Use a more plain style of footnotes, like in ud

--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -12,15 +12,15 @@
 \uminitoc{The Three Absolutes}
 \uminitoc{The Trinities}
 \author{Divine Counsellor}
-\vs p000 0:1 In the minds of the mortals of Urantia\fnst{\textbf{Urantia}, pronounced \textit{oor\'anteeya}, may be a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, signifying ``[y]our place in the heavens''.} --- that being the name of your world --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton corps of truth revealers have been authorized\fnst{\textbf{Orvonton \ldots\ authorized}, Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language\fnst{\textbf{English language}, One possible reason why these revelations were given in English, rather than in Russian is because one of the greatest spiritual teachers on Urantia --- Lev Nikolaevich Tolstoy --- has already given to the Russian speakers the complete and most accurate restatement of Jesus' teachings about half a century earlier. His Complete Works have been printed in Stalin's USSR, beginning in 1935. See, for example, the volumes 23--25, 41--45 of the 90-volume set. On p.~315 of ``The Physiology of Faith and Fear'' Dr~William S.~Sadler writes: Tolstoi once called faith ``the force of life.''} of Urantia.
+\vs p000 0:1 In the minds of the mortals of Urantia\fnst{Pronounced \textit{oor\'anteeya}, may be a coined word from the Greek \textgreek{οὐρανός} ``heavens'' and the Latin suffix \textit{-tia}, signifying ``[y]our place in the heavens''.} --- that being the name of your world --- there exists great confusion respecting the meaning of such terms as God, divinity, and deity. Human beings are still more confused and uncertain about the relationships of the divine personalities designated by these numerous appellations. Because of this conceptual poverty associated with so much ideational confusion, I have been directed to formulate this introductory statement in explanation of the meanings which should be attached to certain word symbols as they may be hereinafter used in those papers which the Orvonton corps of truth revealers have been authorized\fnst{Only the papers 1--31 (i.e. Part I) were authorized at the superuniverse level. The papers 32--196 (Parts II, III and IV) were revealed under the local universe and system level authorization.} to translate into the English language\fnst{A possible reason why these revelations were given in English, rather than in Russian is because one of the greatest spiritual teachers on Urantia --- Lev Nikolaevich Tolstoy --- has already given to the Russian speakers the complete and most accurate restatement of Jesus' teachings about half a century earlier. His Complete Works have been printed in Stalin's USSR, beginning in 1935. See, for example, the volumes 23--25, 41--45 of the 90-volume set. On p.~315 of ``The Physiology of Faith and Fear'' Dr~William S.~Sadler writes: Tolstoi once called faith ``the force of life.''} of Urantia.
 \vs p000 0:2 It is exceedingly difficult to present enlarged concepts and advanced truth, in our endeavour to expand cosmic consciousness and enhance spiritual perception, when we are restricted to the use of a circumscribed language of the realm. But our mandate admonishes us to make every effort to convey our meanings by using the word symbols of the English tongue. We have been instructed to introduce new terms only when the concept to be portrayed finds no terminology in English which can be employed to convey such a new concept partially or even with more or less distortion of meaning.
 \vs p000 0:3 In the hope of facilitating comprehension and of preventing confusion on the part of every mortal who may peruse these papers, we deem it wise to present in this initial statement an outline of the meanings to be attached to numerous English words which are to be employed in designation of Deity and certain associated concepts of the things, meanings, and values of universal reality.
-\vs p000 0:4 But in order to formulate this Foreword of definitions and limitations of terminology, it is necessary to anticipate the usage of these terms in the subsequent presentations. This Foreword is not, therefore, a finished statement within itself;\fnst{\textbf{anticipate the usage \ldots\ statement within itself}, And why \bibemph{exactly} does the need to anticipate the usage of terms make this Foreword an unfinished statement? I could not answer this question until I remembered the difficulty encountered when studying the ancient Hebrew poetry. Not prose, but \bibemph{poetry}. Namely, the paucity of language makes the reading of poetry orders of magnitude more complex than prose. The fundamental fact is that the true meaning of any word is not the paragraph or two found in its dictionary definition, but rather the entire usage thereof in the whole body of literature, everywhere it is encountered. Hebrew poetry provides a clear and relatively compact illustration of this, because to \bibemph{really} understand one verse you often need to re-read many times the entire body of literature (i.e. all three books of Hebrew poetry: Psalms, Proverbs and Job) and this is what makes reading poetry hundreds, if not thousands, times harder than prose. Likewise, here the paucity of English language makes the mere ``dictionary definitions'' incomplete, unfinished and they must be supplemented by the entire ``body of literature'', i.e. the 31 subsequent presentations where each of these definitions is encountered. Therefore, the terms defined here might still have different meanings later on and this is what makes this Foreword an unfinished statement, i.e. it cannot be ``finished'' without the entirety of all the contexts where all the terms are used.} it is only a definitive guide designed to assist those who shall read the accompanying papers dealing with Deity and the universe of universes\fnst{\textbf{papers dealing with Deity and the universe of universes}, As already noted at \bibref[0:0.1]{p000 0:1} these are limited to papers 1--31 only. Therefore, this Foreword is properly ``the Foreword to Part I of the Urantia Papers'' and that is where it should be printed. Curiously, this is where the Foreword is found in ``The Titles of the Papers'' and ``Contents of the Book'' as printed in the original 1955 edition, although the text of the Foreword is printed just before the Part I title page preceding Paper 1 of that edition.} which have been formulated by an Orvonton commission sent to Urantia for this purpose.
+\vs p000 0:4 But in order to formulate this Foreword of definitions and limitations of terminology, it is necessary to anticipate the usage of these terms in the subsequent presentations. This Foreword is not, therefore, a finished statement within itself;\fnst{Why \bibemph{exactly} does the need to anticipate the usage of terms make this Foreword an unfinished statement? I could not answer this question until I remembered the difficulty encountered when studying the ancient Hebrew poetry. Not prose, but \bibemph{poetry}. Namely, the paucity of language makes the reading of poetry orders of magnitude more complex than prose. The fundamental fact is that the true meaning of any word is not the paragraph or two found in its dictionary definition, but rather the entire usage thereof in the whole body of literature, everywhere it is encountered. Hebrew poetry provides a clear and relatively compact illustration of this, because to \bibemph{really} understand one verse you often need to re-read many times the entire body of literature (i.e. all three books of Hebrew poetry: Psalms, Proverbs and Job) and this is what makes reading poetry hundreds, if not thousands, times harder than prose. Likewise, here the paucity of English language makes the mere ``dictionary definitions'' incomplete, unfinished and they must be supplemented by the entire ``body of literature'', i.e. the 31 subsequent presentations where each of these definitions is encountered. Therefore, the terms defined here might still have different meanings later on and this is what makes this Foreword an unfinished statement, i.e. it cannot be ``finished'' without the entirety of all the contexts where all the terms are used.} it is only a definitive guide designed to assist those who shall read the accompanying papers dealing with Deity and the universe of universes\fnst{As already noted at \bibref[0:0.1]{p000 0:1} these are limited to papers 1--31 only. Therefore, this Foreword is properly ``the Foreword to Part I of the Urantia Papers'' and that is where it should be printed. Curiously, this is where the Foreword is found in ``The Titles of the Papers'' and ``Contents of the Book'' as printed in the original 1955 edition, although the text of the Foreword is printed just before the Part I title page preceding Paper 1 of that edition.} which have been formulated by an Orvonton commission sent to Urantia for this purpose.
 \vs p000 0:5 \pc Your world, Urantia, is one of many similar inhabited planets which comprise the local universe of \bibemph{Nebadon}. This universe, together with similar creations, makes up the superuniverse of \bibemph{Orvonton,} from whose capital, Uversa, our commission hails. Orvonton is one of the seven evolutionary superuniverses of time and space which circle the never\hyp{}beginning, never\hyp{}ending creation of divine perfection --- the central universe of \bibemph{Havona.} At the heart of this eternal and central universe is the stationary Isle of Paradise, the geographic centre of infinity and the dwelling place of the eternal God.
 \vs p000 0:6 The seven evolving superuniverses in association with the central and divine universe, we commonly refer to as the \bibemph{grand universe;} these are the now organized and inhabited creations. They are all a part of the \bibemph{master universe,} which also embraces the uninhabited but mobilizing universes of outer space.
 \usection{Deity and Divinity}
-\vs p000 1:1 The universe of universes presents phenomena of deity\fnst{\textbf{deity}, In the lower case to reflect a certain degree of \bibemph{ambiguity} in associating observed universe phenomena with the activity of Deity. This sentence prepares the \bibemph{empirical soil} for the definition of Deity, which commences in the next paragraph.} activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
-\vs p000 1:2 \pc DEITY\fnst{\textbf{DEITY}, All in capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such a combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair (Deity, divinity).} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
+\vs p000 1:1 The universe of universes presents phenomena of deity\fnst{In the lower case to reflect a certain degree of \bibemph{ambiguity} in associating observed universe phenomena with the activity of Deity. This sentence prepares the \bibemph{empirical soil} for the definition of Deity, which commences in the next paragraph.} activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
+\vs p000 1:2 \pc DEITY\fnst{In all capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such a combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair (Deity, divinity).} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
 \vs p000 1:3 \pc Deity functions on personal, prepersonal, and superpersonal levels. Total Deity is functional on the following seven levels:
 \vs p000 1:4 \ublistelem{1.}\bibnobreakspace \bibemph{Static ---} self\hyp{}contained and self\hyp{}existent Deity.
 \vs p000 1:5 \ublistelem{2.}\bibnobreakspace \bibemph{Potential ---} self\hyp{}willed and self\hyp{}purposive Deity.
@@ -37,12 +37,12 @@
 \vs p000 1:16 \pc DIVINITY is the characteristic, unifying, and co\hyp{}ordinating quality of Deity.
 \vs p000 1:17 Divinity is creature comprehensible as truth, beauty, and goodness; correlated in personality as love, mercy, and ministry; disclosed on impersonal levels as justice, power, and sovereignty.
 \vs p000 1:18 Divinity may be perfect --- complete --- as on existential and creator levels of Paradise perfection; it may be imperfect, as on experiential and creature levels of time\hyp{}space evolution; or it may be relative, neither perfect nor imperfect, as on certain Havona levels of existential\hyp{}experiential relationships.
-\vs p000 1:19 \pc When we attempt to conceive of perfection in all phases and forms of relativity, we encounter seven conceivable types\fnst{\textbf{seven conceivable types}, The following list of seven elements is taken from \cite{Hartshorne1} and contains all non-empty subsets ($2^3 - 1 = 7$) of the set (Absolute, Relative, Imperfection), listed in this particular order to reflect the inherent ordering of the three basic elements as follows: Absolute > Relative > Imperfection.}:
+\vs p000 1:19 \pc When we attempt to conceive of perfection in all phases and forms of relativity, we encounter seven conceivable types\fnst{The following list of seven elements is taken from \cite{Hartshorne1} and contains all non-empty subsets ($2^3 - 1 = 7$) of the set (Absolute, Relative, Imperfection), listed in this particular order to reflect the inherent ordering of the three basic elements as follows: Absolute > Relative > Imperfection.}:
 \vs p000 1:20 \ublistelem{1.}\bibnobreakspace Absolute perfection in all aspects.
 \vs p000 1:21 \ublistelem{2.}\bibnobreakspace Absolute perfection in some phases and relative perfection in all other aspects.
 \vs p000 1:22 \ublistelem{3.}\bibnobreakspace Absolute, relative, and imperfect aspects in varied association.
 \vs p000 1:23 \ublistelem{4.}\bibnobreakspace Absolute perfection in some respects, imperfection in all others.
-\vs p000 1:24 \ublistelem{5.}\bibnobreakspace Absolute perfection in no direction, relative perfection in all other\fnst{\textbf{other}, this word was removed from the second edition in 1967 and from all subsequent editions, probably to comply more closely with the human source \cite{Hartshorne1}. I chose to revert to the reading of the first 1955 edition.} manifestations.
+\vs p000 1:24 \ublistelem{5.}\bibnobreakspace Absolute perfection in no direction, relative perfection in all other\fnst{Thе word `other' was removed from the second edition in 1967 and from all subsequent editions, probably to comply more closely with the human source \cite{Hartshorne1}. I chose to revert to the reading of the first 1955 edition.} manifestations.
 \vs p000 1:25 \ublistelem{6.}\bibnobreakspace Absolute perfection in no phase, relative in some, imperfect in others.
 \vs p000 1:26 \ublistelem{7.}\bibnobreakspace Absolute perfection in no attribute, imperfection in all.
 \usection{God}
@@ -93,7 +93,7 @@
 \usection{Universe Reality}
 \vs p000 4:1 Reality differentially actualizes on diverse universe levels; reality originates in and by the infinite volition of the Universal Father and is realizable in three primal phases on many different levels of universe actualization:
 \vs p000 4:2 \ublistelem{1.}\bibnobreakspace \bibemph{Undeified reality} ranges from the energy domains of the nonpersonal to the reality realms of the nonpersonalizable values of universal existence, even to the presence of the Unqualified Absolute.
-\vs p000 4:3 \ublistelem{2.}\bibnobreakspace \bibemph{Deified reality} embraces all\fnc{\textbf{all}, In 1955 text: all of. \bibexpl{The committee decided that this revised phraseology is all-inclusive without implying any limitations and without requiring a change of tone.}} infinite Deity potentials ranging upward through all realms of personality from the lowest finite to the highest infinite, thus encompassing the domain of all that which is personalizable and more --- even to the presence of the Deity Absolute.
+\vs p000 4:3 \ublistelem{2.}\bibnobreakspace \bibemph{Deified reality} embraces all\fnc{In 1955 text: all of. \bibexpl{The committee decided that this revised phraseology is all-inclusive without implying any limitations and without requiring a change of tone.}} infinite Deity potentials ranging upward through all realms of personality from the lowest finite to the highest infinite, thus encompassing the domain of all that which is personalizable and more --- even to the presence of the Deity Absolute.
 \vs p000 4:4 \ublistelem{3.}\bibnobreakspace \bibemph{Interassociated reality.} Universe reality is supposedly either deified or undeified, but to subdeified beings there exists a vast domain of interassociated reality, potential and actualizing, which is difficult of identification. Much of this co\hyp{}ordinate reality is embraced within the realms of the Universal Absolute.
 \vs p000 4:5 This is the primal concept of original reality: The Father initiates and maintains Reality. The primal \bibemph{differentials} of reality are the deified and the undeified --- the Deity Absolute and the Unqualified Absolute. The primal \bibemph{relationship} is the tension between them. This Father\hyp{}initiated divinity\hyp{}tension is perfectly resolved by, and eternalizes as, the Universal Absolute.
 \vs p000 4:6 \pc From the viewpoint of time and space, reality is further divisible as:
@@ -114,9 +114,9 @@
 \vs p000 5:7 \ublistelem{1.}\bibnobreakspace \bibemph{Body.} The material or physical organism of man. The living electrochemical mechanism of animal nature and origin.
 \vs p000 5:8 \ublistelem{2.}\bibnobreakspace \bibemph{Mind.} The thinking, perceiving, and feeling mechanism of the human organism. The total conscious and unconscious experience. The intelligence associated with the emotional life reaching upward through worship and wisdom to the spirit level.
 \vs p000 5:9 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit.} The divine spirit that indwells the mind of man --- the Thought Adjuster. This immortal spirit is prepersonal --- not a personality, though destined to become a part of the personality of the surviving mortal creature.
-\vs p000 5:10 \ublistelem{4.}\bibnobreakspace \bibemph{Soul.} The soul of man is an experiential acquirement. As a mortal creature chooses to “do the will of the Father in heaven,” so the indwelling spirit becomes the father of a \bibemph{new reality} in human experience. The mortal and material mind is the mother\fnst{\textbf{material mind is the mother}, The words \bibemph{matter} and \bibemph{mother} have the same origin, namely from the Latin \bibemph{mater} and Greek \textgreek{μήτηρ} meaning `mother'.} of this same emerging reality. The substance of this new reality is neither material nor spiritual --- it is \bibemph{morontial.} This is the emerging and immortal soul which is destined to survive mortal death and begin the Paradise ascension.
+\vs p000 5:10 \ublistelem{4.}\bibnobreakspace \bibemph{Soul.} The soul of man is an experiential acquirement. As a mortal creature chooses to “do the will of the Father in heaven,” so the indwelling spirit becomes the father of a \bibemph{new reality} in human experience. The mortal and material mind is the mother\fnst{The words \bibemph{matter} and \bibemph{mother} have the same origin, namely from the Latin \bibemph{mater} and Greek \textgreek{μήτηρ} meaning `mother'.} of this same emerging reality. The substance of this new reality is neither material nor spiritual --- it is \bibemph{morontial.} This is the emerging and immortal soul which is destined to survive mortal death and begin the Paradise ascension.
 \vs p000 5:11 \pc \bibemph{Personality.} The personality of mortal man is neither body, mind, nor spirit; neither is it the soul. Personality is the one changeless reality in an otherwise ever\hyp{}changing creature experience; and it unifies all other associated factors of individuality. The personality is the unique bestowal which the Universal Father makes upon the living and associated energies of matter, mind, and spirit, and which survives with the survival of the morontial soul.
-\vs p000 5:12 \pc \bibemph{Morontia} is a term designating a vast level intervening between the material and the spiritual. It may designate personal or impersonal realities, living or nonliving energies. The warp of morontia\fnst{\textbf{morontia}, The word ``morontia'' is composed of ``matter'' plus ``moral''. Apart from the Editor's personal experience, the proof of this is given in the footnote to \bibref[112:3.2]{p112 3:2}.} is spiritual; its woof is physical.
+\vs p000 5:12 \pc \bibemph{Morontia} is a term designating a vast level intervening between the material and the spiritual. It may designate personal or impersonal realities, living or nonliving energies. The warp of morontia\fnst{The word `morontia' is composed of `matter' plus `moral'. Apart from the Editor's personal experience, the proof of this is given in the footnote to \bibref[112:3.2]{p112 3:2}.} is spiritual; its woof is physical.
 \usection{Energy and Pattern}
 \vs p000 6:1 Any and all things responding to the personality circuit of the Father, we call personal. Any and all things responding to the spirit circuit of the Son, we call spirit. Any and all that responds to the mind circuit of the Conjoint Actor, we call mind, mind as an attribute of the Infinite Spirit --- mind in all its phases. Any and all that responds to the material\hyp{}gravity circuit centring in nether Paradise, we call matter --- energy\hyp{}matter in all its metamorphic states.
 \vs p000 6:2 \pc ENERGY we use as an all\hyp{}inclusive term applied to spiritual, mindal, and material realms. \bibemph{Force} is also thus broadly used. \bibemph{Power} is ordinarily limited to the designation of the electronic level of material or linear\hyp{}gravity\hyp{}responsive matter in the grand universe. Power is also employed to designate sovereignty. We cannot follow your generally accepted definitions of force, energy, and power. There is such paucity of language that we must assign multiple meanings to these terms.
@@ -192,7 +192,7 @@
 \vs p000 12:8 \pc The Ultimate Trinity is experientially unifying in completion, but we truly doubt the possibility of such full unification of the Absolute Trinity. Our concept, however, of the eternal Paradise Trinity is an ever\hyp{}present reminder that Deity trinitization may accomplish what is otherwise nonattainable; hence do we postulate the sometime appearance of the \bibemph{Supreme\hyp{}Ultimate} and the possible trinitization\hyp{}factualization of God the Absolute.
 \vs p000 12:9 \pc The philosophers of the universes postulate a \bibemph{Trinity of Trinities,} an existential\hyp{}experiential Trinity Infinite, but they are not able to envisage its personalization; possibly it would equivalate to the person of the Universal Father on the conceptual level of the I AM. But irrespective of all this, the original Paradise Trinity is potentially infinite since the Universal Father actually is infinite.
 \usection{Acknowledgement}
-\vs p000 12:11 In formulating the succeeding presentations having to do with the portrayal of the character of the Universal Father and the nature of his Paradise associates, together with an attempted description of the perfect central universe and the encircling seven superuniverses\fnst{\textbf{succeeding presentations \ldots\ seven superuniverses}, Another confirmation (cf. \bibref[0:0.1]{p000 0:1}, \bibref[0:0.4]{p000 0:4} and \bibref[0:2.11]{p000 2:11}), that this Foreword is intended for papers 1--31 only and not the entire so-called ``Urantia \textbf{Book}''.}, we are to be guided by the mandate of the superuniverse rulers which directs that we shall, in all our efforts to reveal truth and co\hyp{}ordinate essential knowledge, give preference to the highest existing human concepts pertaining to the subjects to be presented. We may resort to pure revelation only when the concept of presentation has had no adequate previous expression by the human mind.
+\vs p000 12:11 In formulating the succeeding presentations having to do with the portrayal of the character of the Universal Father and the nature of his Paradise associates, together with an attempted description of the perfect central universe and the encircling seven superuniverses\fnst{Another clear confirmation (cf. \bibref[0:0.1]{p000 0:1}, \bibref[0:0.4]{p000 0:4} and \bibref[0:2.11]{p000 2:11}), that this Foreword is intended for papers 1--31 only and not the entire so-called ``Urantia \textbf{Book}''.}, we are to be guided by the mandate of the superuniverse rulers which directs that we shall, in all our efforts to reveal truth and co\hyp{}ordinate essential knowledge, give preference to the highest existing human concepts pertaining to the subjects to be presented. We may resort to pure revelation only when the concept of presentation has had no adequate previous expression by the human mind.
 \vs p000 12:12 Successive planetary revelations of divine truth invariably embrace the highest existing concepts of spiritual values as a part of the new and enhanced co\hyp{}ordination of planetary knowledge. Accordingly, in making these presentations about God and his universe associates, we have selected as the basis of these papers more than one thousand human concepts representing the highest and most advanced planetary knowledge of spiritual values and universe meanings. Wherein these human concepts, assembled from the God\hyp{}knowing mortals of the past and the present, are inadequate to portray the truth as we are directed to reveal it, we will unhesitatingly supplement them, for this purpose drawing upon our own superior knowledge of the reality and divinity of the Paradise Deities and their transcendent residential universe.
 \vs p000 12:13 We are fully cognizant of the difficulties of our assignment; we recognize the impossibility of fully translating the language of the concepts of divinity and eternity into the symbols of the language of the finite concepts of the mortal mind. But we know that there dwells within the human mind a fragment of God, and that there sojourns with the human soul the Spirit of Truth; and we further know that these spirit forces conspire to enable material man to grasp the reality of spiritual values and to comprehend the philosophy of universe meanings. But even more certainly we know that these spirits of the Divine Presence are able to assist man in the spiritual appropriation of all truth contributory to the enhancement of the ever\hyp{}progressing reality of personal religious experience --- God\hyp{}consciousness.
 \vsetoff
