--- a/tex/p002.tex
+++ b/tex/p002.tex
@@ -11,7 +11,7 @@
 \vs p002 0:2 The nature of God can be studied in a revelation of supreme ideas, the divine character can be envisaged as a portrayal of supernal ideals, but the most enlightening and spiritually edifying of all revelations of the divine nature is to be found in the comprehension of the religious life of Jesus of Nazareth, both before and after his attainment of full consciousness of divinity. If the incarnated life of Michael is taken as the background of the revelation of God to man, we may attempt to put in human word symbols certain ideas and ideals concerning the divine nature which may possibly contribute to a further illumination and unification of the human concept of the nature and the character of the personality of the Universal Father.
 \vs p002 0:3 In all our efforts to enlarge and spiritualize the human concept of God, we are tremendously handicapped by the limited capacity of the mortal mind. We are also seriously handicapped in the execution of our assignment by the limitations of language and by the poverty of material which can be utilized for purposes of illustration or comparison in our efforts to portray divine values and to present spiritual meanings to the finite, mortal mind of man. All our efforts to enlarge the human concept of God would be well\hyp{}nigh futile except for the fact that the mortal mind is indwelt by the bestowed Adjuster of the Universal Father and is pervaded by the Truth Spirit of the Creator Son. Depending, therefore, on the presence of these divine spirits within the heart of man for assistance in the enlargement of the concept of God, I cheerfully undertake the execution of my mandate to attempt the further portrayal of the nature of God to the mind of man.
 \usection{The Infinity of God}
-\vs p002 1:1 “Touching the Infinite\fnst{\textbf{Touching the Infinite}, Here, as well as in all 30 occurrences of ``touching'' in the KJV, where this quote comes from, viz. Job~37:23, is of course used as a preposition meaning ``regarding'', ``concerning''. The same applies to the usage in \bibref[96:6.4]{p096 6:4}.}, we cannot find him out. The divine footsteps are not known.” “His understanding is infinite and his greatness is unsearchable.” The blinding light of the Father’s presence is such that to his lowly creatures he apparently “dwells in the thick darkness.” Not only are his thoughts and plans unsearchable, but “he does great and marvellous things without number.” “God is great; we comprehend him not, neither can the number of his years be searched out.” “Will God indeed dwell on the earth? Behold, the heaven (universe) and the heaven of heavens (universe of universes) cannot contain him.” “How unsearchable are his judgments and his ways past finding out!”
+\vs p002 1:1 “Touching the Infinite\fnst{Here, as well as in all 30 occurrences of ``touching'' in the KJV, where this quote comes from, viz. Job~37:23, is of course used as a preposition meaning ``regarding'', ``concerning''. The same applies to the usage in \bibref[96:6.4]{p096 6:4}.}, we cannot find him out. The divine footsteps are not known.” “His understanding is infinite and his greatness is unsearchable.” The blinding light of the Father’s presence is such that to his lowly creatures he apparently “dwells in the thick darkness.” Not only are his thoughts and plans unsearchable, but “he does great and marvellous things without number.” “God is great; we comprehend him not, neither can the number of his years be searched out.” “Will God indeed dwell on the earth? Behold, the heaven (universe) and the heaven of heavens (universe of universes) cannot contain him.” “How unsearchable are his judgments and his ways past finding out!”
 \vs p002 1:2 “There is but one God, the infinite Father, who is also a faithful Creator.” “The divine Creator is also the Universal Disposer, the source and destiny of souls. He is the Supreme Soul, the Primal Mind, and the Unlimited Spirit of all creation.” “The great Controller makes no mistakes. He is resplendent in majesty and glory.” “The Creator God is wholly devoid of fear and enmity. He is immortal, eternal, self\hyp{}existent, divine, and bountiful.” “How pure and beautiful, how deep and unfathomable is the supernal Ancestor of all things!” “The Infinite is most excellent in that he imparts himself to men. He is the beginning and the end, the Father of every good and perfect purpose.” “With God all things are possible; the eternal Creator is the cause of causes.”
 \vs p002 1:3 \pc Notwithstanding the infinity of the stupendous manifestations of the Father’s eternal and universal personality, he is unqualifiedly self\hyp{}conscious of both his infinity and eternity; likewise he knows fully his perfection and power. He is the only being in the universe, aside from his divine co\hyp{}ordinates, who experiences a perfect, proper, and complete appraisal of himself.
 \vs p002 1:4 The Father constantly and unfailingly meets the need of the differential of demand for himself as it changes from time to time in various sections of his master universe. The great God knows and understands himself; he is infinitely self\hyp{}conscious of all his primal attributes of perfection. God is not a cosmic accident; neither is he a universe experimenter. The Universe Sovereigns may engage in adventure; the Constellation Fathers may experiment; the system heads may practise; but the Universal Father sees the end from the beginning, and his divine plan and eternal purpose actually embrace and comprehend all the experiments and all the adventures of all his subordinates in every world, system, and constellation in every universe of his vast domains.
