--- a/tex/p004.tex
+++ b/tex/p004.tex
@@ -23,17 +23,17 @@
 \vs p004 1:12 But in the larger sense the apparent “accidents” of the cosmos are undoubtedly a part of the finite drama of the time\hyp{}space adventure of the Infinite in his eternal manipulation of the Absolutes.
 \usection{God and Nature}
 \vs p004 2:1 Nature is in a limited sense the physical habit of God. The conduct, or action, of God is qualified and provisionally modified by the experimental plans and the evolutionary patterns of a local universe, a constellation, a system, or a planet. God acts in accordance with a well\hyp{}defined, unchanging, immutable law throughout the wide\hyp{}spreading master universe; but he modifies the patterns of his action so as to contribute to the co\hyp{}ordinate and balanced conduct of each universe, constellation, system, planet, and personality in accordance with the local objects, aims, and plans of the finite projects of evolutionary unfolding.
-\vs p004 2:2 Therefore, nature, as mortal man understands it, presents the underlying foundation and fundamental background of a changeless Deity and his immutable laws, modified by, fluctuating because of, and experiencing upheavals through, the working of the local plans, purposes, patterns, and conditions which have been inaugurated and are being carried out by the local universe, constellation, system, and planetary forces and personalities. For example: As God’s laws have been ordained in Nebadon, they are modified by the plans established by the Creator Son and Creative Spirit of this local universe; and in addition to all this the operation of these laws has been further influenced by the errors, defaults, and insurrections of certain beings resident upon your planet and belonging to your immediate planetary system of Satania\fnst{\textbf{Satania}, is a coined word from the Hebrew \textheb{שָׂטָן} \textit{satan} ``adversary'', resulting in the probable meaning of ``the hostile system''.}.
+\vs p004 2:2 Therefore, nature, as mortal man understands it, presents the underlying foundation and fundamental background of a changeless Deity and his immutable laws, modified by, fluctuating because of, and experiencing upheavals through, the working of the local plans, purposes, patterns, and conditions which have been inaugurated and are being carried out by the local universe, constellation, system, and planetary forces and personalities. For example: As God’s laws have been ordained in Nebadon, they are modified by the plans established by the Creator Son and Creative Spirit of this local universe; and in addition to all this the operation of these laws has been further influenced by the errors, defaults, and insurrections of certain beings resident upon your planet and belonging to your immediate planetary system of Satania\fnst{Possibly a coined word from the Hebrew \textheb{שָׂטָן} \textit{satan} ``adversary'', resulting in the probable meaning of ``the hostile system''.}.
 \vs p004 2:3 \pc Nature is a time\hyp{}space resultant of two cosmic factors: first, the immutability, perfection, and rectitude of Paradise Deity, and second, the experimental plans, executive blunders, insurrectionary errors, incompleteness of development, and imperfection of wisdom of the extra\hyp{}Paradise creatures, from the highest to the lowest. Nature therefore carries a uniform, unchanging, majestic, and marvellous thread of perfection from the circle of eternity; but in each universe, on each planet, and in each individual life, this nature is modified, qualified, and perchance marred by the acts, the mistakes, and the disloyalties of the creatures of the evolutionary systems and universes; and therefore must nature ever be of a changing mood, whimsical withal, though stable underneath, and varied in accordance with the operating procedures of a local universe.
 \vs p004 2:4 Nature is the perfection of Paradise divided by the incompletion, evil, and sin of the unfinished universes. This quotient is thus expressive of both the perfect and the partial, of both the eternal and the temporal. Continuing evolution modifies nature by augmenting the content of Paradise perfection and by diminishing the content of the evil, error, and disharmony of relative reality.
 \vs p004 2:5 \pc God is not personally present in nature or in any of the forces of nature, for the phenomenon of nature is the superimposition of the imperfections of progressive evolution and, sometimes, the consequences of insurrectionary rebellion, upon the Paradise foundations of God’s universal law. As it appears on such a world as Urantia, nature can never be the adequate expression, the true representation, the faithful portrayal, of an all\hyp{}wise and infinite God.
 \vs p004 2:6 Nature, on your world, is a qualification of the laws of perfection by the evolutionary plans of the local universe. What a travesty to worship nature because it is in a limited, qualified sense pervaded by God; because it is a phase of the universal and, therefore, divine power! Nature also is a manifestation of the unfinished, the incomplete, the imperfect outworkings of the development, growth, and progress of a universe experiment in cosmic evolution.
-\vs p004 2:7 The apparent defects of the natural world are not indicative of any such corresponding defects in the character of God. Rather are such observed imperfections merely the inevitable stop\hyp{}moments in the exhibition of the ever\hyp{}moving reel of infinity picturization. It is these very defect\hyp{}interruptions of perfection\hyp{}continuity which make it possible for the finite mind of material man to catch a fleeting glimpse of divine reality in time and space. The material manifestations of divinity appear defective to the evolutionary mind of man only because mortal man persists in viewing the phenomena of nature through natural eyes, human vision unaided by morontia mota\fnst{\textbf{mota}, is a coined word from the Latin \textit{motus} ``movement'', because the super\hyp{}knowledge corresponding to the true harmony of science, philosophy and religion is inherently active and moving.} or by revelation, its compensatory substitute on the worlds of time.
+\vs p004 2:7 The apparent defects of the natural world are not indicative of any such corresponding defects in the character of God. Rather are such observed imperfections merely the inevitable stop\hyp{}moments in the exhibition of the ever\hyp{}moving reel of infinity picturization. It is these very defect\hyp{}interruptions of perfection\hyp{}continuity which make it possible for the finite mind of material man to catch a fleeting glimpse of divine reality in time and space. The material manifestations of divinity appear defective to the evolutionary mind of man only because mortal man persists in viewing the phenomena of nature through natural eyes, human vision unaided by morontia mota\fnst{Possibly a coined word from the Latin \textit{motus} ``movement'', because the super\hyp{}knowledge corresponding to the true harmony of science, philosophy and religion is inherently active and moving.} or by revelation, its compensatory substitute on the worlds of time.
 \vs p004 2:8 And nature is marred, her beautiful face is scarred, her features are seared, by the rebellion, the misconduct, the misthinking of the myriads of creatures who are a part of nature, but who have contributed to her disfigurement in time. No, nature is not God. Nature is not an object of worship.
 \usection{God’s Unchanging Character}
 \vs p004 3:1 All too long has man thought of God as one like himself. God is not, never was, and never will be jealous of man or any other being in the universe of universes. Knowing that the Creator Son intended man to be the masterpiece of the planetary creation, to be the ruler of all the earth, the sight of his being dominated by his own baser passions, the spectacle of his bowing down before idols of wood, stone, gold, and selfish ambition --- these sordid scenes stir God and his Sons to be jealous \bibemph{for} man, but never of him.
 \vs p004 3:2 The eternal God is incapable of wrath and anger in the sense of these human emotions and as man understands such reactions. These sentiments are mean and despicable; they are hardly worthy of being called human, much less divine; and such attitudes are utterly foreign to the perfect nature and gracious character of the Universal Father.
-\vs p004 3:3 \pc Much, very much, of the difficulty which Urantia mortals have in understanding God is due to the far\hyp{}reaching consequences of the Lucifer rebellion and the Caligastia\fnst{\textbf{Caligastia}, is a coined word from the Latin verb \textit{caligo} ``to be in darkness, waste away'', resulting in the total meaning of ``the one who is in total darkness''.} betrayal. On worlds not segregated by sin, the evolutionary races are able to formulate far better ideas of the Universal Father; they suffer less from confusion, distortion, and perversion of concept.
+\vs p004 3:3 \pc Much, very much, of the difficulty which Urantia mortals have in understanding God is due to the far\hyp{}reaching consequences of the Lucifer rebellion and the Caligastia\fnst{Possibly a coined word from the Latin verb \textit{caligo} ``to be in darkness, waste away'', resulting in the total meaning of ``the one who is in total darkness''.} betrayal. On worlds not segregated by sin, the evolutionary races are able to formulate far better ideas of the Universal Father; they suffer less from confusion, distortion, and perversion of concept.
 \vs p004 3:4 \pc God repents of nothing he has ever done, now does, or ever will do. He is all\hyp{}wise as well as all\hyp{}powerful. Man’s wisdom grows out of the trials and errors of human experience; God’s wisdom consists in the unqualified perfection of his infinite universe insight, and this divine foreknowledge effectively directs the creative free will.
 \vs p004 3:5 The Universal Father never does anything that causes subsequent sorrow or regret, but the will creatures of the planning and making of his Creator personalities in the outlying universes, by their unfortunate choosing, sometimes occasion emotions of divine sorrow in the personalities of their Creator parents. But though the Father neither makes mistakes, harbours regrets, nor experiences sorrows, he is a being with a father’s affection, and his heart is undoubtedly grieved when his children fail to attain the spiritual levels they are capable of reaching with the assistance which has been so freely provided by the spiritual\hyp{}attainment plans and the mortal\hyp{}ascension policies of the universes.
 \vs p004 3:6 The infinite goodness of the Father is beyond the comprehension of the finite mind of time; hence must there always be afforded a contrast with comparative evil (not sin) for the effective exhibition of all phases of relative goodness. Perfection of divine goodness can be discerned by mortal imperfection of insight only because it stands in contrastive association with relative imperfection in the relationships of time and matter in the motions of space.
@@ -53,7 +53,7 @@
 \vs p004 5:2 One of the greatest sources of confusion on Urantia concerning the nature of God grows out of the failure of your sacred books clearly to distinguish between the personalities of the Paradise Trinity and between Paradise Deity and the local universe creators and administrators. During the past dispensations of partial understanding, your priests and prophets failed clearly to differentiate between Planetary Princes, System Sovereigns, Constellation Fathers, Creator Sons, Superuniverse Rulers, the Supreme Being, and the Universal Father. Many of the messages of subordinate personalities, such as Life Carriers and various orders of angels, have been, in your records, presented as coming from God himself. Urantian religious thought still confuses the associate personalities of Deity with the Universal Father himself, so that all are included under one appellation.
 \vs p004 5:3 \pc The people of Urantia continue to suffer from the influence of primitive concepts of God. The gods who go on a rampage in the storm; who shake the earth in their wrath and strike down men in their anger; who inflict their judgments of displeasure in times of famine and flood --- these are the gods of primitive religion; they are not the Gods who live and rule the universes. Such concepts are a relic of the times when men supposed that the universe was under the guidance and domination of the whims of such imaginary gods. But mortal man is beginning to realize that he lives in a realm of comparative law and order as far as concerns the administrative policies and conduct of the Supreme Creators and the Supreme Controllers.
 \vs p004 5:4 \pc The barbarous idea of appeasing an angry God, of propitiating an offended Lord, of winning the favour of Deity through sacrifices and penance and even by the shedding of blood, represents a religion wholly puerile and primitive, a philosophy unworthy of an enlightened age of science and truth. Such beliefs are utterly repulsive to the celestial beings and the divine rulers who serve and reign in the universes. It is an affront to God to believe, hold, or teach that innocent blood must be shed in order to win his favour or to divert the fictitious divine wrath.
-\vs p004 5:5 The Hebrews believed that “without the shedding of blood there could be no remission of sin.”\fnst{\textbf{“without \ldots\ sin.”}, Hebrews~9:22.} They had not found deliverance from the old and pagan idea that the Gods could not be appeased except by the sight of blood, though Moses did make a distinct advance when he forbade human sacrifices and substituted therefor, in the primitive minds of his childlike Bedouin followers, the ceremonial sacrifice of animals.
+\vs p004 5:5 The Hebrews believed that “without the shedding of blood there could be no remission of sin.”\fnst{Hebrews~9:22.} They had not found deliverance from the old and pagan idea that the Gods could not be appeased except by the sight of blood, though Moses did make a distinct advance when he forbade human sacrifices and substituted therefor, in the primitive minds of his childlike Bedouin followers, the ceremonial sacrifice of animals.
 \vs p004 5:6 The bestowal of a Paradise Son on your world was inherent in the situation of closing a planetary age; it was inescapable, and it was not made necessary for the purpose of winning the favour of God. This bestowal also happened to be the final personal act of a Creator Son in the long adventure of earning the experiential sovereignty of his universe. What a travesty upon the infinite character of God! this teaching that his fatherly heart in all its austere coldness and hardness was so untouched by the misfortunes and sorrows of his creatures that his tender mercies were not forthcoming until he saw his blameless Son bleeding and dying upon the cross of Calvary!
 \vs p004 5:7 But the inhabitants of Urantia are to find deliverance from these ancient errors and pagan superstitions respecting the nature of the Universal Father. The revelation of the truth about God is appearing, and the human race is destined to know the Universal Father in all that beauty of character and loveliness of attributes so magnificently portrayed by the Creator Son who sojourned on Urantia as the Son of Man and the Son of God.
 \vsetoff
