--- a/tex/p010.tex
+++ b/tex/p010.tex
@@ -62,7 +62,7 @@
 \vs p010 5:4 \ublistelem{1.}\bibnobreakspace \bibemph{Attitude toward the Finite.} The maximum self\hyp{}limitation of the Trinity is its attitude toward the finite. The Trinity is not a person, nor is the Supreme Being an exclusive personalization of the Trinity, but the Supreme is the nearest approach to a power\hyp{}personality focalization of the Trinity which can be comprehended by finite creatures. Hence the Trinity in relation to the finite is sometimes spoken of as the Trinity of Supremacy.
 \vs p010 5:5 \ublistelem{2.}\bibnobreakspace \bibemph{Attitude toward the Absonite.} The Paradise Trinity has regard for those levels of existence which are more than finite but less than absolute, and this relationship is sometimes denominated the Trinity of Ultimacy. Neither the Ultimate nor the Supreme are wholly representative of the Paradise Trinity, but in a qualified sense and to their respective levels, each seems to represent the Trinity during the prepersonal eras of experiential\hyp{}power development.
 \vs p010 5:6 \ublistelem{3.}\bibnobreakspace \bibemph{The Absolute Attitude} of the Paradise Trinity is in relation to absolute existences and culminates in the action of total Deity.
-\vs p010 5:7 \pc The Trinity Infinite involves the co\hyp{}ordinate action of all triunity relationships of the First Source and Centre --- undeified as well as deified --- and hence is very difficult for personalities to grasp. In the contemplation of the Trinity as infinite, do not ignore the seven triunities\fnst{\textbf{seven triunities}, defined at \bibref[104:4]{p104 4:1}.}; thereby certain difficulties of understanding may be avoided, and certain paradoxes may be partially resolved.
+\vs p010 5:7 \pc The Trinity Infinite involves the co\hyp{}ordinate action of all triunity relationships of the First Source and Centre --- undeified as well as deified --- and hence is very difficult for personalities to grasp. In the contemplation of the Trinity as infinite, do not ignore the seven triunities\fnst{Defined at \bibref[104:4]{p104 4:1}.}; thereby certain difficulties of understanding may be avoided, and certain paradoxes may be partially resolved.
 \vs p010 5:8 \pc But I do not command language which would enable me to convey to the limited human mind the full truth and the eternal significance of the Paradise Trinity and the nature of the never\hyp{}ending interassociation of the three beings of infinite perfection.
 \usection{The Stationary Sons of the Trinity}
 \vs p010 6:1 All law takes origin in the First Source and Centre; \bibemph{he is law.} The administration of spiritual law inheres in the Second Source and Centre. The revelation of law, the promulgation and interpretation of the divine statutes, is the function of the Third Source and Centre. The application of law, justice, falls within the province of the Paradise Trinity and is carried out by certain Sons of the Trinity.
