--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -15,7 +15,7 @@
 \usection{Space Levels of the Master Universe}
 \vs p012 1:1 The universe of universes is not an infinite plane, a boundless cube, nor a limitless circle; it certainly has dimensions. The laws of physical organization and administration prove conclusively that the whole vast aggregation of force\hyp{}energy and matter\hyp{}power functions ultimately as a space unit, as an organized and co\hyp{}ordinated whole. The observable behaviour of the material creation constitutes evidence of a physical universe of definite limits. The final proof of both a circular and delimited universe is afforded by the, to us, well\hyp{}known fact that all forms of basic energy ever swing around the curved path of the space levels of the master universe in obedience to the incessant and absolute pull of Paradise gravity.
 \vs p012 1:2 The successive space levels of the master universe constitute the major divisions of pervaded space --- total creation, organized and partially inhabited or yet to be organized and inhabited. If the master universe were not a series of elliptical space levels of lessened resistance to motion, alternating with zones of relative quiescence, we conceive that some of the cosmic energies would be observed to shoot off on an infinite range, off on a straight\hyp{}line path into trackless space; but we never find force, energy, or matter thus behaving; ever they whirl, always swinging onward in the tracks of the great space circuits.
-\vs p012 1:3 \pc Proceeding outward from Paradise through the horizontal extension of pervaded space, the master universe is existent in six concentric ellipses, the space levels encircling the central Isle:
+\vs p012 1:3 \pc Proceeding outward from Paradise\tunemarkup{pgkoboaurahd}{\linebreak} through the horizontal extension of pervaded space, the master universe is existent in six concentric ellipses, the space levels encircling the central Isle:
 \vs p012 1:4 \ublistelem{1.}\bibnobreakspace The Central Universe --- Havona.
 \vs p012 1:5 \ublistelem{2.}\bibnobreakspace The Seven Superuniverses.
 \vs p012 1:6 \ublistelem{3.}\bibnobreakspace The First Outer Space Level.
@@ -31,8 +31,8 @@
 \vs p012 1:16 The central universe is the creation of eternity; the seven superuniverses are the creations of time; the four outer space levels are undoubtedly destined to eventuate\hyp{}evolve the ultimacy of creation. And there are those who maintain that the Infinite can never attain full expression short of infinity; and therefore do they postulate an additional and unrevealed creation beyond the fourth and outermost space level, a possible ever\hyp{}expanding, never\hyp{}ending universe of infinity. In theory we do not know how to limit either the infinity of the Creator or the potential infinity of creation, but as it exists and is administered, we regard the master universe as having limitations, as being definitely delimited and bounded on its outer margins by open space.
 \usection{The Domains of the Unqualified Absolute}
 \vs p012 2:1 When Urantia astronomers peer through their increasingly powerful telescopes into the mysterious stretches of outer space and there behold the amazing evolution of almost countless physical universes, they should realize that they are gazing upon the mighty outworking of the unsearchable plans of the Architects of the Master Universe. True, we do possess evidences which are suggestive of the presence of certain Paradise personality influences here and there throughout the vast energy manifestations now characteristic of these outer regions, but from the larger viewpoint the space regions extending beyond the outer borders of the seven superuniverses are generally recognized as constituting the domains of the Unqualified Absolute.
-\vs p012 2:2 Although the unaided human eye can see only two or three nebulae\fnst{\textbf{two or three nebulae}, That is galaxies. Unaided eye can see only two galaxies in the Northern Hemisphere: M31 (Andromeda) and M33 (Triangulum). These very objects are mentioned in the book \cite{Baker1}, which served as one of the sources of this paper. The Large and Small Magellanic Clouds are visible only in the Southern Hemisphere and are considered to be the sattelites of our Galaxy. Therefore, the Andromeda galaxy is situated \bibemph{outside the borders of the superuniverse of Orvonton}. See also \bibref[15:4.7]{p015 4:7}.} outside the borders of the superuniverse of Orvonton, your telescopes literally reveal millions upon millions of these physical universes in process of formation. Most of the starry realms visually exposed to the search of your present\hyp{}day telescopes are in Orvonton, but with photographic technique the larger telescopes penetrate far beyond the borders of the grand universe into the domains of outer space, where untold universes are in process of organization. And there are yet other millions of universes beyond the range of your present instruments.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/M31.jpg}\caption{Andromeda galaxy (М31)}\end{figure}}
-\vs p012 2:3 In the not\hyp{}distant future, new telescopes\fnst{\textbf{new telescopes}, According to \cite{Baker1} the ``new'' 200\hyp{}inch telescope Hale, sponsored by the Rockefeller Foundation in 1928 is meant here. It was being built from 1936 until 1948.} will reveal to the wondering gaze of Urantian astronomers no less than 375,000,000 new galaxies in the remote stretches of outer space. At the same time these more powerful telescopes will disclose that many island universes formerly believed to be in outer space are really a part of the galactic system of Orvonton. The seven superuniverses are still growing; the periphery of each is gradually expanding; new nebulae are constantly being stabilized and organized; and some of the nebulae which Urantian astronomers regard as extragalactic are actually on the fringe of Orvonton and are travelling along with us.\fnst{\textbf{travelling along with us}, Perhaps the Large and Small Magellanic Clouds are meant here.}\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Hale-200inch.jpg}\caption{200\hyp{}inch telescope George Ellery Hale in San Diego, California, USA}\end{figure}}
+\vs p012 2:2 Although the unaided human eye can see only two or three nebulae\fnst{That is galaxies. Unaided eye can see only two galaxies in the Northern Hemisphere: M31 (Andromeda) and M33 (Triangulum). These very objects are mentioned in the book \cite{Baker1}, which served as one of the sources of this paper. The Large and Small Magellanic Clouds are visible only in the Southern Hemisphere and are considered to be the sattelites of our Galaxy. Therefore, the Andromeda galaxy is situated \bibemph{outside the borders of the superuniverse of Orvonton}. See also \bibref[15:4.7]{p015 4:7}.} outside the borders of the superuniverse of Orvonton, your telescopes literally reveal millions upon millions of these physical universes in process of formation. Most of the starry realms visually exposed to the search of your present\hyp{}day telescopes are in Orvonton, but with photographic technique the larger telescopes penetrate far beyond the borders of the grand universe into the domains of outer space, where untold universes are in process of organization. And there are yet other millions of universes beyond the range of your present instruments.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/M31.jpg}\caption{Andromeda galaxy (М31)}\end{figure}}
+\vs p012 2:3 In the not\hyp{}distant future, new telescopes\fnst{According to \cite{Baker1} the ``new'' 200\hyp{}inch telescope Hale, sponsored by the Rockefeller Foundation in 1928 is meant here. It was being built from 1936 until 1948.} will reveal to the wondering gaze of Urantian astronomers no less than 375,000,000 new galaxies in the remote stretches of outer space. At the same time these more powerful telescopes will disclose that many island universes formerly believed to be in outer space are really a part of the galactic system of Orvonton. The seven superuniverses are still growing; the periphery of each is gradually expanding; new nebulae are constantly being stabilized and organized; and some of the nebulae which Urantian astronomers regard as extragalactic are actually on the fringe of Orvonton and are travelling along with us.\fnst{The Large and Small Magellanic Clouds may be referred to here.}\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Hale-200inch.jpg}\caption{200\hyp{}inch telescope George Ellery Hale in San Diego, California, USA}\end{figure}}
 \vs p012 2:4 \pc The Uversa star students observe that the grand universe is surrounded by the ancestors of a series of starry and planetary clusters which completely encircle the present inhabited creation as concentric rings of outer universes upon universes. The physicists of Uversa calculate that the energy and matter of these outer and uncharted regions already equal many times the total material mass and energy charge embraced in all seven superuniverses. We are informed that the metamorphosis of cosmic force in these outer space levels is a function of the Paradise force organizers. We also know that these forces are ancestral to those physical energies which at present activate the grand universe. The Orvonton power directors, however, have nothing to do with these far\hyp{}distant realms, neither are the energy movements therein discernibly connected with the power circuits of the organized and inhabited creations.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/LMC.jpg}\caption{Large and Small Magellanic Clouds}\end{figure}}
 \vs p012 2:5 \pc We know very little of the significance of these tremendous phenomena of outer space. A greater creation of the future is in process of formation. We can observe its immensity, we can discern its extent and sense its majestic dimensions, but otherwise we know little more about these realms than do the astronomers of Urantia. As far as we know, no material beings on the order of humans, no angels or other spirit creatures, exist in this outer ring of nebulae, suns, and planets. This distant domain is beyond the jurisdiction and administration of the superuniverse governments.
 \vs p012 2:6 Throughout Orvonton it is believed that a new type of creation is in process, an order of universes destined to become the scene of the future activities of the assembling Corps of the Finality; and if our conjectures are correct, then the endless future may hold for all of you the same enthralling spectacles that the endless past has held for your seniors and predecessors.
@@ -64,7 +64,7 @@
 \vs p012 4:12 \pc The present relationship of your sun and its associated planets, while disclosing many relative and absolute motions in space, tends to convey the impression to astronomic observers that you are comparatively stationary in space, and that the surrounding starry clusters and streams are engaged in outward flight at ever\hyp{}increasing velocities as your calculations proceed outward in space. But such is not the case. You fail to recognize the present outward and uniform expansion of the physical creations of all pervaded space. Your own local creation (Nebadon) participates in this movement of universal outward expansion. The entire seven superuniverses participate in the two\hyp{}billion\hyp{}year cycles of space respiration along with the outer regions of the master universe.
 \vs p012 4:13 When the universes expand and contract, the material masses in pervaded space alternately move against and with the pull of Paradise gravity. The work that is done in moving the material energy mass of creation is \bibemph{space} work but not \bibemph{power\hyp{}energy} work.
 \vs p012 4:14 \pc Although your spectroscopic estimations of astronomic velocities are fairly reliable when applied to the starry realms belonging to your superuniverse and its associate superuniverses, such reckonings with reference to the realms of outer space are wholly unreliable. Spectral lines are displaced from the normal towards the violet by an approaching star; likewise these lines are displaced towards the red by a receding star. Many influences interpose to make it appear that the recessional velocity of the external universes increases at the rate of more than 160 km/s for every 1,000,000 light\hyp{}years\fnst{The value of Hubble constant given in the text (522\,km/s/Mpc) is very close to the value obtained by Hubble himself in 1935: 535\,km/s/Mpc. Hubble's calculations were based on the dependence between the period and luminosity of variable stars called Cepheids. The revision of the base point of this dependence by W.~Baade in 1952 led to the significant correction of the value of Hubble's constant. By 1955 the accepted value became 180\,km/s/Mpc and the modern (2016) value is even smaller: 6,93$\pm$0,62\,km/s/Mpc.} increase in distance. By this method of reckoning, subsequent to the perfection of more powerful telescopes, it will appear that these far\hyp{}distant systems are in flight from this part of the universe at the unbelievable rate of more than 48,000 km/s. But this apparent speed of recession is not real; it results from numerous factors of error embracing angles of observation and other time\hyp{}space distortions.
-\vs p012 4:15 But the greatest of all such distortions arises because the vast universes of outer space, in the realms\fnc{\textbf{outer space, in the realms}, In 1955 text no comma.} next to the domains of the seven superuniverses, seem to be revolving in a direction opposite to that of the grand universe. That is, these myriads of nebulae and their accompanying suns and spheres are at the present time revolving clockwise about the central creation. The seven superuniverses revolve about Paradise in a counterclockwise direction. It appears that the second outer universe of galaxies, like the seven superuniverses, revolves counterclockwise about Paradise. And the astronomic observers of Uversa think they detect evidence of revolutionary movements in a third outer belt of far\hyp{}distant space which are beginning to exhibit directional tendencies of a clockwise nature.
+\vs p012 4:15 But the greatest of all such distortions arises because the vast universes of outer space, in the realms\fnc{In 1955 text no comma after ``space''.} next to the domains of the seven superuniverses, seem to be revolving in a direction opposite to that of the grand universe. That is, these myriads of nebulae and their accompanying suns and spheres are at the present time revolving clockwise about the central creation. The seven superuniverses revolve about Paradise in a counterclockwise direction. It appears that the second outer universe of galaxies, like the seven superuniverses, revolves counterclockwise about Paradise. And the astronomic observers of Uversa think they detect evidence of revolutionary movements in a third outer belt of far\hyp{}distant space which are beginning to exhibit directional tendencies of a clockwise nature.
 \vs p012 4:16 It is probable that these alternate directions of successive space processions of the universes have something to do with the intramaster universe gravity technique of the Universal Absolute, which consists of a co\hyp{}ordination of forces and an equalization of space tensions. Motion as well as space is a complement or equilibrant of gravity.
 \usection{Space and Time}
 \vs p012 5:1 Like space, time is a bestowal of Paradise, but not in the same sense, only indirectly. Time comes by virtue of motion and because mind is inherently aware of sequentiality. From a practical viewpoint, motion is essential to time, but there is no universal time unit based on motion except in so far as the Paradise\hyp{}Havona standard day is arbitrarily so recognized. The totality of space respiration destroys its local value as a time source.
