--- a/tex/p013.tex
+++ b/tex/p013.tex
@@ -7,7 +7,7 @@
 \vs p013 0:1 Between the central Isle of Paradise and the innermost of the Havona planetary circuits there are situated in space three lesser circuits of special spheres. The innermost circuit consists of the seven secret spheres of the Universal Father; the second group is composed of the seven luminous worlds of the Eternal Son; in the outermost are the seven immense spheres of the Infinite Spirit, the executive\hyp{}headquarters worlds of the Seven Master Spirits.
 \vs p013 0:2 These three seven\hyp{}world circuits of the Father, the Son, and the Spirit are spheres of unexcelled grandeur and unimagined glory. Even their material or physical construction is of an order unrevealed to you. Each circuit is diverse in material, and each world of each circuit is different excepting the seven worlds of the Son, which are alike in physical constitution. All 21 are enormous spheres, and each group of seven is differently eternalized. As far as we know they have always been; like Paradise they are eternal. There exists neither record nor tradition of their origin.
 \vs p013 0:3 \pc The seven secret spheres of the Universal Father, circulating about Paradise in close proximity to the eternal Isle, are highly reflective of the spiritual luminosity of the central shining of the eternal Deities, shedding this light of divine glory throughout Paradise and even upon the seven circuits of Havona.
-\vs p013 0:4 \pc On the seven sacred worlds of the Eternal Son there appear to take origin the impersonal energies of spirit luminosity. No personal being may sojourn on any of these seven shining realms. With spiritual glory they illuminate all Paradise and Havona, and they directionize pure spirit luminosity to the seven superuniverses. These brilliant spheres of the second circuit likewise emit their light (light without heat\fnst{\textbf{light without heat}, The scientific term for this is \bibemph{luminescence} and its sources can be compared to those of the thermal (blackbody, i.e. ``light with heat'') radiation as the orderly movements of the troops are compared to the chaotic pushes and running of a crowd. See p.138 of ``О <<тёплом>> и <<холодном>> свете'', С.И.~Вавилов, 1961.}) to Paradise and to the billion worlds of the seven\hyp{}circuited central universe.
+\vs p013 0:4 \pc On the seven sacred worlds of the Eternal Son there appear to take origin the impersonal energies of spirit luminosity. No personal being may sojourn on any of these seven shining realms. With spiritual glory they illuminate all Paradise and Havona, and they directionize pure spirit luminosity to the seven superuniverses. These brilliant spheres of the second circuit likewise emit their light (light without heat\fnst{The scientific term for this is \bibemph{luminescence} and its sources can be compared to those of the thermal (blackbody, i.e. ``light with heat'') radiation as the orderly movements of the troops are compared to the chaotic pushes and running of a crowd. See p.138 of ``О <<тёплом>> и <<холодном>> свете'', С.И.~Вавилов, 1961.}) to Paradise and to the billion worlds of the seven\hyp{}circuited central universe.
 \vs p013 0:5 \pc The seven worlds of the Infinite Spirit are occupied by the Seven Master Spirits, who preside over the destinies of the seven superuniverses, sending forth the spiritual illumination of the Third Person of Deity to these creations of time and space. And all Havona, but not the Isle of Paradise, is bathed in these spiritualizing influences.
 \vs p013 0:6 \pc Although the worlds of the Father are ultimate status spheres for all Father\hyp{}endowed personalities, this is not their exclusive function. Many beings and entities other than personal sojourn on these worlds. Each world in the circuit of the Father and the circuit of the Spirit has a distinct type of permanent citizenship, but we think the Son’s worlds are inhabited by uniform types of other\hyp{}than\hyp{}personal beings. Father fragments are among the natives of Divinington; the other orders of permanent citizenship are unrevealed to you.
 \vs p013 0:7 The 21 Paradise satellites serve many purposes in both central and superuniverses not disclosed in these narratives. You are able to understand so little of the life of these spheres that you cannot hope to gain anything like a consistent view of them, either as to nature or function; thousands of activities are there going on which are unrevealed to you. These 21 spheres embrace the \bibemph{potentials} of the function of the master universe. These papers afford only a fleeting glimpse of certain circumscribed activities pertaining to the present universe age of the grand universe --- rather, one of the seven sectors of the grand universe.
@@ -19,7 +19,7 @@
 \vs p013 1:5 \pc \bibemph{The secrets of Divinington} include the secret of the bestowal and mission of Thought Adjusters. Their nature, origin, and the technique of their contact with the lowly creatures of the evolutionary worlds is a secret of this Paradise sphere. These amazing transactions do not personally concern the rest of us, and therefore do the Deities deem it proper to withhold certain features of this great and divine ministry from our full understanding. In so far as we come in contact with this phase of divine activity, we are permitted full knowledge of these transactions, but concerning the intimate details of this great bestowal we are not fully informed.
 \vs p013 1:6 This sphere also holds the secrets of the nature, purpose, and activities of all other forms of Father fragments, of the Gravity Messengers, and of hosts of other beings unrevealed to you. It is highly probable that those truths pertaining to Divinington which are withheld from me, if revealed, would merely confuse and handicap me in my present work, and still again, perhaps they are beyond the conceptual capacity of my order of being.
 \vs p013 1:7 \ublistelem{2.}\bibnobreakspace SONARINGTON. This sphere is the “bosom of the Son,” the personal receiving world of the Eternal Son. It is the Paradise headquarters of the descending and ascending Sons of God when, and after, they are fully accredited and finally approved. This world is the Paradise home for all Sons of the Eternal Son and of his co\hyp{}ordinate and associate Sons. There are numerous orders of divine sonship attached to this supernal abode which have not been revealed to mortals since they are not concerned with the plans of the ascension scheme of human spiritual progression through the universes and on to Paradise.
-\vs p013 1:8 \pc \bibemph{The secrets of Sonarington} include the secret of the incarnation of the divine Sons. When a Son of God becomes a Son of Man, is literally born of woman, as occurred on your world 1900 years ago\fnst{By the time of working on this book (2021) this event occurred 2027 years ago.}, it is a universal mystery. It is occurring right along throughout the universes, and it is a Sonarington secret of divine sonship. The Adjusters are a mystery of God the Father. The incarnation of the divine Sons is a mystery of God the Son; it is a secret locked up in the seventh sector of Sonarington, a realm penetrated by none save those who have personally passed through this unique experience. Only those phases of incarnation having to do with your ascension career have been brought to your notice. There are many other phases of the mystery of the incarnation of the Paradise Sons of unrevealed types on missions of universe service which are undisclosed to you. And there are still other Sonarington mysteries.
+\vs p013 1:8 \pc \bibemph{The secrets of Sonarington} include the secret of the incarnation of the divine Sons. When a Son of God becomes a Son of Man, is literally born of woman, as occurred on your world 1900 years ago\fnst{By the time of working on this book (2021) this event had occurred 2027 years ago.}, it is a universal mystery. It is occurring right along throughout the universes, and it is a Sonarington secret of divine sonship. The Adjusters are a mystery of God the Father. The incarnation of the divine Sons is a mystery of God the Son; it is a secret locked up in the seventh sector of Sonarington, a realm penetrated by none save those who have personally passed through this unique experience. Only those phases of incarnation having to do with your ascension career have been brought to your notice. There are many other phases of the mystery of the incarnation of the Paradise Sons of unrevealed types on missions of universe service which are undisclosed to you. And there are still other Sonarington mysteries.
 \vs p013 1:9 \ublistelem{3.}\bibnobreakspace SPIRITINGTON. This world is the “bosom of the Spirit,” the Paradise home of the high beings that exclusively represent the Infinite Spirit. Here forgather the Seven Master Spirits and certain of their offspring from all universes. At this celestial abode may also be found numerous unrevealed orders of spirit personalities, beings assigned to the manifold activities of the universe not associated with the plans of upstepping the mortal creatures of time to the Paradise levels of eternity.
 \vs p013 1:10 \pc \bibemph{The secrets of Spiritington} involve the impenetrable mysteries of reflectivity. We tell you of the vast and universal phenomenon of reflectivity, more particularly as it is operative on the headquarters worlds of the seven superuniverses, but we never fully explain this phenomenon, for we do not fully understand it. Much, very much, we do comprehend, but many basic details are still mysterious to us. Reflectivity is a secret of God the Spirit. You have been instructed concerning reflectivity functions in relation to the ascension scheme of mortal survival, and it does so operate, but reflectivity is also an indispensable feature of the normal working of numerous other phases of universe occupation. This endowment of the Infinite Spirit is also utilized in channels other than those of intelligence gathering and information dissemination. And there are other secrets of Spiritington.
 \vs p013 1:11 \ublistelem{4.}\bibnobreakspace VICEGERINGTON. This planet is the “bosom of the Father and the Son” and is the secret sphere of certain unrevealed beings who take origin by the acts of the Father and the Son. This is also the Paradise home of many glorified beings of complex ancestry, those whose origin is complicated because of the many diverse techniques operative in the seven superuniverses. Many groups of beings forgather on this world whose identity has not been revealed to Urantia mortals.
@@ -32,7 +32,7 @@
 \vs p013 1:18 \pc \bibemph{The secrets of Solitarington.} Besides certain secrets of trinitization, this world holds the secrets of the personal relation of the Infinite Spirit with certain of the higher offspring of the Third Source and Centre. On Solitarington are held the mysteries of the intimate association of numerous unrevealed orders with the spirits of the Father, of the Son, and of the Spirit, with the threefold spirit of the Trinity, and with the spirits of the Supreme, the Ultimate, and the Supreme\hyp{}Ultimate.
 \vs p013 1:19 \ublistelem{6.}\bibnobreakspace SERAPHINGTON. This sphere is the “bosom of the Son and the Spirit” and is the home world of the vast hosts of unrevealed beings created by the Son and the Spirit. This is also the destiny sphere of all ministering orders of the angelic hosts, including supernaphim, seconaphim, and seraphim. There also serve in the central and outlying universes many orders of superb spirits who are not “ministering spirits to those who shall be heirs of salvation.” All these spirit workers in all levels and realms of universe activities look upon Seraphington as their Paradise home.
 \vs p013 1:20 \pc \bibemph{The secrets of Seraphington} involve a threefold mystery, only one of which I may mention --- the mystery of seraphic transport. The ability of various orders of seraphim and allied spirit beings to envelop within their spirit forms all orders of nonmaterial personalities and to carry them away on lengthy interplanetary journeys, is a secret locked up in the sacred sectors of Seraphington. The transport seraphim comprehend this mystery, but they do not communicate it to the rest of us, or perhaps they cannot. The other mysteries of Seraphington pertain to the personal experiences of types of spirit servers as yet not revealed to mortals. And we refrain from discussing the secrets of such closely related beings because you can almost comprehend such near orders of existence, and it would be akin to betrayal of trust to present even our partial knowledge of such phenomena.
-\vs p013 1:21 \ublistelem{7.}\bibnobreakspace ASCENDINGTON. This unique world is the “bosom of the Father, Son, and Spirit,” the rendezvous of the ascendant creatures of space, the receiving sphere of the pilgrims of time who are passing through the Havona universe on their way to Paradise. Ascendington is the actual Paradise home of the ascendant souls of time and space until they attain Paradise status. You mortals will spend most of your Havona “vacations” on Ascendington. During your Havona life Ascendington will be to you what the reversion directors were during the local and superuniverse ascension. Here you will engage in thousands of activities which are beyond the grasp of mortal imagination. And as on every previous advance in the Godward ascent, your human self will here enter into new relationships with your divine self.
+\vs p013 1:21 \ublistelem{7.}\bibnobreakspace ASCENDINGTON. This unique\tunemarkup{pgkoboaurahd}{\linebreak} world is the “bosom of the Father, Son, and Spirit,” the rendezvous of the ascendant creatures of space, the receiving sphere of the pilgrims of time who are passing through the Havona universe on their way to Paradise. Ascendington is the actual Paradise home of the ascendant souls of time and space until they attain Paradise status. You mortals will spend most of your Havona “vacations” on Ascendington. During your Havona life Ascendington will be to you what the reversion directors were during the local and superuniverse ascension. Here you will engage in thousands of activities which are beyond the grasp of mortal imagination. And as on every previous advance in the Godward ascent, your human self will here enter into new relationships with your divine self.
 \vs p013 1:22 \pc \bibemph{The secrets of Ascendington} include the mystery of the gradual and certain building up in the material and mortal mind of a spiritual and potentially immortal counterpart of character and identity. This phenomenon constitutes one of the most perplexing mysteries of the universes --- the evolution of an immortal soul within the mind of a mortal and material creature.
 \vs p013 1:23 You will never fully understand this mysterious transaction until you reach Ascendington. And that is just why all Ascendington will be open to your wondering gaze. One seventh of Ascendington is forbidden to me --- that sector concerned with this very secret which is (or will be) the exclusive experience and possession of your type of being. This experience belongs to your human order of existence. My order of personality is not directly concerned with such transactions. It is therefore forbidden to me and eventually revealed to you. But even after it is revealed to you, for some reason it forever remains your secret. You do not reveal it to us nor to any other order of beings. We know about the eternal fusion of a divine Adjuster and an immortal soul of human origin, but the ascendant finaliters know this very experience as an absolute reality.
 \usection{Father\hyp{}World Relationships}
