--- a/tex/p016.tex
+++ b/tex/p016.tex
@@ -105,7 +105,7 @@
 \vs p016 8:3 Personality is a unique endowment of original nature whose existence is independent of, and antecedent to, the bestowal of the Thought Adjuster. Nevertheless, the presence of the Adjuster does augment the qualitative manifestation of personality. Thought Adjusters, when they come forth from the Father, are identical in nature, but personality is diverse, original, and exclusive; and the manifestation of personality is further conditioned and qualified by the nature and qualities of the associated energies of a material, mindal, and spiritual nature which constitute the organismal vehicle for personality manifestation.
 \vs p016 8:4 Personalities may be similar, but they are never the same. Persons of a given series, type, order, or pattern may and do resemble one another, but they are never identical. Personality is that feature of an individual which we \bibemph{know,} and which enables us to identify such a being at some future time regardless of the nature and extent of changes in form, mind, or spirit status. Personality is that part of any individual which enables us to recognize and positively identify that person as the one we have previously known, no matter how much he may have changed because of the modification of the vehicle of expression and manifestation of his personality.
 \vs p016 8:5 \pc Creature personality is distinguished by two self\hyp{}manifesting and characteristic phenomena of mortal reactive behaviour: self\hyp{}consciousness and associated relative free will.
-\vs p016 8:6 Self\hyp{}consciousness consists in intellectual\tunemarkup{pgkoboaurahd}{\linebreak} awareness of personality actuality; it includes the ability to recognize the reality of other personalities. It indicates capacity for individualized experience in and with cosmic realities, equivalating to the attainment of identity status in the personality relationships of the universe. Self\hyp{}consciousness connotes recognition of the actuality of mind ministration and the realization of relative independence of creative and determinative free will.
+\vs p016 8:6 Self\hyp{}consciousness consists in intellectual awareness of personality actuality; it includes the ability to recognize the reality of other personalities. It indicates capacity for individualized experience in and with cosmic realities, equivalating to the attainment of identity status in the personality relationships of the universe. Self\hyp{}consciousness connotes recognition of the actuality of mind ministration and the realization of relative independence of creative and determinative free will.
 \vs p016 8:7 \pc The relative free will which characterizes the self\hyp{}consciousness of human personality is involved in:
 \vs p016 8:8 \ublistelem{1.}\bibnobreakspace Moral decision, highest wisdom.
 \vs p016 8:9 \ublistelem{2.}\bibnobreakspace Spiritual choice, truth discernment.
