--- a/tex/p019.tex
+++ b/tex/p019.tex
@@ -52,7 +52,7 @@
 \vs p019 4:5 \pc The Censors are universe totalling personalities. When a thousand witnesses have given testimony --- or a million --- when the voice of wisdom has spoken and the counsel of divinity has recorded, when the testimony of ascendant perfection has been added, then the Censor functions, and there is immediately revealed an unerring and divine totalling of all that has transpired; and such a disclosure represents the divine conclusion, the sum and substance of a final and perfect decision. Therefore, when a Censor has spoken, no one else may speak, for the Censor has depicted the true and unmistakable total of all that has gone before. When he speaks, there is no appeal.
 \vs p019 4:6 Most fully do I understand the operation of the mind of a Perfector of Wisdom, but I certainly do not fully comprehend the working of the adjudicating mind of a Universal Censor. It appears to me that the Censors formulate new meanings and originate new values from the association of the facts, truths, and findings presented to them in the course of an investigation of universe affairs. It seems probable that the Universal Censors are able to bring forth original interpretations of the combination of perfect Creator insight and the perfected creature experience. This association of Paradise perfection and universe experience undoubtedly eventuates a new value in ultimates.
 \vs p019 4:7 But this is not the end of our difficulties regarding the working of the minds of the Universal Censors. Having made due allowances for all that we know or conjecture about the functioning of a Censor in any given universe situation, we find that we are still unable to predict decisions or to forecast verdicts. We very accurately determine the probable result of the association of Creator attitude and creature experience, but such conclusions are not always accurate forecasts of Censor disclosures. It seems likely that the Censors are in some manner in liaison with the Deity Absolute; we are otherwise unable to explain many of their decisions and rulings.
-\vs p019 4:8 \pc Perfectors of Wisdom, Divine Counsellors, and Universal Censors, together with the seven orders of Supreme Trinity Personalities, constitute those ten groups which have been sometimes designated \bibemph{Stationary Sons of the Trinity.} Together they comprise the grand corps of Trinity administrators, rulers, executives, advisers, counsellors, and judges. Their numbers slightly exceed 37,000,000,000. 2,000,000,070\fnst{\textbf{2,000,000,070}, The 70 are, no doubt, the Trinitized Secrets of Supremacy serving in the innermost circuit of the Paradise satellites, the spheres of the Universal Father.} are stationed in the central universe and just over 5,000,000,000 in each superuniverse.
+\vs p019 4:8 \pc Perfectors of Wisdom, Divine Counsellors, and Universal Censors, together with the seven orders of Supreme Trinity Personalities, constitute those ten groups which have been sometimes designated \bibemph{Stationary Sons of the Trinity.} Together they comprise the grand corps of Trinity administrators, rulers, executives, advisers, counsellors, and judges. Their numbers slightly exceed 37,000,000,000. 2,000,000,070\fnst{The 70 are, no doubt, the Trinitized Secrets of Supremacy serving in the innermost circuit of the Paradise satellites, the spheres of the Universal Father.} are stationed in the central universe and just over 5,000,000,000 in each superuniverse.
 \vs p019 4:9 It is very difficult to portray the functional limits of the Stationary Sons of the Trinity. It would be incorrect to state that their acts are finite limited, for there are transactions of superuniverse record which indicate otherwise. They act on any level of universe administration or adjudication that may be required by time\hyp{}space conditions and that pertains to the past, present, and future evolution of the master universe.
 \usection{Inspired Trinity Spirits}
 \vs p019 5:1 I will be able to tell you very little concerning the Inspired Trinity Spirits, for they are one of the few wholly secret orders of beings in existence, secret, no doubt, because it is impossible for them fully to reveal themselves even to those of us whose origin is so near the source of their creation. They come into being by the act of the Paradise Trinity and may be utilized by any one or two of the Deities as well as by all three. We do not know whether these Spirits are of completed numbers or are constantly increasing, but we incline to the belief that their number is not fixed.
