--- a/tex/p021.tex
+++ b/tex/p021.tex
@@ -75,7 +75,7 @@
 \usection{Destiny of the Master Michaels}
 \vs p021 6:1 No one may with finality of authority presume to discuss either the natures or the destinies of the sevenfold Master Sovereigns of the local universes; nevertheless, we all speculate much regarding these matters. We are taught, and we believe, that each Paradise Michael is the \bibemph{absolute} of the dual deity concepts of his origin; thus he embodies actual phases of the infinity of the Universal Father and the Eternal Son. The Michaels must be partial in relation to total infinity, but they are probably absolute in relation to that part of infinity concerned in their origin. But as we observe their work in the present universe age, we detect no action that is more than finite; any conjectured superfinite capacities must be self\hyp{}contained and as yet unrevealed.
 \vs p021 6:2 The completion of the creature\hyp{}bestowal careers and the elevation to supreme universe sovereignty must signify the completed liberation of a Michael’s finite\hyp{}action capacities accompanied by the appearance of capacity for more\hyp{}than\hyp{}finite service. For in this connection we note that such Master Sons are then restricted in the production of new types of creature beings, a restriction undoubtedly made necessary by the liberation of their superfinite potentialities.
-\vs p021 6:3 It is highly probable that these undisclosed creator powers will remain self\hyp{}contained\tunemarkup{pgkoboaurahd}{\linebreak} throughout the present universe age. But sometime in the far\hyp{}distant future, in the now mobilizing universes of outer space, we believe that the liaison between a sevenfold Master Son and a seventh\hyp{}stage Creative Spirit may attain to absonite levels of service attended by the appearance of new things, meanings, and values on transcendental levels of ultimate universe significance.
+\vs p021 6:3 It is highly probable that these undisclosed creator powers will remain self\hyp{}contained throughout the present universe age. But sometime in the far\hyp{}distant future, in the now mobilizing universes of outer space, we believe that the liaison between a sevenfold Master Son and a seventh\hyp{}stage Creative Spirit may attain to absonite levels of service attended by the appearance of new things, meanings, and values on transcendental levels of ultimate universe significance.
 \vs p021 6:4 Just as the Deity of the Supreme is actualizing by virtue of experiential service, so are the Creator Sons achieving the personal realization of the Paradise\hyp{}divinity potentials bound up in their unfathomable natures. When on Urantia, Christ Michael once said, \textcolour{ubdarkred}{“I am the way, the truth, and the life.”} And we believe that in eternity the Michaels are literally destined to be “the way, the truth, and the life,” ever blazing the path for all universe personalities as it leads from supreme divinity through ultimate absonity to eternal deity finality.
 \vsetoff
 \vs p021 6:5 [Presented by a Perfector of Wisdom from Uversa.]
