--- a/tex/p025.tex
+++ b/tex/p025.tex
@@ -22,7 +22,7 @@
 \vs p025 1:2 \pc The Havona Servitals are the joint creative work of the Seven Master Spirits and their associates, the Seven Supreme Power Directors. This creative collaboration comes the nearest to being the pattern for the long list of reproductions of the dual order in the evolutionary universes, extending from the creation of a Bright and Morning Star by a Creator Son\hyp{}Creative Spirit liaison down to sex procreation on worlds like Urantia.
 \vs p025 1:3 The number of servitals is prodigious, and more are being created all the time. They appear in groups of 1,000 on the 3\ts{rd} moment following the assembly of the Master Spirits and the Supreme Power Directors at their joint area in the far northerly sector of Paradise. Every 4\ts{th} servital is more physical in type than the others; that is, out of each 1,000, 750 are apparently true to spirit type, but 250 are semiphysical in nature. These \bibemph{4\ts{th} creatures} are somewhat on the order of material beings (material in the Havona sense), resembling the physical power directors more than the Master Spirits.
 \vs p025 1:4 \pc In personality relationships the spiritual is dominant over the material, even though it does not now so appear on Urantia; and in the production of Havona Servitals the law of spirit dominance prevails; the established ratio yields three spiritual beings to one semiphysical.
-\vs p025 1:5 \pc The newly created servitals, together with newly appearing Graduate Guides, all pass\tunemarkup{pgkoboaurahd}{\linebreak} through the courses of training which the senior guides continuously conduct on each of the seven Havona circuits. Servitals are then assigned to the activities for which they are best adapted, and since they are of two types --- spiritual and semiphysical --- there are few limits to the range of work these versatile beings can do. The higher or spirit groups are assigned selectively to the services of the Father, the Son, and the Spirit, and to the work of the Seven Master Spirits. In large numbers they are dispatched, from time to time, to serve on the study worlds encircling the headquarters spheres of the seven superuniverses, the worlds devoted to the final training and spiritual culture of the ascending souls of time who are preparing for advancement to the circuits of Havona. Both spirit servitals and their more physical fellows are also designated assistants and associates of the Graduate Guides in helping and instructing the various orders of ascending creatures who have attained Havona, and who seek to attain Paradise.
+\vs p025 1:5 \pc The newly created servitals, together with newly appearing Graduate Guides, all pass through the courses of training which the senior guides continuously conduct on each of the seven Havona circuits. Servitals are then assigned to the activities for which they are best adapted, and since they are of two types --- spiritual and semiphysical --- there are few limits to the range of work these versatile beings can do. The higher or spirit groups are assigned selectively to the services of the Father, the Son, and the Spirit, and to the work of the Seven Master Spirits. In large numbers they are dispatched, from time to time, to serve on the study worlds encircling the headquarters spheres of the seven superuniverses, the worlds devoted to the final training and spiritual culture of the ascending souls of time who are preparing for advancement to the circuits of Havona. Both spirit servitals and their more physical fellows are also designated assistants and associates of the Graduate Guides in helping and instructing the various orders of ascending creatures who have attained Havona, and who seek to attain Paradise.
 \vs p025 1:6 The Havona Servitals and the Graduate Guides manifest a transcendent devotion to their work and a touching affection for one another, an affection which, while spiritual, you could only understand by comparison with the phenomenon of human love. There is divine pathos in the separation of the servitals from the guides, as so often occurs when the servitals are dispatched on missions beyond the limits of the central universe; but they go with joy and not with sorrow. The satisfying joy of high duty is the eclipsing emotion of spiritual beings. Sorrow cannot exist in the face of the consciousness of divine duty faithfully performed. And when man’s ascending soul stands before the Supreme Judge, the decision of eternal import will not be determined by material successes or quantitative achievements; the verdict reverberating through the high courts declares: “Well done, good and \bibemph{faithful} servant; you have been faithful over a few essentials; you shall be made ruler over universe realities.”
 \vs p025 1:7 On superuniverse service the Havona Servitals are always assigned to that domain presided over by the Master Spirit whom they most resemble in general and special spirit prerogatives. They serve only on the educational worlds surrounding the capitals of the seven superuniverses, and the last report of Uversa indicates that almost 138 billion servitals were ministering on its 490 satellites. They engage in an endless variety of activities in connection with the work of these educational worlds comprising the superuniversities of the superuniverse of Orvonton. Here they are your companions; they have come down from your next career to study you and to inspire you with the reality and certainty of your eventual graduation from the universes of time to the realms of eternity. And in these contacts the servitals gain that preliminary experience of ministering to the ascending creatures of time which is so helpful in their subsequent work on the Havona circuits as associates of the Graduate Guides or --- as translated servitals --- as Graduate Guides themselves.
 \usection{The Universal Conciliators}
@@ -102,7 +102,7 @@
 \vs p025 8:5 \pc If you, as an ascendant mortal, should reach Paradise in the company of the companion or close associate of your earthly career, or if your seraphic guardian of destiny should chance to arrive with you or were waiting for you, then no permanent companion would be assigned you. But if you arrive alone, a companion will certainly welcome you as you awaken on the Isle of Light from the terminal sleep of time. Even if it is known that you will be accompanied by someone of ascendant association, temporary companions will be designated to welcome you to the eternal shores and to escort you to the reservation made ready for the reception of you and your associates. You may be certain of being warmly welcomed when you experience the resurrection into eternity on the everlasting shores of Paradise.
 \vs p025 8:6 Reception companions are assigned during the terminal days of the ascenders’ sojourn on the last circuit of Havona, and they carefully examine the records of mortal origin and eventful ascent through the worlds of space and the circles of Havona. When they greet the mortals of time, they are already well versed in the careers of these arriving pilgrims and immediately prove to be sympathetic and intriguing companions.
 \vs p025 8:7 During your prefinaliter sojourn on Paradise, if for any reason you should be temporarily separated from your associate of the ascending career --- mortal or seraphic --- a Paradise Companion would be forthwith assigned for counsel and companionship. When once assigned to an ascendant mortal of solitary residence on Paradise, the companion remains with this person until he either is rejoined by his ascendant associates or is duly mustered into the Corps of the Finality.
-\vs p025 8:8 \pc Paradise Companions are assigned in order of waiting except that an ascender is never placed in the charge of a companion whose nature is unlike his superuniverse type. If a Urantia mortal were arriving on Paradise today, there would be assigned to him the first waiting companion either of origin in Orvonton or otherwise of the nature of the Seventh Master Spirit. Hence the omniaphim serve not with the ascendant creatures\fnst{\textbf{omniaphim serve not with the ascendant creatures}, Because omniaphim are created concertedly by the Infinite Spirit and the Seven Supreme Executives (cf.~\bibref[26:1.13]{p026 1:13}) and therefore their natures are not like a single superuniverse type.} from the seven superuniverses.
+\vs p025 8:8 \pc Paradise Companions are assigned in order of waiting except that an ascender is never placed in the charge of a companion whose nature is unlike his superuniverse type. If a Urantia mortal were arriving on Paradise today, there would be assigned to him the first waiting companion either of origin in Orvonton or otherwise of the nature of the Seventh Master Spirit. Hence the omniaphim serve not with the ascendant creatures\fnst{Because omniaphim are created concertedly by the Infinite Spirit and the Seven Supreme Executives (cf.~\bibref[26:1.13]{p026 1:13}) and therefore their natures are not like a single superuniverse type.} from the seven superuniverses.
 \vs p025 8:9 \pc Many additional services are performed by the Paradise Companions: If an ascending mortal should reach the central universe alone and, while traversing Havona, should fail in some phase of the Deity adventure, in due course he would be remanded to the universes of time, and forthwith a call would be made to the reserves of the Paradise Companions. One of this order would be assigned to follow the defeated pilgrim, to be with him and to comfort and cheer him, and to remain with him until he returned to the central universe to resume the Paradise ascent.
 \vs p025 8:10 If an ascending pilgrim met defeat in the Deity adventure while traversing Havona in the company of an ascending seraphim, the guardian angel of the mortal career, she would elect to accompany her mortal associate. These seraphim always volunteer and are permitted to accompany their long\hyp{}time mortal comrades back to the service of time and space.
 \vs p025 8:11 But not so with two closely associated mortal ascenders: If one attains God while the other temporarily fails, the successful individual invariably chooses to go back to the evolutionary creations with the disappointed personality, but this is not permitted. Instead, a call is made to the reserves of the Paradise Companions, and one of the volunteers is selected to accompany the disappointed pilgrim. A volunteer Paradise Citizen then becomes associated with the successful mortal, who tarries on the central Isle awaiting the Havona return of the defeated comrade and in the meantime teaches in certain Paradise schools, presenting the adventurous story of the evolutionary ascent.
