--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -42,7 +42,7 @@
 \vs p029 2:18 \ublistelem{6.}\bibnobreakspace \bibemph{System Centres.} One Supreme Power Centre is permanently assigned to each local system. These system centres dispatch the power circuits to the inhabited worlds of time and space. They co\hyp{}ordinate the activities of the subordinate physical controllers and otherwise function to ensure the satisfactory distribution of power in the local system. The circuit relay between the planets depends upon the perfect co\hyp{}ordination of certain material energies and upon the efficient regulation of physical power.
 \vs p029 2:19 \ublistelem{7.}\bibnobreakspace \bibemph{Unclassified Centres.} These are the centres who function in special local situations but not on the inhabited planets. The individual worlds are in the charge of Master Physical Controllers and receive the encircuited lines of power dispatched by the power centre of their system. Only those spheres of the most extraordinary energy relationships have power centres of the 7\ts{th} order acting as universe balance wheels or energy governors. In every phase of activity these power centres are the full equals of those who function on the higher units of control, but not 1 space body in 1,000,000 harbours such a living power organization.
 \usection{The Domain of Power Centres}
-\vs p029 3:1 The Supreme Power Centres distributed\tunemarkup{pgkoboaurahd}{\linebreak} throughout the superuniverses number, with their associates and subordinates, upward of ten billion. And they are all in perfect synchrony and complete liaison with their Paradise progenitors, the Seven Supreme Power Directors. The power control of the grand universe is thus entrusted to the keeping and direction of the Seven Master Spirits, the creators of the Seven Supreme Power Directors.
+\vs p029 3:1 The Supreme Power Centres distributed throughout the superuniverses number, with their associates and subordinates, upward of ten billion. And they are all in perfect synchrony and complete liaison with their Paradise progenitors, the Seven Supreme Power Directors. The power control of the grand universe is thus entrusted to the keeping and direction of the Seven Master Spirits, the creators of the Seven Supreme Power Directors.
 \vs p029 3:2 The Supreme Power Directors and all their associates, assistants, and subordinates are forever exempt from apprehension or interference by all the tribunals of all space; neither are they subject to the administrative direction either of the superuniverse government of the Ancients of Days or of the local universe administration of the Creator Sons.
 \vs p029 3:3 These power centres and directors are brought into being by the children of the Infinite Spirit. They are not germane to the administration of the Sons of God, though they affiliate with the Creator Sons during the later epochs of universe material organization. But the power centres are in some way closely associated with the cosmic overcontrol of the Supreme Being.
 \vs p029 3:4 \pc Power centres and physical controllers undergo no training; they are all created in perfection and are inherently perfect in action. Never do they pass from one function to another; always do they serve as originally assigned. There is no evolution in their ranks, and this is true of all seven divisions of both orders.
