--- a/tex/p035.tex
+++ b/tex/p035.tex
@@ -19,7 +19,7 @@
 \vs p035 0:7 \pc Triune Paradise Deity functions for the creation of three orders of sonship: the Michaels, the Avonals, and the Daynals. Dual Deity in the local universe, the Son and the Spirit, also functions in the creation of three high orders of Sons: the Melchizedeks, the Vorondadeks, and the Lanonandeks; and having achieved this threefold expression, they collaborate with the next level of God the Sevenfold in the production of the versatile order of Life Carriers. These beings are classified with the descending Sons of God, but they are a unique and original form of universe life. Their consideration will occupy the whole of the next paper.
 \usection{The Father Melchizedek}
 \vs p035 1:1 After bringing into existence the beings of personal aid, such as the Bright and Morning Star and other administrative personalities, in accordance with the divine purpose and creative plans of a given universe, there occurs a new form of creative union between the Creator Son and the Creative Spirit, the local universe Daughter of the Infinite Spirit. The personality offspring resulting from this creative partnership is the original Melchizedek --- the Father Melchizedek --- that unique being who subsequently collaborates with the Creator Son and the Creative Spirit to bring into existence the entire group of that name.
-\vs p035 1:2 In the universe of Nebadon the Father Melchizedek acts as the first executive associate of the Bright and Morning Star. Gabriel is occupied more with universe policies, Melchizedek with practical procedures. Gabriel presides over the regularly constituted tribunals and councils of Nebadon, Melchizedek over the special, extraordinary, and emergency commissions and advisory bodies. Gabriel and the Father Melchizedek are never away from Salvington at the same time\fnst{\textbf{Gabriel and the Father Melchizedek are never away from Salvington at the same time}, They were \bibemph{apparently} away at the same time on the Mount of Transfiguration, cf. \bibref[158:1.6,7]{p158 1:6}.}, for in Gabriel’s absence the Father Melchizedek functions as the chief executive of Nebadon.
+\vs p035 1:2 In the universe of Nebadon the Father Melchizedek acts as the first executive associate of the Bright and Morning Star. Gabriel is occupied more with universe policies, Melchizedek with practical procedures. Gabriel presides over the regularly constituted tribunals and councils of Nebadon, Melchizedek over the special, extraordinary, and emergency commissions and advisory bodies. Gabriel and the Father Melchizedek are never away from Salvington at the same time\fnst{They were \bibemph{apparently} away at the same time on the Mount of Transfiguration, cf. \bibref[158:1.6,7]{p158 1:6}.}, for in Gabriel’s absence the Father Melchizedek functions as the chief executive of Nebadon.
 \vs p035 1:3 The Melchizedeks of our universe were all created within one millennial period of standard time by the Creator Son and the Creative Spirit in liaison with the Father Melchizedek. Being an order of sonship wherein one of their own number functioned as co\hyp{}ordinate creator, Melchizedeks are in constitution partly of self\hyp{}origin and therefore candidates for the realization of a supernal type of self\hyp{}government. They periodically elect their own administrative chief for a term of 7 years of standard time and otherwise function as a self\hyp{}regulating order, though the original Melchizedek does exercise certain inherent coparental prerogatives. From time to time this Father Melchizedek designates certain individuals of his order to function as special Life Carriers to the midsonite worlds, a type of inhabited planet not heretofore revealed on Urantia.
 \vs p035 1:4 The Melchizedeks do not function extensively outside the local universe except when they are called as witnesses in matters pending before the tribunals of the superuniverse, and when designated special ambassadors, as they sometimes are, representing one universe to another in the same superuniverse. The original or first\hyp{}born Melchizedek of each universe is always at liberty to journey to the neighbouring universes or to Paradise on missions having to do with the interests and duties of his order.
 \usection{The Melchizedek Sons}
@@ -68,7 +68,7 @@
 \vs p035 5:4 Although the decisions and rulings of this order of Sons are always in accordance with the spirit of divine sonship and in harmony with the policies of the Creator Son, they have been cited for error to the Creator Son, and in details of technique their decisions have sometimes been reversed on appeal to the superior tribunals of the universe. But these Sons rarely fall into error, and they have never gone into rebellion; never in all the history of Nebadon has a Vorondadek been found in contempt of the universe government.
 \vs p035 5:5 The service of the Vorondadeks in the local universes is extensive and varied. They serve as ambassadors to other universes and as consuls representing constellations within their native universe. Of all orders of local universe sonship they are the most often entrusted with the full delegation of sovereign powers to be exercised in critical universe situations.
 \vs p035 5:6 On those worlds segregated in spiritual darkness, those spheres which have, through rebellion and default, suffered planetary isolation, an observer Vorondadek is usually present pending the restoration of normal status. In certain emergencies this Most High observer could exercise absolute and arbitrary authority over every celestial being assigned to that planet. It is of record on Salvington that the Vorondadeks have sometimes exercised such authority as Most High regents of such planets. And this has also been true even of inhabited worlds that were untouched by rebellion.
-\vs p035 5:7 Often a corps of 12 or more Vorondadek Sons sits en banc\fnst{\textbf{en banc}, As a group, particularly with respect to a legal decision rendered by all of the judges sitting on a court, rather than by a smaller panel of judges from that court.} as a high court of review and appeal concerning special cases involving the status of a planet or a system. But their work more largely pertains to the legislative functions indigenous to the constellation governments. As a result of all these services, the Vorondadek Sons have become the historians of the local universes; they are personally familiar with all the political struggles and the social upheavals of the inhabited worlds.
+\vs p035 5:7 Often a corps of 12 or more Vorondadek Sons sits en banc\fnst{As a group, particularly with respect to a legal decision rendered by all of the judges sitting on a court, rather than by a smaller panel of judges from that court.} as a high court of review and appeal concerning special cases involving the status of a planet or a system. But their work more largely pertains to the legislative functions indigenous to the constellation governments. As a result of all these services, the Vorondadek Sons have become the historians of the local universes; they are personally familiar with all the political struggles and the social upheavals of the inhabited worlds.
 \usection{The Constellation Fathers}
 \vs p035 6:1 At least three Vorondadeks are assigned to the rulership of each of the 100 constellations of a local universe. These Sons are selected by the Creator Son and are commissioned by Gabriel as the \bibemph{Most Highs} of the constellations for service during one dekamillennium --- 10,000 standard years, about 50,000 years of Urantia time. The reigning Most High, the Constellation Father, has two associates, a senior and a junior. At each change of administration the senior associate becomes the head of the government, the junior assumes the duties of the senior, while the unassigned Vorondadeks resident on the Salvington worlds nominate one of their number as candidate for selection to assume the responsibilities of junior associate. Thus each of the Most High rulers, in accordance with present policy, has a period of service on the headquarters of a constellation of three dekamillenniums, about 150,000 Urantia years.
 \vs p035 6:2 The 100 Constellation Fathers, the actual presiding heads of the constellation governments, constitute the supreme advisory cabinet of the Creator Son. This council is in frequent session at universe headquarters and is unlimited in the scope and range of its deliberations but is chiefly concerned with the welfare of the constellations and with the unification of the administration of the entire local universe.
