--- a/tex/p037.tex
+++ b/tex/p037.tex
@@ -13,7 +13,7 @@
 \vs p037 0:1 At the head of all personality in Nebadon stands the Creator and Master Son, Michael, the universe father and sovereign. Co\hyp{}ordinate in divinity and complemental in creative attributes is the local universe Mother Spirit, the Divine Minister of Salvington. And these creators are in a very literal sense the Father\hyp{}Son and the Spirit\hyp{}Mother of all the native creatures of Nebadon.
 \vs p037 0:2 Preceding papers have dealt with the created orders of sonship; succeeding narratives will portray the ministering spirits and the ascending orders of sonship. This paper is chiefly concerned with an intervening group, the Universe Aids, but it will also give brief consideration to certain of the higher spirits stationed in Nebadon and to certain of the orders of permanent citizenship in the local universe.
 \usection{The Universe Aids}
-\vs p037 1:1 Many of the unique orders generally grouped in this category are unrevealed, but as presented in these papers, the Universe Aids include the following seven orders:
+\vs p037 1:1 Many of the unique orders generally\tunemarkup{pgkoboaurahd}{\linebreak} grouped in this category are unrevealed, but as presented in these papers, the Universe Aids include the following seven orders:
 \vs p037 1:2 \ublistelem{1.}\bibnobreakspace Bright and Morning Stars.
 \vs p037 1:3 \ublistelem{2.}\bibnobreakspace Brilliant Evening Stars.
 \vs p037 1:4 \ublistelem{3.}\bibnobreakspace Archangels.
@@ -31,7 +31,7 @@
 \vs p037 2:5 Both types of Brilliant Evening Stars are easily visible to morontia personalities and certain types of supermortal material beings. The created beings of this interesting and versatile order possess a spirit force which can be manifested independently of their personal presence.
 \vs p037 2:6 \pc The head of these superangels is Gavalia, the first\hyp{}born of this order in Nebadon. Since the return of Christ Michael from his triumphant bestowal on Urantia, Gavalia has been assigned to the ascendant mortal ministry, and for the last 1900 Urantia years his associate, Galantia, has maintained headquarters on Jerusem, where he spends about half of his time. Galantia is the first of the ascendant superangels to attain this high estate.
 \vs p037 2:7 No grouping or company organization of the Brilliant Evening Stars exists other than their customary association in pairs on many assignments. They are not extensively assigned on missions pertaining to the ascendant career of mortals, but when thus commissioned, they never function alone. They always work in pairs --- one a created being, the other an ascendant Evening Star.
-\vs p037 2:8 One of the high duties of the Evening Stars is to accompany the Avonal bestowal Sons on their planetary missions, even as Gabriel accompanied Michael on his Urantia bestowal. The two attending superangels are the ranking personalities of such missions, serving as cocommanders of the archangels and all others assigned to these undertakings. It is the senior of these superangel commanders who, at the significant time and age, bids the Avonal bestowal Son, “Be about your brother’s business.”\fnst{\textbf{“Be about your brother’s business.”}, Compare with a similar message Jesus received at the age of 12 during the visit to Jerusalem (see \bibref[124:6.15]{p124 6:15}): “The hour has come. It is time that you began to be about your Father’s business.”}
+\vs p037 2:8 One of the high duties of the Evening Stars is to accompany the Avonal bestowal Sons on their planetary missions, even as Gabriel accompanied Michael on his Urantia bestowal. The two attending superangels are the ranking personalities of such missions, serving as cocommanders of the archangels and all others assigned to these undertakings. It is the senior of these superangel commanders who, at the significant time and age, bids the Avonal bestowal Son, “Be about your brother’s business.”\fnst{Compare with a similar message Jesus received at the age of 12 during the visit to Jerusalem (see \bibref[124:6.15]{p124 6:15}): “The hour has come. It is time that you began to be about your Father’s business.”}
 \vs p037 2:9 Similar pairs of these superangels are assigned to the planetary corps of Trinity Teacher Sons that functions to establish the postbestowal or dawning spiritual age of an inhabited world. On such assignments the Evening Stars serve as liaisons between the mortals of the realm and the invisible corps of Teacher Sons.
 \vs p037 2:10 \pc \bibemph{The Worlds of the Evening Stars.} The sixth group of seven Salvington worlds and their 42 tributary satellites are assigned to the administration of the Brilliant Evening Stars. The seven primary worlds are presided over by the created orders of these superangels, while the tributary satellites are administered by ascendant Evening Stars.
 \vs p037 2:11 The satellites of the first three worlds are devoted to the schools of the Teacher Sons and the Evening Stars dedicated to the spirit personalities of the local universe. The next three groups are occupied by similar joint schools devoted to the training of ascending mortals. The seventh\hyp{}world satellites are reserved for the triune deliberations of the Teacher Sons, the Evening Stars, and the finaliters. During recent times these superangels have been closely identified with the local universe work of the Corps of the Finality, and they have long been associated with the Teacher Sons. There exists a liaison of tremendous power and import between the Evening Stars and the Gravity Messengers attached to the finaliter working groups. The seventh primary world itself is reserved for those unrevealed matters which pertain to the future relationship that will obtain between the Teacher Sons, the finaliters, and the Evening Stars consequent upon the completed emergence of the superuniverse manifestation of the personality of God the Supreme.
@@ -83,11 +83,11 @@
 \vs p037 8:7 Of the \bibemph{Technical Advisers,} the legal minds of the realm, we have our quota, about 500,000,000. These beings are the living and circulating experiential law libraries of all space.
 \vs p037 8:8 Of the \bibemph{Celestial Recorders,} the ascendant seraphim, we have in Nebadon 75. These are the senior or supervising recorders. The advancing students of this order in training number almost 4 billion.
 \vs p037 8:9 The ministry of the 70 billion \bibemph{Morontia Companions} in Nebadon is described in those narratives dealing with the transition planets of the pilgrims of time.
-\vs p037 8:10 \pc Each universe has its own native angelic corps; nevertheless, there are occasions on which it is very helpful to have the assistance of those higher spirits of origin outside the local creation. Supernaphim perform certain rare and unique services; the present chief of Urantia seraphim is a primary supernaphim of Paradise\fnst{\textbf{the present chief \ldots\ Paradise}, This fact has been already revealed in \bibref[27:0.2]{p027 0:2}}. The reflective seconaphim are encountered wherever the superuniverse personnel is functioning, and a great many tertiaphim are of temporary service as Most High Assistants.
+\vs p037 8:10 \pc Each universe has its own native angelic corps; nevertheless, there are occasions on which it is very helpful to have the assistance of those higher spirits of origin outside the local creation. Supernaphim perform certain rare and unique services; the present chief of Urantia seraphim is a primary supernaphim of Paradise\fnst{This fact has been already revealed in \bibref[27:0.2]{p027 0:2}}. The reflective seconaphim are encountered wherever the superuniverse personnel is functioning, and a great many tertiaphim are of temporary service as Most High Assistants.
 \usection{Permanent Citizens of the Local Universe}
 \vs p037 9:1 As with the super\hyp{} and central universes, the local universe has its orders of permanent citizenship. These include the following created types:
 \vs p037 9:2 \ublistelem{1.}\bibnobreakspace Susatia.
-\vs p037 9:3 \ublistelem{2.}\bibnobreakspace Univitatia\fnst{\textbf{Univitatia}, i.e. \bibemph{one-lifers}, beings living one life.}.
+\vs p037 9:3 \ublistelem{2.}\bibnobreakspace Univitatia\fnst{That is \bibemph{one\hyp{}lifers} --- beings living one life.}.
 \vs p037 9:4 \ublistelem{3.}\bibnobreakspace Material Sons.
 \vs p037 9:5 \ublistelem{4.}\bibnobreakspace Midway Creatures.
 \vs p037 9:6 \pc These natives of the local creation, together with the Spirit\hyp{}fused ascenders and the spironga (who are otherwise classified), constitute a relatively permanent citizenship. These orders of beings are by and large neither ascending nor descending. They are all experiential creatures, but their enlarging experience continues to be available to the universe on their level of origin. While this is not wholly true of the Adamic Sons and midway creatures, it is relatively true of these orders.
@@ -98,7 +98,7 @@
 \vs p037 9:11 \pc \bibemph{The Midway Creatures.} In the early days of most inhabited worlds, certain superhuman but materialized beings are of assignment, but they usually retire upon the arrival of the Planetary Adams. The transactions of such beings and the efforts of the Material Sons to improve the evolutionary races often result in the appearance of a limited number of creatures who are difficult to classify. These unique beings are often midway between the Material Sons and the evolutionary creatures; hence their designation, midway creatures. In a comparative sense these midwayers are the permanent citizens of the evolutionary worlds. From the early days of the arrival of a Planetary Prince to the far\hyp{}distant time of the settling of the planet in light and life, they are the only group of intelligent beings to remain continuously on the sphere. On Urantia the midway ministers are in reality the actual custodians of the planet; they are, practically speaking, the citizens of Urantia. Mortals are indeed the physical and material inhabitants of an evolutionary world, but you are all so short\hyp{}lived; you tarry on your nativity planet such a short time. You are born, live, die, and pass on to other worlds of evolutionary progression. Even the superhuman beings who serve on the planets as celestial ministers are of transient assignment; few of them are long attached to a given sphere. The midway creatures, however, provide continuity of planetary administration in the face of ever\hyp{}changing celestial ministries and constantly shifting mortal inhabitants. Throughout all of this never\hyp{}ceasing changing and shifting, the midway creatures remain on the planet uninterruptedly carrying on their work.
 \vs p037 9:12 \pc In like manner, all divisions of the administrative organization of the local universes and superuniverses have their more or less permanent populations, inhabitants of citizenship status. As Urantia has its midwayers, Jerusem, your system capital, has the Material Sons and Daughters; Edentia, your constellation headquarters, has the univitatia, while the citizens of Salvington are twofold, the created susatia and the evolved Spirit\hyp{}fused mortals. The administrative worlds of the minor and major sectors of the superuniverses do not have permanent citizens. But the Uversa headquarters spheres are continuously fostered by an amazing group of beings known as the \bibemph{abandonters,} the creation of the unrevealed agents of the Ancients of Days and the seven Reflective Spirits resident on the capital of Orvonton. These residential citizens on Uversa are at present administering the routine affairs of their world under the immediate supervision of the Uversa corps of the Son\hyp{}fused mortals. Even Havona has its native beings, and the central Isle of Light and Life is the home of the various groups of Paradise Citizens.
 \usection{Other Local Universe Groups}
-\vs p037 10:1 Besides the seraphic and mortal orders, who will be considered in later papers, there are numerous additional beings concerned in the maintenance and perfecting of such a gigantic organization as the universe of Nebadon, which even now has more than 3,000,000 inhabited worlds, with 10,000,000 in prospect. The various Nebadon types of life are much too numerous to be catalogued in this paper, but there are two unusual orders that function extensively on the 647,591 architectural spheres\fnst{\textbf{647,591 architectural spheres}, It is easy to arrive at this number if we add the architectural worlds of the Salvington cluster ($1 + 70 + 70\times 6 = 491$), those of each of the 100 constellations ($1 + 70 + 70\times 10 = 771$ in each) and those of each of the $100\times 100 = 10,000$ local systems ($1 + 7 + 7\times 7 = 57$ in each): $491 + 77100 + 570000 = 647591$.} of the local universe, that may be mentioned.
+\vs p037 10:1 Besides the seraphic and mortal orders, who will be considered in later papers, there are numerous additional beings concerned in the maintenance and perfecting of such a gigantic organization as the universe of Nebadon, which even now has more than 3,000,000 inhabited worlds, with 10,000,000 in prospect. The various Nebadon types of life are much too numerous to be catalogued in this paper, but there are two unusual orders that function extensively on the 647,591 architectural spheres\fnst{It is easy to arrive at this number if we add the architectural worlds of the Salvington cluster ($1 + 70 + 70\times 6 = 491$), those of each of the 100 constellations ($1 + 70 + 70\times 10 = 771$ in each) and those of each of the $100\times 100 = 10,000$ local systems ($1 + 7 + 7\times 7 = 57$ in each): $491 + 77100 + 570000 = 647591$.} of the local universe, that may be mentioned.
 \vs p037 10:2 \pc The \bibemph{Spironga} are the spirit offspring of the Bright and Morning Star and the Father Melchizedek. They are exempt from personality termination but are not evolutionary or ascending beings. Neither are they functionally concerned with the evolutionary ascension regime. They are the spirit helpers of the local universe, executing the routine spirit tasks of Nebadon.
 \vs p037 10:3 \pc The \bibemph{Spornagia.} The architectural headquarters worlds of the local universe are real worlds --- physical creations. There is much work connected with their physical upkeep, and herein we have the assistance of a group of physical creatures called spornagia. They are devoted to the care and culture of the material phases of these headquarters worlds, from Jerusem to Salvington. Spornagia are neither spirits nor persons; they are an animal order of existence, but if you could see them, you would agree that they seem to be perfect animals.
 \vs p037 10:4 \pc The various \bibemph{courtesy colonies} are domiciled on Salvington and elsewhere. We especially profit from the ministry of the celestial artisans on the constellations and benefit from the activities of the reversion directors, who operate chiefly on the capitals of the local systems.
