--- a/tex/p038.tex
+++ b/tex/p038.tex
@@ -9,11 +9,11 @@
 \uminitoc{Evolution of Cherubim and Sanobim}
 \uminitoc{The Midway Creatures}
 \author{Melchizedek}
-\vs p038 0:1 There are three distinct orders of the personalities of the Infinite Spirit. The impetuous apostle\fnst{\textbf{The impetuous apostle}, i.e. Peter, cf. \bibref[139:3.4]{p139 3:4}, \bibref[158:7.3]{p158 7:3}, \bibref[179:3.5]{p179 3:5}, \bibref[192:1.3]{p192 1:3}. The quote is from 1~Peter~3:22.} understood this when he wrote respecting Jesus, “who has gone to heaven and is on the right hand of God, angels and authorities and powers being made subject to him.” Angels are the ministering spirits of time; authorities, the messenger hosts of space; powers, the higher personalities of the Infinite Spirit.
+\vs p038 0:1 There are three distinct orders of the personalities of the Infinite Spirit. The impetuous apostle\fnst{Namely. Peter, cf. \bibref[139:3.4]{p139 3:4}, \bibref[158:7.3]{p158 7:3}, \bibref[179:3.5]{p179 3:5}, \bibref[192:1.3]{p192 1:3}. The quote is from 1~Peter~3:22.} understood this when he wrote respecting Jesus, “who has gone to heaven and is on the right hand of God, angels and authorities and powers being made subject to him.” Angels are the ministering spirits of time; authorities, the messenger hosts of space; powers, the higher personalities of the Infinite Spirit.
 \vs p038 0:2 \pc As the supernaphim in the central universe and the seconaphim in a superuniverse, so the seraphim, with the associated cherubim and sanobim, constitute the angelic corps of a local universe.
 \vs p038 0:3 The seraphim are all fairly uniform in design. From universe to universe, throughout all seven of the superuniverses, they show a minimum of variation; they are the most nearly standard of all spirit types of personal beings. Their various orders constitute the corps of the skilled and common ministers of the local creations.
 \usection{Origin of Seraphim}
-\vs p038 1:1 Seraphim are created by the Universe Mother Spirit and have been projected in unit formation --- 41,472\fnst{\textbf{41,472} $=$ 1 unit $=$ 12 battalions, cf. \bibref[38:6.1]{p038 6:1}.} at a time --- ever since the creation of the “pattern angels” and certain angelic archetypes in the early times of Nebadon. The Creator Son and the universe representation of the Infinite Spirit collaborate in the creation of a large number of Sons and other universe personalities. Following the completion of this united effort, the Son engages in the creation of the Material Sons, the first of the sex creatures, while the Universe Mother Spirit concurrently engages in her initial solitary effort at spirit reproduction. Thus begins the creation of the seraphic hosts of a local universe.
+\vs p038 1:1 Seraphim are created by the Universe Mother Spirit and have been projected in unit formation --- 41,472\fnst{One unit $=$ 12 battalions, cf.~\bibref[38:6.1]{p038 6:1}.} at a time --- ever since the creation of the “pattern angels” and certain angelic archetypes in the early times of Nebadon. The Creator Son and the universe representation of the Infinite Spirit collaborate in the creation of a large number of Sons and other universe personalities. Following the completion of this united effort, the Son engages in the creation of the Material Sons, the first of the sex creatures, while the Universe Mother Spirit concurrently engages in her initial solitary effort at spirit reproduction. Thus begins the creation of the seraphic hosts of a local universe.
 \vs p038 1:2 These angelic orders are projected at the time of planning for the evolution of mortal will creatures. The creation of seraphim dates from the attainment of relative personality by the Universe Mother Spirit, not as the later co\hyp{}ordinate of the Master Son, but as the early creative helper of the Creator Son. Previous to this event the seraphim on duty in Nebadon were temporarily loaned by a neighbouring universe.
 \vs p038 1:3 Seraphim are still being periodically created; the universe of Nebadon is still in the making. The Universe Mother Spirit never ceases creative activity in a growing and perfecting universe.
 \usection{Angelic Natures}
@@ -21,7 +21,7 @@
 \vs p038 2:2 \pc Though seraphim are very affectionate and sympathetic beings, they are not sex\hyp{}emotion creatures. They are much as you will be on the mansion worlds, where you will “neither marry nor be given in marriage but will be as the angels of heaven.” For all who “shall be accounted worthy to attain the mansion worlds neither marry nor are given in marriage; neither do they die any more, for they are equal to the angels.” Nevertheless, in dealing with sex creatures it is our custom to speak of those beings of more direct descent from the Father and the Son as the sons of God, while referring to the children of the Spirit as the daughters of God. Angels are, therefore, commonly designated by feminine pronouns on the sex planets.
 \vs p038 2:3 The seraphim are so created as to function on both spiritual and literal levels. There are few phases of morontia or spirit activity which are not open to their ministrations. While in personal status angels are not so far removed from human beings, in certain functional performances seraphim far transcend them. They possess many powers far beyond human comprehension. For example: You have been told that the “very hairs of your head are numbered,” and it is true they are, but a seraphim does not spend her time counting them and keeping the number corrected up to date. Angels possess inherent and automatic (that is, automatic as far as you could perceive) powers of knowing such things; you would truly regard a seraphim as a mathematical prodigy. Therefore, numerous duties which would be tremendous tasks for mortals are performed with exceeding ease by seraphim.
 \vs p038 2:4 \pc Angels are superior to you in spiritual status, but they are not your judges or accusers. No matter what your faults, “the angels, although greater in power and might, bring no accusation against you.” Angels do not sit in judgment on mankind, neither should individual mortals prejudge their fellow creatures.
-\vs p038 2:5 \pc You do well to love them, but you should not adore them; angels are not objects of worship. The great seraphim, Loyalatia, when your seer\fnst{\textbf{seer}, i.e. John Zebedee and the quote is from Revelation~22:8--9.} “fell down to worship before the feet of the angel,” said: “See that you do it not; I am a fellow servant with you and with your races, who are all enjoined to worship God.”
+\vs p038 2:5 \pc You do well to love them, but you should not adore them; angels are not objects of worship. The great seraphim, Loyalatia, when your seer\fnst{That is John Zebedee and the quote is from Revelation~22:8--9.} “fell down to worship before the feet of the angel,” said: “See that you do it not; I am a fellow servant with you and with your races, who are all enjoined to worship God.”
 \vs p038 2:6 In nature and personality endowment the seraphim are just a trifle ahead of mortal races in the scale of creature existence. Indeed, when you are delivered from the flesh, you become very much like them. On the mansion worlds you will begin to appreciate the seraphim, on the constellation spheres to enjoy them, while on Salvington they will share their places of rest and worship with you. Throughout the whole morontia and subsequent spirit ascent, your fraternity with the seraphim will be ideal; your companionship will be superb.
 \usection{Unrevealed Angels}
 \vs p038 3:1 Numerous orders of spirit beings function throughout the domains of the local universe that are unrevealed to mortals because they are in no manner connected with the evolutionary plan of Paradise ascension. In this paper the word “angel” is purposely limited to the designation of those seraphic and associated offspring of the Universe Mother Spirit who are so largely concerned with the operation of the plans of mortal survival. There serve in the local universe six other orders of related beings, the unrevealed angels, who are not in any specific manner connected with those universe activities pertaining to the Paradise ascent of evolutionary mortals. These six groups of angelic associates are never called seraphim, neither are they referred to as ministering spirits. These personalities are wholly occupied with the administrative and other affairs of Nebadon, engagements which are in no way related to man’s progressive career of spiritual ascent and perfection attainment.
