--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -64,7 +64,7 @@
 \vs p042 3:13 \pc The foregoing classification of matter pertains to its organization rather than to the forms of its appearance to created beings. Neither does it take into account the pre\hyp{}emergent stages of energy nor the eternal materializations on Paradise and in the central universe.
 \usection{Energy and Matter Transmutations}
 \vs p042 4:1 Light, heat, electricity, magnetism, chemism, energy, and matter are --- in origin, nature, and destiny --- one and the same thing, together with other material realities as yet undiscovered on Urantia.
-\vs p042 4:2 We do not fully comprehend the almost endless changes to which physical energy may be subject. In one universe it appears as light, in another as light plus heat, in another as forms of energy unknown on Urantia; in untold millions of years it may reappear as some form of restless, surging electrical energy or magnetic power\fnst{\textbf{electrical energy or magnetic power}, This may be a pointer to the representation of Maxwell's equations in which the electric and magnetic fields are canonically conjugated variables, like the coordinate and momentum of Classical Mechanics. The hamiltonian of the electromagnetic field in such representation would have the following compact and beautiful geometric form: \begin{equation}H[E,B] = {1\over2} \int\,d^3x (E\wedge dE + B\wedge dB)\end{equation} The above leads directly to the usual Maxwell's equations:\begin{align}\partial_t E_i & = {\delta H\over\delta B_i} = \epsilon_{ijk}\partial_j B_k\\ \partial_t B_i & = - {\delta H\over\delta E_i} = - \epsilon_{ijk}\partial_j E_k\end{align} and the canonical quantisation leads to the Schr\"odinger equation in $E$-representation ($B_i \rightarrow -i{\delta\over\delta E_i})$ of the form: \begin{equation}i{\partial\Psi[E,t)\over\partial t} = {1\over2}\int\,d^3x \epsilon_{ijk}\left(E_i\partial_j E_k\Psi - {\delta\over\delta E_i}{\partial\over\partial x^j}{\delta\Psi\over\delta E_k}\right)\end{equation}}; and still later on it may again appear in a subsequent universe as some form of variable matter going through a series of metamorphoses, to be followed by its outward physical disappearance in some great cataclysm of the realms. And then, after countless ages and almost endless wandering through numberless universes, again may this same energy re\hyp{}emerge and many times change its form and potential; and so do these transformations continue through successive ages and throughout countless realms. Thus matter sweeps on, undergoing the transmutations of time but swinging ever true to the circle of eternity; even if long prevented from returning to its source, it is ever responsive thereto, and it ever proceeds in the path ordained by the Infinite Personality who sent it forth.
+\vs p042 4:2 We do not fully comprehend the almost endless changes to which physical energy may be subject. In one universe it appears as light, in another as light plus heat, in another as forms of energy unknown on Urantia; in untold millions of years it may reappear as some form of restless, surging electrical energy or magnetic power\fnst{This may be a pointer to the representation of Maxwell's equations in which the electric and magnetic fields are canonically conjugated variables, like the coordinate and momentum of Classical Mechanics. The hamiltonian of the electromagnetic field in such representation would have the following compact and beautiful geometric form: \begin{equation*}H[E,B] = {1\over2} \int\,d^3x (E\wedge dE + B\wedge dB)\end{equation*} The above leads directly to the usual Maxwell's equations:\begin{align*}\partial_t E_i & = {\delta H\over\delta B_i} = \epsilon_{ijk}\partial_j B_k\\ \partial_t B_i & = - {\delta H\over\delta E_i} = - \epsilon_{ijk}\partial_j E_k\end{align*} and the canonical quantisation leads to the Schr\"odinger equation in $E$-representation ($B_i \rightarrow -i{\delta\over\delta E_i})$ of the form: \begin{align*}& i{\partial\Psi[E,t)\over\partial t} =\\ & {1\over2}\int\,d^3x \epsilon_{ijk}\left(E_i\partial_j E_k\Psi - {\delta\over\delta E_i}{\partial\over\partial x^j}{\delta\Psi\over\delta E_k}\right)\end{align*}}; and still later on it may again appear in a subsequent universe as some form of variable matter going through a series of metamorphoses, to be followed by its outward physical disappearance in some great cataclysm of the realms. And then, after countless ages and almost endless wandering through numberless universes, again may this same energy re\hyp{}emerge and many times change its form and potential; and so do these transformations continue through successive ages and throughout countless realms. Thus matter sweeps on, undergoing the transmutations of time but swinging ever true to the circle of eternity; even if long prevented from returning to its source, it is ever responsive thereto, and it ever proceeds in the path ordained by the Infinite Personality who sent it forth.
 \vs p042 4:3 The power centres and their associates are much concerned in the work of transmuting the ultimaton into the circuits and revolutions of the electron. These unique beings control and compound power by their skillful manipulation of the basic units of materialized energy, the ultimatons. They are masters of energy as it circulates in this primitive state. In liaison with the physical controllers they are able to effectively control and direct energy even after it has transmuted to the electrical level, the so\hyp{}called electronic stage. But their range of action is enormously curtailed when electronically organized energy swings into the whirls of the atomic systems. Upon such materialization, these energies fall under the complete grasp of the drawing power of linear gravity.
 \vs p042 4:4 Gravity acts positively on the power lanes and energy channels of the power centres and the physical controllers, but these beings have only a negative relation to gravity --- the exercise of their antigravity endowments.
 \vs p042 4:5 Throughout all space, cold and other influences are at work creatively organizing ultimatons into electrons. Heat is the measurement of electronic activity, while cold merely signifies absence of heat --- comparative energy rest --- the status of the universal force\hyp{}charge of space provided neither emergent energy nor organized matter were present and responding to gravity.
@@ -74,11 +74,11 @@
 \vs p042 4:9 The blazing suns can transform matter into various forms of energy, but the dark worlds and all outer space can slow down electronic and ultimatonic activity to the point of converting these energies into the matter of the realms. Certain electronic associations of a close nature, as well as many of the basic associations of nuclear matter, are formed in the exceedingly low temperatures of open space, being later augmented by association with larger accretions of materializing energy.
 \vs p042 4:10 Throughout all of this never\hyp{}ending metamorphosis of energy and matter we must reckon with the influence of gravity pressure and with the antigravity behaviour of the ultimatonic energies under certain conditions of temperature, velocity, and revolution. Temperature, energy currents, distance, and the presence of the living force organizers and the power directors also have a bearing on all transmutation phenomena of energy and matter.
 \vs p042 4:11 The increase of mass in matter is equal to the increase of energy divided by the square of the velocity of light. In a dynamic sense the work which resting matter can perform is equal to the energy expended in bringing its parts together from Paradise minus the resistance of the forces overcome in transit and the attraction exerted by the parts of matter on one another.
-\vs p042 4:12 \pc The existence of pre\hyp{}electronic forms of matter is indicated by the two atomic weights of lead. The lead of original formation weighs slightly more than that produced through uranium disintegration by way of radium em\-a\-na\-tions\fnst{\textbf{radium emanations}, the archaic term for the chemical element radon, which is the indirect decay product (via radium) of Uranium-238.}; and this difference in atomic weight represents the actual loss of energy in the atomic breakup.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.8\columnwidth]{images/Uranium-Decay-Series.jpg}\caption{Uranium-238 decay series ending in Lead-206.}\end{figure}}
+\vs p042 4:12 \pc The existence of pre\hyp{}electronic forms of matter is indicated by the two atomic weights of lead. The lead of original formation weighs slightly more than that produced through uranium disintegration by way of radium em\-a\-na\-tions\fnst{The archaic term for the chemical element Radon, which is the indirect decay product (via radium) of Uranium-238.}; and this difference in atomic weight represents the actual loss of energy in the atomic breakup.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.8\columnwidth]{images/Uranium-Decay-Series.jpg}\caption{Uranium-238 decay series ending in Lead-206.}\end{figure}}
 \vs p042 4:13 \pc The relative integrity of matter is assured by the fact that energy can be absorbed or released only in those exact amounts which Urantia scientists have designated quanta. This wise provision in the material realms serves to maintain the universes as going concerns.
-\vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860\fnst{\textbf{860}, This ``magic number'' is explained by Sir James Jeans in his book ``The Universe Around Us'' (1930, p.138) as follows: the energy needed to separate two charges $+e$ and $-e$ at a distance $r$ is $e^2/(4\pi\epsilon_0 r)$; equating it to the energy of photon $h\nu$ we have $h\nu=hc/\lambda = e^2/(4\pi\epsilon_0 r)$, whence we obtain $\lambda/r = 4\pi\epsilon_0 hc/e^2 \approx 861.02$.} times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
+\vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860\fnst{This ``magic number'' is explained by Sir James Jeans in his book ``The Universe Around Us'' (1930, p.138) as follows: the energy needed to separate two charges $+e$ and $-e$ at a distance $r$ is $e^2/(4\pi\epsilon_0 r)$; equating it to the energy of photon $h\nu$ we have $h\nu=hc/\lambda = e^2/(4\pi\epsilon_0 r)$, whence we obtain $\lambda/r = 4\pi\epsilon_0 hc/e^2 \approx 861.02$.} times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
 \usection{Wave\hyp{}Energy Manifestations}
-\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{\textbf{the visible rays embracing a single octave, number 46}, The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the γ-rays\fnc{\textbf{γ-rays}, 1955 text: \bibtextul{Y rays}.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
+\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the γ-rays\fnc{\textbf{γ-rays}, 1955 text: \bibtextul{Y rays}.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
 \vs p042 5:2 \pc Wavelike energy manifestations --- from the standpoint of XX century Urantia scientific enlightenment --- may be classified into the following 10 groups:
 \vs p042 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{Infraultimatonic rays ---} the borderland revolutions of ultimatons as they begin to assume definite form. This is the 1\ts{st} stage of emergent energy in which wavelike phenomena can be detected and measured.
 \vs p042 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{Ultimatonic rays.} The assembly of energy into the minute spheres of the ultimatons occasions vibrations in the content of space which are discernible and measurable. And long before physicists ever discover the ultimaton, they will undoubtedly detect the phenomena of these rays as they shower in upon Urantia. These short and powerful rays represent the initial activity of the ultimatons as they are slowed down to that point where they veer towards the electronic organization of matter. As the ultimatons aggregate into electrons, condensation occurs with a consequent storage of energy.
@@ -101,7 +101,7 @@
 \vs p042 6:4 \pc The ultimatons, unknown on Urantia, slow down\tunemarkup{pgnexus10}{\linebreak} through many phases of physical activity before they attain the revolutionary\hyp{}energy prerequisites to electronic organization. Ultimatons have three varieties of motion: mutual resistance to cosmic force, individual revolutions of antigravity potential, and the intraelectronic positions of the 100 mutually interassociated ultimatons.
 \vs p042 6:5 Mutual attraction holds 100 ultimatons together in the constitution of the electron; and there are never more nor less than 100 ultimatons in a typical electron. The loss of one or more ultimatons destroys typical electronic identity, thus bringing into existence one of the 10 modified forms of the electron.
 \vs p042 6:6 Ultimatons do not describe orbits or whirl about in circuits within the electrons, but they do spread or cluster in accordance with their axial revolutionary velocities, thus determining the differential electronic dimensions. This same ultimatonic velocity of axial revolution also determines the negative or positive reactions of the several types of electronic units. The entire segregation and grouping of electronic matter, together with the electric differentiation of negative and positive bodies of energy\hyp{}matter, result from these various functions of the component ultimatonic interassociation.
-\vs p042 6:7 \pc Each atom is a trifle over $2.54 \times 10^{-8}$\,cm\fnst{$2.54 \times 10^{-8}$\,cm, i.e. about 4.8 times greater than the value of \bibemph{Bohr radius} $a=5.29\times 10^{-9}$\,cm.} in diameter, while an electron weighs a little less than 1/2,000\ts{th} of the smallest atom, hydrogen. The positive proton, characteristic of the atomic nucleus, while it may be no larger than a negative electron, weighs from 2,000 to 3,000 times more.
+\vs p042 6:7 \pc Each atom is a trifle over $2.54 \times 10^{-8}$\,cm\fnst{About 4.8 times greater than the value of \bibemph{Bohr radius} $a=5.29\times 10^{-9}$\,cm.} in diameter, while an electron weighs a little less than 1/2,000\ts{th} of the smallest atom, hydrogen. The positive proton, characteristic of the atomic nucleus, while it may be no larger than a negative electron, weighs from 2,000 to 3,000 times more.
 \vs p042 6:8 \pc If the mass of matter should be magnified until that of an electron equalled 3\,g, then were size to be proportionately magnified, the volume of such an electron would become as large as that of the earth. If the volume of a proton --- 1,800 times as heavy as an electron --- should be magnified to the size of the head of a pin, then, in comparison, a pin’s head would attain a diameter equal to that of the earth’s orbit around the sun.
 \usection{Atomic Matter}
 \vs p042 7:1 The formation of all matter is on the order of the solar system. There is at the centre of every minute universe of energy a relatively stable, comparatively stationary, nuclear portion of material existence. This central unit is endowed with a threefold possibility of manifestation. Surrounding this energy centre there whirl, in endless profusion but in fluctuating circuits, the energy units which are faintly comparable to the planets encircling the sun of some starry group like your own solar system.
@@ -117,9 +117,9 @@
 \usection{Atomic Cohesion}
 \vs p042 8:1 While gravity is one of several factors concerned in holding together a tiny atomic energy system, there is also present in and among these basic physical units a powerful and unknown energy, the secret of their basic constitution and ultimate behaviour, a force which remains to be discovered on Urantia. This universal influence permeates all the space embraced within this tiny energy organization.
 \vs p042 8:2 The interelectronic space of an atom is not empty. Throughout an atom this interelectronic space is activated by wavelike manifestations which are perfectly synchronized with electronic velocity and ultimatonic revolutions. This force is not wholly dominated by your recognized laws of positive and negative attraction; its behaviour is therefore sometimes unpredictable. This unnamed influence seems to be a space\hyp{}force reaction of the Unqualified Absolute.
-\vs p042 8:3 \pc The charged protons and the uncharged neutrons of the nucleus of the atom are held together by the reciprocating function of the mesotron\fnst{\textbf{mesotron}, This hypothetical particle was known under many aliases: Yukon, Japanese electron, heavy electron, mesotron, and finally meson (cf. ``Thirty Years That Shook Physics'' by G.~Gamow, p.~152, 1966). The $\pi^+$-meson (pion) here referred to is now considered to be 273 times as heavy as the electron, but at the time (1934) when Swann penned the text quoted here it was assumed to be 180 times as heavy as the electron.}, a particle of matter 180 times as heavy as the electron. Without this arrangement the electric charge carried by the protons would be disruptive of the atomic nucleus.
+\vs p042 8:3 \pc The charged protons and the uncharged neutrons of the nucleus of the atom are held together by the reciprocating function of the mesotron\fnst{This hypothetical particle was known under many aliases: Yukon, Japanese electron, heavy electron, mesotron, and finally meson (cf. ``Thirty Years That Shook Physics'' by G.~Gamow, p.~152, 1966). The $\pi^+$-meson (pion) here referred to is now considered to be 273 times as heavy as the electron, but at the time (1934) when Swann penned the text quoted here it was assumed to be 180 times as heavy as the electron.}, a particle of matter 180 times as heavy as the electron. Without this arrangement the electric charge carried by the protons would be disruptive of the atomic nucleus.
 \vs p042 8:4 As atoms are constituted, neither electric nor gravitational forces could hold the nucleus together. The integrity of the nucleus is maintained by the reciprocal cohering function of the mesotron, which is able to hold charged and uncharged particles together because of superior force\hyp{}mass power and by the further function of causing protons and neutrons constantly to change places. The mesotron causes the electric charge of the nuclear particles to be incessantly tossed back and forth between protons and neutrons. At one infinitesimal part of a second a given nuclear particle is a charged proton and the next an uncharged neutron. And these alternations of energy status are so unbelievably rapid that the electric charge is deprived of all opportunity to function as a disruptive influence. Thus does the mesotron function as an “energy\hyp{}carrier” particle which mightily contributes to the nuclear stability of the atom\fnst{The mechanism of $\pi^+$ pion exchange described here was first suggested by Hideki Yukawa in 1935 and experimentally confirmed in 1947. Having \bibemph{finite mass} for the virtual quantum of strong field ideally corresponded to the fact that this interaction has a \bibemph{short} range, unlike the electromagnetic interaction explained by the \bibemph{massless} virtual photons. However, in 1964 it was superseded by the quark model, according to which the proton-neutron force is a kind of ``residual'' force caused by the gluon exchange between the quark constituents of nucleons. In the quark model, pions are thought to consist of quark-antiquark pairs (e.g. $\pi^+ = u\overline{d}$), just like all other mesons and so their \bibemph{special} role as the field quanta disappears.}.
-\vs p042 8:5 The presence and function of the mesotron also explains another atomic riddle. When atoms perform radioactively, they emit far more energy than would be expected. This excess of radiation is derived from the breaking up of the mesotron “energy carrier,” which thereby becomes a mere electron. The mesotronic disintegration is also accompanied by the emission of certain small uncharged particles\fnst{\textbf{small uncharged particles}, These are probably neutrino and the actual decay reaction is: $\pi^+ \rightarrow e^+ + \nu_e$.}.
+\vs p042 8:5 The presence and function of the mesotron also explains another atomic riddle. When atoms perform radioactively, they emit far more energy than would be expected. This excess of radiation is derived from the breaking up of the mesotron “energy carrier,” which thereby becomes a mere electron. The mesotronic disintegration is also accompanied by the emission of certain small uncharged particles\fnst{These are probably neutrino and the actual decay reaction is: $\pi^+ \rightarrow e^+ + \nu_e$.}.
 \vs p042 8:6 The mesotron explains certain cohesive properties of the atomic nucleus, but it does not account for the cohesion of proton to proton nor for the adhesion of neutron to neutron. The paradoxical and powerful force of atomic cohesive integrity is a form of energy as yet undiscovered on Urantia.
 \vs p042 8:7 These mesotrons are found abundantly in the space rays which so incessantly impinge upon your planet.
 \usection{Natural Philosophy}
