--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -78,7 +78,7 @@
 \vs p045 5:1 The great divisions of celestial life have their headquarters and immense preserves on Jerusem, including the various orders of divine Sons, high spirits, superangels, angels, and midway creatures. The central abode of this wonderful sector is the chief temple of the Material Sons.
 \vs p045 5:2 The domain of the Adams is the centre of attraction to all new arrivals on Jerusem. It is an enormous area consisting of 1,000 centres, although each family of Material Sons and Daughters lives on an estate of its own up to the time of the departure of its members for service on the evolutionary worlds of space or until their embarkation upon the Paradise\hyp{}ascension career.
 \vs p045 5:3 These Material Sons are the highest type of sex\hyp{}reproducing beings to be found on the training spheres of the evolving universes. And they are really material; even the Planetary Adams and Eves are plainly visible to the mortal races of the inhabited worlds. These Material Sons are the last and physical link in the chain of personalities extending from divinity and perfection above down to humanity and material existence below. These Sons provide the inhabited worlds with a mutually contactable intermediary between the invisible Planetary Prince and the material creatures of the realms.
-\vs p045 5:4 \pc At the last millennial registration on Salvington there were of record in Nebadon\tunemarkup{pgkoboaurahd}{\linebreak} 161,432,840 Material Sons and Daughters of citizenship status on the local system capitals. The number of Material Sons varies in the different systems, and their number is being constantly increased by natural reproduction. In the exercise of their reproductive functions they are not guided wholly by the personal desires of the contacting personalities but also by the higher governing bodies and advisory councils.
+\vs p045 5:4 \pc At the last millennial registration on Salvington there were of record in Nebadon 161,432,840 Material Sons and Daughters of citizenship status on the local system capitals. The number of Material Sons varies in the different systems, and their number is being constantly increased by natural reproduction. In the exercise of their reproductive functions they are not guided wholly by the personal desires of the contacting personalities but also by the higher governing bodies and advisory councils.
 \vs p045 5:5 \pc These Material Sons and Daughters are the permanent inhabitants of Jerusem and its associated worlds. They occupy vast estates on Jerusem and participate liberally in the local management of the capital sphere, administering practically all routine affairs with the assistance of the midwayers and the ascenders.
 \vs p045 5:6 On Jerusem these reproducing Sons are permitted to experiment with the ideals of self\hyp{}government after the manner of the Melchizedeks, and they are achieving a very high type of society. The higher orders of sonship reserve the veto functions of the realm, but in nearly every respect the Jerusem Adamites govern themselves by universal suffrage and representative government. Sometime they hope to be granted virtually complete autonomy.\fnc{\bibtextul{Some time} they hope to be granted virtually complete autonomy. \bibexpl{The one-word form is correct as the reference is to an indefinite point in time rather than to an indefinite period of time. (See \bibemph{Webster’s}) Given the location of this word in the 1955 text --- with a line break occurring between Some and time --- it is possible that the original error was simply a missing end-of-line hyphen.}}
 \vs p045 5:7 The character of the service of the Material Sons is largely determined by their ages. While they are not eligible for admission to the Melchizedek University of Salvington --- being material and ordinarily limited to certain planets --- nevertheless, the Melchizedeks maintain strong faculties of teachers on the headquarters of each system for the instruction of the younger generations of Material Sons. The educational and spiritual training systems provided for the development of the younger Material Sons and Daughters are the acme of perfection in scope, technique, and practicability.
