--- a/tex/p046.tex
+++ b/tex/p046.tex
@@ -11,7 +11,7 @@
 \vs p046 0:1 Jerusem, the headquarters of Satania, is an average capital of a local system, and aside from numerous irregularities occasioned by the Lucifer rebellion and the bestowal of Michael on Urantia, it is typical of similar spheres. Your local system has passed through some stormy experiences, but it is at present being administered most efficiently, and as the ages pass, the results of disharmony are being slowly but surely eradicated. Order and good will are being restored, and the conditions on Jerusem are more and more approaching the heavenly status of your traditions, for the system headquarters is truly the heaven visualized by the majority of XX century religious believers.
 \usection{Physical Aspects of Jerusem}
 \vs p046 1:1 Jerusem is divided into 1,000 latitudinal sectors and 10,000 longitudinal zones. The sphere has 7 major capitals and 70 minor administrative centres. The 7 sectional capitals are concerned with diverse activities, and the System Sovereign is present in each at least once a year.
-\vs p046 1:2 \pc The standard mile of Jerusem is equivalent to about 11 Urantia km. The standard weight, the “gradant,” is built up through the decimal system from the mature ultimaton\fnst{\textbf{“gradant,” \ldots\ from the mature ultimaton}, This suggests, that there is no need for the concept of \bibemph{amount of substance} or the equivalent of our Avogadro's number on Jerusem. It should be recalled that on Urantia the concept of the ``amount of substance'' exists because the unit of mass is not defined as a multiple of some elementary such unit, unlike the metre and second. And the accuracy with which the mass can be measured differs from that of the number of structural elements (electrons, ions, molecules, atoms etc). But on Jerusem, the mass is defined in the same way as our metre and second, i.e. as multiple of an elementary unit.} and represents almost exactly 283 grams\fnst{\textbf{283 grams}, So the mass of the mature ultimaton can be written as $2.8349523125 \times 10^{-N}$\,kg, where $N$ is a natural number. I think that $N=8$, i.e. ultimaton has the mass close to the value of \bibemph{Planck mass}.} of your weight. The Satania day equals 3 days of Urantia time, less 1 hour, 4 minutes, and 15 seconds, that being the time of the axial revolution of Jerusem. The system year consists of 100 Jerusem days. The time of the system is broadcast by the master chronoldeks.
+\vs p046 1:2 \pc The standard mile of Jerusem is equivalent to about 11 Urantia km. The standard weight, the “gradant,” is built up through the decimal system from the mature ultimaton\fnst{This suggests that there is no need for the concept of \bibemph{amount of substance} or the equivalent of our Avogadro's number on Jerusem. It should be recalled that on Urantia the concept of the ``amount of substance'' exists because the unit of mass is not defined as a multiple of some elementary such unit, unlike the metre and second. And the accuracy with which the mass can be measured differs from that of the number of structural elements (electrons, ions, molecules, atoms etc). But on Jerusem, the mass is defined in the same way as our metre and second, i.e. as multiple of an elementary unit.} and represents almost exactly 283 grams\fnst{Thus the mass of the mature ultimaton can be written as $2.8349523125 \times 10^{-N}$\,kg, where $N$ is a natural number. I think that $N=8$, i.e. ultimaton has the mass close to the value of \bibemph{Planck mass}.} of your weight. The Satania day equals 3 days of Urantia time, less 1 hour, 4 minutes, and 15 seconds, that being the time of the axial revolution of Jerusem. The system year consists of 100 Jerusem days. The time of the system is broadcast by the master chronoldeks.
 \vs p046 1:3 \pc The energy of Jerusem is superbly controlled and circulates about the sphere in the zone channels, which are directly fed from the energy charges of space and expertly administered by the Master Physical Controllers. The natural resistance to the passage of these energies through the physical channels of conduction yields the heat required for the production of the equable temperature of Jerusem. The full\hyp{}light temperature is maintained at about 21\,°C, while during the period of light recession it falls to a little lower than 10\,°C.
 \vs p046 1:4 \pc The lighting system of Jerusem should not be so difficult for you to comprehend. There are no days and nights, no seasons of heat and cold. The power transformers maintain 100,000 centres from which rarefied energies are projected upward through the planetary atmosphere, undergoing certain changes, until they reach the electric air\hyp{}ceiling of the sphere; and then these energies are reflected back and down as a gentle, sifting, and even light of about the intensity of Urantia sunlight when the sun is shining overhead at 10:00.
 \vs p046 1:5 Under such conditions of lighting, the light rays do not seem to come from one place; they just sift out of the sky, emanating equally from all space directions. This light is very similar to natural sunlight except that it contains very much less heat. Thus it will be recognized that such headquarters worlds are not luminous in space; if Jerusem were very near Urantia, it would not be visible.
@@ -23,14 +23,14 @@
 \vs p046 2:1 On Jerusem you will miss the rugged mountain ranges of Urantia and other evolved worlds since there are neither earthquakes nor rainfalls, but you will enjoy the beauteous highlands and other unique variations of topography and landscape. Enormous areas of Jerusem are preserved in a “natural state,” and the grandeur of such districts is quite beyond the powers of human imagination.
 \vs p046 2:2 There are thousands upon thousands of small lakes but no raging rivers nor expansive oceans. There is no rainfall, neither storms nor blizzards, on any of the architectural worlds, but there is the daily precipitation of the condensation of moisture during the time of lowest temperature attending the light recession. (The dew point is higher on a 3\hyp{}gas world than on a 2\hyp{}gas planet like Urantia.) The physical plant life and the morontia world of living things both require moisture, but this is largely supplied by the subsoil system of circulation which extends all over the sphere, even up to the very tops of the highlands. This water system is not entirely subsurface, for there are many canals interconnecting the sparkling lakes of Jerusem.
 \vs p046 2:3 The atmosphere of Jerusem is a 3\hyp{}gas mixture. This air is very similar to that of Urantia with the addition of a gas adapted to the respiration of the morontia order of life. This third gas in no way unfits the air for the respiration of animals or plants of the material orders.
-\vs p046 2:4 The transportation system is allied with the circulatory streams of energy movement, these main energy currents being located at 10\hyp{}mile intervals. By adjustment of physical mechanisms the material beings of the planet can proceed at a pace varying from 2 to 500 miles\fnst{\textbf{miles}, Here the ``mile'' could be referring to a ``standard Jerusem mile'' and so was left unconverted.} per hour. The transport birds fly at about 100 miles an hour. The air mechanisms of the Material Sons travel around 500 miles per hour. Material and early morontia beings must utilize these mechanical means of transport, but spirit personalities proceed by liaison with the superior forces and spirit sources of energy.
+\vs p046 2:4 The transportation system is allied with the circulatory streams of energy movement, these main energy currents being located at 10\hyp{}mile intervals. By adjustment of physical mechanisms the material beings of the planet can proceed at a pace varying from 2 to 500 miles\fnst{Here the ``mile'' could be referring to a ``standard Jerusem mile'' and so was left unconverted.} per hour. The transport birds fly at about 100 miles an hour. The air mechanisms of the Material Sons travel around 500 miles per hour. Material and early morontia beings must utilize these mechanical means of transport, but spirit personalities proceed by liaison with the superior forces and spirit sources of energy.
 \vs p046 2:5 \pc Jerusem and its associated worlds are endowed with the ten standard divisions of physical life characteristic of the architectural spheres of Nebadon. And since there is no organic evolution on Jerusem, there are no conflicting forms of life, no struggle for existence, no survival of the fittest. Rather is there a creative adaptation which foreshadows the beauty, the harmony, and the perfection of the eternal worlds of the central and divine universe. And in all this creative perfection there is the most amazing intermingling of physical and of morontia life, artistically contrasted by the celestial artisans and their fellows.
 \vs p046 2:6 Jerusem is indeed a foretaste of paradisiacal glory and grandeur. But you can never hope to gain an adequate idea of these glorious architectural worlds by any attempted description. There is so little that can be compared with aught on your world, and even then the things of Jerusem so transcend the things of Urantia that the comparison is almost grotesque. Until you actually arrive on Jerusem, you can hardly entertain anything like a true concept of the heavenly worlds, but that is not so long a time in the future when your coming experience on the system capital is compared with your sometime arrival on the more remote training spheres of the universe, the superuniverse, and of Havona.
 \vs p046 2:7 \pc The manufacturing or laboratory sector of Jerusem is an extensive domain, one which Urantians would hardly recognize since it has no smoking chimneys; nevertheless, there is an intricate material economy associated with these special worlds, and there is a perfection of mechanical technique and physical achievement which would astonish and even awe your most experienced chemists and inventors. Pause to consider that this first world of detention in the Paradise journey is far more material than spiritual. Throughout your stay on Jerusem and its transition worlds you are far nearer your earth life of material things than your later life of advancing spirit existence.
 \vs p046 2:8 \pc Mount Seraph is the highest elevation on Jerusem, almost 4.5\,km, and is the point of departure for all transport seraphim. Numerous mechanical developments are used in providing initial energy for escaping the planetary gravity and overcoming the air resistance. A seraphic transport departs every 3 seconds of Urantia time throughout the light period and, sometimes, far into the recession. The transporters take off at about 25 standard miles per second of Urantia time and do not attain standard velocity until they are over 2,000 miles away from Jerusem.
 \vs p046 2:9 Transports arrive on the crystal field, the so\hyp{}called sea of glass. Around this area are the receiving stations for the various orders of beings who traverse space by seraphic transport. Near the polar crystal receiving station for student visitors you may ascend the pearly observatory and view the immense relief map of the entire headquarters planet.
 \usection{The Jerusem Broadcasts}
-\vs p046 3:1 The superuniverse and Paradise\hyp{}Havona\tunemarkup{pgkoboaurahd}{\linebreak} broadcasts are received on Jerusem in liaison with Salvington and by a technique involving the polar crystal, the sea of glass. In addition to provisions for the reception of these extra\hyp{}Nebadon communications, there are 3 distinct groups of receiving stations. These separate but tricircular groups of stations are adjusted to the reception of broadcasts from the local worlds, from the constellation headquarters, and from the capital of the local universe. All these broadcasts are automatically displayed so as to be discernible by all types of beings present in the central broadcast amphitheatre; of all preoccupations for an ascendant mortal on Jerusem, none is more engaging and engrossing than that of listening in on the never\hyp{}ending stream of universe space reports.
+\vs p046 3:1 The superuniverse and Paradise\hyp{}Havona broadcasts are received on Jerusem in liaison with Salvington and by a technique involving the polar crystal, the sea of glass. In addition to provisions for the reception of these extra\hyp{}Nebadon communications, there are 3 distinct groups of receiving stations. These separate but tricircular groups of stations are adjusted to the reception of broadcasts from the local worlds, from the constellation headquarters, and from the capital of the local universe. All these broadcasts are automatically displayed so as to be discernible by all types of beings present in the central broadcast amphitheatre; of all preoccupations for an ascendant mortal on Jerusem, none is more engaging and engrossing than that of listening in on the never\hyp{}ending stream of universe space reports.
 \vs p046 3:2 This Jerusem broadcast\hyp{}receiving station is encircled by an enormous amphitheatre, constructed of scintillating materials largely unknown on Urantia and seating over five billion beings --- material and morontia --- besides accommodating innumerable spirit personalities. It is the favourite diversion for all Jerusem to spend their leisure at the broadcast station, there to learn of the welfare and state of the universe. And this is the only planetary activity which is not slowed down during the recession of light.
 \vs p046 3:3 At this broadcast\hyp{}receiving amphitheatre the Salvington messages are coming in continuously. Near by, the Edentia word of the Most High Constellation Fathers is received at least once a day. Periodically the regular and special broadcasts of Uversa are relayed through Salvington, and when Paradise messages are in reception, the entire population is assembled around the sea of glass, and the Uversa friends add the reflectivity phenomena to the technique of the Paradise broadcast so that everything heard becomes visible. And it is in this manner that continual foretastes of advancing beauty and grandeur are afforded the mortal survivors as they journey inward on the eternal adventure.
 \vs p046 3:4 \pc The Jerusem sending station is located at the opposite pole of the sphere. All broadcasts to the individual worlds are relayed from the system capitals except the Michael messages, which sometimes go direct to their destinations over the archangels’ circuit.
