--- a/tex/p047.tex
+++ b/tex/p047.tex
@@ -83,7 +83,7 @@
 \vs p047 9:5 \pc You will greatly enjoy your progress through the seven dematerializing worlds; they are really demortalizing spheres. You are mostly human on the first mansion world, just a mortal being minus a material body, a human mind housed in a morontia form --- a material body of the morontia world but not a mortal house of flesh and blood. You really pass from the mortal state to the immortal status at the time of Adjuster fusion, and by the time you have finished the Jerusem career, you will be full\hyp{}fledged morontians.
 \usection{Jerusem Citizenship}
 \vs p047 10:1 The reception of a new class of mansion world graduates is the signal for all Jerusem to assemble as a committee of welcome. Even the spornagia enjoy the arrival of these triumphant ascenders of evolutionary origin, those who have run the planetary race and finished the mansion world progression. Only the physical controllers and Morontia Power Supervisors are absent from these occasions of rejoicing.
-\vs p047 10:2 \pc John the Revelator saw a vision of the arrival of a class of advancing mortals from the seventh mansion world to their first heaven, the glories of Jerusem. He recorded\fnst{\textbf{He recorded}, What follows is the quotation from Revelation~15:2, except the clause ``that was originally in them'' and, obviously, there is no mention of the mansion worlds in our present text.}: “And I saw as it were a sea of glass mingled with fire; and those who had gained the victory over the beast that was originally in them and over the image that persisted through the mansion worlds and finally over the last mark and trace, standing on the sea of glass, having the harps of God, and singing the song of deliverance from mortal fear and death.” (Perfected space communication is to be had on all these worlds; and your anywhere reception of such communications is made possible by carrying the “harp of God,” a morontia contrivance compensating for the inability to directly adjust the immature morontia sensory mechanism to the reception of space communications.)
+\vs p047 10:2 \pc John the Revelator saw a vision of the arrival of a class of advancing mortals from the seventh mansion world to their first heaven, the glories of Jerusem. He recorded\fnst{What follows is the quotation from Revelation~15:2, except the clause ``that was originally in them'' and, obviously, there is no mention of the mansion worlds in our present text.}: “And I saw as it were a sea of glass mingled with fire; and those who had gained the victory over the beast that was originally in them and over the image that persisted through the mansion worlds and finally over the last mark and trace, standing on the sea of glass, having the harps of God, and singing the song of deliverance from mortal fear and death.” (Perfected space communication is to be had on all these worlds; and your anywhere reception of such communications is made possible by carrying the “harp of God,” a morontia contrivance compensating for the inability to directly adjust the immature morontia sensory mechanism to the reception of space communications.)
 \vs p047 10:3 Paul also had a view of the ascendant\hyp{}citizen corps of perfecting mortals on Jerusem, for he wrote: “But you have come to Mount Zion and to the city of the living God, the heavenly Jerusalem, and to an innumerable company of angels, to the grand assembly of Michael, and to the spirits of just men being made perfect.”
 \vs p047 10:4 \pc After mortals have attained residence on the system headquarters, no more literal resurrections will be experienced. The morontia form granted you on departure from the mansion world career is such as will see you through to the end of the local universe experience. Changes will be made from time to time, but you will retain this same form until you bid it farewell when you emerge as first\hyp{}stage spirits preparatory for transit to the superuniverse worlds of ascending culture and spirit training.
 \vs p047 10:5 Seven times do those mortals who pass through the entire mansonia career experience the adjustment sleep and the resurrection awakening. But the last resurrection hall, the final awakening chamber, was left behind on the seventh mansion world. No more will a form\hyp{}change necessitate the lapse of consciousness or a break in the continuity of personal memory.
