--- a/tex/p048.tex
+++ b/tex/p048.tex
@@ -49,7 +49,7 @@
 \usection{Morontia Companions}
 \vs p048 3:1 These hosts of the mansion and morontia worlds are the offspring of a local universe Mother Spirit. They are created from age to age in groups of 100,000, and in Nebadon there are at present over $7 \times 10^{10}$ of these unique beings.
 \vs p048 3:2 Morontia Companions are trained for service by the Melchizedeks on a special planet near Salvington; they do not pass through the central Melchizedek schools. In service they range from the lowest mansion worlds of the systems to the highest study spheres of Salvington, but they are seldom encountered on the inhabited worlds. They serve under the general supervision of the Sons of God and under the immediate direction of the Melchizedeks.
-\vs p048 3:3 The Morontia Companions maintain 10,000 headquarters in a local universe --- on each of the first mansion worlds of the local systems. They are almost wholly a self\hyp{}governing order and are, in general, an intelligent and loyal group of beings; but every now and then, in connection with certain unfortunate celestial upheavals, they have been known to go astray. Thousands of these useful creatures were lost during the times of the Lucifer rebellion in Satania. Your local system now has its full quota of these beings, the loss of the Lucifer rebellion having only recently been made up.
+\vs p048 3:3 The Morontia Companions maintain\tunemarkup{pgkoboaurahd}{\linebreak} 10,000 headquarters in a local universe --- on each of the first mansion worlds of the local systems. They are almost wholly a self\hyp{}governing order and are, in general, an intelligent and loyal group of beings; but every now and then, in connection with certain unfortunate celestial upheavals, they have been known to go astray. Thousands of these useful creatures were lost during the times of the Lucifer rebellion in Satania. Your local system now has its full quota of these beings, the loss of the Lucifer rebellion having only recently been made up.
 \vs p048 3:4 \pc There are two distinct types of Morontia Companions; one type is aggressive, the other retiring, but otherwise they are equal in status. They are not sex creatures, but they manifest a touchingly beautiful affection for one another. And while they are hardly companionate in the material (human) sense, they are very close of kin to the human races in the order of creature existence. The midway creatures of the worlds are your nearest of kin; then come the morontia cherubim, and after them the Morontia Companions.
 \vs p048 3:5 These companions are touchingly affectionate and charmingly social beings. They possess distinct personalities, and when you meet them on the mansion worlds, after learning to recognize them as a class, you will soon discern their individuality. Mortals all resemble one another; at the same time each of you possesses a distinct and recognizable personality.
 \vs p048 3:6 \pc Something of an idea of the nature of the work of these Morontia Companions may be derived from the following classification of their activities in a local system:
