--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -56,7 +56,7 @@
 \usection{Evolutionary Will Creatures}
 \vs p049 4:1 There are great differences between the mortals of the different worlds, even among those belonging to the same intellectual and physical types, but all mortals of will dignity are erect animals, bipeds.
 \vs p049 4:2 There are six basic evolutionary races: three primary --- red, yellow, and blue; and three secondary --- orange, green, and indigo. Most inhabited worlds have all of these races, but many of the three\hyp{}brained planets harbour only the three primary types. Some local systems also have only these three races.
-\vs p049 4:3 The average special physical\hyp{}sense endowment of human beings is 12\fnst{\textbf{12}, It was Rudolf Steiner who first suggested the idea of 12 senses. His theory was later developed by others, e.g. Appli, Kranich, Schoorel, Soesman et al. Steiner's 12 senses are grouped as follows:\begin{itemize}\item Lower (0-7 years): life, touch, movement, balance. \item Feeling (7-14 years): sight, smell, taste, warmth. \item Cognitive (14-21 years): hearing, speech, thought, ego.\end{itemize} On the other hand, these are not all \bibemph{physical} senses, which are probably more accurately mapped to the 12 \bibemph{cranial nerves}: olfactory, optic, motor oculi, patheticus, tri\hyp{}facial, abducens, facial nerve, auditory, glossopharyngeal, pneumogastric, spinal accessory, hypoglossal. But the number of cranial nerves is always exact, so why does the text refer to the \bibemph{average} endowment?}, though the special senses of the three\hyp{}brained mortals are extended slightly beyond those of the one\hyp{} and two\hyp{}brained types; they can see and hear considerably more than the Urantia races.
+\vs p049 4:3 The average special physical\hyp{}sense endowment of human beings is 12\fnst{It was Rudolf Steiner who first suggested the idea of 12 senses. His theory was later developed by others, e.g. Appli, Kranich, Schoorel, Soesman et al. Steiner's 12 senses are grouped as follows:\begin{itemize}\item Lower (0-7 years): life, touch, movement, balance. \item Feeling (7-14 years): sight, smell, taste, warmth. \item Cognitive (14-21 years): hearing, speech, thought, ego.\end{itemize} On the other hand, these are not all \bibemph{physical} senses, which are probably more accurately mapped to the 12 \bibemph{cranial nerves}: olfactory, optic, motor oculi, patheticus, tri\hyp{}facial, abducens, facial nerve, auditory, glossopharyngeal, pneumogastric, spinal accessory, hypoglossal. But the number of cranial nerves is always exact, so why does the text refer to the \bibemph{average} endowment?}, though the special senses of the three\hyp{}brained mortals are extended slightly beyond those of the one\hyp{} and two\hyp{}brained types; they can see and hear considerably more than the Urantia races.
 \vs p049 4:4 Young are usually born singly, multiple births being the exception, and the family life is fairly uniform on all types of planets. Sex equality prevails on all advanced worlds; male and female are equal in mind endowment and spiritual status. We do not regard a planet as having emerged from barbarism so long as one sex seeks to tyrannize over the other. This feature of creature experience is always greatly improved after the arrival of a Material Son and Daughter.
 \vs p049 4:5 \pc Seasons and temperature variations occur on all sunlighted and sun\hyp{}heated planets. Agriculture is universal on all atmospheric worlds; tilling the soil is the one pursuit that is common to the advancing races of all such planets.
 \vs p049 4:6 Mortals all have the same general struggles with microscopic foes in their early days, such as you now experience on Urantia, though perhaps not so extensive. The length of life varies on the different planets from 25 years on the primitive worlds to near 500 on the more advanced and older spheres.
@@ -73,16 +73,16 @@
 \vs p049 5:7 \ublistelem{6.}\bibnobreakspace Adjuster\hyp{}fusion series.
 \vs p049 5:8 \ublistelem{7.}\bibnobreakspace Techniques of terrestrial escape.
 \vs p049 5:9 \pc The inhabited spheres of the seven superuniverses are peopled with mortals who simultaneously classify in some one or more categories of each of these seven generalized classes of evolutionary creature life. But even these general classifications make no provision for such beings as midsoniters nor for certain other forms of intelligent life. The inhabited worlds, as they have been presented in these narratives, are peopled with evolutionary mortal creatures, but there are other life forms.
-\vs p049 5:10 \ublistelem{1.}\bibnobreakspace \bibemph{Adjustment to planetary environment.}\tunemarkup{pgkoboaurahd}{\linebreak} There are three general groups of inhabited worlds from the standpoint of the adjustment of creature life to the planetary environment: the normal adjustment group, the radical adjustment group, and the experimental group.
+\vs p049 5:10 \ublistelem{1.}\bibnobreakspace \bibemph{Adjustment to planetary environment.} There are three general groups of inhabited worlds from the standpoint of the adjustment of creature life to the planetary environment: the normal adjustment group, the radical adjustment group, and the experimental group.
 \vs p049 5:11 Normal adjustments to planetary conditions follow the general physical patterns previously considered. The worlds of the nonbreathers typify the radical or extreme adjustment, but other types are also included in this group. Experimental worlds are usually ideally adapted to the typical life forms, and on these decimal planets the Life Carriers attempt to produce beneficial variations in the standard life designs. Since your world is an experimental planet, it differs markedly from its sister spheres in Satania; many forms of life have appeared on Urantia that are not found elsewhere; likewise are many common species absent from your planet.
 \vs p049 5:12 In the universe of Nebadon, all the life\hyp{}modification worlds are serially linked together and constitute a special domain of universe affairs which is given attention by designated administrators; and all of these experimental worlds are periodically inspected by a corps of universe directors whose chief is the veteran finaliter known in Satania as Tabamantia.
-\vs p049 5:13 \ublistelem{2.}\bibnobreakspace \bibemph{Brain\hyp{}type series.} The one physical uniformity of mortals is the brain and nervous system; nevertheless, there are three basic organizations of the brain mechanism: the one-, the two-, and the three\hyp{}brained types. Urantians are of the two\hyp{}brained type\fnst{\textbf{Urantians are of the two\hyp{}brained type}, The two conjectures on the identification of these ``two brains'' were: a) the two hemispheres of the cerebral cortex and b) the brain proper and the spinal cord. Both conjectures turned out to be wrong after careful examination of Dr William~S. Sadler's ``Physiology of Faith and Fear'', Chicago, 1912 (pp.~513--514), where the first brain is identified with the brain proper (including medulla oblongata and the spinal cord) and the second brain is the \emph{solar plexus}, also referred to as \emph{the ``abdominal brain''}.}, somewhat more imaginative, adventurous, and philosophical than the one\hyp{}brained mortals but somewhat less spiritual, ethical, and worshipful than the three\hyp{}brained orders. These brain differences characterize even the prehuman animal existences.
+\vs p049 5:13 \ublistelem{2.}\bibnobreakspace \bibemph{Brain\hyp{}type series.} The one physical uniformity of mortals is the brain and nervous system; nevertheless, there are three basic organizations of the brain mechanism: the one-, the two-, and the three\hyp{}brained types. Urantians are of the two\hyp{}brained type\fnst{The two conjectures on the identification of these ``two brains'' were: a) the two hemispheres of the cerebral cortex and b) the brain proper and the spinal cord. Both conjectures turned out to be wrong after careful examination of Dr William~S. Sadler's ``Physiology of Faith and Fear'', Chicago, 1912 (pp.~513--514), where the first brain is identified with the brain proper (including medulla oblongata and the spinal cord) and the second brain is the \emph{solar plexus}, also referred to as \emph{the ``abdominal brain''}.}, somewhat more imaginative, adventurous, and philosophical than the one\hyp{}brained mortals but somewhat less spiritual, ethical, and worshipful than the three\hyp{}brained orders. These brain differences characterize even the prehuman animal existences.
 \vs p049 5:14 From the two\hyp{}hemisphere type of the Urantian cerebral cortex you can, by analogy, grasp something of the one\hyp{}brained type. The third brain of the three\hyp{}brained orders is best conceived as an evolvement of your lower or rudimentary form of brain, which is developed to the point where it functions chiefly in control of physical activities, leaving the two superior brains free for higher engagements: one for intellectual functions and the other for the spiritual\hyp{}counterparting activities of the Thought Adjuster.
 \vs p049 5:15 While the terrestrial attainments of the one\hyp{}brained races are slightly limited in comparison with the two\hyp{}brained orders, the older planets of the three\hyp{}brained group exhibit civilizations that would astound Urantians, and which would somewhat shame yours by comparison. In mechanical development and material civilization, even in intellectual progress, the two\hyp{}brained mortal worlds are able to equal the three\hyp{}brained spheres. But in the higher control of mind and development of intellectual and spiritual reciprocation, you are somewhat inferior.
 \vs p049 5:16 All such comparative estimates concerning the intellectual progress or the spiritual attainments of any world or group of worlds should in fairness recognize planetary age; much, very much, depends on age, the help of the biologic uplifters, and the subsequent missions of the various orders of the divine Sons.
 \vs p049 5:17 While the three\hyp{}brained peoples are capable of a slightly higher planetary evolution than either the one\hyp{} or two\hyp{}brained orders, all have the same type of life plasm and carry on planetary activities in very similar ways, much as do human beings on Urantia. These three types of mortals are distributed throughout the worlds of the local systems. In the majority of cases planetary conditions had very little to do with the decisions of the Life Carriers to project these varied orders of mortals on the different worlds; it is a prerogative of the Life Carriers thus to plan and execute.
 \vs p049 5:18 These three orders stand on an equal footing in the ascension career. Each must traverse the same intellectual scale of development, and each must master the same spiritual tests of progression. The system administration and the constellation overcontrol of these different worlds are uniformly free from discrimination; even the regimes of the Planetary Princes are identical.
-\vs p049 5:19 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit\hyp{}reception series.} There are three groups of mind design as related to contact with spirit affairs. This classification does not refer to the one-, two-, and three\hyp{}brained orders of mortals; it refers primarily to gland chemistry, more particularly to the organization of certain glands comparable to the pituitary bodies. The races on some worlds have one gland, on others two, as do Urantians\fnst{\textbf{two, as do Urantians}, my original conjecture was that the second gland here referred to is in fact the pineal gland or epiphysis. The hypophysis and epiphysis correspond to the 6\ts{th} and 7\ts{th} chakras, which in the Urantia Papers are called ``adjutant mind\hyp{}spirits'', so the ``opening of the 3\ts{rd} eye'' (enlightenment) would correspond to the synchronized action of the two higher adjutants (worship and wisdom), coordinating the lower chakra activities. However, in his book ``The Truth About Spiritualism'' (1923, pp.40--41), Dr~William Sadler mentions the anterior and posterior lobes of the human pituitary gland. He also notes: \bibemph{``man possesses a larger anterior lobe and is therefore more gifted in analytical reason and more reliable in mature judgment; but woman, because of this fact that she has a superior posterior lobe of the pituitary gland, has more ability when it comes to sizing up and prognosticating human character.''}}, while on still other spheres the races have three of these unique bodies. The inherent imagination and spiritual receptivity is definitely influenced by this differential chemical endowment.
+\vs p049 5:19 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit\hyp{}reception series.} There are three groups of mind design as related to contact with spirit affairs. This classification does not refer to the one-, two-, and three\hyp{}brained orders of mortals; it refers primarily to gland chemistry, more particularly to the organization of certain glands comparable to the pituitary bodies. The races on some worlds have one gland, on others two, as do Urantians\fnst{My original conjecture was that the second gland here referred to is in fact the pineal gland or epiphysis. The hypophysis and epiphysis correspond to the 6\ts{th} and 7\ts{th} chakras, which in the Urantia Papers are called ``adjutant mind\hyp{}spirits'', so the ``opening of the 3\ts{rd} eye'' (enlightenment) would correspond to the synchronized action of the two higher adjutants (worship and wisdom), coordinating the lower chakra activities. However, in his book ``The Truth About Spiritualism'' (1923, pp.40--41), Dr~William Sadler mentions the anterior and posterior lobes of the human pituitary gland. He also notes: \bibemph{``man possesses a larger anterior lobe and is therefore more gifted in analytical reason and more reliable in mature judgment; but woman, because of this fact that she has a superior posterior lobe of the pituitary gland, has more ability when it comes to sizing up and prognosticating human character.''}}, while on still other spheres the races have three of these unique bodies. The inherent imagination and spiritual receptivity is definitely influenced by this differential chemical endowment.
 \vs p049 5:20 Of the spirit\hyp{}reception types, 65\% are of the second group, like the Urantia races. 12\% are of the first type, naturally less receptive, while 23\% are more spiritually inclined during terrestrial life. But such distinctions do not survive natural death; all of these racial differences pertain only to the life in the flesh.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/spirit-reception-types.png}\caption{Distribution of Spirit Reception Types (\%), Urantia type (``Two glands'') is marked with green.}\end{figure}}
 \vs p049 5:21 \ublistelem{4.}\bibnobreakspace \bibemph{Planetary\hyp{}mortal epochs.} This classification recognizes the succession of temporal dispensations as they affect man’s terrestrial status and his reception of celestial ministry.
 \vs p049 5:22 Life is initiated on the planets by the Life Carriers, who watch over its development until sometime after the evolutionary appearance of mortal man. Before the Life Carriers leave a planet, they duly install a Planetary Prince as ruler of the realm. With this ruler there arrives a full quota of subordinate auxiliaries and ministering helpers, and the first adjudication of the living and the dead is simultaneous with his arrival.
