--- a/tex/p054.tex
+++ b/tex/p054.tex
@@ -61,7 +61,7 @@
 \vs p054 6:5 And there is compensation for these trials, delays, and disappointments which invariably accompany the sin of rebellion. Of the many valuable repercussions of the Lucifer rebellion which might be named, I will only call attention to the enhanced careers of those mortal ascenders, the Jerusem citizens, who, by withstanding the sophistries of sin, placed themselves in line for becoming future Mighty Messengers, fellows of my own order. Every being who stood the test of that evil episode thereby immediately advanced his administrative status and enhanced his spiritual worth.
 \vs p054 6:6 \pc At first the Lucifer upheaval appeared to be an unmitigated calamity to the system and to the universe. Gradually benefits began to accrue. With the passing of 25,000 years of system time (20,000 years of Urantia time), the Melchizedeks began to teach that the good resulting from Lucifer’s folly had come to equal the evil incurred. The sum of evil had by that time become almost stationary, continuing to increase only on certain isolated worlds, while the beneficial repercussions continued to multiply and extend out through the universe and superuniverse, even to Havona. The Melchizedeks now teach that the good resulting from the Satania rebellion is more than a thousand times the sum of all the evil.
 \vs p054 6:7 But such an extraordinary and beneficent harvest of wrongdoing could only be brought about by the wise, divine, and merciful attitude of all of Lucifer’s superiors, extending from the Constellation Fathers on Edentia to the Universal Father on Paradise. The passing of time has enhanced the consequential good to be derived from the Lucifer folly; and since the evil to be penalized was quite fully developed within a comparatively short time, it is apparent that the all\hyp{}wise and farseeing universe rulers would be certain to extend the time in which to reap increasingly beneficial results. Regardless of the many additional reasons for delaying the apprehension and adjudication of the Satania rebels, this one gain would have been enough to explain why these sinners were not sooner interned, and why they have not been adjudicated and destroyed.
-\vs p054 6:8 Short\hyp{}sighted and time\hyp{}bound mortal minds should be slow to criticize the time delays of the farseeing and all\hyp{}wise administrators of universe affairs.
+\vs p054 6:8 Short\hyp{}sighted and time\hyp{}bound mortal\tunemarkup{pgkoboaurahd}{\linebreak} minds should be slow to criticize the time delays of the farseeing and all\hyp{}wise administrators of universe affairs.
 \vs p054 6:9 One error of human thinking respecting these problems consists in the idea that all evolutionary mortals on an evolving planet would choose to enter upon the Paradise career if sin had not cursed their world. The ability to decline survival does not date from the times of the Lucifer rebellion. Mortal man has always possessed the endowment of freewill choice regarding the Paradise career.
 \vs p054 6:10 \pc As you ascend in the survival experience, you will broaden your universe concepts and extend your horizon of meanings and values; and thus will you be able the better to understand why such beings as Lucifer and Satan are permitted to continue in rebellion. You will also better comprehend how ultimate (if not immediate) good can be derived from time\hyp{}limited evil. After you attain Paradise, you will really be enlightened and comforted when you listen to the superaphic philosophers discuss and explain these profound problems of universe adjustment. But even then, I doubt that you will be fully satisfied in your own minds. At least I was not even when I had thus attained the acme of universe philosophy. I did not achieve a full comprehension of these complexities until after I had been assigned to administrative duties in the superuniverse, where by actual experience I have acquired conceptual capacity adequate for the comprehension of such many\hyp{}sided problems in cosmic equity and spiritual philosophy. As you ascend Paradiseward, you will increasingly learn that many problematic features of universe administration can only be comprehended subsequent to the acquirement of increased experiential capacity and to the achievement of enhanced spiritual insight. Cosmic wisdom is essential to the understanding of cosmic situations.
 \vsetoff
