--- a/tex/p058.tex
+++ b/tex/p058.tex
@@ -9,22 +9,22 @@
 \author{Life Carrier}
 \vs p058 0:1 In all Satania there are only 61 worlds similar to Urantia, life\hyp{}modification planets. The majority of inhabited worlds are peopled in accordance with established techniques; on such spheres the Life Carriers are afforded little leeway in their plans for life implantation. But about one world in ten is designated as a \bibemph{decimal planet} and assigned to the special registry of the Life Carriers; and on such planets we are permitted to undertake certain life experiments in an effort to modify or possibly improve the standard universe types of living beings.
 \usection{Physical\hyp{}Life Prerequisites}
-\vs p058 1:1 \bibemph{600,000,000} years ago the commission of Life Carriers sent out from Jerusem arrived on Urantia and began the study of physical conditions preparatory to launching life on world number 606 of the Satania system. This was to be our 606\ts{th} experience with the initiation of the Nebadon life patterns in Satania and our 60\ts{th}\fnst{\textbf{606\ts{th} ... 60\ts{th}}, It is interesting to note that the planet number (606) added to the number of experiment (60) is 666, known also as \bibemph{The Number of the Beast}, see Revelation 13:18. Also, see the clarification of John's vision at \bibref[47:10.2]{p047 10:2} and the note at \bibref[15:14.8]{p015 14:8}.} opportunity to make changes and institute modifications in the basic and standard life designs of the local universe.
+\vs p058 1:1 \bibemph{600,000,000} years ago the commission of Life Carriers sent out from Jerusem arrived on Urantia and began the study of physical conditions preparatory to launching life on world number 606 of the Satania system. This was to be our 606\ts{th} experience with the initiation of the Nebadon life patterns in Satania and our 60\ts{th}\fnst{It is interesting to note that the planet number (606) added to the number of experiment (60) is 666, known also as \bibemph{The Number of the Beast}, see Revelation 13:18. Also, see the clarification of John's vision at \bibref[47:10.2]{p047 10:2} and the note at \bibref[15:14.8]{p015 14:8}.} opportunity to make changes and institute modifications in the basic and standard life designs of the local universe.
 \vs p058 1:2 \pc It should be made clear that Life Carriers cannot initiate life until a sphere is ripe for the inauguration of the evolutionary cycle. Neither can we provide for a more rapid life development than can be supported and accommodated by the physical progress of the planet.
 \vs p058 1:3 The Satania Life Carriers had projected a sodium chloride pattern of life; therefore no steps could be taken toward planting it until the ocean waters had become sufficiently briny. The Urantia type of protoplasm can function only in a suitable salt solution. All ancestral life --- vegetable and animal --- evolved in a salt\hyp{}solution habitat. And even the more highly organized land animals could not continue to live did not this same essential salt solution circulate throughout their bodies in the blood stream which freely bathes, literally submerses, every tiny living cell in this “briny deep.”
 \vs p058 1:4 Your primitive ancestors freely circulated about in the salty ocean; today, this same oceanlike salty solution freely circulates about in your bodies, bathing each individual cell with a chemical liquid in all essentials comparable to the salt water which stimulated the first protoplasmic reactions of the first living cells to function on the planet.
 \vs p058 1:5 But as this era opens, Urantia is in every way evolving toward a state favourable for the support of the initial forms of marine life. Slowly but surely physical developments on earth and in adjacent space regions are preparing the stage for the later attempts to establish such life forms as we had decided would be best adapted to the unfolding physical environment --- both terrestrial and spatial.
 \vs p058 1:6 Subsequently the Satania commission of Life Carriers returned to Jerusem, preferring to await the further breakup of the continental land mass, which would afford still more inland seas and sheltered bays, before actually beginning life implantation.
-\vs p058 1:7 \pc On a planet where life has a marine origin the ideal conditions for life implantation are provided by a large number of inland seas, by an extensive shore line of shallow waters and sheltered bays; and just such a distribution of the earth’s waters was rapidly developing. These ancient inland seas were seldom over 150--180\,m deep, and sunlight can penetrate ocean water for more than 180\,m\fnst{\textbf{sunlight can penetrate ocean water for more than 180\,m}, The density of most liquids decreases with increasing temperature, but water is an exception to this rule. In the region of temperatures 0--3\,°C for the salty ocean water or 0--4\,°C for the fresh water, the density \bibemph{increases} with increasing temperature, reaching the maximum density at the temperature 3\,°C for the salty and 4\,°C for the fresh water respectively. Therefore, the warm water at the surface (say, having the temperature 2\,°C) is more dense than the cold water (say, at 1\,°C) underneath and moves down replacing it, thus ensuring that the temperature does not fall below 2--3\,°C all the way to the bottom. This is also the reason why a pond begins to freeze from the surface to the bottom and not the other way around, which would have been catastrophic for the survival of fish and other forms of life in the pond.}.
+\vs p058 1:7 \pc On a planet where life has a marine origin the ideal conditions for life implantation are provided by a large number of inland seas, by an extensive shore line of shallow waters and sheltered bays; and just such a distribution of the earth’s waters was rapidly developing. These ancient inland seas were seldom over 150--180\,m deep, and sunlight can penetrate ocean water for more than 180\,m\fnst{The density of most liquids decreases with increasing temperature, but water is an exception to this rule. In the region of temperatures 0--3\,°C for the salty ocean water or 0--4\,°C for the fresh water, the density \bibemph{increases} with increasing temperature, reaching the maximum density at the temperature 3\,°C for the salty and 4\,°C for the fresh water respectively. Therefore, the warm water at the surface (say, having the temperature 2\,°C) is more dense than the cold water (say, at 1\,°C) underneath and moves down replacing it, thus ensuring that the temperature does not fall below 2--3\,°C all the way to the bottom. This is also the reason why a pond begins to freeze from the surface to the bottom and not the other way around, which would have been catastrophic for the survival of fish and other forms of life in the pond.}.
 \vs p058 1:8 And it was from such seashores of the mild and equable climes of a later age that primitive plant life found its way onto the land. There the high degree of carbon in the atmosphere afforded the new land varieties of life opportunity for speedy and luxuriant growth. Though this atmosphere was then ideal for plant growth, it contained such a high degree of carbon dioxide that no animal, much less man, could have lived on the face of the earth.
 \usection{The Urantia Atmosphere}
-\vs p058 2:1 The planetary atmosphere filters through to the earth about $5 \times 10^{-10}$ of the sun’s total light emanation. If the light falling upon North America were paid for at the rate of 2¢/kWh, the annual light bill would be upward of 800 quadrillion\fnst{\textbf{quadrillion} $=$ one thousand trillion, $10^{15}$.} dollars. Chicago’s bill for sunshine would amount to considerably over \$100,000,000 a day. And it should be remembered that you receive from the sun other forms of energy --- light is not the only solar contribution reaching your atmosphere. Vast solar energies pour in upon Urantia embracing wave lengths ranging both above and below the recognition range of human vision.
-\vs p058 2:2 \pc The earth’s atmosphere is all but opaque to much of the solar radiation at the extreme ultraviolet end of the spectrum. Most of these short wave lengths are absorbed by a layer of ozone which exists throughout a level about 16\,km above the surface of the earth, and which extends spaceward for another 16\,km. The ozone permeating this region, at conditions prevailing on the earth’s surface, would make a layer only 2.5\,mm thick\fnst{\textbf{2.5\,mm thick}, The present (2000) estimate of the ozone layer thickness over the US is about 3\,mm.}; nevertheless, this relatively small and apparently insignificant amount of ozone protects Urantia inhabitants from the excess of these dangerous and destructive ultraviolet radiations present in sunlight. But were this ozone layer just a trifle thicker, you would be deprived of the highly important and health\hyp{}giving ultraviolet rays which now reach the earth’s surface, and which are ancestral to one of the most essential of your vitamins.
+\vs p058 2:1 The planetary atmosphere filters through to the earth about $5 \times 10^{-10}$ of the sun’s total light emanation. If the light falling upon North America were paid for at the rate of 2¢/kWh, the annual light bill would be upward of 800 quadrillion\fnst{One thousand trillion, $10^{15}$.} dollars. Chicago’s bill for sunshine would amount to considerably over \$100,000,000 a day. And it should be remembered that you receive from the sun other forms of energy --- light is not the only solar contribution reaching your atmosphere. Vast solar energies pour in upon Urantia embracing wave lengths ranging both above and below the recognition range of human vision.
+\vs p058 2:2 \pc The earth’s atmosphere is all but opaque to much of the solar radiation at the extreme ultraviolet end of the spectrum. Most of these short wave lengths are absorbed by a layer of ozone which exists throughout a level about 16\,km above the surface of the earth, and which extends spaceward for another 16\,km. The ozone permeating this region, at conditions prevailing on the earth’s surface, would make a layer only 2.5\,mm thick\fnst{The present (2000) estimate of the ozone layer thickness over the US is about 3\,mm.}; nevertheless, this relatively small and apparently insignificant amount of ozone protects Urantia inhabitants from the excess of these dangerous and destructive ultraviolet radiations present in sunlight. But were this ozone layer just a trifle thicker, you would be deprived of the highly important and health\hyp{}giving ultraviolet rays which now reach the earth’s surface, and which are ancestral to one of the most essential of your vitamins.
 \vs p058 2:3 And yet some of the less imaginative of your mortal mechanists insist on viewing material creation and human evolution as an accident. The Urantia midwayers have assembled over 50,000 facts of physics and chemistry which they deem to be incompatible with the laws of accidental chance, and which they contend unmistakably demonstrate the presence of intelligent purpose in the material creation. And all of this takes no account of their catalogue of more than 100,000 findings outside the domain of physics and chemistry which they maintain prove the presence of mind in the planning, creation, and maintenance of the material cosmos.
 \vs p058 2:4 Your sun pours forth a veritable flood of death\hyp{}dealing rays, and your pleasant life on Urantia is due to the “fortuitous” influence of more than two\hyp{}score apparently accidental protective operations similar to the action of this unique ozone layer.
 \vs p058 2:5 Were it not for the “blanketing” effect of the atmosphere at night, heat would be lost by radiation so rapidly that life would be impossible of maintenance except by artificial provision.
 \vs p058 2:6 \pc The lower 8 or 10\,km of the earth’s atmosphere is the troposphere; this is the region of winds and air currents which provide weather phenomena. Above this region is the inner ionosphere and next above is the stratosphere. Ascending from the surface of the earth, the temperature steadily falls for 9 or 12\,km, at which height it registers around -57\,°C. This temperature range of from -54\,°C to -57\,°C is unchanged in the further ascent for 64 km; this realm of constant temperature is the stratosphere. At a height of 72 or 80\,km, the temperature begins to rise, and this increase continues until, at the level of the auroral displays, a temperature of 649\,°C is attained, and it is this intense heat that ionizes the oxygen. But temperature in such a rarefied atmosphere is hardly comparable with heat reckoning at the surface of the earth. Bear in mind that 50\% of all your atmosphere is to be found in the first 5\,km. The height of the earth’s atmosphere is indicated by the highest auroral streamers --- about 643\,km.
-\vs p058 2:7 Auroral phenomena are directly related to sunspots, those solar cyclones which whirl in opposite directions above and below the solar equator, even as do the terrestrial tropical hurricanes. Such atmospheric disturbances whirl in opposite directions\fnst{\textbf{opposite directions}, This is due to the direction of the Coriolis force $\vec{F}_{cor} = 2m\vec{v}\times\vec{\omega}$, see the figure.} when occurring above or below the equator.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.5\columnwidth]{images/Coriolis-Effect.png}\caption{Coriolis effect}\end{figure}}
+\vs p058 2:7 Auroral phenomena are directly related to sunspots, those solar cyclones which whirl in opposite directions above and below the solar equator, even as do the terrestrial tropical hurricanes. Such atmospheric disturbances whirl in opposite directions\fnst{This is due to the direction of the Coriolis force $\vec{F}_{cor} = 2m\vec{v}\times\vec{\omega}$, see the figure.} when occurring above or below the equator.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.5\columnwidth]{images/Coriolis-Effect.png}\caption{Coriolis effect}\end{figure}}
 \vs p058 2:8 The power of sunspots to alter light frequencies shows that these solar storm centres function as enormous magnets. Such magnetic fields are able to hurl charged particles from the sunspot craters out through space to the earth’s outer atmosphere, where their ionizing influence produces such spectacular auroral displays. Therefore do you have the greatest auroral phenomena when sunspots are at their height --- or soon thereafter --- at which time the spots are more generally equatorially situated.
 \vs p058 2:9 Even the compass needle is responsive to this solar influence since it turns slightly to the east as the sun rises and slightly to the west as the sun nears setting. This happens every day, but during the height of sunspot cycles this variation of the compass is twice as great. These diurnal wanderings of the compass are in response to the increased ionization of the upper atmosphere, which is produced by the sunlight.
 \vs p058 2:10 It is the presence of two different levels of electrified conducting regions in the superstratosphere that accounts for the long\hyp{}distance transmission of your long\hyp{} and short\hyp{}wave radiobroadcasts. Your broadcasting is sometimes disturbed by the terrific storms which occasionally rage in the realms of these outer ionospheres.
@@ -36,7 +36,7 @@
 \vs p058 3:5 \pc All of these essential cosmic conditions had to evolve to a favourable status before the Life Carriers could actually begin the establishment of life on Urantia.
 \usection{The Life\hyp{}Dawn Era}
 \vs p058 4:1 That we are called Life Carriers should not confuse you. We can and do carry life to the planets, but we brought no life to Urantia. Urantia life is unique, original with the planet. This sphere is a life\hyp{}modification world; all life appearing hereon was formulated by us right here on the planet; and there is no other world in all Satania, even in all Nebadon, that has a life existence just like that of Urantia.
-\vs p058 4:2 \pc \bibemph{550,000,000} years ago\fnst{\textbf{\bibemph{550,000,000} years ago}, This corresponds to the time when, according to Kislicyn's hypothesis, the geosphere underwent a deformation from the shape of a dodecahedron (the ``ether shape'') into the shape of an icosahedron (the ``water shape'').} the Life Carrier corps returned to Urantia. In co\hyp{}operation with spiritual powers and superphysical forces we organized and initiated the original life patterns of this world and planted them in the hospitable waters of the realm. All planetary life (aside from extraplanetary personalities) down to the days of Caligastia, the Planetary Prince, had its origin in our three original, identical, and simultaneous marine\hyp{}life implantations. These three life implantations have been designated as: the \bibemph{central} or Eurasian\hyp{}African, the \bibemph{eastern} or Australasian, and the \bibemph{western,} embracing Greenland and the Americas.
+\vs p058 4:2 \pc \bibemph{550,000,000} years ago\fnst{This corresponds to the time when, according to Kislicyn's hypothesis, the geosphere underwent a deformation from the shape of a dodecahedron (the ``ether shape'') into the shape of an icosahedron (the ``water shape'').} the Life Carrier corps returned to Urantia. In co\hyp{}operation with spiritual powers and superphysical forces we organized and initiated the original life patterns of this world and planted them in the hospitable waters of the realm. All planetary life (aside from extraplanetary personalities) down to the days of Caligastia, the Planetary Prince, had its origin in our three original, identical, and simultaneous marine\hyp{}life implantations. These three life implantations have been designated as: the \bibemph{central} or Eurasian\hyp{}African, the \bibemph{eastern} or Australasian, and the \bibemph{western,} embracing Greenland and the Americas.
 \vs p058 4:3 \pc \bibemph{500,000,000} years ago primitive marine vegetable life was well established on Urantia. Greenland and the arctic land mass, together with North and South America, were beginning their long and slow westward drift. Africa moved slightly south, creating an east and west trough, the Mediterranean basin, between itself and the mother body. Antarctica, Australia, and the land indicated by the islands of the Pacific broke away on the south and east and have drifted far away since that day.
 \vs p058 4:4 We had planted the primitive form of marine life in the sheltered tropic bays of the central seas of the east\hyp{}west cleavage of the breaking\hyp{}up continental land mass. Our purpose in making three marine\hyp{}life implantations was to ensure that each great land mass would carry this life with it, in its warm\hyp{}water seas, as the land subsequently separated. We foresaw that in the later era of the emergence of land life large oceans of water would separate these drifting continental land masses.
 \usection{The Continental Drift}
