--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -9,7 +9,7 @@
 \vs p059 0:1 We reckon the history of Urantia as beginning about one billion years ago and extending through five major eras:
 \vs p059 0:2 \ublistelem{1.}\bibnobreakspace \bibemph{The prelife era} extends over the initial 450,000,000 years, from about the time the planet attained its present size to the time of life establishment. Your students have designated this period as the \bibemph{Archeozoic.}
 \vs p059 0:3 \ublistelem{2.}\bibnobreakspace \bibemph{The life\hyp{}dawn era} extends over the next 150,000,000 years. This epoch intervenes between the preceding prelife or cataclysmic age and the following period of more highly developed marine life. This era is known to your researchers as the \bibemph{Proterozoic.}
-\vs p059 0:4 \ublistelem{3.}\bibnobreakspace \bibemph{The marine\hyp{}life era} covers the next\tunemarkup{pgkoboaurahd}{\linebreak} 250,000,000 years and is best known to you as the \bibemph{Paleozoic.}
+\vs p059 0:4 \ublistelem{3.}\bibnobreakspace \bibemph{The marine\hyp{}life era} covers the next 250,000,000 years and is best known to you as the \bibemph{Paleozoic.}
 \vs p059 0:5 \ublistelem{4.}\bibnobreakspace \bibemph{The early land\hyp{}life era} extends over the next 100,000,000 years and is known as the \bibemph{Mesozoic.}
 \vs p059 0:6 \ublistelem{5.}\bibnobreakspace \bibemph{The mammalian era} occupies the last 50,000,000 years. This recent\hyp{}times era is known as the \bibemph{Cenozoic.}
 \vs p059 0:7 \pc The marine\hyp{}life era thus covers about \bibfrac{1}{4}\ts{er} of your planetary history. It may be subdivided into 6 long periods, each characterized by certain well\hyp{}defined developments in both the geologic realms and the biologic domains.
@@ -47,7 +47,7 @@
 \vs p059 2:8 The life of this period continues to evolve. The world is once again quiet and relatively peaceful; the climate remains mild and equable; the land plants are migrating farther and farther from the seashores. The life patterns are well developed, although few plant fossils of these times are to be found.
 \vs p059 2:9 \pc This was the great age of individual animal organismal evolution, though many of the basic changes, such as the transition from plant to animal, had previously occurred. The marine fauna developed to the point where every type of life below the vertebrate scale was represented in the fossils of those rocks which were laid down during these times. But all of these animals were marine organisms. No land animals had yet appeared except a few types of worms which burrowed along the seashores, nor had the land plants yet overspread the continents; there was still too much carbon dioxide in the air to permit of the existence of air breathers. Primarily, all animals except certain of the more primitive ones are directly or indirectly dependent on plant life for their existence.
 \vs p059 2:10 The trilobites were still prominent. These little animals existed in tens of thousands of patterns and were the predecessors of modern crustaceans. Some of the trilobites had from 25 to 4,000 tiny eyelets; others had aborted eyes. As this period closed, the trilobites shared domination of the seas with several other forms of invertebrate life. But they utterly perished during the beginning of the next period.
-\vs p059 2:11 Lime\hyp{}secreting algae were widespread. There existed thousands of species of the early ancestors of the corals. Sea worms were abundant, and there were many varieties of jellyfish which have since become extinct. Corals and the later types of sponges evolved. The cephalopods were well developed, and they have survived as the modern pearly nautilus, octopus, cuttlefish, and squid.
+\vs p059 2:11 Lime\hyp{}secreting algae were widespread.\tunemarkup{pgkoboaurahd}{\linebreak} There existed thousands of species of the early ancestors of the corals. Sea worms were abundant, and there were many varieties of jellyfish which have since become extinct. Corals and the later types of sponges evolved. The cephalopods were well developed, and they have survived as the modern pearly nautilus, octopus, cuttlefish, and squid.
 \vs p059 2:12 There were many varieties of shell animals, but their shells were not then so much needed for defensive purposes as in subsequent ages. The gastropods were present in the waters of the ancient seas, and they included single\hyp{}shelled drills, periwinkles, and snails. The bivalve gastropods have come on down through the intervening millions of years much as they then existed and embrace the mussels, clams, oysters, and scallops. The valve\hyp{}shelled organisms also evolved, and these brachiopods lived in those ancient waters much as they exist today; they even had hinged, notched, and other sorts of protective arrangements of their valves.\fnc{The bivalve gastropods\ldots{}embrace the \bibtextul{muscles,} clams, oysters, and scallops. \bibexpl{Muscles is an acceptable variant (\bibemph{Webster}) and there are no other instances with this meaning, so standardization is not required, but the committee determined that the form “muscles” is now so uncommon for this meaning that adoption of the modern form “mussels” is justified.}}
 \vs p059 2:13 \pc So ends the evolutionary story of the second great period of marine life, which is known to your geologists as the \bibemph{Ordovician.}
 \usection{The Second Great Flood Stage\\The Coral Period --- The Brachiopod Age}
