--- a/tex/p060.tex
+++ b/tex/p060.tex
@@ -44,7 +44,7 @@
 \vs p060 3:4 \pc \bibemph{100,000,000} years ago the North American continent and a part of Europe were well above water. The warping of the American continents continued, resulting in the metamorphosing of the South American Andes and in the gradual elevation of the western plains of North America. Most of Mexico sank beneath the sea, and the southern Atlantic encroached on the eastern coast of South America, eventually reaching the present shore line. The Atlantic and Indian Oceans were then about as they are today.
 \vs p060 3:5 \pc \bibemph{95,000,000} years ago the American and European land masses again began to sink. The southern seas commenced the invasion of North America and gradually extended northward to connect with the Arctic Ocean, constituting the second greatest submergence of the continent. When this sea finally withdrew, it left the continent about as it now is. Before this great submergence began, the eastern Appalachian highlands had been almost completely worn down to the water’s level. The many coloured layers of pure clay now used for the manufacture of earthenware were laid down over the Atlantic coast regions during this age, their average thickness being about 600\,m.
 \vs p060 3:6 Great volcanic actions occurred south of the Alps and along the line of the present California coast\hyp{}range mountains. The greatest crustal deformations in millions upon millions of years took place in Mexico. Great changes also occurred in Europe, Russia, Japan, and southern South America. The climate became increasingly diversified.
-\vs p060 3:7 \pc \bibemph{90,000,000} years ago the angiosperms\tunemarkup{pgkoboaurahd}{\linebreak} emerged from these early Cretaceous seas and soon overran the continents. These land plants \bibemph{suddenly} appeared along with fig trees, magnolias, and tulip trees. Soon after this time fig trees, breadfruit trees, and palms overspread Europe and the western plains of North America. No new land animals appeared.
+\vs p060 3:7 \pc \bibemph{90,000,000} years ago the angiosperms emerged from these early Cretaceous seas and soon overran the continents. These land plants \bibemph{suddenly} appeared along with fig trees, magnolias, and tulip trees. Soon after this time fig trees, breadfruit trees, and palms overspread Europe and the western plains of North America. No new land animals appeared.
 \vs p060 3:8 \pc \bibemph{85,000,000} years ago the Bering Strait closed, shutting off the cooling waters of the northern seas. Theretofore the marine life of the Atlantic\hyp{}Gulf waters and that of the Pacific Ocean had differed greatly, owing to the temperature variations of these two bodies of water, which now became uniform.
 \vs p060 3:9 The deposits of chalk and greensand marl give name to this period. The sedimentations of these times are variegated, consisting of chalk, shale, sandstone, and small amounts of limestone, together with inferior coal or lignite, and in many regions they contain oil. These layers vary in thickness from 61\,m in some places to 3\,km in western North America and numerous European localities. Along the eastern borders of the Rocky Mountains these deposits may be observed in the uptilted foothills.
 \vs p060 3:10 All over the world these strata are permeated with chalk, and these layers of porous semirock pick up water at upturned outcrops and convey it downward to furnish the water supply of much of the earth’s present arid regions.
@@ -59,7 +59,7 @@
 \vs p060 3:19 Great plant\hyp{}life evolution was taking place. Among the land plants the angiosperms predominated, and many present\hyp{}day trees first appeared, including beech, birch, oak, walnut, sycamore, maple, and modern palms. Fruits, grasses, and cereals were abundant, and these seed\hyp{}bearing grasses and trees were to the plant world what the ancestors of man were to the animal world --- they were second in evolutionary importance only to the appearance of man himself. \bibemph{Suddenly} and without previous gradation, the great family of flowering plants mutated. And this new flora soon overspread the entire world.
 \vs p060 3:20 \pc \bibemph{60,000,000} years ago, though the land reptiles were on the decline, the dinosaurs continued as monarchs of the land, the lead now being taken by the more agile and active types of the smaller leaping kangaroo varieties of the carnivorous dinosaurs. But sometime previously there had appeared new types of the herbivorous dinosaurs, whose rapid increase was due to the appearance of the grass family of land plants. One of these new grass\hyp{}eating dinosaurs was a true quadruped having two horns and a capelike shoulder flange. The land type of turtle, 6\,m across, appeared as did also the modern crocodile and true snakes of the modern type. Great changes were also occurring among the fishes and other forms of marine life.\fnc{But \bibtextul{some time} previously there had appeared new types of the herbivorous dinosaurs\ldots{} \bibexpl{The one-word form is correct as the reference is to an indefinite point in time rather than to an indefinite period of time. (see \bibemph{Webster’s})}}
 \vs p060 3:21 The wading and swimming prebirds of earlier ages had not been a success in the air, nor had the flying dinosaurs. They were a short\hyp{}lived species, soon becoming extinct. They, too, were subject to the dinosaur doom, destruction, because of having too little brain substance in comparison with body size. This second attempt to produce animals that could navigate the atmosphere failed, as did the abortive attempt to produce mammals during this and a preceding age.
-\vs p060 3:22 \pc \bibemph{55,000,000} years ago the evolutionary\tunemarkup{pgkoboaurahd}{\linebreak} march was marked by the \bibemph{sudden} appearance of the first of the \bibemph{true birds,} a small pigeonlike creature which was the ancestor of all bird life. This was the third type of flying creature to appear on earth, and it sprang directly from the reptilian group, not from the contemporary flying dinosaurs nor from the earlier types of toothed land birds. And so this becomes known as the \bibemph{age of birds} as well as the declining age of reptiles.
+\vs p060 3:22 \pc \bibemph{55,000,000} years ago the evolutionary march was marked by the \bibemph{sudden} appearance of the first of the \bibemph{true birds,} a small pigeonlike creature which was the ancestor of all bird life. This was the third type of flying creature to appear on earth, and it sprang directly from the reptilian group, not from the contemporary flying dinosaurs nor from the earlier types of toothed land birds. And so this becomes known as the \bibemph{age of birds} as well as the declining age of reptiles.
 \usection{The End of the Chalk Period}
 \vs p060 4:1 The great Cretaceous period was drawing to a close, and its termination marks the end of the great sea invasions of the continents. Particularly is this true of North America, where there had been just 24 great inundations. And though there were subsequent minor submergences, none of these can be compared with the extensive and lengthy marine invasions of this and previous ages. These alternate periods of land and sea dominance have occurred in 1,000,000\hyp{}year cycles. There has been an agelong rhythm associated with this rise and fall of ocean floor and continental land levels. And these same rhythmical crustal movements will continue from this time on throughout the earth’s history but with diminishing frequency and extent.
 \vs p060 4:2 This period also witnesses the end of the continental drift and the building of the modern mountains of Urantia. But the pressure of the continental masses and the thwarted momentum of their agelong drift are not the exclusive influences in mountain building. The chief and underlying factor in determining the location of a mountain range is the pre\hyp{}existent lowland, or trough, which has become filled up with the comparatively lighter deposits of the land erosion and marine drifts of the preceding ages. These lighter areas of land are sometimes 4,572 to 6,100\,m thick; therefore, when the crust is subjected to pressure from any cause, these lighter areas are the first to crumple up, fold, and rise upward to afford compensatory adjustment for the contending and conflicting forces and pressures at work in the earth’s crust or underneath the crust. Sometimes these upthrusts of land occur without folding. But in connection with the rise of the Rocky Mountains, great folding and tilting occurred, coupled with enormous overthrusts of the various layers, both underground and at the surface.
