--- a/tex/p069.tex
+++ b/tex/p069.tex
@@ -15,9 +15,9 @@
 \usection{Basic Human Institutions}
 \vs p069 1:1 All human institutions minister to some social need, past or present, notwithstanding that their overdevelopment unfailingly detracts from the worth\hyp{}whileness of the individual in that personality is overshadowed and initiative is diminished. Man should control his institutions rather than permit himself to be dominated by these creations of advancing civilization.
 \vs p069 1:2 \pc Human institutions are of three general classes:
-\vs p069 1:3 \ublistelem{1.}\bibnobreakspace \bibemph{The institutions of self\hyp{}maintenance.} These institutions embrace those practices growing out of food hunger and its associated instincts of self\hyp{}preservation. They include industry, property, war for gain, and all the regulative machinery of society. Sooner or later the fear instinct fosters the establishment of these institutions of survival by means of taboo, convention, and religious sanction. But fear, ignorance, and superstition have played a prominent part in the early origin and subsequent development of all human institutions.
-\vs p069 1:4 \ublistelem{2.}\bibnobreakspace \bibemph{The institutions of self\hyp{}perpetuation.} These are the establishments of society growing out of sex hunger, maternal instinct, and the higher tender emotions of the races. They embrace the social safeguards of the home and the school, of family life, education, ethics, and religion. They include marriage customs, war for defence, and home building.
-\vs p069 1:5 \ublistelem{3.}\bibnobreakspace \bibemph{The institutions of self\hyp{}gratification.} These are the practices growing out of vanity proclivities and pride emotions; and they embrace customs in dress and personal adornment, social usages, war for glory, dancing, amusement, games, and other phases of sensual gratification. But civilization has never evolved distinctive institutions of self\hyp{}gratification.
+\vs p069 1:3 \ublistelem{1.}\bibnobreakspace \bibemph{The institutions of self\hyp{}maintenance.}\tunemarkup{pgkoboaurahd}{\linebreak} These institutions embrace those practices growing out of food hunger and its associated instincts of self\hyp{}preservation. They include industry, property, war for gain, and all the regulative machinery of society. Sooner or later the fear instinct fosters the establishment of these institutions of survival by means of taboo, convention, and religious sanction. But fear, ignorance, and superstition have played a prominent part in the early origin and subsequent development of all human institutions.
+\vs p069 1:4 \ublistelem{2.}\bibnobreakspace \bibemph{The institutions of self\hyp{}perpetuation.}\tunemarkup{pgkoboaurahd}{\linebreak} These are the establishments of society growing out of sex hunger, maternal instinct, and the higher tender emotions of the races. They embrace the social safeguards of the home and the school, of family life, education, ethics, and religion. They include marriage customs, war for defence, and home building.
+\vs p069 1:5 \ublistelem{3.}\bibnobreakspace \bibemph{The institutions of self\hyp{}gratification.}\tunemarkup{pgkoboaurahd}{\linebreak} These are the practices growing out of vanity proclivities and pride emotions; and they embrace customs in dress and personal adornment, social usages, war for glory, dancing, amusement, games, and other phases of sensual gratification. But civilization has never evolved distinctive institutions of self\hyp{}gratification.
 \vs p069 1:6 \pc These three groups of social practices are intimately interrelated and minutely interdependent the one upon the other. On Urantia they represent a complex organization which functions as a single social mechanism.
 \usection{The Dawn of Industry}
 \vs p069 2:1 Primitive industry slowly grew up as an insurance against the terrors of famine. Early in his existence man began to draw lessons from some of the animals that, during a harvest of plenty, store up food against the days of scarcity.
@@ -59,7 +59,7 @@
 \vs p069 5:8 \ublistelem{5.}\bibnobreakspace \bibemph{Power ---} the craving to be master. Treasure lending was carried on as a means of enslavement, 100\% a year being the loan rate of these ancient times. The moneylenders made themselves kings by creating a standing army of debtors. Bond servants were among the earliest form of property to be accumulated, and in olden days debt slavery extended even to the control of the body after death.
 \vs p069 5:9 \ublistelem{6.}\bibnobreakspace \bibemph{Fear of the ghosts of the dead ---} priest fees for protection. Men early began to give death presents to the priests with a view to having their property used to facilitate their progress through the next life. The priesthoods thus became very rich; they were chief among ancient capitalists.
 \vs p069 5:10 \ublistelem{7.}\bibnobreakspace \bibemph{Sex urge ---} the desire to buy one or more wives. Man’s first form of trading was woman exchange; it long preceded horse trading. But never did the barter in sex slaves advance society; such traffic was and is a racial disgrace, for at one and the same time it hindered the development of family life and polluted the biologic fitness of superior peoples.
-\vs p069 5:11 \ublistelem{8.}\bibnobreakspace \bibemph{Numerous forms of self\hyp{}gratification.} Some sought wealth because it conferred power; others toiled for property because it meant ease. Early man (and some later\hyp{}day ones) tended to squander his resources on luxury. Intoxicants and drugs intrigued the primitive races.
+\vs p069 5:11 \ublistelem{8.}\bibnobreakspace \bibemph{Numerous forms of self\hyp{}gratification.}\tunemarkup{pgkoboaurahd}{\linebreak} Some sought wealth because it conferred power; others toiled for property because it meant ease. Early man (and some later\hyp{}day ones) tended to squander his resources on luxury. Intoxicants and drugs intrigued the primitive races.
 \vs p069 5:12 \pc As civilization developed, men acquired new incentives for saving; new wants were rapidly added to the original food hunger. Poverty became so abhorred that only the rich were supposed to go direct to heaven when they died. Property became so highly valued that to give a pretentious feast would wipe a dishonour from one’s name.
 \vs p069 5:13 Accumulations of wealth early became the badge of social distinction. Individuals in certain tribes would accumulate property for years just to create an impression by burning it up on some holiday or by freely distributing it to fellow tribesmen. This made them great men. Even modern peoples revel in the lavish distribution of Christmas gifts, while rich men endow great institutions of philanthropy and learning. Man’s technique varies, but his disposition remains quite unchanged.
 \vs p069 5:14 But it is only fair to record that many an ancient rich man distributed much of his fortune because of the fear of being killed by those who coveted his treasures. Wealthy men commonly sacrificed scores of slaves to show disdain for wealth.
