--- a/tex/p078.tex
+++ b/tex/p078.tex
@@ -85,7 +85,7 @@
 \vs p078 8:8 The end of this long period of the weak rule of the city priests was terminated by Sargon, the priest of Kish, who proclaimed himself king and started out on the conquest of the whole of Mesopotamia and adjoining lands. And for the time, this ended the city\hyp{}states, priest\hyp{}ruled and priest\hyp{}ridden, each city having its own municipal god and its own ceremonial practices.
 \vs p078 8:9 After the breakup of this Kish confederation there ensued a long period of constant warfare between these valley cities for supremacy. And the rulership variously shifted between Sumer, Akkad, Kish, Erech, Ur, and Susa.
 \vs p078 8:10 About 2500\,B.C. the Sumerians suffered severe reverses at the hands of the northern Suites and Guites. Lagash, the Sumerian capital built on flood mounds, fell. Erech held out for 30 years after the fall of Akkad. By the time of the establishment of the rule of Hammurabi the Sumerians had become absorbed into the ranks of the northern Semites, and the Mesopotamian Andites passed from the pages of history.
-\vs p078 8:11 From 2500 to 2000\,B.C. the nomads were on a rampage from the Atlantic to the Pacific. The Nerites\fnst{\textbf{Nerites}, Could these be the same as ``the people of Nairi'' (arm. \textarm{Նաիրի}), identified with the ancient kingdom of Urartu, also known as the ``Kingdom of Van''? The names ``Nairi'' and ``Urartu'' are used interchangeably in the Assyrian inscriptions of king Ashurnasirpal~II (883--859\,B.C.) and Shalmaneser~III (860--825\,B.C.)} constituted the final eruption of the Caspian group of the Mesopotamian descendants of the blended Andonite and Andite races. What the barbarians failed to do to effect the ruination of Mesopotamia, subsequent climatic changes succeeded in accomplishing.
+\vs p078 8:11 From 2500 to 2000\,B.C. the nomads were on a rampage from the Atlantic to the Pacific. The Nerites\fnst{Could these be the same as ``the people of Nairi'' (arm. \textarm{Նաիրի}), identified with the ancient kingdom of Urartu, also known as the ``Kingdom of Van''? The names ``Nairi'' and ``Urartu'' are used interchangeably in the Assyrian inscriptions of king Ashurnasirpal~II (883--859\,B.C.) and Shalmaneser~III (860--825\,B.C.)} constituted the final eruption of the Caspian group of the Mesopotamian descendants of the blended Andonite and Andite races. What the barbarians failed to do to effect the ruination of Mesopotamia, subsequent climatic changes succeeded in accomplishing.
 \vs p078 8:12 \pc And this is the story of the violet race after the days of Adam and of the fate of their homeland between the Tigris and Euphrates. Their ancient civilization finally fell due to the emigration of superior peoples and the immigration of their inferior neighbours. But long before the barbarian cavalrymen conquered the valley, much of the Garden culture had spread to Asia, Africa, and Europe, there to produce the ferments which have resulted in the XX century civilization of Urantia.
 \vsetoff
 \vs p078 8:13 [Presented by an Archangel of Nebadon.]
