--- a/tex/p081.tex
+++ b/tex/p081.tex
@@ -67,7 +67,7 @@
 \vs p081 5:2 Through agriculture, animal domestication, and improved architecture, mankind gradually escaped the worst of the incessant struggle to live and began to cast about to find wherewith to sweeten the process of living; and this was the beginning of the striving for higher and ever higher standards of material comfort. Through manufacture and industry man is gradually augmenting the pleasure content of mortal life.
 \vs p081 5:3 But cultural society is no great and beneficent club of inherited privilege into which all men are born with free membership and entire equality. Rather is it an exalted and ever\hyp{}advancing guild of earth workers, admitting to its ranks only the nobility of those toilers who strive to make the world a better place in which their children and their children’s children may live and advance in subsequent ages. And this guild of civilization exacts costly admission fees, imposes strict and rigorous disciplines, visits heavy penalties on all dissenters and nonconformists, while it confers few personal licenses or privileges except those of enhanced security against common dangers and racial perils.
 \vs p081 5:4 Social association is a form of survival insurance which human beings have learned is profitable; therefore are most individuals willing to pay those premiums of self\hyp{}sacrifice and personal\hyp{}liberty curtailment which society exacts from its members in return for this enhanced group protection. In short, the present\hyp{}day social mechanism is a trial\hyp{}and\hyp{}error insurance plan designed to afford some degree of assurance and protection against a return to the terrible and antisocial conditions which characterized the early experiences of the human race.
-\vs p081 5:5 Society thus becomes a co\hyp{}operative scheme for securing civil freedom through institutions, economic freedom through capital and invention, social liberty through culture, and freedom from violence through police regulation.
+\vs p081 5:5 Society thus becomes a co\hyp{}operative\tunemarkup{pgkoboaurahd}{\linebreak} scheme for securing civil freedom through institutions, economic freedom through capital and invention, social liberty through culture, and freedom from violence through police regulation.
 \vs p081 5:6 \bibemph{Might does not make right, but it does enforce the commonly recognized rights of each succeeding generation.} The prime mission of government is the definition of the right, the just and fair regulation of class differences, and the enforcement of equality of opportunity under the rules of law. Every human right is associated with a social duty; group privilege is an insurance mechanism which unfailingly demands the full payment of the exacting premiums of group service. And group rights, as well as those of the individual, must be protected, including the regulation of the sex propensity.
 \vs p081 5:7 Liberty subject to group regulation is the legitimate goal of social evolution. Liberty without restrictions is the vain and fanciful dream of unstable and flighty human minds.
 \usection{The Maintenance of Civilization}
