--- a/tex/p082.tex
+++ b/tex/p082.tex
@@ -55,7 +55,7 @@
 \vs p082 5:4 \pc Superior groups, when isolated, always reverted to consanguineous mating. The Nodites for over 150,000 years were one of the great in\hyp{}marriage groups. The later\hyp{}day in\hyp{}marriage mores were tremendously influenced by the traditions of the violet race, in which, at first, matings were, perforce, between brother and sister. And brother and sister marriages were common in early Egypt, Syria, Mesopotamia, and throughout the lands once occupied by the Andites. The Egyptians long practised brother and sister marriages in an effort to keep the royal blood pure, a custom which persisted even longer in Persia. Among the Mesopotamians, before the days of Abraham, cousin marriages were obligatory; cousins had prior marriage rights to cousins. Abraham himself married his half sister, but such unions were not allowed under the later mores of the Jews.
 \vs p082 5:5 The first move away from brother and sister marriages came about under the plural\hyp{}wife mores because the sister\hyp{}wife would arrogantly dominate the other wife or wives. Some tribal mores forbade marriage to a dead brother’s widow but required the living brother to beget children for his departed brother. There is no biologic instinct against any degree of in\hyp{}marriage; such restrictions are wholly a matter of taboo.
 \vs p082 5:6 \pc Outmarriage finally dominated because it was favoured by the man; to get a wife from the outside ensured greater freedom from in\hyp{}laws. Familiarity breeds contempt; so, as the element of individual choice began to dominate mating, it became the custom to choose partners from outside the tribe.
-\vs p082 5:7 Many tribes finally forbade marriages within the clan; others limited mating to certain castes. The taboo against marriage with a woman of one’s own totem gave impetus to the custom of stealing women from neighbouring tribes. Later on, marriages were regulated more in accordance with territorial residence than with kinship. There were many steps in the evolution of in\hyp{}marriage into the modern practice of outmarriage. Even after the taboo rested upon in\hyp{}marriages for the common people, chiefs and kings were permitted to marry those of close kin in order to keep the royal blood concentrated and pure. The mores have usually permitted sovereign rulers certain licenses in sex matters.
+\vs p082 5:7 Many tribes finally forbade marriages\tunemarkup{pgkoboaurahd}{\linebreak} within the clan; others limited mating to certain castes. The taboo against marriage with a woman of one’s own totem gave impetus to the custom of stealing women from neighbouring tribes. Later on, marriages were regulated more in accordance with territorial residence than with kinship. There were many steps in the evolution of in\hyp{}marriage into the modern practice of outmarriage. Even after the taboo rested upon in\hyp{}marriages for the common people, chiefs and kings were permitted to marry those of close kin in order to keep the royal blood concentrated and pure. The mores have usually permitted sovereign rulers certain licenses in sex matters.
 \vs p082 5:8 The presence of the later Andite peoples had much to do with increasing the desire of the Sangik races to mate outside their own tribes. But it was not possible for out\hyp{}mating to become prevalent until neighbouring groups had learned to live together in relative peace.
 \vs p082 5:9 Outmarriage itself was a peace promoter; marriages between the tribes lessened hostilities. Outmarriage led to tribal co\hyp{}ordination and to military alliances; it became dominant because it provided increased strength; it was a nation builder. Outmarriage was also greatly favoured by increasing trade contacts; adventure and exploration contributed to the extension of the mating bounds and greatly facilitated the cross\hyp{}fertilization of racial cultures.
 \vs p082 5:10 The otherwise inexplicable inconsistencies of the racial marriage mores are largely due to this outmarriage custom with its accompanying wife stealing and buying from foreign tribes, all of which resulted in a compounding of the separate tribal mores. That these taboos respecting in\hyp{}marriage were sociologic, not biologic, is well illustrated by the taboos on kinship marriages, which embraced many degrees of in\hyp{}law relationships, cases representing no blood relation whatsoever.
