--- a/tex/p083.tex
+++ b/tex/p083.tex
@@ -81,7 +81,7 @@
 \vs p083 8:4 It is also unfortunate that certain groups of mortals have conceived of marriage as being consummated by divine action. Such beliefs lead directly to the concept of the indissolubility of the marital state regardless of the circumstances or wishes of the contracting parties. But the very fact of marriage dissolution itself indicates that Deity is not a conjoining party to such unions. If God has once joined any two things or persons together, they will remain thus joined until such a time as the divine will decrees their separation. But, regarding marriage, which is a human institution, who shall presume to sit in judgment, to say which marriages are unions that might be approved by the universe supervisors in contrast with those which are purely human in nature and origin?
 \vs p083 8:5 Nevertheless, there is an ideal of marriage on the spheres on high. On the capital of each local system the Material Sons and Daughters of God do portray the height of the ideals of the union of man and woman in the bonds of marriage and for the purpose of procreating and rearing offspring. After all, the ideal mortal marriage is \bibemph{humanly} sacred.
 \vs p083 8:6 \pc Marriage always has been and still is man’s supreme dream of temporal ideality. Though this beautiful dream is seldom realized in its entirety, it endures as a glorious ideal, ever luring progressing mankind on to greater strivings for human happiness. But young men and women should be taught something of the realities of marriage before they are plunged into the exacting demands of the interassociations of family life; youthful idealization should be tempered with some degree of premarital disillusionment.
-\vs p083 8:7 The youthful idealization of marriage should not, however, be discouraged; such dreams are the visualization of the future goal of family life. This attitude is both stimulating and helpful providing it does not produce an insensitivity to the realization of the practical and commonplace requirements of marriage and subsequent family life.
+\vs p083 8:7 The youthful idealization of marriage\tunemarkup{pgkoboaurahd}{\linebreak} should not, however, be discouraged; such dreams are the visualization of the future goal of family life. This attitude is both stimulating and helpful providing it does not produce an insensitivity to the realization of the practical and commonplace requirements of marriage and subsequent family life.
 \vs p083 8:8 The ideals of marriage have made great progress in recent times; among some peoples woman enjoys practically equal rights with her consort. In concept, at least, the family is becoming a loyal partnership for rearing offspring, accompanied by sexual fidelity. But even this newer version of marriage need not presume to swing so far to the extreme as to confer mutual monopoly of all personality and individuality. Marriage is not just an individualistic ideal; it is the evolving social partnership of a man and a woman, existing and functioning under the current mores, restricted by the taboos, and enforced by the laws and regulations of society.
 \vs p083 8:9 XX century marriages stand high in comparison with those of past ages, notwithstanding that the home institution is now undergoing a serious testing because of the problems so suddenly thrust upon the social organization by the precipitate augmentation of woman’s liberties, rights so long denied her in the tardy evolution of the mores of past generations.
 \vsetoff
