--- a/tex/p085.tex
+++ b/tex/p085.tex
@@ -31,7 +31,7 @@
 \vs p085 3:4 The worship of insects and other animals was promoted by a later misinterpretation of the golden rule --- doing to others (every form of life) as you would be done by. The ancients once believed that all winds were produced by the wings of birds and therefore both feared and worshipped all winged creatures. The early Nordics thought that eclipses were caused by a wolf that devoured a portion of the sun or moon. The Hindus often show Vishnu with a horse’s head. Many times an animal symbol stands for a forgotten god or a vanished cult. Early in evolutionary religion the lamb became the typical sacrificial animal and the dove the symbol of peace and love.
 \vs p085 3:5 In religion, symbolism may be either good or bad just to the extent that the symbol does or does not displace the original worshipful idea. And symbolism must not be confused with direct idolatry wherein the material object is directly and actually worshipped.
 \usection{Worship of the Elements}
-\vs p085 4:1 Mankind has worshipped earth, air, water, and fire. The primitive races venerated springs and worshipped rivers. Even now in Mongolia there flourishes an influential river cult. Baptism became a religious ceremonial in Babylon, and the Greeks\fnst{\textbf{Greeks}, The human source of this text is E.W. Hopkins, ``Origin and Evolution of Religion'', 1923. The text on page 47, Chapter IV ``The Worship of Elements and Heavenly Phenomena'' says: \bibemph{Baptism was practiced in Babylon. Religious use of water is prominent in the cult of the Amerinds: The Creeks bathed annually, after purging and fasting, to ``wash out the sins of the year.''} Dr.~Hopkins clearly speaks of ``Creeks'' and not ``Greeks'', emphasizing that the religious use of water purification was common worldwide, from Babylon to Alabama. However, when the human author of this Revelation (presumably Dr.~Sadler) used the information in Dr.~Hopkins' book he modified the word ``Creeks'' to ``Greeks'' and I see no compelling reason to revert the text to the original form and undo Dr.~Sadler's decision. Needless to say, both the first edition of 1955 and the present SRT English text read ``Greeks'' and not ``Creeks''.} practised the annual ritual bath. It was easy for the ancients to imagine that the spirits dwelt in the bubbling springs, gushing fountains, flowing rivers, and raging torrents. Moving waters vividly impressed these simple minds with beliefs of spirit animation and supernatural power. Sometimes a drowning man would be refused succour for fear of offending some river god.
+\vs p085 4:1 Mankind has worshipped earth, air, water, and fire. The primitive races venerated springs and worshipped rivers. Even now in Mongolia there flourishes an influential river cult. Baptism became a religious ceremonial in Babylon, and the Greeks\fnst{The human source of this text is E.W. Hopkins, ``Origin and Evolution of Religion'', 1923. The text on page 47, Chapter IV ``The Worship of Elements and Heavenly Phenomena'' says: \bibemph{Baptism was practiced in Babylon. Religious use of water is prominent in the cult of the Amerinds: The Creeks bathed annually, after purging and fasting, to ``wash out the sins of the year.''} Dr.~Hopkins clearly speaks of ``Creeks'' and not ``Greeks'', emphasizing that the religious use of water purification was common worldwide, from Babylon to Alabama. However, when the human author of this Revelation (presumably Dr.~Sadler) used the information in Dr.~Hopkins' book he modified the word ``Creeks'' to ``Greeks'' and I see no compelling reason to revert the text to the original form and undo Dr.~Sadler's decision. Needless to say, both the first edition of 1955 and the present SRT English text read ``Greeks'' and not ``Creeks''.} practised the annual ritual bath. It was easy for the ancients to imagine that the spirits dwelt in the bubbling springs, gushing fountains, flowing rivers, and raging torrents. Moving waters vividly impressed these simple minds with beliefs of spirit animation and supernatural power. Sometimes a drowning man would be refused succour for fear of offending some river god.
 \vs p085 4:2 Many things and numerous events have functioned as religious stimuli to different peoples in different ages. A rainbow is yet worshipped by many of the hill tribes of India. In both India and Africa the rainbow is thought to be a gigantic celestial snake; Hebrews and Christians regard it as “the bow of promise.” Likewise, influences regarded as beneficent in one part of the world may be looked upon as malignant in other regions. The east wind is a god in South America, for it brings rain; in India it is a devil because it brings dust and causes drought. The ancient Bedouins believed that a nature spirit produced the sand whirls, and even in the times of Moses belief in nature spirits was strong enough to ensure their perpetuation in Hebrew theology as angels of fire, water, and air.
 \vs p085 4:3 Clouds, rain, and hail have all been feared and worshipped by numerous primitive tribes and by many of the early nature cults. Windstorms with thunder and lightning overawed early man. He was so impressed with these elemental disturbances that thunder was regarded as the voice of an angry god. The worship of fire and the fear of lightning were linked together and were widespread among many early groups.
 \vs p085 4:4 Fire was mixed up with magic in the minds of primitive fear\hyp{}ridden mortals. A devotee of magic will vividly remember one positive chance result in the practice of his magic formulas, while he nonchalantly forgets a score of negative results, out\hyp{}and\hyp{}out failures. Fire reverence reached its height in Persia, where it long persisted. Some tribes worshipped fire as a deity itself; others revered it as the flaming symbol of the purifying and purging spirit of their venerated deities. Vestal virgins were charged with the duty of watching sacred fires, and in the XX century candles still burn as a part of the ritual of many religious services.
