--- a/tex/p088.tex
+++ b/tex/p088.tex
@@ -26,7 +26,7 @@
 \vs p088 2:4 \pc The earliest images were made to preserve the appearance and memory of the illustrious dead; they were really monuments. Idols were a refinement of fetishism. The primitives believed that a ceremony of consecration caused the spirit to enter the image; likewise, when certain objects were blessed, they became charms.
 \vs p088 2:5 Moses, in the addition of the second commandment to the ancient Dalamatian moral code, made an effort to control fetish worship among the Hebrews. He carefully directed that they should make no sort of image that might become consecrated as a fetish. He made it plain, “You shall not make a graven image or any likeness of anything that is in heaven above, or on the earth beneath, or in the waters of the earth.” While this commandment did much to retard art among the Jews, it did lessen fetish worship. But Moses was too wise to attempt suddenly to displace the olden fetishes, and he therefore consented to the putting of certain relics alongside the law in the combined war altar and religious shrine which was the ark.
 \vs p088 2:6 \pc Words eventually became fetishes, more especially those which were regarded as God’s words; in this way the sacred books of many religions have become fetishistic prisons incarcerating the spiritual imagination of man. Moses’ very effort against fetishes became a supreme fetish; his commandment was later used to stultify art and to retard the enjoyment and adoration of the beautiful.
-\vs p088 2:7 In olden times the fetish word of authority was a fear\hyp{}inspiring \bibemph{doctrine,} the most terrible of all tyrants which enslave men. A doctrinal fetish will lead mortal man to betray himself into the clutches of bigotry, fanaticism, superstition, intolerance, and the most atrocious of barbarous cruelties. Modern respect for wisdom and truth is but the recent escape from the fetish\hyp{}making tendency up to the higher levels of thinking and reasoning. Concerning the accumulated fetish writings which various religionists hold as \bibemph{sacred books,} it is not only believed that what is in the book is true, but also that every truth is contained in the book. If one of these sacred books happens to speak of the earth as being flat, then, for long generations, otherwise sane\fnst{\textbf{otherwise sane}, The great popularity in our days of the ``flat earth theories'', accepted by the masses of uneducated and superficially educated people is both sad and ominous.} men and women will refuse to accept positive evidence that the planet is round.
+\vs p088 2:7 In olden times the fetish word of authority was a fear\hyp{}inspiring \bibemph{doctrine,} the most terrible of all tyrants which enslave men. A doctrinal fetish will lead mortal man to betray himself into the clutches of bigotry, fanaticism, superstition, intolerance, and the most atrocious of barbarous cruelties. Modern respect for wisdom and truth is but the recent escape from the fetish\hyp{}making tendency up to the higher levels of thinking and reasoning. Concerning the accumulated fetish writings which various religionists hold as \bibemph{sacred books,} it is not only believed that what is in the book is true, but also that every truth is contained in the book. If one of these sacred books happens to speak of the earth as being flat, then, for long generations, otherwise sane\fnst{The great popularity in our days of the ``flat earth theories'', accepted by the masses of uneducated and superficially educated people is both sad and ominous.} men and women will refuse to accept positive evidence that the planet is round.
 \vs p088 2:8 The practice of opening one of these sacred books to let the eye chance upon a passage, the following of which may determine important life decisions or projects, is nothing more nor less than arrant fetishism. To take an oath on a “holy book” or to swear by some object of supreme veneration is a form of refined fetishism.
 \vs p088 2:9 But it does represent real evolutionary progress to advance from the fetish fear of a savage chief’s fingernail trimmings to the adoration of a superb collection of letters, laws, legends, allegories, myths, poems, and chronicles which, after all, reflect the winnowed moral wisdom of many centuries, at least up to the time and event of their being assembled as a “sacred book.”
 \vs p088 2:10 To become fetishes, words had to be considered inspired, and the invocation of supposed divinely inspired writings led directly to the establishment of the \bibemph{authority} of the church, while the evolution of civil forms led to the fruition of the \bibemph{authority} of the state.
@@ -53,7 +53,7 @@
 \usection{The Practice of Magic}
 \vs p088 6:1 Magic was practised through the use of wands, “medicine” ritual, and incantations, and it was customary for the practitioner to work unclothed. Women outnumbered the men among primitive magicians. In magic, “medicine” means mystery, not treatment. The savage never doctored himself; he never used medicines except on the advice of the specialists in magic. And the voodoo doctors of the XX century are typical of the magicians of old.
 \vs p088 6:2 There was both a public and a private phase to magic. That performed by the medicine man, shaman, or priest was supposed to be for the good of the whole tribe. Witches, sorcerers, and wizards dispensed private magic, personal and selfish magic which was employed as a coercive method of bringing evil on one’s enemies. The concept of dual spiritism, good and bad spirits, gave rise to the later beliefs in white and black magic. And as religion evolved, magic was the term applied to spirit operations outside one’s own cult, and it also referred to older ghost beliefs.
-\vs p088 6:3 Word combinations, the ritual of chants and incantations, were highly magical. Some early incantations finally evolved into prayers. Presently, imitative magic was practised; prayers were acted out; magical dances were nothing but dramatic prayers. Prayer gradually displaced magic as the associate of sacrifice.
+\vs p088 6:3 Word combinations, the ritual of chants and incantations, were highly magical. Some early incantations finally evolved into prayers. Presently, imitative magic was practised;\tunemarkup{pgkoboaurahd}{\linebreak} prayers were acted out; magical dances were nothing but dramatic prayers. Prayer gradually displaced magic as the associate of sacrifice.
 \vs p088 6:4 Gesture, being older than speech, was the more holy and magical, and mimicry was believed to have strong magical power. The red men often staged a buffalo dance in which one of their number would play the part of a buffalo and, in being caught, would ensure the success of the impending hunt. The sex festivities of May Day were simply imitative magic, a suggestive appeal to the sex passions of the plant world. The doll was first employed as a magic talisman by the barren wife.
 \vs p088 6:5 \pc Magic was the branch off the evolutionary religious tree which eventually bore the fruit of a scientific age. Belief in astrology led to the development of astronomy; belief in a philosopher’s stone led to the mastery of metals, while belief in magic numbers founded the science of mathematics.
 \vs p088 6:6 \pc But a world so filled with charms did much to destroy all personal ambition and initiative. The fruits of extra labour or of diligence were looked upon as magical. If a man had more grain in his field than his neighbour, he might be haled before the chief and charged with enticing this extra grain from the indolent neighbour’s field. Indeed, in the days of barbarism it was dangerous to know very much; there was always the chance of being executed as a black artist.
