--- a/tex/p091.tex
+++ b/tex/p091.tex
@@ -34,7 +34,7 @@
 \vs p091 3:1 Children, when first learning to make use of language, are prone to think out loud, to express their thoughts in words, even if no one is present to hear them. With the dawn of creative imagination they evince a tendency to converse with imaginary companions. In this way a budding ego seeks to hold communion with a fictitious \bibemph{alter ego.} By this technique the child early learns to convert his monologue conversations into pseudo dialogues in which this alter ego makes replies to his verbal thinking and wish expression. Very much of an adult’s thinking is mentally carried on in conversational form.
 \vs p091 3:2 The early and primitive form of prayer was much like the semimagical recitations of the present\hyp{}day Toda tribe, prayers that were not addressed to anyone in particular. But such techniques of praying tend to evolve into the dialogue type of communication by the emergence of the idea of an alter ego. In time the alter\hyp{}ego concept is exalted to a superior status of divine dignity, and prayer as an agency of religion has appeared. Through many phases and during long ages this primitive type of praying is destined to evolve before attaining the level of intelligent and truly ethical prayer.
 \vs p091 3:3 As it is conceived by successive generations of praying mortals, the alter ego evolves up through ghosts, fetishes, and spirits to polytheistic gods, and eventually to the One God, a divine being embodying the highest ideals and the loftiest aspirations of the praying ego. And thus does prayer function as the most potent agency of religion in the conservation of the highest values and ideals of those who pray. From the moment of the conceiving of an alter ego to the appearance of the concept of a divine and heavenly Father, prayer is always a socializing, moralizing, and spiritualizing practice.
-\vs p091 3:4 The simple prayer of faith evidences a mighty evolution in human experience whereby the ancient conversations with the fictitious symbol of the alter ego of primitive religion have become exalted to the level of communion with the spirit of the Infinite and to that of a bona fide consciousness of the reality of the eternal God and Paradise Father of all intelligent creation.
+\vs p091 3:4 The simple prayer of faith evidences a mighty evolution in human experience where\-by the ancient conversations with the fictitious symbol of the alter ego of primitive religion have become exalted to the level of communion with the spirit of the Infinite and to that of a bona fide consciousness of the reality of the eternal God and Paradise Father of all intelligent creation.
 \vs p091 3:5 Aside from all that is superself in the experience of praying, it should be remembered that ethical prayer is a splendid way to elevate one’s ego and reinforce the self for better living and higher attainment. Prayer induces the human ego to look both ways for help: for material aid to the subconscious reservoir of mortal experience, for inspiration and guidance to the superconscious borders of the contact of the material with the spiritual, with the Mystery Monitor.
 \vs p091 3:6 Prayer ever has been and ever will be a twofold human experience: a psychologic procedure interassociated with a spiritual technique. And these two functions of prayer can never be fully separated.
 \vs p091 3:7 Enlightened prayer must recognize not only an external and personal God but also an internal and impersonal Divinity, the indwelling Adjuster. It is altogether fitting that man, when he prays, should strive to grasp the concept of the Universal Father on Paradise; but the more effective technique for most practical purposes will be to revert to the concept of a near\hyp{}by alter ego, just as the primitive mind was wont to do, and then to recognize that the idea of this alter ego has evolved from a mere fiction to the truth of God’s indwelling mortal man in the factual presence of the Adjuster so that man can talk face to face, as it were, with a real and genuine and divine alter ego that indwells him and is the very presence and essence of the living God, the Universal Father.
