--- a/tex/p095.tex
+++ b/tex/p095.tex
@@ -42,7 +42,7 @@
 \vs p095 4:2 Amenemope taught that riches and fortune were the gift of God, and this concept thoroughly coloured the later appearing Hebrew philosophy. This noble teacher believed that God\hyp{}consciousness was the determining factor in all conduct; that every moment should be lived in the realization of the presence of, and responsibility to, God. The teachings of this sage were subsequently translated into Hebrew and became the sacred book of that people long before the Old Testament was reduced to writing. The chief preachment of this good man had to do with instructing his son in uprightness and honesty in governmental positions of trust, and these noble sentiments of long ago would do honour to any modern statesman.
 \vs p095 4:3 This wise man of the Nile taught that “riches take themselves wings and fly away” --- that all things earthly are evanescent. His great prayer was to be “saved from fear.” He exhorted all to turn away from “the words of men” to “the acts of God.” In substance he taught: Man proposes but God disposes. His teachings, translated into Hebrew, determined the philosophy of the Old Testament Book of Proverbs. Translated into Greek, they gave colour to all subsequent Hellenic religious philosophy. The later Alexandrian philosopher, Philo, possessed a copy of the Book of Wisdom.
 \vs p095 4:4 Amenemope functioned to conserve the ethics of evolution and the morals of revelation and in his writings passed them on both to the Hebrews and to the Greeks. He was not the greatest of the religious teachers of this age, but he was the most influential in that he coloured the subsequent thought of two vital links in the growth of Occidental civilization --- the Hebrews, among whom evolved the acme of Occidental religious faith, and the Greeks, who developed pure philosophic thought to its greatest European heights.
-\vs p095 4:5 \pc In the Book of Hebrew Proverbs, chapters 15, 17, 20, 22:17--24:22, are taken almost verbatim from Amenemope’s Book of Wisdom\fnst{\textbf{Amenemope’s Book of Wisdom}, This was demonstrated by A.~Erman in 1924. For more information see John Ruffle, ``The Teaching of Amenemope and Its Connection with the Book of Proverbs'' in The Tyndale Bulletin 28 (1977)29-68.}. The first psalm\fnst{\textbf{The first psalm}, Probably also the 105\ts{th}, the 111\ts{th}, and a few others are based on the Egyptian texts sources..} of the Hebrew Book of Psalms was written by Amenemope and is the heart of the teachings of Ikhnaton.
+\vs p095 4:5 \pc In the Book of Hebrew Proverbs, chapters 15, 17, 20, 22:17--24:22, are taken almost verbatim from Amenemope’s Book of Wisdom\fnst{This was demonstrated by A.~Erman in 1924. For more information see John Ruffle, ``The Teaching of Amenemope and Its Connection with the Book of Proverbs'' in The Tyndale Bulletin 28 (1977)29-68.}. The first psalm\fnst{Probably also the 105\ts{th}, the 111\ts{th}, and a few others are based on the Egyptian texts sources..} of the Hebrew Book of Psalms was written by Amenemope and is the heart of the teachings of Ikhnaton.
 \usection{The Remarkable Ikhnaton}
 \vs p095 5:1 The teachings of Amenemope were slowly losing their hold on the Egyptian mind when, through the influence of an Egyptian Salemite physician, a woman of the royal family espoused the Melchizedek teachings. This woman prevailed upon her son, Ikhnaton, Pharaoh of Egypt, to accept these doctrines of One God.
 \vs p095 5:2 Since the disappearance of Melchizedek in the flesh, no human being up to that time had possessed such an amazingly clear concept of the revealed religion of Salem as Ikhnaton. In some respects this young Egyptian king is one of the most remarkable persons in human history. During this time of increasing spiritual depression in Mesopotamia, he kept alive the doctrine of El Elyon, the One God, in Egypt, thus maintaining the philosophic monotheistic channel which was vital to the religious background of the then future bestowal of Michael. And it was in recognition of this exploit, among other reasons, that the child Jesus was taken to Egypt, where some of the spiritual successors of Ikhnaton saw him and to some extent understood certain phases of his divine mission to Urantia.
