--- a/tex/p096.tex
+++ b/tex/p096.tex
@@ -62,7 +62,7 @@
 \vs p096 6:1 Upon the death of Moses his lofty concept of Yahweh rapidly deteriorated. Joshua and the leaders of Israel continued to harbour the Mosaic traditions of the all\hyp{}wise, beneficent, and almighty God, but the common people rapidly reverted to the older desert idea of Yahweh. And this backward drift of the concept of Deity continued increasingly under the successive rule of the various tribal sheiks, the so\hyp{}called Judges.
 \vs p096 6:2 The spell of the extraordinary personality of Moses had kept alive in the hearts of his followers the inspiration of an increasingly enlarged concept of God; but when they once reached the fertile lands of Palestine, they quickly evolved from nomadic herders into settled and somewhat sedate farmers. And this evolution of life practices and change of religious viewpoint demanded a more or less complete change in the character of their conception of the nature of their God, Yahweh. During the times of the beginning of the transmutation of the austere, crude, exacting, and thunderous desert god of Sinai into the later appearing concept of a God of love, justice, and mercy, the Hebrews almost lost sight of Moses’ lofty teachings. They came near losing all concept of monotheism; they nearly lost their opportunity of becoming the people who would serve as a vital link in the spiritual evolution of Urantia, the group who would conserve the Melchizedek teaching of one God until the times of the incarnation of a bestowal Son of that Father of all.
 \vs p096 6:3 Desperately Joshua sought to hold the concept of a supreme Yahweh in the minds of the tribesmen, causing it to be proclaimed: “As I was with Moses, so will I be with you; I will not fail you nor forsake you.” Joshua found it necessary to preach a stern gospel to his disbelieving people, people all too willing to believe their old and native religion but unwilling to go forward in the religion of faith and righteousness. The burden of Joshua’s teaching became: “Yahweh is a holy God; he is a jealous God; he will not forgive your transgressions nor your sins.” The highest concept of this age pictured Yahweh as a “God of power, judgment, and justice.”
-\vs p096 6:4 But even in this dark age, every now and then a solitary teacher would arise proclaiming the Mosaic concept of divinity: “You children of wickedness cannot serve the Lord, for he is a holy God.” “Shall mortal man be more just than God? shall a man be more pure than his Maker?” “Can you by searching find out God? Can you find out the Almighty to perfection? Behold, God is great and we know him not. Touching\fnst{\textbf{Touching}, See the note on \bibref[2:1.1]{p002 1:1}.} the Almighty, we cannot find him out.”
+\vs p096 6:4 But even in this dark age, every now and then a solitary teacher would arise proclaiming the Mosaic concept of divinity: “You children of wickedness cannot serve the Lord, for he is a holy God.” “Shall mortal man be more just than God? shall a man be more pure than his Maker?” “Can you by searching find out God? Can you find out the Almighty to perfection? Behold, God is great and we know him not. Touching\fnst{See the note on \bibref[2:1.1]{p002 1:1}.} the Almighty, we cannot find him out.”
 \usection{Psalms and the Book of Job}
 \vs p096 7:1 Under the leadership of their sheiks and priests the Hebrews became loosely established in Palestine. But they soon drifted back into the benighted beliefs of the desert and became contaminated with the less advanced Canaanite religious practices. They became idolatrous and licentious, and their idea of Deity fell far below the Egyptian and Mesopotamian concepts of God that were maintained by certain surviving Salem groups, and which are recorded in some of the Psalms and in the so\hyp{}called Book of Job.
 \vs p096 7:2 \pc The Psalms are the work of a score or more of authors; many were written by Egyptian and Mesopotamian teachers. During these times when the Levant worshipped nature gods, there were still a goodly number who believed in the supremacy of El Elyon, the Most High.
