--- a/tex/p098.tex
+++ b/tex/p098.tex
@@ -25,7 +25,7 @@
 \vs p098 2:4 \pc The philosophers disdained all forms of worship, notwithstanding that they practically all held loosely to the background of a belief in the Salem doctrine of “the Intelligence of the universe,” “the idea of God,” and “the Great Source.” In so far as the Greek philosophers gave recognition to the divine and the superfinite, they were frankly monotheistic; they gave scant recognition to the whole galaxy of Olympian gods and goddesses.
 \vs p098 2:5 The Greek poets of the fifth and sixth centuries, notably Pindar, attempted the reformation of Greek religion. They elevated its ideals, but they were more artists than religionists. They failed to develop a technique for fostering and conserving supreme values.
 \vs p098 2:6 Xenophanes taught one God, but his deity concept was too pantheistic to be a personal Father to mortal man. Anaxagoras was a mechanist except that he did recognize a First Cause, an Initial Mind. Socrates and his successors, Plato and Aristotle, taught that virtue is knowledge; goodness, health of the soul; that it is better to suffer injustice than to be guilty of it, that it is wrong to return evil for evil, and that the gods are wise and good. Their cardinal virtues were: wisdom, courage, temperance, and justice.
-\vs p098 2:7 \pc The evolution of religious philosophy\tunemarkup{pgkoboaurahd}{\linebreak} among the Hellenic and Hebrew peoples affords a contrastive illustration of the function of the church as an institution in the shaping of cultural progress. In Palestine, human thought was so priest\hyp{}controlled and scripture\hyp{}directed that philosophy and aesthetics were entirely submerged in religion and morality. In Greece, the almost complete absence of priests and “sacred scriptures” left the human mind free and unfettered, resulting in a startling development in depth of thought. But religion as a personal experience failed to keep pace with the intellectual probings into the nature and reality of the cosmos.
+\vs p098 2:7 \pc The evolution of religious philosophy among the Hellenic and Hebrew peoples affords a contrastive illustration of the function of the church as an institution in the shaping of cultural progress. In Palestine, human thought was so priest\hyp{}controlled and scripture\hyp{}directed that philosophy and aesthetics were entirely submerged in religion and morality. In Greece, the almost complete absence of priests and “sacred scriptures” left the human mind free and unfettered, resulting in a startling development in depth of thought. But religion as a personal experience failed to keep pace with the intellectual probings into the nature and reality of the cosmos.
 \vs p098 2:8 In Greece, believing was subordinated to thinking; in Palestine, thinking was held subject to believing. Much of the strength of Christianity is due to its having borrowed heavily from both Hebrew morality and Greek thought.
 \vs p098 2:9 In Palestine, religious dogma became so crystallized as to jeopardize further growth; in Greece, human thought became so abstract that the concept of God resolved itself into a misty vapour of pantheistic speculation not at all unlike the impersonal Infinity of the Brahman philosophers.
 \vs p098 2:10 \pc But the average men of these times could not grasp, nor were they much interested in, the Greek philosophy of self\hyp{}realization and an abstract Deity; they rather craved promises of salvation, coupled with a personal God who could hear their prayers. They exiled the philosophers, persecuted the remnants of the Salem cult, both doctrines having become much blended, and made ready for that terrible orgiastic plunge into the follies of the mystery cults which were then overspreading the Mediterranean lands. The Eleusinian mysteries grew up within the Olympian pantheon, a Greek version of the worship of fertility; Dionysus nature worship flourished; the best of the cults was the Orphic brotherhood, whose moral preachments and promises of salvation made a great appeal to many.
@@ -47,7 +47,7 @@
 \vs p098 4:3 \ublistelem{1.}\bibnobreakspace The Phrygian cult of Cybele and her son Attis.
 \vs p098 4:4 \ublistelem{2.}\bibnobreakspace The Egyptian cult of Osiris and his mother Isis.
 \vs p098 4:5 \ublistelem{3.}\bibnobreakspace The Iranian cult of the worship of Mithras as the saviour and redeemer of sinful mankind.
-\vs p098 4:6 \pc The Phrygian and Egyptian mysteries\tunemarkup{pgkoboaurahd}{\linebreak} taught that the divine son (respectively Attis and Osiris) had experienced death and had been resurrected by divine power, and further that all who were properly initiated into the mystery, and who reverently celebrated the anniversary of the god’s death and resurrection, would thereby become partakers of his divine nature and his immortality.
+\vs p098 4:6 \pc The Phrygian and Egyptian mysteries taught that the divine son (respectively Attis and Osiris) had experienced death and had been resurrected by divine power, and further that all who were properly initiated into the mystery, and who reverently celebrated the anniversary of the god’s death and resurrection, would thereby become partakers of his divine nature and his immortality.
 \vs p098 4:7 \pc The Phrygian ceremonies were imposing but degrading; their bloody festivals indicate how degraded and primitive these Levantine mysteries became. The most holy day was Black Friday, the “day of blood,” commemorating the self\hyp{}inflicted death of Attis. After three days of the celebration of the sacrifice and death of Attis the festival was turned to joy in honour of his resurrection.
 \vs p098 4:8 The rituals of the worship of Isis and Osiris were more refined and impressive than were those of the Phrygian cult. This Egyptian ritual was built around the legend of the Nile god of old, a god who died and was resurrected, which concept was derived from the observation of the annually recurring stoppage of vegetation growth followed by the springtime restoration of all living plants. The frenzy of the observance of these mystery cults and the orgies of their ceremonials, which were supposed to lead up to the “enthusiasm” of the realization of divinity, were sometimes most revolting.
 \usection{The Cult of Mithras}
