--- a/tex/p100.tex
+++ b/tex/p100.tex
@@ -16,7 +16,7 @@
 \vs p100 1:4 Children are permanently impressed only by the loyalties of their adult associates; precept or even example is not lastingly influential. Loyal persons are growing persons, and growth is an impressive and inspiring reality. Live loyally today --- grow --- and tomorrow will attend to itself. The quickest way for a tadpole to become a frog is to live loyally each moment as a tadpole.
 \vs p100 1:5 \pc The soil essential for religious growth presupposes a progressive life of self\hyp{}realization, the co\hyp{}ordination of natural propensities, the exercise of curiosity and the enjoyment of reasonable adventure, the experiencing of feelings of satisfaction, the functioning of the fear stimulus of attention and awareness, the wonder\hyp{}lure, and a normal consciousness of smallness, humility. Growth is also predicated on the discovery of selfhood accompanied by self\hyp{}criticism --- conscience, for conscience is really the criticism of oneself by one’s own value\hyp{}habits, personal ideals.
 \vs p100 1:6 \pc Religious experience is markedly influenced by physical health, inherited temperament, and social environment. But these temporal conditions do not inhibit inner spiritual progress by a soul dedicated to the doing of the will of the Father in heaven. There are present in all normal mortals certain innate drives toward growth and self\hyp{}realization which function if they are not specifically inhibited. The certain technique of fostering this constitutive endowment of the potential of spiritual growth is to maintain an attitude of wholehearted devotion to supreme values.
-\vs p100 1:7 Religion cannot be bestowed, received,\tunemarkup{pgkoboaurahd}{\linebreak} loaned, learned, or lost. It is a personal experience which grows proportionally to the growing quest for final values. Cosmic growth thus attends on the accumulation of meanings and the ever\hyp{}expanding elevation of values. But nobility itself is always an unconscious growth.
+\vs p100 1:7 Religion cannot be bestowed, received, loaned, learned, or lost. It is a personal experience which grows proportionally to the growing quest for final values. Cosmic growth thus attends on the accumulation of meanings and the ever\hyp{}expanding elevation of values. But nobility itself is always an unconscious growth.
 \vs p100 1:8 Religious habits of thinking and acting are contributory to the economy of spiritual growth. One can develop religious predispositions toward favourable reaction to spiritual stimuli, a sort of conditioned spiritual reflex. Habits which favour religious growth embrace cultivated sensitivity to divine values, recognition of religious living in others, reflective meditation on cosmic meanings, worshipful problem solving, sharing one’s spiritual life with one’s fellows, avoidance of selfishness, refusal to presume on divine mercy, living as in the presence of God. The factors of religious growth may be intentional, but the growth itself is unvaryingly unconscious.
 \vs p100 1:9 The unconscious nature of religious growth does not, however, signify that it is an activity functioning in the supposed subconscious realms of human intellect; rather does it signify creative activities in the superconscious levels of mortal mind. The experience of the realization of the reality of unconscious religious growth is the one positive proof of the functional existence of the superconsciousness.
 \usection{Spiritual Growth}
@@ -64,7 +64,7 @@
 \vs p100 6:6 \pc One of the most amazing earmarks of religious living is that dynamic and sublime peace, that peace which passes all human understanding, that cosmic poise which betokens the absence of all doubt and turmoil. Such levels of spiritual stability are immune to disappointment. Such religionists are like the Apostle Paul, who said: “I am persuaded that neither death, nor life, nor angels, nor principalities, nor powers, nor things present, nor things to come, nor height, nor depth, nor anything else shall be able to separate us from the love of God.”
 \vs p100 6:7 There is a sense of security, associated with the realization of triumphing glory, resident in the consciousness of the religionist who has grasped the reality of the Supreme, and who pursues the goal of the Ultimate.
 \vs p100 6:8 \pc Even evolutionary religion is all of this in loyalty and grandeur because it is a genuine experience. But revelatory religion is \bibemph{excellent} as well as genuine. The new loyalties of enlarged spiritual vision create new levels of love and devotion, of service and fellowship; and all this enhanced social outlook produces an enlarged consciousness of the Fatherhood of God and the brotherhood of man.
-\vs p100 6:9 The characteristic difference between evolved and revealed religion is a new quality of divine wisdom which is added to purely experiential human wisdom. But it is experience in and with the human religions that develops the capacity for subsequent reception of increased bestowals of divine wisdom and cosmic insight.
+\vs p100 6:9 The characteristic difference between\tunemarkup{pgkoboaurahd}{\linebreak} evolved and revealed religion is a new quality of divine wisdom which is added to purely experiential human wisdom. But it is experience in and with the human religions that develops the capacity for subsequent reception of increased bestowals of divine wisdom and cosmic insight.
 \usection{The Acme of Religious Living}
 \vs p100 7:1 Although the average mortal of Urantia cannot hope to attain the high perfection of character which Jesus of Nazareth acquired while sojourning in the flesh, it is altogether possible for every mortal believer to develop a strong and unified personality along the perfected lines of the Jesus personality. The unique feature of the Master’s personality was not so much its perfection as its symmetry, its exquisite and balanced unification. The most effective presentation of Jesus consists in following the example of the one who said, as he gestured toward the Master standing before his accusers, “Behold the man!”
 \vs p100 7:2 The unfailing kindness of Jesus touched the hearts of men, but his stalwart strength of character amazed his followers. He was truly sincere; there was nothing of the hypocrite in him. He was free from affectation; he was always so refreshingly genuine. He never stooped to pretence, and he never resorted to shamming. He lived the truth, even as he taught it. He was the truth. He was constrained to proclaim saving truth to his generation, even though such sincerity sometimes caused pain. He was unquestioningly loyal to all truth.
