--- a/tex/p104.tex
+++ b/tex/p104.tex
@@ -93,7 +93,7 @@
 \vs p104 4:42 \ublistelem{3.}\bibnobreakspace The Universal Absolute.
 \vs p104 4:43 \pc The Conjoint Actor universally integrates the varying functional aspects of all actualized reality on all levels of manifestation, from finites through transcendentals and on to absolutes. The Universal Absolute perfectly compensates the differentials inherent in the varying aspects of all incomplete reality, from the limitless potentialities of active\hyp{}volitional and causative Deity reality to the boundless possibilities of static, reactive, nondeity reality in the incomprehensible domains of the Unqualified Absolute.
 \vs p104 4:44 As they function in this triunity, the Conjoint Actor and the Universal Absolute are alike responsive to Deity and to nondeity presences, as also is the First Source and Centre, who in this relationship is to all intents and purposes conceptually indistinguishable from the I AM.
-\vs p104 4:45 \pc These approximations are sufficient to elucidate the concept of the triunities. Not knowing the ultimate level of the triunities, you cannot fully comprehend the first 7. While we do not deem it wise to attempt any further elaboration, we may state that there are 15\fnst{\textbf{15}, The total number of triunities is the number of combinations of 2 elements out of 6, given by the binomial coefficient: $C^2_6 = {6! \over {2!4!}} = 15$.} triune associations of the First Source and Centre, 8 of which are unrevealed in these papers. These unrevealed associations are concerned with realities, actualities, and potentialities which are beyond the experiential level of supremacy.
+\vs p104 4:45 \pc These approximations are sufficient to elucidate the concept of the triunities. Not knowing the ultimate level of the triunities, you cannot fully comprehend the first 7. While we do not deem it wise to attempt any further elaboration, we may state that there are 15\fnst{The total number of triunities is the number of combinations of 2 elements out of 6, given by the binomial coefficient: $C^2_6 = {6! \over {2!4!}} = 15$.} triune associations of the First Source and Centre, 8 of which are unrevealed in these papers. These unrevealed associations are concerned with realities, actualities, and potentialities which are beyond the experiential level of supremacy.
 \vs p104 4:46 The triunities are the functional balance wheel of infinity, the unification of the uniqueness of the Seven Infinity Absolutes. It is the existential presence of the triunities that enables the Father\hyp{}I AM to experience functional infinity unity despite the diversification of infinity into seven Absolutes. The First Source and Centre is the unifying member of all triunities; in him all things have their unqualified beginnings, eternal existences, and infinite destinies --- “in him all things consist.”
 \vs p104 4:47 Although these associations cannot augment the infinity of the Father\hyp{}I AM, they do appear to make possible the subinfinite and subabsolute manifestations of his reality. The seven triunities multiply versatility, eternalize new depths, deitize new values, disclose new potentialities, reveal new meanings; and all these diversified manifestations in time and space and in the eternal cosmos are existent in the hypothetical stasis of the original infinity of the I AM.
 \usection{Triodities}
@@ -108,7 +108,7 @@
 \vs p104 5:9 \ublistelem{2.}\bibnobreakspace The Universal Absolute.
 \vs p104 5:10 \ublistelem{3.}\bibnobreakspace The Unqualified Absolute.
 \vs p104 5:11 \pc Thus are interassociated the infinity reservoirs of all latent energy reality --- spirit, mindal, or cosmic. This association yields the integration of all latent energy reality. It is infinite in potential.
-\vs p104 5:12 \pc As the triunities are primarily concerned with the functional unification of infinity, so are triodities\fnst{\textbf{triodities}, The total number of triodities is the number of combinations of 3 elements out of 6: $C^3_6 = {6! \over {3!3!}} = 20$.} involved in the cosmic appearance of experiential Deities. The triunities are indirectly concerned, but the triodities are directly concerned, in the experiential Deities --- Supreme, Ultimate, and Absolute. They appear in the emerging power\hyp{}personality synthesis of the Supreme Being. And to the time creatures of space the Supreme Being is a revelation of the unity of the I AM.
+\vs p104 5:12 \pc As the triunities are primarily concerned with the functional unification of infinity, so are triodities\fnst{The total number of triodities is the number of combinations of 3 elements out of 6: $C^3_6 = {6! \over {3!3!}} = 20$.} involved in the cosmic appearance of experiential Deities. The triunities are indirectly concerned, but the triodities are directly concerned, in the experiential Deities --- Supreme, Ultimate, and Absolute. They appear in the emerging power\hyp{}personality synthesis of the Supreme Being. And to the time creatures of space the Supreme Being is a revelation of the unity of the I AM.
 \vsetoff
 \vs p104 5:13 [Presented by a Melchizedek of Nebadon.]
 \quizlink
