--- a/tex/p110.tex
+++ b/tex/p110.tex
@@ -61,7 +61,7 @@
 \vs p110 6:9 \ublistelem{2.}\bibnobreakspace \bibemph{Soul evolution.} The emergence of the morontia soul indicates the extent and depth of circle mastery.
 \vs p110 6:10 \ublistelem{3.}\bibnobreakspace \bibemph{Personality reality.} The degree of selfhood reality is directly determined by circle conquest. Persons become more real as they ascend from the seventh to the first level of mortal existence.
 \vs p110 6:11 \pc As the circles are traversed, the child of material evolution is growing into the mature human of immortal potentiality. The shadowy reality of the embryonic nature of a seventh circler is giving way to the clearer manifestation of the emerging morontia nature of a local universe citizen.
-\vs p110 6:12 While it is impossible precisely to define the seven levels\fnst{\textbf{impossible precisely to define the seven levels}, A rather detailed discussion of these seven psychic circles can be found in Chapter 4 of the book ``In Search of the Miraculous'' by P.D.~Ouspensky. Note that his enumeration (originally Gurdzhiev's) is reverse, i.e. his `man number one' corresponds to the 7\ts{th} psychic cicle, `man number two' to the 6\ts{th} psychic circle, and so on.}, or psychic circles, of human growth, it is permissible to suggest the minimum and maximum limits of these stages of maturity realization:
+\vs p110 6:12 While it is impossible precisely to define the seven levels\fnst{A rather detailed discussion of these seven psychic circles can be found in Chapter 4 of the book ``In Search of the Miraculous'' by P.D.~Ouspensky. Note that his enumeration (originally Gurdzhiev's) is reverse, i.e. his `man number one' corresponds to the 7\ts{th} psychic cicle, `man number two' to the 6\ts{th} psychic circle, and so on.}, or psychic circles, of human growth, it is permissible to suggest the minimum and maximum limits of these stages of maturity realization:
 \vs p110 6:13 \pc \bibemph{The seventh circle.} This level is entered when human beings develop the powers of personal choice, individual decision, moral responsibility, and the capacity for the attainment of spiritual individuality. This signifies the united function of the seven adjutant mind\hyp{}spirits under the direction of the spirit of wisdom, the encircuitment of the mortal creature in the influence of the Holy Spirit, and, on Urantia, the first functioning of the Spirit of Truth, together with the reception of a Thought Adjuster in the mortal mind. Entrance upon the seventh circle constitutes a mortal creature a truly potential citizen of the local universe.
 \vs p110 6:14 \pc \bibemph{The third circle.} The Adjuster’s work is much more effective after the human ascender attains the third circle and receives a personal seraphic guardian of destiny. While there is no apparent concert of effort between the Adjuster and the seraphic guardian, nonetheless there is to be observed an unmistakable improvement in all phases of cosmic achievement and spiritual development subsequent to the assignment of the personal seraphic attendant. When the third circle is attained, the Adjuster endeavours to morontiaize the mind of man during the remainder of the mortal life span, to make the remaining circles, and achieve the final stage of the divine\hyp{}human association before natural death dissolves the unique partnership.
 \vs p110 6:15 \pc \bibemph{The first circle.} The Adjuster cannot, ordinarily, speak directly and immediately with you until you attain the first and final circle of progressive mortal achievement. This level represents the highest possible realization of mind\hyp{}Adjuster relationship in the human experience prior to the liberation of the evolving morontia soul from the habiliments of the material body. Concerning mind, emotions, and cosmic insight, this achievement of the first psychic circle is the nearest possible approach of material mind and spirit Adjuster in human experience.
