--- a/tex/p112.tex
+++ b/tex/p112.tex
@@ -18,7 +18,7 @@
 \vs p112 0:9 \ublistelem{7.}\bibnobreakspace Personality is changeless in the presence of change.
 \vs p112 0:10 \ublistelem{8.}\bibnobreakspace It can make a gift to God --- dedication of the free will to the doing of the will of God.
 \vs p112 0:11 \ublistelem{9.}\bibnobreakspace It is characterized by morality --- awareness of relativity of relationship with other persons. It discerns conduct levels and choosingly discriminates between them.
-\vs p112 0:12 \ublistelem{10.}\bibnobreakspace Personality is unique, absolutely unique: It is unique in time and space; it is unique in eternity and on Paradise; it is unique when bestowed --- there are no duplicates; it is unique during every moment of existence; it is unique in relation to God --- he is no respecter of persons, but neither does he add them together, for they are nonaddable --- they are associable but nontotalable.
+\vs p112 0:12 \ublistelem{10.}\bibnobreakspace Personality is unique, absolutely\tunemarkup{pgkoboaurahd}{\linebreak} unique: It is unique in time and space; it is unique in eternity and on Paradise; it is unique when bestowed --- there are no duplicates; it is unique during every moment of existence; it is unique in relation to God --- he is no respecter of persons, but neither does he add them together, for they are nonaddable --- they are associable but nontotalable.
 \vs p112 0:13 \ublistelem{11.}\bibnobreakspace Personality responds directly to other\hyp{}personality presence.
 \vs p112 0:14 \ublistelem{12.}\bibnobreakspace It is one thing which can be added to spirit, thus illustrating the primacy of the Father in relation to the Son. (Mind does not have to be added to spirit.)
 \vs p112 0:15 \ublistelem{13.}\bibnobreakspace Personality may survive mortal death with identity in the surviving soul. The Adjuster and the personality are changeless; the relationship between them (in the soul) is nothing but change, continuing evolution; and if this change (growth) ceased, the soul would cease.
@@ -66,7 +66,7 @@
 \vs p112 2:20 \pc The material self, the ego\hyp{}entity of human identity, is dependent during the physical life on the continuing function of the material life vehicle, on the continued existence of the unbalanced equilibrium of energies and intellect which, on Urantia, has been given the name \bibemph{life.} But selfhood of survival value, selfhood that can transcend the experience of death, is only evolved by establishing a potential transfer of the seat of the identity of the evolving personality from the transient life vehicle --- the material body --- to the more enduring and immortal nature of the morontia soul and on beyond to those levels whereon the soul becomes infused with, and eventually attains the status of, spirit reality. This actual transfer from material association to morontia identification is effected by the sincerity, persistence, and steadfastness of the God\hyp{}seeking decisions of the human creature.
 \usection{The Phenomenon of Death}
 \vs p112 3:1 Urantians generally recognize only one kind of death, the physical cessation of life energies; but concerning personality survival there are really three kinds:
-\vs p112 3:2 \ublistelem{1.}\bibnobreakspace \bibemph{Spiritual (soul) death.} If and when mortal man has finally rejected survival, when he has been pronounced spiritually insolvent, morontially bankrupt\fnst{\textbf{spiritually insolvent, morontially bankrupt}, A very similar phrase occurs in the book ``Long Heads And Round Heads or What's the Matter with Germany'' published by William~S.~Sadler in 1918 during the World War~I as a propaganda leaflet to be read by the soldiers. There, on page 156 we read the 25\ts{th} indictment of Germany: \bibemph{``Because Germany has gone into moral bankruptcy---because she is spiritually insolvent---and the time has come for the civilized nations of the earth to sit as a solemn court of judgment to appoint a receiver either to reorganize or wind up the career of this brutal Germanic military establishment.''} Assuming that there was no ``Sleeping Subject'' and that Dr~Sadler himself was the direct and sole recipient of the Fifth Epochal Revelation, we come to the curious parallel between the new term ``morontial'' and the existing English word ``moral''. The Revelation, having gone through Dr~Sadler's mind, naturally shaped the new terms based on the existing word symbols already present in his mind.}, in the conjoint opinion of the Adjuster and the surviving seraphim, when such co\hyp{}ordinate advice has been recorded on Uversa, and after the Censors and their reflective associates have verified these findings, thereupon do the rulers of Orvonton order the immediate release of the indwelling Monitor. But this release of the Adjuster in no way affects the duties of the personal or group seraphim concerned with that Adjuster\hyp{}abandoned individual. This kind of death is final in its significance irrespective of the temporary continuation of the living energies of the physical and mind mechanisms. From the cosmic standpoint the mortal is already dead; the continuing life merely indicates the persistence of the material momentum of cosmic energies.
+\vs p112 3:2 \ublistelem{1.}\bibnobreakspace \bibemph{Spiritual (soul) death.} If and when mortal man has finally rejected survival, when he has been pronounced spiritually insolvent, morontially bankrupt\fnst{A very similar phrase occurs in the book ``Long Heads And Round Heads or What's the Matter with Germany'' published by William~S.~Sadler in 1918 during the World War~I as a propaganda leaflet to be read by the soldiers. There, on page 156 we read the 25\ts{th} indictment of Germany: \bibemph{``Because Germany has gone into moral bankruptcy---because she is spiritually insolvent---and the time has come for the civilized nations of the earth to sit as a solemn court of judgment to appoint a receiver either to reorganize or wind up the career of this brutal Germanic military establishment.''} Assuming that there was no ``Sleeping Subject'' and that Dr~Sadler himself was the direct and sole recipient of the Fifth Epochal Revelation, we come to the curious parallel between the new term ``morontial'' and the existing English word ``moral''. The Revelation, having gone through Dr~Sadler's mind, naturally shaped the new terms based on the existing word symbols already present in his mind.}, in the conjoint opinion of the Adjuster and the surviving seraphim, when such co\hyp{}ordinate advice has been recorded on Uversa, and after the Censors and their reflective associates have verified these findings, thereupon do the rulers of Orvonton order the immediate release of the indwelling Monitor. But this release of the Adjuster in no way affects the duties of the personal or group seraphim concerned with that Adjuster\hyp{}abandoned individual. This kind of death is final in its significance irrespective of the temporary continuation of the living energies of the physical and mind mechanisms. From the cosmic standpoint the mortal is already dead; the continuing life merely indicates the persistence of the material momentum of cosmic energies.
 \vs p112 3:3 \ublistelem{2.}\bibnobreakspace \bibemph{Intellectual (mind) death.} When the vital circuits of higher adjutant ministry are disrupted through the aberrations of intellect or because of the partial destruction of the mechanism of the brain, and if these conditions pass a certain critical point of irreparability, the indwelling Adjuster is immediately released to depart for Divinington. On the universe records a mortal personality is considered to have met with death whenever the essential mind circuits of human will\hyp{}action have been destroyed. And again, this is death, irrespective of the continuing function of the living mechanism of the physical body. The body minus the volitional mind is no longer human, but according to the prior choosing of the human will, the soul of such an individual may survive.
 \vs p112 3:4 \ublistelem{3.}\bibnobreakspace \bibemph{Physical (body and mind) death.} When death overtakes a human being, the Adjuster remains in the citadel of the mind until it ceases to function as an intelligent mechanism, about the time that the measurable brain energies cease their rhythmic vital pulsations. Following this dissolution the Adjuster takes leave of the vanishing mind, just as unceremoniously as entry was made years before, and proceeds to Divinington by way of Uversa.
 \vs p112 3:5 \pc After death the material body returns to the elemental world from which it was derived, but two nonmaterial factors of surviving personality persist: The pre\hyp{}existent Thought Adjuster, with the memory transcription of the mortal career, proceeds to Divinington; and there also remains, in the custody of the destiny guardian, the immortal morontia soul of the deceased human. These phases and forms of soul, these once kinetic but now static formulas of identity, are essential to repersonalization on the morontia worlds; and it is the reunion of the Adjuster and the soul that reassembles the surviving personality, that reconsciousizes you at the time of the morontia awakening.
