--- a/tex/p118.tex
+++ b/tex/p118.tex
@@ -52,7 +52,7 @@
 \vs p118 4:1 Many of the theologic difficulties and the metaphysical dilemmas of mortal man are due to man’s mislocation of Deity personality and consequent assignment of infinite and absolute attributes to subordinate Divinity and to evolutionary Deity. You must not forget that, while there is indeed a true First Cause, there are also a host of co\hyp{}ordinate and subordinate causes, both associate and secondary causes.
 \vs p118 4:2 The vital distinction between first causes and second causes is that first causes produce original effects which are free from inheritance of any factor derived from any antecedent causation. Secondary causes yield effects which invariably exhibit inheritance from other and preceding causation.
 \vs p118 4:3 \pc The purely static potentials inherent in the Unqualified Absolute are reactive to those causations of the Deity Absolute which are produced by the actions of the Paradise Trinity. In the presence of the Universal Absolute these causative\hyp{}impregnated static potentials forthwith become active and responsive to the influence of certain transcendental agencies whose actions result in the transmutation of these activated potentials to the status of true universe possibilities for development, actualized capacities for growth. It is upon such matured potentials that the creators and controllers of the grand universe enact the never\hyp{}ending drama of cosmic evolution.
-\vs p118 4:4 Causation, disregarding existentials, is threefold in its basic constitution. As it operates in this universe age and concerning the finite level of the seven superuniverses, it may be conceived as follows:
+\vs p118 4:4 Causation, disregarding existentials, is\tunemarkup{pgkoboaurahd}{\linebreak} threefold in its basic constitution. As it operates in this universe age and concerning the finite level of the seven superuniverses, it may be conceived as follows:
 \vs p118 4:5 \ublistelem{1.}\bibnobreakspace \bibemph{Activation of static potentials.} The establishment of destiny in the Universal Absolute by the actions of the Deity Absolute, operating in and upon the Unqualified Absolute and in consequence of the volitional mandates of the Paradise Trinity.
 \vs p118 4:6 \ublistelem{2.}\bibnobreakspace \bibemph{Eventuation of universe capacities.} This involves the transformation of undifferentiated potentials into segregated and defined plans. This is the act of the Ultimacy of Deity and of the manifold agencies of the transcendental level. Such acts are in perfect anticipation of the future needs of the entire master universe. It is in connection with the segregation of potentials that the Architects of the Master Universe exist as the veritable embodiments of the Deity concept of the universes. Their plans appear to be ultimately space limited in extent by the concept periphery of the master universe, but \bibemph{as plans} they are not otherwise conditioned by time or space.
 \vs p118 4:7 \ublistelem{3.}\bibnobreakspace \bibemph{Creation and evolution of universe actuals.} It is upon a cosmos impregnated by the capacity\hyp{}producing presence of the Ultimacy of Deity that the Supreme Creators operate to effect the time transmutations of matured potentials into experiential actuals. Within the master universe all actualization of potential reality is limited by ultimate capacity for development and is time\hyp{}space conditioned in the final stages of emergence. The Creator Sons going out from Paradise are, in actuality, \bibemph{transformative} creators in the cosmic sense. But this in no manner invalidates man’s concept of them as creators; from the finite viewpoint they certainly can and do create.
