--- a/tex/p119.tex
+++ b/tex/p119.tex
@@ -24,7 +24,7 @@
 \vs p119 1:6 And that is all I am permitted to tell you of the first bestowal of Michael. We, of course, fully understand that this strange Melchizedek who so mysteriously served with the Melchizedeks a billion years ago was none other than the incarnated Michael on the mission of his first bestowal. The records do not specifically state that this unique and efficient Melchizedek was Michael, but it is universally believed that he was. Probably the actual statement of that fact cannot be found outside of the records of Sonarington, and the records of that secret world are not open to us. Only on this sacred world of the divine Sons are the mysteries of incarnation and bestowal fully known. We all know of the facts of the Michael bestowals, but we do not understand how they are effected. We do not know how the ruler of a universe, the creator of the Melchizedeks, can so suddenly and mysteriously become one of their number and, as one of them, live among them and work as a Melchizedek Son for 100 years. But it so happened.
 \usection{The Second Bestowal}
 \vs p119 2:1 For almost 150,000,000 years after the Melchizedek bestowal of Michael, all went well in the universe of Nebadon, when trouble began to brew in system 11 of constellation 37. This trouble involved a misunderstanding by a Lanonandek Son, a System Sovereign, which had been adjudicated by the Constellation Fathers and approved by the Faithful of Days, the Paradise counsellor to that constellation, but the protesting System Sovereign was not fully reconciled to the verdict. After more than 100 years of dissatisfaction he led his associates in one of the most widespread and disastrous rebellions against the sovereignty of the Creator Son ever instigated in the universe of Nebadon, a rebellion long since adjudicated and ended by the action of the Ancients of Days on Uversa.
-\vs p119 2:2 This rebel System Sovereign, Lutentia\fnst{\textbf{Lutentia}, Is there a connection with \bibemph{Lutetia}, i.e. the ancient name of Paris? The origin of this name is unknown (Strabo, Plato and Julius C\ae sar) and so it may well have originated from the name of this rebel, possibly known to other superhuman rebels stationed on Urantia.},\tunemarkup{pgkoboaurahd}{\linebreak} reigned supreme on his headquarters planet for more than 20 years of standard Nebadon time; whereupon, the Most Highs, with approval from Uversa, ordered his segregation and requisitioned the Salvington rulers for the designation of a new System Sovereign to assume direction of that strife\hyp{}torn and confused system of inhabited worlds.
+\vs p119 2:2 This rebel System Sovereign, Lutentia\fnst{Is there a connection with \bibemph{Lutetia}, i.e. the ancient name of Paris? The origin of this name is unknown (Strabo, Plato and Julius C\ae sar) and so it may well have originated from the name of this rebel, possibly known to other superhuman rebels stationed on Urantia.}, reigned supreme on his headquarters planet for more than 20 years of standard Nebadon time; whereupon, the Most Highs, with approval from Uversa, ordered his segregation and requisitioned the Salvington rulers for the designation of a new System Sovereign to assume direction of that strife\hyp{}torn and confused system of inhabited worlds.
 \vs p119 2:3 \pc Simultaneously with the reception of this request on Salvington, Michael initiated the second of those extraordinary proclamations of intention to be absent from the universe headquarters for the purpose of “doing the bidding of my Paradise Father,” promising to “return in due season” and concentrating all authority in the hands of his Paradise brother, Immanuel, the Union of Days.
 \vs p119 2:4 And then, by the same technique observed at the time of his departure in connection with the Melchizedek bestowal, Michael again took leave of his headquarters sphere. Three days after this unexplained leave\hyp{}taking there appeared among the reserve corps of the primary Lanonandek Sons of Nebadon, a new and unknown member. This new Son appeared at noon, unannounced and accompanied by a lone tertiaphim who bore credentials from the Uversa Ancients of Days, certified by Immanuel of Salvington, directing that this new Son be assigned to system 11 of constellation 37 as the successor of the deposed Lutentia and with full authority as acting System Sovereign pending the appointment of a new sovereign.
 \vs p119 2:5 For more than 17 years of universe time this strange and unknown temporary ruler administered the affairs and wisely adjudicated the difficulties of this confused and demoralized local system. No System Sovereign was ever more ardently loved or more widespreadly honoured and respected. In justice and mercy this new ruler set the turbulent system in order while he painstakingly ministered to all his subjects, even offering his rebellious predecessor the privilege of sharing the system throne of authority if he would only apologize to Immanuel for his indiscretions. But Lutentia spurned these overtures of mercy, well knowing that this new and strange System Sovereign was none other than Michael, the very universe ruler whom he had so recently defied. But millions of his misguided and deluded followers accepted the forgiveness of this new ruler, known in that age as the Saviour Sovereign of the system of Palonia.
