--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -27,12 +27,12 @@
 \vs p122 2:7 \pc John was born in the City of Judah, March 25, 7\,B.C. Zacharias and Elizabeth rejoiced greatly in the realization that a son had come to them as Gabriel had promised, and when on the eighth day they presented the child for circumcision, they formally christened him John, as they had been directed aforetime. Already had a nephew of Zacharias departed for Nazareth, carrying the message of Elizabeth to Mary proclaiming that a son had been born to her and that his name was to be John.
 \vs p122 2:8 From his earliest infancy John was judiciously impressed by his parents with the idea that he was to grow up to become a spiritual leader and religious teacher. And the soil of John’s heart was ever responsive to the sowing of such suggestive seeds. Even as a child he was found frequently at the temple during the seasons of his father’s service, and he was tremendously impressed with the significance of all that he saw.
 \usection{Gabriel’s Announcement to Mary}
-\vs p122 3:1 One evening about sundown, before Joseph had returned home, Gabriel appeared to Mary by the side of a low stone table and, after she had recovered her composure, said: “I come at the bidding of one who is my Master and whom you shall love and nurture. To you, Mary, I bring glad tidings when I announce that the conception within you is ordained by heaven, and that in due time you will become the mother of a son; you shall call him Joshua, and he shall inaugurate the kingdom of heaven on earth and among men. Speak not of this matter\fnst{\textbf{Speak not of this matter}, Note that no such warning was given by Gabriel to Elizabeth --- clearly the life of Jesus was in even greater danger than that of John.} save to Joseph and to Elizabeth, your kinswoman, to whom I have also appeared, and who shall presently also bear a son, whose name shall be John, and who will prepare the way for the message of deliverance which your son shall proclaim to men with great power and deep conviction. And doubt not my word, Mary, for this home has been chosen as the mortal habitat of the child of destiny. My benediction rests upon you, the power of the Most Highs will strengthen you, and the Lord of all the earth shall overshadow you.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Annunciation.jpg}\caption{The Annunciation by Henry Ossawa Tanner}\end{figure}}
+\vs p122 3:1 One evening about sundown, before Joseph had returned home, Gabriel appeared to Mary by the side of a low stone table and, after she had recovered her composure, said: “I come at the bidding of one who is my Master and whom you shall love and nurture. To you, Mary, I bring glad tidings when I announce that the conception within you is ordained by heaven, and that in due time you will become the mother of a son; you shall call him Joshua, and he shall inaugurate the kingdom of heaven on earth and among men. Speak not of this matter\fnst{Note that no such warning was given by Gabriel to Elizabeth --- clearly the life of Jesus was in even greater danger than that of John.} save to Joseph and to Elizabeth, your kinswoman, to whom I have also appeared, and who shall presently also bear a son, whose name shall be John, and who will prepare the way for the message of deliverance which your son shall proclaim to men with great power and deep conviction. And doubt not my word, Mary, for this home has been chosen as the mortal habitat of the child of destiny. My benediction rests upon you, the power of the Most Highs will strengthen you, and the Lord of all the earth shall overshadow you.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Annunciation.jpg}\caption{The Annunciation by Henry Ossawa Tanner}\end{figure}}
 \vs p122 3:2 \pc Mary pondered this visitation secretly in her heart for many weeks until of a certainty she knew she was with child, before she dared to disclose these unusual events to her husband. When Joseph heard all about this, although he had great confidence in Mary, he was much troubled and could not sleep for many nights. At first Joseph had doubts about the Gabriel visitation. Then when he became well\hyp{}nigh persuaded that Mary had really heard the voice and beheld the form of the divine messenger, he was torn in mind as he pondered how such things could be. How could the offspring of human beings be a child of divine destiny? Never could Joseph reconcile these conflicting ideas until, after several weeks of thought, both he and Mary reached the conclusion that they had been chosen to become the parents of the Messiah, though it had hardly been the Jewish concept that the expected deliverer was to be of divine nature. Upon arriving at this momentous conclusion, Mary hastened to depart for a visit with Elizabeth.
 \vs p122 3:3 Upon her return, Mary went to visit her parents, Joachim and Hannah. Her two brothers and two sisters, as well as her parents, were always very sceptical about the divine mission of Jesus, though, of course, at this time they knew nothing of the Gabriel visitation. But Mary did confide to her sister Salome that she thought her son was destined to become a great teacher.
 \vs p122 3:4 \pc Gabriel’s announcement to Mary was made the day following the conception of Jesus and was the only event of supernatural occurrence connected with her entire experience of carrying and bearing the child of promise.
 \usection{Joseph’s Dream}
-\vs p122 4:1 Joseph did not become reconciled to the idea that Mary was to become the mother of an extraordinary child until after he had experienced a very impressive dream. In this dream a brilliant celestial messenger appeared to him and, among other things, said: “Joseph, I appear by command of Him who now reigns on high,\fnst{\textbf{now reigns on high}, I.e. Immanuel, Michael's elder brother.} and I am directed to instruct you concerning the son whom Mary shall bear, and who shall become a great light in the world. In him will be life, and his life shall become the light of mankind. He shall first come to his own people, but they will hardly receive him; but to as many as shall receive him to them will he reveal that they are the children of God.” After this experience Joseph never again wholly doubted Mary’s story of Gabriel’s visit and of the promise that the unborn child was to become a divine messenger to the world.
+\vs p122 4:1 Joseph did not become reconciled to the idea that Mary was to become the mother of an extraordinary child until after he had experienced a very impressive dream. In this dream a brilliant celestial messenger appeared to him and, among other things, said: “Joseph, I appear by command of Him who now reigns on high,\fnst{That is Immanuel, Michael's elder brother.} and I am directed to instruct you concerning the son whom Mary shall bear, and who shall become a great light in the world. In him will be life, and his life shall become the light of mankind. He shall first come to his own people, but they will hardly receive him; but to as many as shall receive him to them will he reveal that they are the children of God.” After this experience Joseph never again wholly doubted Mary’s story of Gabriel’s visit and of the promise that the unborn child was to become a divine messenger to the world.
 \vs p122 4:2 \pc In all these visitations nothing was said about the house of David. Nothing was ever intimated about Jesus’ becoming a “deliverer of the Jews,” not even that he was to be the long\hyp{}expected Messiah. Jesus was not such a Messiah as the Jews had anticipated, but he was the \bibemph{world’s deliverer.} His mission was to all races and peoples, not to any one group.
 \vs p122 4:3 Joseph was not of the line of King David. Mary had more of the Davidic ancestry than Joseph. True, Joseph did go to the City of David, Bethlehem, to be registered for the Roman census, but that was because, six generations previously, Joseph’s paternal ancestor of that generation, being an orphan, was adopted by one Zadoc, who was a direct descendant of David; hence was Joseph also accounted as of the “house of David.”
 \vs p122 4:4 Most of the so\hyp{}called Messianic prophecies of the Old Testament were made to apply to Jesus long after his life had been lived on earth. For centuries the Hebrew prophets had proclaimed the coming of a deliverer, and these promises had been construed by successive generations as referring to a new Jewish ruler who would sit upon the throne of David and, by the reputed miraculous methods of Moses, proceed to establish the Jews in Palestine as a powerful nation, free from all foreign domination. Again, many figurative passages found throughout the Hebrew scriptures were subsequently misapplied to the life mission of Jesus. Many Old Testament sayings were so distorted as to appear to fit some episode of the Master’s earth life. Jesus himself onetime publicly denied any connection with the royal house of David. Even the passage, “a maiden shall bear a son,” was made to read, “a virgin shall bear a son.” This was also true of the many genealogies of both Joseph and Mary which were constructed subsequent to Michael’s career on earth. Many of these lineages contain much of the Master’s ancestry, but on the whole they are not genuine and may not be depended upon as factual. The early followers of Jesus all too often succumbed to the temptation to make all the olden prophetic utterances appear to find fulfilment in the life of their Lord and Master.
@@ -42,7 +42,7 @@
 \vs p122 5:3 Jesus derived much of his unusual gentleness and marvellous sympathetic understanding of human nature from his father; he inherited his gift as a great teacher and his tremendous capacity for righteous indignation from his mother. In emotional reactions to his adult\hyp{}life environment, Jesus was at one time like his father, meditative and worshipful, sometimes characterized by apparent sadness; but more often he drove forward in the manner of his mother’s optimistic and determined disposition. All in all, Mary’s temperament tended to dominate the career of the divine Son as he grew up and swung into the momentous strides of his adult life. In some particulars Jesus was a blending of his parents’ traits; in other respects he exhibited the traits of one in contrast with those of the other.
 \vs p122 5:4 From Joseph Jesus secured his strict training in the usages of the Jewish ceremonials and his unusual acquaintance with the Hebrew scriptures; from Mary he derived a broader viewpoint of religious life and a more liberal concept of personal spiritual freedom.
 \vs p122 5:5 The families of both Joseph and Mary were well educated for their time. Joseph and Mary were educated far above the average for their day and station in life. He was a thinker; she was a planner, expert in adaptation and practical in immediate execution. Joseph was a black\hyp{}eyed brunet; Mary, a brown\hyp{}eyed well\hyp{}nigh blond type.
-\vs p122 5:6 Had Joseph lived, he undoubtedly would have become a firm believer in the divine mission of his eldest son. Mary alternated between believing and doubting, being greatly influenced by the position taken by her other children and by her friends and relatives, but always was she steadied in her final attitude by the memory of Gabriel’s appearance to her immediately after\fnst{\textbf{immediately after}, Note that Gabriel's appearance had taken place \bibemph{after} the conception, to allow for freedom of will of both parents, but it happened \bibemph{immediately} after the conception in order to prevent any danger to this child of destiny.} the child was conceived.
+\vs p122 5:6 Had Joseph lived, he undoubtedly would have become a firm believer in the divine mission of his eldest son. Mary alternated between believing and doubting, being greatly influenced by the position taken by her other children and by her friends and relatives, but always was she steadied in her final attitude by the memory of Gabriel’s appearance to her immediately after\fnst{Note that Gabriel's appearance had taken place \bibemph{after} the conception, to allow for freedom of will of both parents, but it happened \bibemph{immediately} after the conception in order to prevent any danger to this child of destiny.} the child was conceived.
 \vs p122 5:7 Mary was an expert weaver and more than averagely skilled in most of the household arts of that day; she was a good housekeeper and a superior homemaker. Both Joseph and Mary were good teachers, and they saw to it that their children were well versed in the learning of that day.
 \vs p122 5:8 \pc When Joseph was a young man, he was employed by Mary’s father in the work of building an addition to his house, and it was when Mary brought Joseph a cup of water, during a noontime meal, that the courtship of the pair who were destined to become the parents of Jesus really began.
 \vs p122 5:9 Joseph and Mary were married, in accordance with Jewish custom, at Mary’s home in the environs of Nazareth when Joseph was 21 years old. This marriage concluded a normal courtship of almost two years’ duration. Shortly thereafter they moved into their new home in Nazareth, which had been built by Joseph with the assistance of two of his brothers. The house was located near the foot of the near\hyp{}by elevated land which so charmingly overlooked the surrounding countryside. In this home, especially prepared, these young and expectant parents had thought to welcome the child of promise, little realizing that this momentous event of a universe was to transpire while they would be absent from home in Bethlehem of Judea.
@@ -68,7 +68,7 @@
 \vs p122 8:4 The second day after the birth of Jesus, Mary sent word to Elizabeth that her child had come and received word in return inviting Joseph up to Jerusalem to talk over all their affairs with Zacharias. The following week Joseph went to Jerusalem to confer with Zacharias. Both Zacharias and Elizabeth had become possessed with the sincere conviction that Jesus was indeed to become the Jewish deliverer, the Messiah, and that their son John was to be his chief of aides, his right\hyp{}hand man of destiny. And since Mary held these same ideas, it was not difficult to prevail upon Joseph to remain in Bethlehem, the City of David, so that Jesus might grow up to become the successor of David on the throne of all Israel. Accordingly, they remained in Bethlehem more than a year, Joseph meantime working some at his carpenter’s trade.
 \vs p122 8:5 \pc At the noontide birth of Jesus the seraphim of Urantia, assembled under their directors, did sing anthems of glory over the Bethlehem manger, but these utterances of praise were not heard by human ears. No shepherds nor any other mortal creatures came to pay homage to the babe of Bethlehem until the day of the arrival of certain priests from Ur, who were sent down from Jerusalem by Zacharias.
 \vs p122 8:6 These priests from Mesopotamia had been told sometime before by a strange religious teacher of their country that he had had a dream in which he was informed that “the light of life” was about to appear on earth as a babe and among the Jews. And thither went these three teachers looking for this “light of life.” After many weeks of futile search in Jerusalem, they were about to return to Ur when Zacharias met them and disclosed his belief that Jesus was the object of their quest and sent them on to Bethlehem, where they found the babe and left their gifts with Mary, his earth mother. The babe was almost three weeks old at the time of their visit.
-\vs p122 8:7 These wise men saw no star to guide them to Bethlehem. The beautiful legend of the star of Bethlehem originated in this way: Jesus was born August 21 at noon, 7\,B.C. On May 29, 7\,B.C., there occurred an extraordinary conjunction of Jupiter and Saturn in the constellation of Pisces\fnst{\textbf{conjunction of Jupiter and Saturn in the constellation of Pisces}, Indeed, there was such a triple conjunction in 7\,B.C. and this fact was known back in 1614 to Johannes Kepler, who was the first scientist to link the ``Star of Bethlehem'' to this astronomical event. I have calculated (using the program \bibemph{Stellarium} under Linux) the gap between the planets to be around one degree. The apparent diameter of the Moon is just over half a degree, so the planets were two Moon's diameters apart.}. And it is a remarkable astronomic fact that similar conjunctions occurred on September 29 and December 5 of the same year. Upon the basis of these extraordinary but wholly natural events the well\hyp{}meaning zealots of the succeeding generation constructed the appealing legend of the star of Bethlehem and the adoring Magi led thereby to the manger, where they beheld and worshipped the newborn babe. Oriental and near\hyp{}Oriental minds delight in fairy stories, and they are continually spinning such beautiful myths about the lives of their religious leaders and political heroes. In the absence of printing, when most human knowledge was passed by word of mouth from one generation to another, it was very easy for myths to become traditions and for traditions eventually to become accepted as facts.
+\vs p122 8:7 These wise men saw no star to guide them to Bethlehem. The beautiful legend of the star of Bethlehem originated in this way: Jesus was born August 21 at noon, 7\,B.C. On May 29, 7\,B.C., there occurred an extraordinary conjunction of Jupiter and Saturn in the constellation of Pisces\fnst{Indeed, there was such a triple conjunction in 7\,B.C. and this fact was known back in 1614 to Johannes Kepler, who was the first scientist to link the ``Star of Bethlehem'' to this astronomical event. I have calculated (using the program \bibemph{Stellarium} under Linux) the gap between the planets to be around one degree. The apparent diameter of the Moon is just over half a degree, so the planets were two Moon's diameters apart.}. And it is a remarkable astronomic fact that similar conjunctions occurred on September 29 and December 5 of the same year. Upon the basis of these extraordinary but wholly natural events the well\hyp{}meaning zealots of the succeeding generation constructed the appealing legend of the star of Bethlehem and the adoring Magi led thereby to the manger, where they beheld and worshipped the newborn babe. Oriental and near\hyp{}Oriental minds delight in fairy stories, and they are continually spinning such beautiful myths about the lives of their religious leaders and political heroes. In the absence of printing, when most human knowledge was passed by word of mouth from one generation to another, it was very easy for myths to become traditions and for traditions eventually to become accepted as facts.
 \usection{The Presentation in the Temple}
 \vs p122 9:1 Moses had taught the Jews that every first\hyp{}born son belonged to the Lord, and that, in lieu of his sacrifice as was the custom among the heathen nations, such a son might live provided his parents would redeem him by the payment of five shekels to any authorized priest. There was also a Mosaic ordinance which directed that a mother, after the passing of a certain period of time, should present herself (or have someone make the proper sacrifice for her) at the temple for purification. It was customary to perform both of these ceremonies at the same time. Accordingly, Joseph and Mary went up to the temple at Jerusalem in person to present Jesus to the priests and effect his redemption and also to make the proper sacrifice to ensure Mary’s ceremonial purification from the alleged uncleanness of childbirth.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=0.8\columnwidth]{images/Presentation.jpg}\caption{Presentation In The Temple by William Hole}\end{figure}}
 \vs p122 9:2 \pc There lingered constantly about the courts of the temple two remarkable characters, Simeon a singer and Anna a poetess. Simeon was a Judean, but Anna was a Galilean. This couple were frequently in each other’s company, and both were intimates of the priest Zacharias, who had confided the secret of John and Jesus to them. Both Simeon and Anna longed for the coming of the Messiah, and their confidence in Zacharias led them to believe that Jesus was the expected deliverer of the Jewish people.
