--- a/tex/p123.tex
+++ b/tex/p123.tex
@@ -61,7 +61,7 @@
 \usection{School Days in Nazareth}
 \vs p123 5:1 Jesus was now seven years old, the age when Jewish children were supposed to begin their formal education in the synagogue schools. Accordingly, in August of this year he entered upon his eventful school life at Nazareth. Already this lad was a fluent reader, writer, and speaker of two languages, Aramaic and Greek. He was now to acquaint himself with the task of learning to read, write, and speak the Hebrew language. And he was truly eager for the new school life which was ahead of him.
 \vs p123 5:2 For three years --- until he was ten --- he attended the elementary school of the Nazareth synagogue. For these three years he studied the rudiments of the Book of the Law as it was recorded in the Hebrew tongue. For the following three years he studied in the advanced school and committed to memory, by the method of repeating aloud, the deeper teachings of the sacred law. He graduated from this school of the synagogue during his 13\ts{th} year and was turned over to his parents by the synagogue rulers as an educated “son of the commandment” --- henceforth a responsible citizen of the commonwealth of Israel, all of which entailed his attendance at the Passovers in Jerusalem; accordingly, he attended his first Passover that year in company with his father and mother.
-\vs p123 5:3 \pc At Nazareth the pupils sat on the floor in a semicircle, while their teacher, the chazan\fnst{\textbf{chazan}, A more accurate rendition of the Hebrew \textheb{חַזָּן} would have been ``chazzan''.}, an officer of the synagogue, sat facing them. Beginning with the Book of Leviticus, they passed on to the study of the other books of the Law\fnc{books of the \bibtextul{law}. \bibexpl{Here and in the paragraph 5 below, the ``Law'' being spoken of is the Hebrew Torah, i.e. the first part of the Hebrew Scriptures: \textheb{כתובים נביאים תורה}}.}, followed by the study of the Prophets and the Psalms\fnst{\textbf{Psalms}, Here the Writings (Hebrew \textheb{כתובים}) are called the ``Psalms'' by the name of the first book of this section of Hebrew Scriptures, according to many Hebrew MSS, though not that of Talmud (which places Ruth first) and some of the early MSS I have examined, such as The Leningrad Codex (B19A), which places Chronicles first.}. The Nazareth synagogue possessed a complete copy of the Scriptures in Hebrew. Nothing but the Scriptures was studied prior to the 12\ts{th} year. In the summer months the hours for school were greatly shortened.
+\vs p123 5:3 \pc At Nazareth the pupils sat on the floor in a semicircle, while their teacher, the chazan\fnst{A more accurate rendition of the Hebrew \textheb{חַזָּן} would have been ``chazzan''.}, an officer of the synagogue, sat facing them. Beginning with the Book of Leviticus, they passed on to the study of the other books of the Law\fnc{books of the \bibtextul{law}. \bibexpl{Here and in the paragraph 5 below, the ``Law'' being spoken of is the Hebrew Torah, i.e. the first part of the Hebrew Scriptures: \textheb{כתובים נביאים תורה}}.}, followed by the study of the Prophets and the Psalms\fnst{Here the Writings (Hebrew \textheb{כתובים}) are called the ``Psalms'' by the name of the first book of this section of Hebrew Scriptures, according to many Hebrew MSS, though not that of Talmud (which places Ruth first) and some of the early MSS I have examined, such as The Leningrad Codex (B19A), which places Chronicles first.}. The Nazareth synagogue possessed a complete copy of the Scriptures in Hebrew. Nothing but the Scriptures was studied prior to the 12\ts{th} year. In the summer months the hours for school were greatly shortened.
 \vs p123 5:4 Jesus early became a master of Hebrew, and as a young man, when no visitor of prominence happened to be sojourning in Nazareth, he would often be asked to read the Hebrew scriptures to the faithful assembled in the synagogue at the regular Sabbath services.
 \vs p123 5:5 These synagogue schools, of course, had no textbooks. In teaching, the chazan would utter a statement while the pupils would in unison repeat it after him. When having access to the written books of the Law, the student learned his lesson by reading aloud and by constant repetition.
 \vs p123 5:6 \pc Next, in addition to his more formal schooling, Jesus began to make contact with human nature from the four quarters of the earth as men from many lands passed in and out of his father’s repair shop. When he grew older, he mingled freely with the caravans as they tarried near the spring for rest and nourishment. Being a fluent speaker of Greek, he had little trouble in conversing with the majority of the caravan travellers and conductors.
