--- a/tex/p139.tex
+++ b/tex/p139.tex
@@ -50,7 +50,7 @@
 \vs p139 3:4 The outstanding feature of James’s personality was his ability to see all sides of a proposition. Of all the twelve, he came the nearest to grasping the real import and significance of Jesus’ teaching. He, too, was slow at first to comprehend the Master’s meaning, but ere they had finished their training, he had acquired a superior concept of Jesus’ message. James was able to understand a wide range of human nature; he got along well with the versatile Andrew, the impetuous Peter, and his self\hyp{}contained brother John.
 \vs p139 3:5 Though James and John had their troubles trying to work together, it was inspiring to observe how well they got along. They did not succeed quite so well as Andrew and Peter, but they did much better than would ordinarily be expected of two brothers, especially such headstrong and determined brothers. But, strange as it may seem, these two sons of Zebedee were much more tolerant of each other than they were of strangers. They had great affection for one another; they had always been happy playmates. It was these “sons of thunder” who wanted to call fire down from heaven to destroy the Samaritans who presumed to show disrespect for their Master. But the untimely death of James greatly modified the vehement temperament of his younger brother John.
 \vs p139 3:6 \pc That characteristic of Jesus which James most admired was the Master’s sympathetic affection. Jesus’ understanding interest in the small and the great, the rich and the poor, made a great appeal to him.
-\vs p139 3:7 \pc James Zebedee was a well\hyp{}balanced thinker and planner. Along with Andrew, he was one of the more level\hyp{}headed of the apostolic group. He was a vigorous individual but was never in a hurry. He was an excellent balance wheel for Peter.
+\vs p139 3:7 \pc James Zebedee was a well\hyp{}balanced\tunemarkup{pgkoboaurahd}{\linebreak} thinker and planner. Along with Andrew, he was one of the more level\hyp{}headed of the apostolic group. He was a vigorous individual but was never in a hurry. He was an excellent balance wheel for Peter.
 \vs p139 3:8 He was modest and undramatic, a daily server, an unpretentious worker, seeking no special reward when he once grasped something of the real meaning of the kingdom. And even in the story about the mother of James and John, who asked that her sons be granted places on the right hand and the left hand of Jesus, it should be remembered that it was the mother who made this request. And when they signified that they were ready to assume such responsibilities, it should be recognized that they were cognizant of the dangers accompanying the Master’s supposed revolt against the Roman power, and that they were also willing to pay the price. When Jesus asked if they were ready to drink the cup, they replied that they were. And as concerns James, it was literally true --- he did drink the cup with the Master, seeing that he was the first of the apostles to experience martyrdom, being early put to death with the sword by Herod Agrippa. James was thus the first of the twelve to sacrifice his life upon the new battle line of the kingdom. Herod Agrippa feared James above all the other apostles. He was indeed often quiet and silent, but he was brave and determined when his convictions were aroused and challenged.
 \vs p139 3:9 \pc James lived his life to the full, and when the end came, he bore himself with such grace and fortitude that even his accuser and informer, who attended his trial and execution, was so touched that he rushed away from the scene of James’s death to join himself to the disciples of Jesus.
 \usection{John Zebedee}
@@ -68,7 +68,7 @@
 \vs p139 4:12 Several years after the martyrdom of James, John married his brother’s widow. The last 20 years of his life he was cared for by a loving granddaughter.
 \vs p139 4:13 John was in prison several times and was banished to the Isle of Patmos for a period of four years until another emperor came to power in Rome. Had not John been tactful and sagacious, he would undoubtedly have been killed as was his more outspoken brother James. As the years passed, John, together with James the Lord’s brother, learned to practise wise conciliation when they appeared before the civil magistrates. They found that a “soft answer turns away wrath.” They also learned to represent the church as a “spiritual brotherhood devoted to the social service of mankind” rather than as “the kingdom of heaven.” They taught loving service rather than ruling power --- kingdom and king.
 \vs p139 4:14 When in temporary exile on Patmos, John wrote the Book of Revelation, which you now have in greatly abridged and distorted form. This Book of Revelation contains the surviving fragments of a great revelation, large portions of which were lost, other portions of which were removed, subsequent to John’s writing. It is preserved in only fragmentary and adulterated form.
-\vs p139 4:15 John travelled much, laboured incessantly, and after becoming bishop of the Asia churches, settled down at Ephesus. He directed his associate, Nathan, in the writing of the so\hyp{}called “Gospel according to John,” at Ephesus, when he was 99 years old. Of all the twelve apostles, John Zebedee eventually became the outstanding theologian. He died a natural death at Ephesus in A.D.\,103 when he was 101 years of age.
+\vs p139 4:15 John travelled much, laboured incessantly, and after becoming bishop of the Asia\tunemarkup{pgkoboaurahd}{\linebreak} churches, settled down at Ephesus. He directed his associate, Nathan, in the writing of the so\hyp{}called “Gospel according to John,” at Ephesus, when he was 99 years old. Of all the twelve apostles, John Zebedee eventually became the outstanding theologian. He died a natural death at Ephesus in A.D.\,103 when he was 101 years of age.
 \usection{Philip the Curious}
 \vs p139 5:1 Philip was the 5\ts{th} apostle to be chosen, being called when Jesus and his first four apostles were on their way from John’s rendezvous on the Jordan to Cana of Galilee. Since he lived at Bethsaida, Philip had for some time known of Jesus, but it had not occurred to him that Jesus was a really great man until that day in the Jordan valley when he said, \textcolour{ubdarkred}{“Follow me.”} Philip was also somewhat influenced by the fact that Andrew, Peter, James, and John had accepted Jesus as the Deliverer.
 \vs p139 5:2 Philip was 27 years of age when he joined the apostles; he had recently been married, but he had no children at this time. The nickname which the apostles gave him signified “curiosity.” Philip was always wanting to be shown. He never seemed to see very far into any proposition. He was not necessarily dull, but he lacked imagination. This lack of imagination was the great weakness of his character. He was a commonplace and matter\hyp{}of\hyp{}fact individual.
@@ -88,10 +88,10 @@
 \vs p139 6:3 \pc Jesus did not himself give Nathaniel a nickname, but the twelve soon began to speak of him in terms that signified honesty, sincerity. He was “without guile.” And this was his great virtue; he was both honest and sincere. The weakness of his character was his pride; he was very proud of his family, his city, his reputation, and his nation, all of which is commendable if it is not carried too far. But Nathaniel was inclined to go to extremes with his personal prejudices. He was disposed to prejudge individuals in accordance with his personal opinions. He was not slow to ask the question, even before he had met Jesus, “Can any good thing come out of Nazareth?” But Nathaniel was not obstinate, even if he was proud. He was quick to reverse himself when he once looked into Jesus’ face.
 \vs p139 6:4 In many respects Nathaniel was the odd genius of the twelve. He was the apostolic philosopher and dreamer, but he was a very practical sort of dreamer. He alternated between seasons of profound philosophy and periods of rare and droll humour; when in the proper mood, he was probably the best storyteller among the twelve. Jesus greatly enjoyed hearing Nathaniel discourse on things both serious and frivolous. Nathaniel progressively took Jesus and the kingdom more seriously, but never did he take himself seriously.
 \vs p139 6:5 The apostles all loved and respected Nathaniel, and he got along with them splendidly, excepting Judas Iscariot. Judas did not think Nathaniel took his apostleship sufficiently seriously and once had the temerity to go secretly to Jesus and lodge complaint against him. Said Jesus: \textcolour{ubdarkred}{“Judas, watch carefully your steps; do not overmagnify your office. Who of us is competent to judge his brother? It is not the Father’s will that his children should partake only of the serious things of life. Let me repeat: I have come that my brethren in the flesh may have joy, gladness, and life more abundantly. Go then, Judas, and do well that which has been entrusted to you but leave Nathaniel, your brother, to give account of himself to God.”} And the memory of this, with that of many similar experiences, long lived in the self\hyp{}deceiving heart of Judas Iscariot.
-\vs p139 6:6 Many times, when Jesus was away on the mountain with Peter, James, and John, and things were becoming tense and tangled among the apostles, when even Andrew was in doubt about what to say to his disconsolate brethren, Nathaniel would relieve the tension by a bit of philosophy or a flash of humour; good humour\fnst{\textbf{good humour}, According to Dr~Meredith Justin Sprunger the original Papers stated that the apostle Nathaniel ``had a good sense of humour for a Jew'', but after it was read the members of the Forum chuckled at this phrase. The next time they obtained this paper from the safe, they discovered the phrase ``for a Jew'' was deleted. I am assuming that this comment refers to this particular location as it seems to be the closest to providing just such a context.}, too.
+\vs p139 6:6 Many times, when Jesus was away on the mountain with Peter, James, and John, and things were becoming tense and tangled among the apostles, when even Andrew was in doubt about what to say to his disconsolate brethren, Nathaniel would relieve the tension by a bit of philosophy or a flash of humour; good humour\fnst{According to Dr~Meredith Justin Sprunger the original Papers stated that the apostle Nathaniel ``had a good sense of humour for a Jew'', but after it was read the members of the Forum chuckled at this phrase. The next time they obtained this paper from the safe, they discovered the phrase ``for a Jew'' was deleted. I am assuming that this comment refers to this particular location as it seems to be the closest to providing just such a context.}, too.
 \vs p139 6:7 Nathaniel’s duty was to look after the families of the twelve. He was often absent from the apostolic councils, for when he heard that sickness or anything out of the ordinary had happened to one of his charges, he lost no time in getting to that home. The twelve rested securely in the knowledge that their families’ welfare was safe in the hands of Nathaniel.
 \vs p139 6:8 \pc Nathaniel most revered Jesus for his tolerance. He never grew weary of contemplating the broadmindedness and generous sympathy of the Son of Man.
-\vs p139 6:9 \pc Nathaniel’s father (Bartholomew\fnst{\textbf{Bartholomew}, Note that this is the \bibemph{only} mention of a Bartholomew in the Urantia Papers. Nathaniel was invited to be one of the apostles by Philip (\bibref[137:2.6]{p137 2:6}). In the synoptic gospels Nathaniel is always mentioned under the name Bartholomew as an associate of Philip (Matthew~10:3, Mark~3:18 and Luke~6:14). In the gospel of John we have Nathaniel, but no Bartholomew. The name ``Bartholomew'' is an anglicized form of the Aramaic ``bar Tholmai'' meaning ``son of Tholmai''. It is possible that Nathaniel's father's name was Tholmai and not Bartholomew. However, I did not amend the text here because Dr.~Sadler is saying that ``the manuscript was very clear that it was Bartholomew''.}) died shortly after Pentecost, after which this apostle went into Mesopotamia and India proclaiming the glad tidings of the kingdom and baptizing believers. His brethren never knew what became of their onetime philosopher, poet, and humorist. But he also was a great man in the kingdom and did much to spread his Master’s teachings, even though he did not participate in the organization of the subsequent Christian church. Nathaniel died in India.
+\vs p139 6:9 \pc Nathaniel’s father (Bartholomew\fnst{Note that this is the \bibemph{only} mention of a Bartholomew in the Urantia Papers. Nathaniel was invited to be one of the apostles by Philip (\bibref[137:2.6]{p137 2:6}). In the synoptic gospels Nathaniel is always mentioned under the name Bartholomew as an associate of Philip (Matthew~10:3, Mark~3:18 and Luke~6:14). In the gospel of John we have Nathaniel, but no Bartholomew. The name ``Bartholomew'' is an anglicized form of the Aramaic ``bar Tholmai'' meaning ``son of Tholmai''. It is possible that Nathaniel's father's name was Tholmai and not Bartholomew. However, I did not amend the text here because Dr.~Sadler is saying that ``the manuscript was very clear that it was Bartholomew''.}) died shortly after Pentecost, after which this apostle went into Mesopotamia and India proclaiming the glad tidings of the kingdom and baptizing believers. His brethren never knew what became of their onetime philosopher, poet, and humorist. But he also was a great man in the kingdom and did much to spread his Master’s teachings, even though he did not participate in the organization of the subsequent Christian church. Nathaniel died in India.
 \usection{Matthew Levi}
 \vs p139 7:1 Matthew, the 7\ts{th} apostle, was chosen by Andrew. Matthew belonged to a family of tax gatherers, or publicans, but was himself a customs collector in Capernaum, where he lived. He was 31 years old and married and had 4 children. He was a man of moderate wealth, the only one of any means belonging to the apostolic corps. He was a good business man, a good social mixer, and was gifted with the ability to make friends and to get along smoothly with a great variety of people.
 \vs p139 7:2 \pc Andrew appointed Matthew the financial representative of the apostles. In a way he was the fiscal agent and publicity spokesman for the apostolic organization. He was a keen judge of human nature and a very efficient propagandist. His is a personality difficult to visualize, but he was a very earnest disciple and an increasing believer in the mission of Jesus and in the certainty of the kingdom. Jesus never gave Levi a nickname, but his fellow apostles commonly referred to him as the “money\hyp{}getter.”
@@ -142,7 +142,7 @@
 \vs p139 11:10 \pc After the dispersion because of the Jerusalem persecutions, Simon went into temporary retirement. He was literally crushed. As a nationalist patriot he had surrendered in deference to Jesus’ teachings; now all was lost. He was in despair, but in a few years he rallied his hopes and went forth to proclaim the gospel of the kingdom.
 \vs p139 11:11 He went to Alexandria and, after working up the Nile, penetrated into the heart of Africa, everywhere preaching the gospel of Jesus and baptizing believers. Thus he laboured until he was an old man and feeble. And he died and was buried in the heart of Africa.
 \usection{Judas Iscariot}
-\vs p139 12:1 Judas Iscariot, the 12\ts{th} apostle, was chosen by Nathaniel. He was born in Kerioth\fnst{\textbf{Kerioth}, In Hebrew \textheb{אִישׁ־קְרִיּוֹת} \textit{ish-keriyoth} means ``a man of Kerioth'', hence the surname ``Iscariot''.}, a small town in southern Judea. When he was a lad, his parents moved to Jericho, where he lived and had been employed in his father’s various business enterprises until he became interested in the preaching and work of John the Baptist. Judas’s parents were Sadducees, and when their son joined John’s disciples, they disowned him.
+\vs p139 12:1 Judas Iscariot, the 12\ts{th} apostle, was chosen by Nathaniel. He was born in Kerioth\fnst{In Hebrew \textheb{אִישׁ־קְרִיּוֹת} \textit{ish-keriyoth} means ``a man of Kerioth'', hence the surname ``Iscariot''.}, a small town in southern Judea. When he was a lad, his parents moved to Jericho, where he lived and had been employed in his father’s various business enterprises until he became interested in the preaching and work of John the Baptist. Judas’s parents were Sadducees, and when their son joined John’s disciples, they disowned him.
 \vs p139 12:2 \pc When Nathaniel met Judas at Tarichea, he was seeking employment with a fish\hyp{}drying enterprise at the lower end of the Sea of Galilee. He was 30 years of age and unmarried when he joined the apostles. He was probably the best\hyp{}educated man among the twelve and the only Judean in the Master’s apostolic family. Judas had no outstanding trait of personal strength, though he had many outwardly appearing traits of culture and habits of training. He was a good thinker but not always a truly \bibemph{honest} thinker. Judas did not really understand himself; he was not really sincere in dealing with himself.
 \vs p139 12:3 Andrew appointed Judas treasurer of the twelve, a position which he was eminently fitted to hold, and up to the time of the betrayal of his Master he discharged the responsibilities of his office honestly, faithfully, and most efficiently.
 \vs p139 12:4 \pc There was no special trait about Jesus which Judas admired above the generally attractive and exquisitely charming personality of the Master. Judas was never able to rise above his Judean prejudices against his Galilean associates; he would even criticize in his mind many things about Jesus. Him whom 11 of the apostles looked upon as the perfect man, as the “one altogether lovely and the chiefest among ten thousand,” this self\hyp{}satisfied Judean often dared to criticize in his own heart. He really entertained the notion that Jesus was timid and somewhat afraid to assert his own power and authority.
