--- a/tex/p142.tex
+++ b/tex/p142.tex
@@ -20,7 +20,7 @@
 \vs p142 1:7 Besides teaching in and about the temple, the apostles and other believers were engaged in doing much personal work among the Passover throngs. These interested men and women carried the news of Jesus’ message from this Passover celebration to the uttermost parts of the Roman Empire and also to the East. This was the beginning of the spread of the gospel of the kingdom to the outside world. No longer was the work of Jesus to be confined to Palestine.
 \usection{God’s Wrath}
 \vs p142 2:1 There was in Jerusalem in attendance upon the Passover festivities one Jacob, a wealthy Jewish trader from Crete, and he came to Andrew making request to see Jesus privately. Andrew arranged this secret meeting with Jesus at Flavius’s home the evening of the next day. This man could not comprehend the Master’s teachings, and he came because he desired to inquire more fully about the kingdom of God. Said Jacob to Jesus: “But, Rabbi, Moses and the olden prophets tell us that Yahweh is a jealous God, a God of great wrath and fierce anger. The prophets say he hates evildoers and takes vengeance on those who obey not his law. You and your disciples teach us that God is a kind and compassionate Father who so loves all men that he would welcome them into this new kingdom of heaven, which you proclaim is so near at hand.”
-\vs p142 2:2 \pc When Jacob finished speaking, Jesus replied: \textcolour{ubdarkred}{“Jacob, you have well stated the teachings of the olden prophets who taught the children of their generation in accordance with the light of their day. Our Father in Paradise is changeless. But the concept of his nature has enlarged and grown from the days of Moses down through the times of Amos and even to the generation of the prophet Isaiah. And now have I come in the flesh to reveal the Father in new glory and to show forth his love and mercy to all men on all worlds. As the gospel of this kingdom shall spread over the world with its message of good cheer and good will to all men, there will grow up improved and better relations among the families of all nations. As time passes, fathers and their children will love each other more, and thus will be brought about a better understanding of the love of the Father in heaven for his children on earth. Remember, Jacob, that a good and true father not only loves his family as a whole --- as a family --- but he also truly loves and affectionately cares for each \bibemph{individual} member.”}\fnst{See Malachi 4:6: ``And he shall turn the heart of the fathers to the children, and the heart of the children to their fathers, lest I come and smite the earth with a curse.''}
+\vs p142 2:2 \pc When Jacob finished speaking, Jesus replied: \textcolour{ubdarkred}{“Jacob, you have well stated the teachings of the olden prophets who taught the children of their generation in accordance with the light of their day. Our Father in Paradise is changeless. But the concept of his nature has enlarged and grown from the days of Moses down through the times of Amos and even to the generation of the prophet Isaiah. And now have I come in the flesh to reveal the Father in new glory and to show forth his love and mercy to all men on all worlds. As the gospel of this kingdom shall spread over the world with its message of good cheer and good will to all men, there will grow up improved and better relations among the families of all nations. As time passes, fathers and their children will love each other more, and thus will be brought about a better understanding of the love of the Father in heaven for his children on earth. Remember, Jacob, that a good and true father not only loves his family as a whole --- as a family --- but he also truly loves and affectionately cares for each \bibemph{individual} member.”}\fnst{Malachi 4:6: ``And he shall turn the heart of the fathers to the children, and the heart of the children to their fathers, lest I come and smite the earth with a curse.''}
 \vs p142 2:3 After considerable discussion of the heavenly Father’s character, Jesus paused to say: \textcolour{ubdarkred}{“You, Jacob, being a father of many, know well the truth of my words.”} And Jacob said: “But, Master, who told you I was the father of six children? How did you know this about me?” And the Master replied: \textcolour{ubdarkred}{“Suffice it to say that the Father and the Son know all things, for indeed they see all. Loving your children as a father on earth, you must now accept as a reality the love of the heavenly Father for \bibemph{you ---} not just for all the children of Abraham, but for you, your individual soul.”}
 \vs p142 2:4 \pc Then Jesus went on to say: \textcolour{ubdarkred}{“When your children are very young and immature, and when you must chastise them, they may reflect that their father is angry and filled with resentful wrath. Their immaturity cannot penetrate beyond the punishment to discern the father’s farseeing and corrective affection. But when these same children become grown\hyp{}up men and women, would it not be folly for them to cling to these earlier and misconceived notions regarding their father? As men and women they should now discern their father’s love in all these early disciplines. And should not mankind, as the centuries pass, come the better to understand the true nature and loving character of the Father in heaven? What profit have you from successive generations of spiritual illumination if you persist in viewing God as Moses and the prophets saw him? I say to you, Jacob, under the bright light of this hour you should see the Father as none of those who have gone before ever beheld him. And thus seeing him, you should rejoice to enter the kingdom wherein such a merciful Father rules, and you should seek to have his will of love dominate your life henceforth.”}
 \vs p142 2:5 And Jacob answered: “Rabbi, I believe; I desire that you lead me into the Father’s kingdom.”
@@ -28,7 +28,7 @@
 \vs p142 3:1 The twelve apostles, most of whom had listened to this discussion of the character of God, that night asked Jesus many questions about the Father in heaven. The Master’s answers to these questions can best be presented by the following summary in modern phraseology:
 \vs p142 3:2 Jesus mildly upbraided the twelve, in substance saying: Do you not know the traditions of Israel relating to the growth of the idea of Yahweh, and are you ignorant of the teaching of the Scriptures concerning the doctrine of God? And then did the Master proceed to instruct the apostles about the evolution of the concept of Deity throughout the course of the development of the Jewish people. He called attention to the following phases of the growth of the God idea:
 \vs p142 3:3 \ublistelem{1.}\bibnobreakspace \bibemph{Yahweh ---} the god of the Sinai clans. This was the primitive concept of Deity which Moses exalted to the higher level of the Lord God of Israel. The Father in heaven never fails to accept the sincere worship of his children on earth, no matter how crude their concept of Deity or by what name they symbolize his divine nature.
-\vs p142 3:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Most High.} This concept of the Father in heaven was proclaimed by Melchizedek to Abraham and was carried far from Salem by those who subsequently believed in this enlarged and expanded idea of Deity. Abraham and his brother\fnst{\bibemph{The fact of Nahor leaving Ur with Abraham (cf. Genesis~11:31) has been preserved only in the Samaritan Pentateuch, the Massoretic scribes having carefully deleted the reference to Abraham's brother Nahor from the Hebrew text, leaving him with the sunworshippers in Ur.}} left Ur because of the establishment of sun worship, and they became believers in Melchizedek’s teaching of El Elyon --- the Most High God. Theirs was a composite concept of God, consisting in a blending of their older Mesopotamian ideas and the Most High doctrine.
+\vs p142 3:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Most High.} This concept of the Father in heaven was proclaimed by Melchizedek to Abraham and was carried far from Salem by those who subsequently believed in this enlarged and expanded idea of Deity. Abraham and his brother\fnst{The fact of Nahor leaving Ur with Abraham (cf. Genesis~11:31) has been preserved only in the Samaritan Pentateuch, the Massoretic scribes having carefully deleted the reference to Abraham's brother Nahor from the Hebrew text, leaving him with the sunworshippers in Ur.} left Ur because of the establishment of sun worship, and they became believers in Melchizedek’s teaching of El Elyon --- the Most High God. Theirs was a composite concept of God, consisting in a blending of their older Mesopotamian ideas and the Most High doctrine.
 \vs p142 3:5 \ublistelem{3.}\bibnobreakspace \bibemph{El Shaddai.} During these early days many of the Hebrews worshipped El Shaddai, the Egyptian concept of the God of heaven, which they learned about during their captivity in the land of the Nile. Long after the times of Melchizedek all three of these concepts of God became joined together to form the doctrine of the creator Deity, the Lord God of Israel.
 \vs p142 3:6 \ublistelem{4.}\bibnobreakspace \bibemph{Elohim.} From the times of Adam the teaching of the Paradise Trinity has persisted. Do you not recall how the Scriptures begin by asserting that “In the beginning the Gods created the heavens and the earth”? This indicates that when that record was made the Trinity concept of three Gods in one had found lodgement in the religion of our forebears.
 \vs p142 3:7 \ublistelem{5.}\bibnobreakspace \bibemph{The Supreme Yahweh.} By the times of Isaiah these beliefs about God had expanded into the concept of a Universal Creator who was simultaneously all\hyp{}powerful and all\hyp{}merciful. And this evolving and enlarging concept of God virtually supplanted all previous ideas of Deity in our fathers’ religion.
