--- a/tex/p143.tex
+++ b/tex/p143.tex
@@ -53,7 +53,7 @@
 \vs p143 5:9 As Nalda was about to voice her real and personal longing for better things and a more noble way of living, just as she was ready to speak the real desire of her heart, the twelve apostles returned from Sychar, and coming upon this scene of Jesus’ talking so intimately with this woman --- this Samaritan woman, and alone --- they were more than astonished. They quickly deposited their supplies and drew aside, no man daring to reprove him, while Jesus said to Nalda: \textcolour{ubdarkred}{“Woman, go your way; God has forgiven you. Henceforth you will live a new life. You have received the living water, and a new joy will spring up within your soul, and you shall become a daughter of the Most High.”} And the woman, perceiving the disapproval of the apostles, left her waterpot and fled to the city.
 \vs p143 5:10 As she entered the city, she proclaimed to everyone she met: “Go out to Jacob’s well and go quickly, for there you will see a man who told me all I ever did. Can this be the Converter?” And ere the sun went down, a great crowd had assembled at Jacob’s well to hear Jesus. And the Master talked to them more about the water of life, the gift of the indwelling spirit.
 \vs p143 5:11 The apostles never ceased to be shocked by Jesus’ willingness to talk with women, women of questionable character, even immoral women. It was very difficult for Jesus to teach his apostles that women, even so\hyp{}called immoral women, have souls which can choose God as their Father, thereby becoming daughters of God and candidates for life everlasting. Even 19 centuries later many show the same unwillingness to grasp the Master’s teachings. Even the Christian religion has been persistently built up around the fact of the death of Christ instead of around the truth of his life. The world should be more concerned with his happy and God\hyp{}revealing life than with his tragic and sorrowful death.
-\vs p143 5:12 Nalda told this entire story to the Apostle John the next day, but he never revealed it fully to the other apostles, and Jesus did not speak of it in detail to the twelve\fnst{\bibemph{This explains why the story in John 4:6--42 has no parallels in the Synoptics.}}.
+\vs p143 5:12 Nalda told this entire story to the Apostle John the next day, but he never revealed it fully to the other apostles, and Jesus did not speak of it in detail to the twelve\fnst{This explains why the story in John~4:6--42 has no parallels in the Synoptics.}.
 \vs p143 5:13 Nalda told John that Jesus had told her “all I ever did.” John many times wanted to ask Jesus about this visit with Nalda, but he never did. Jesus told her only one thing about herself, but his look into her eyes and the manner of his dealing with her had so brought all of her checkered life in panoramic review before her mind in a moment of time that she associated all of this self\hyp{}revelation of her past life with the look and the word of the Master. Jesus never told her she had had five husbands. She had lived with four different men since her husband cast her aside, and this, with all her past, came up so vividly in her mind at the moment when she realized Jesus was a man of God that she subsequently repeated to John that Jesus had really told her all about herself.
 \usection{The Samaritan Revival}
 \vs p143 6:1 On the evening that Nalda drew the crowd out from Sychar to see Jesus, the twelve had just returned with food, and they besought Jesus to eat with them instead of talking to the people, for they had been without food all day and were hungry. But Jesus knew that darkness would soon be upon them; so he persisted in his determination to talk to the people before he sent them away. When Andrew sought to persuade him to eat a bite before speaking to the crowd, Jesus said, \textcolour{ubdarkred}{“I have meat to eat that you do not know about.”} When the apostles heard this, they said among themselves: “Has any man brought him aught to eat? Can it be that the woman gave him food as well as drink?” When Jesus heard them talking among themselves, before he spoke to the people, he turned aside and said to the twelve: \textcolour{ubdarkred}{“My meat is to do the will of Him who sent me and to accomplish His work. You should no longer say it is such and such a time until the harvest. Behold these people coming out from a Samaritan city to hear us; I tell you the fields are already white for the harvest. He who reaps receives wages and gathers this fruit to eternal life; consequently the sowers and the reapers rejoice together. For herein is the saying true: ‘One sows and another reaps.’ I am now sending you to reap that whereon you have not laboured; others have laboured, and you are about to enter into their labour.”} This he said in reference to the preaching of John the Baptist.
