--- a/tex/p147.tex
+++ b/tex/p147.tex
@@ -55,7 +55,7 @@
 \vs p147 6:3 \pc Peter preached to the assembled multitude at the crossing of the Jordan, and the following morning they moved up the river toward Amathus. They wanted to proceed straight on to Capernaum, but such a crowd gathered here they remained three days, preaching, teaching, and baptizing. They did not move toward home until early Sabbath morning, the first day of May. The Jerusalem spies were sure they would now secure their first charge against Jesus --- that of Sabbath breaking --- since he had presumed to start his journey on the Sabbath day. But they were doomed to disappointment because, just before their departure, Jesus called Andrew into his presence and before them all instructed him to proceed for a distance of only 914\,m, the legal Jewish Sabbath day’s journey.
 \vs p147 6:4 But the spies did not have long to wait for their opportunity to accuse Jesus and his associates of Sabbath breaking. As the company passed along the narrow road, the waving wheat, which was just then ripening, was near at hand on either side, and some of the apostles, being hungry, plucked the ripe grain and ate it. It was customary for travellers to help themselves to grain as they passed along the road, and therefore no thought of wrongdoing was attached to such conduct. But the spies seized upon this as a pretext for assailing Jesus. When they saw Andrew rub the grain in his hand, they went up to him and said: “Do you not know that it is unlawful to pluck and rub the grain on the Sabbath day?” And Andrew answered: “But we are hungry and rub only sufficient for our needs; and since when did it become sinful to eat grain on the Sabbath day?” But the Pharisees answered: “You do no wrong in eating, but you do break the law in plucking and rubbing out the grain between your hands; surely your Master would not approve of such acts.” Then said Andrew: “But if it is not wrong to eat the grain, surely the rubbing out between our hands is hardly more work than the chewing of the grain, which you allow; wherefore do you quibble over such trifles?” When Andrew intimated that they were quibblers, they were indignant, and rushing back to where Jesus walked along, talking to Matthew, they protested, saying: “Behold, Teacher, your apostles do that which is unlawful on the Sabbath day; they pluck, rub, and eat the grain. We are sure you will command them to cease.” And then said Jesus to the accusers: \textcolour{ubdarkred}{“You are indeed zealous for the law, and you do well to remember the Sabbath day to keep it holy; but did you never read in the Scripture that, one day when David was hungry, he and they who were with him entered the house of God and ate the showbread, which it was not lawful for anyone to eat save the priests? and David also gave this bread to those who were with him. And have you not read in our law that it is lawful to do many needful things on the Sabbath day? And shall I not, before the day is finished, see you eat that which you have brought along for the needs of this day? My good men, you do well to be zealous for the Sabbath, but you would do better to guard the health and well\hyp{}being of your fellows. I declare that the Sabbath was made for man and not man for the Sabbath. And if you are here present with us to watch my words, then will I openly proclaim that the Son of Man is lord even of the Sabbath.”}
 \vs p147 6:5 The Pharisees were astonished and confounded by his words of discernment and wisdom. For the remainder of the day they kept by themselves and dared not ask any more questions.
-\vs p147 6:6 \pc Jesus’ antagonism to the Jewish traditions and slavish ceremonials was always \bibemph{positive.} It consisted in what he did and in what he affirmed. The Master spent little time in negative denunciations. He taught that those who know God can enjoy the liberty of living without deceiving themselves by the licenses of sinning. Said Jesus to the apostles: \textcolour{ubdarkred}{“Men\fnst{\textbf{Men, if \ldots\ breakers of the law.}, These words of Jesus are preserved (albeit in a modified form) only in the Codex Bezae Cantabrigiensis (V c.) at Luke 6:4 \textgreek{``Τη αυτη ημερα θεασαμενος τινα εργαζομενον τω σαββατω, ειπεν αυτω, Ανθρωπε, ει μεν οιδας τι ποιεις μακαριος ει; ει δε μη οιδας επικαταρατος, και παραβατης ει του νομου.''}, or, translated into English, ``On the same day, seeing one working on the Sabbath, he said unto him, Man, if indeed thou knowest what thou dost, blessed art thou; but if thou knowest not, thou art cursed, and art a transgressor of the law.''}, if you are enlightened by the truth and really know what you are doing, you are blessed; but if you know not the divine way, you are unfortunate and already breakers of the law.”}
+\vs p147 6:6 \pc Jesus’ antagonism to the Jewish traditions and slavish ceremonials was always \bibemph{positive.} It consisted in what he did and in what he affirmed. The Master spent little time in negative denunciations. He taught that those who know God can enjoy the liberty of living without deceiving themselves by the licenses of sinning. Said Jesus to the apostles: \textcolour{ubdarkred}{“Men\fnst{These words of Jesus are preserved (albeit in a modified form) only in the Codex Bezae Cantabrigiensis (V c.) at Luke 6:4 \textgreek{``Τη αυτη ημερα θεασαμενος τινα εργαζομενον τω σαββατω, ειπεν αυτω, Ανθρωπε, ει μεν οιδας τι ποιεις μακαριος ει; ει δε μη οιδας επικαταρατος, και παραβατης ει του νομου.''}, or, translated into English, ``On the same day, seeing one working on the Sabbath, he said unto him, Man, if indeed thou knowest what thou dost, blessed art thou; but if thou knowest not, thou art cursed, and art a transgressor of the law.''}, if you are enlightened by the truth and really know what you are doing, you are blessed; but if you know not the divine way, you are unfortunate and already breakers of the law.”}
 \usection{Back in Capernaum}
 \vs p147 7:1 It was around noon on Monday, May 3, when Jesus and the twelve came to Bethsaida by boat from Tarichea. They travelled by boat in order to escape those who journeyed with them. But by the next day the others, including the official spies from Jerusalem, had again found Jesus.
 \vs p147 7:2 On Tuesday evening Jesus was conducting one of his customary classes of questions and answers when the leader of the six spies said to him: “I was today talking with one of John’s disciples who is here attending upon your teaching, and we were at a loss to understand why you never command your disciples to fast and pray as we Pharisees fast and as John bade his followers.” And Jesus, referring to a statement by John, answered this questioner: \textcolour{ubdarkred}{“Do the sons of the bridechamber fast while the bridegroom is with them? As long as the bridegroom remains with them, they can hardly fast. But the time is coming when the bridegroom shall be taken away, and during those times the children of the bridechamber undoubtedly will fast and pray. To pray is natural for the children of light, but fasting is not a part of the gospel of the kingdom of heaven. Be reminded that a wise tailor does not sew a piece of new and unshrunk cloth upon an old garment, lest, when it is wet, it shrink and produce a worse rent. Neither do men put new wine into old wine skins, lest the new wine burst the skins so that both the wine and the skins perish. The wise man puts the new wine into fresh wine skins. Therefore do my disciples show wisdom in that they do not bring too much of the old order over into the new teaching of the gospel of the kingdom. You who have lost your teacher may be justified in fasting for a time. Fasting may be an appropriate part of the law of Moses, but in the coming kingdom the sons of God shall experience freedom from fear and joy in the divine spirit.”} And when they heard these words, the disciples of John were comforted while the Pharisees themselves were the more confounded.
