--- a/tex/p151.tex
+++ b/tex/p151.tex
@@ -49,7 +49,7 @@
 \vs p151 4:6 \pc \textcolour{ubdarkred}{“Again, the kingdom of heaven is like a sweep net which was cast into the sea, and it gathered up every kind of fish. Now, when the net was filled, the fishermen drew it up on the beach, where they sat down and sorted out the fish, gathering the good into vessels while the bad they threw away.”}
 \vs p151 4:7 \pc Many other parables spoke Jesus to the multitudes. In fact, from this time forward he seldom taught the masses except by this means. After speaking to a public audience in parables, he would, during the evening classes, more fully and explicitly expound his teachings to the apostles and the evangelists.
 \usection{The Visit to Kheresa}
-\vs p151 5:1 The multitude continued to increase throughout the week. On Sabbath Jesus hastened away to the hills, but when Sunday morning came, the crowds returned. Jesus spoke to them in the early afternoon after the preaching of Peter, and when he had finished, he said to his apostles: \textcolour{ubdarkred}{“I am weary of the throngs; let us cross over to the other side that we may rest for a day.”}
+\vs p151 5:1 The multitude continued to increase\tunemarkup{pgkoboaurahd}{\linebreak} throughout the week. On Sabbath Jesus hastened away to the hills, but when Sunday morning came, the crowds returned. Jesus spoke to them in the early afternoon after the preaching of Peter, and when he had finished, he said to his apostles: \textcolour{ubdarkred}{“I am weary of the throngs; let us cross over to the other side that we may rest for a day.”}
 \vs p151 5:2 On the way across the lake they encountered one of those violent and sudden windstorms which are characteristic of the Sea of Galilee, especially at this season of the year. This body of water is almost 210\,m below the level of the sea and is surrounded by high banks, especially on the west. There are steep gorges leading up from the lake into the hills, and as the heated air rises in a pocket over the lake during the day, there is a tendency after sunset for the cooling air of the gorges to rush down upon the lake. These gales come on quickly and sometimes go away just as suddenly.
 \vs p151 5:3 It was just such an evening gale that caught the boat carrying Jesus over to the other side on this Sunday evening. Three other boats containing some of the younger evangelists were trailing after. This tempest was severe, notwithstanding that it was confined to this region of the lake, there being no evidence of a storm on the western shore. The wind was so strong that the waves began to wash over the boat. The high wind had torn the sail away before the apostles could furl it, and they were now entirely dependent on their oars as they laboriously pulled for the shore, a little more than 2.4\,km distant.
 \vs p151 5:4 Meanwhile Jesus lay asleep in the stern of the boat under a small overhead shelter. The Master was weary when they left Bethsaida, and it was to secure rest that he had directed them to sail him across to the other side. These ex\hyp{}fishermen were strong and experienced oarsmen, but this was one of the worst gales they had ever encountered. Although the wind and the waves tossed their boat about as though it were a toy ship, Jesus slumbered on undisturbed. Peter was at the right\hyp{}hand oar near the stern. When the boat began to fill with water, he dropped his oar and, rushing over to Jesus, shook him vigorously in order to awaken him, and when he was aroused, Peter said: “Master, don’t you know we are in a violent storm? If you do not save us, we will all perish.”
