--- a/tex/p156.tex
+++ b/tex/p156.tex
@@ -18,7 +18,7 @@
 \vs p156 1:7 Jesus, who had heard all of this conversation through an open window, now came outside, much to their surprise, and said: \textcolour{ubdarkred}{“O woman, great is your faith, so great that I cannot withhold that which you desire; go your way in peace. Your daughter already has been made whole.”} And the little girl was well from that hour. As Norana and the child took leave, Jesus entreated them to tell no one of this occurrence; and while his associates did comply with this request, the mother and the child ceased not to proclaim the fact of the little girl’s healing throughout all the countryside and even in Sidon, so much so that Jesus found it advisable to change his lodgings within a few days.
 \vs p156 1:8 \pc The next day, as Jesus taught his apostles, commenting on the cure of the daughter of the Syrian woman, he said: \textcolour{ubdarkred}{“And so it has been all the way along; you see for yourselves how the gentiles are able to exercise saving faith in the teachings of the gospel of the kingdom of heaven. Verily, verily, I tell you that the Father’s kingdom shall be taken by the gentiles if the children of Abraham are not minded to show faith enough to enter therein.”}
 \usection{Teaching in Sidon}
-\vs p156 2:1 In entering Sidon, Jesus and his associates passed over a bridge, the first one many of them had ever seen. As they walked over this bridge\fnst{\textbf{This world is only a bridge}, In the book ``Our Lord's Earthly Life'' by David Smith (New York, 1925, p.189) this incident is described. The phrase itself is part of the ancient Persian inscription on the main gate of Buland Darwaza (India) which reads: ``Isa, son of Mary said: The world is a Bridge, pass over it, but build no houses upon it. He who hopes for a day, may hope for eternity; but the World endures but an hour. Spend it in prayer for the rest is unseen.''}, Jesus, among other things, said: \textcolour{ubdarkred}{“This world is only a bridge; you may pass over it, but you should not think to build a dwelling place upon it.”}
+\vs p156 2:1 In entering Sidon, Jesus and his associates passed over a bridge, the first one many of them had ever seen. As they walked over this bridge\fnst{In the book ``Our Lord's Earthly Life'' by David Smith (New York, 1925, p.189) this incident is described. The phrase itself is part of the ancient Persian inscription on the main gate of Buland Darwaza (India) which reads: ``Isa, son of Mary said: The world is a Bridge, pass over it, but build no houses upon it. He who hopes for a day, may hope for eternity; but the World endures but an hour. Spend it in prayer for the rest is unseen.''}, Jesus, among other things, said: \textcolour{ubdarkred}{“This world is only a bridge; you may pass over it, but you should not think to build a dwelling place upon it.”}
 \vs p156 2:2 \pc As the 24 began their labours in Sidon, Jesus went to stay in a home just north of the city, the house of Justa and her mother, Bernice. Jesus taught the 24 each morning at the home of Justa, and they went abroad in Sidon to teach and preach during the afternoons and evenings.
 \vs p156 2:3 The apostles and the evangelists were greatly cheered by the manner in which the gentiles of Sidon received their message; during their short sojourn many were added to the kingdom. This period of about six weeks in Phoenicia was a very fruitful time in the work of winning souls, but the later Jewish writers of the Gospels were wont lightly to pass over the record of this warm reception of Jesus’ teachings by these gentiles at this very time when such a large number of his own people were in hostile array against him.
 \vs p156 2:4 In many ways these gentile believers appreciated Jesus’ teachings more fully than the Jews. Many of these Greek\hyp{}speaking Syrophoenicians came to know not only that Jesus was like God but also that God was like Jesus. These so\hyp{}called heathen achieved a good understanding of the Master’s teachings about the uniformity of the laws of this world and the entire universe. They grasped the teaching that God is no respecter of persons, races, or nations; that there is no favouritism with the Universal Father; that the universe is wholly and ever law\hyp{}abiding and unfailingly dependable. These gentiles were not afraid of Jesus; they dared to accept his message. All down through the ages men have not been unable to comprehend Jesus; they have been afraid to.
