--- a/tex/p158.tex
+++ b/tex/p158.tex
@@ -16,7 +16,7 @@
 \vs p158 1:3 They reached their destination, about halfway up the mountain, shortly before noon, and while eating lunch, Jesus told the 3 apostles something of his experience in the hills to the east of Jordan shortly after his baptism and also some more of his experience on Mount Hermon in connection with his former visit to this lonely retreat.
 \vs p158 1:4 When a boy, Jesus used to ascend the hill near his home and dream of the battles which had been fought by the armies of empires on the plain of Esdraelon; now he ascended Mount Hermon to receive the endowment which was to prepare him to descend upon the plains of the Jordan to enact the closing scenes of the drama of his bestowal on Urantia. The Master could have relinquished the struggle this day on Mount Hermon and returned to his rule of the universe domains, but he not only chose to meet the requirements of his order of divine sonship embraced in the mandate of the Eternal Son on Paradise, but he also elected to meet the last and full measure of the present will of his Paradise Father. On this day in August 3 of his apostles saw him decline to be invested with full universe authority. They looked on in amazement as the celestial messengers departed, leaving him alone to finish out his earth life as the Son of Man and the Son of God.
 \vs p158 1:5 The faith of the apostles was at a high point at the time of the feeding of the 5,000, and then it rapidly fell almost to zero. Now, as a result of the Master’s admission of his divinity, the lagging faith of the twelve arose in the next few weeks to its highest pitch, only to undergo a progressive decline. The third revival of their faith did not occur until after the Master’s resurrection.
-\vs p158 1:6 It was about 15:00 on this beautiful afternoon that Jesus took leave of the 3 apostles, saying: \textcolour{ubdarkred}{“I go apart by myself for a season to commune with the Father and his messengers; I bid you tarry here and, while awaiting my return, pray that the Father’s will may be done in all your experience in connection with the further bestowal mission of the Son of Man.”} And after saying this to them, Jesus withdrew for a long conference with Gabriel and the Father Melchizedek\fnst{\textbf{Gabriel and the Father Melchizedek}, Elsewhere (\bibref[35:1.2]{p035 1:2}) it is said that these two are never away from Salvington at the same time. It is possible that they were not really \bibemph{away}, but were communicating with Jesus via some kind of holographic presence.}, not returning until about 18:00. When Jesus saw their anxiety over his prolonged absence, he said: \textcolour{ubdarkred}{“Why were you afraid? You well know I must be about my Father’s business; wherefore do you doubt when I am not with you? I now declare that the Son of Man has chosen to go through his full life in your midst and as one of you. Be of good cheer; I will not leave you until my work is finished.”}
+\vs p158 1:6 It was about 15:00 on this beautiful afternoon that Jesus took leave of the 3 apostles, saying: \textcolour{ubdarkred}{“I go apart by myself for a season to commune with the Father and his messengers; I bid you tarry here and, while awaiting my return, pray that the Father’s will may be done in all your experience in connection with the further bestowal mission of the Son of Man.”} And after saying this to them, Jesus withdrew for a long conference with Gabriel and the Father Melchizedek\fnst{Elsewhere (\bibref[35:1.2]{p035 1:2}) it is said that these two are never away from Salvington at the same time. It is possible that they were not really \bibemph{away}, but were communicating with Jesus via some kind of holographic presence.}, not returning until about 18:00. When Jesus saw their anxiety over his prolonged absence, he said: \textcolour{ubdarkred}{“Why were you afraid? You well know I must be about my Father’s business; wherefore do you doubt when I am not with you? I now declare that the Son of Man has chosen to go through his full life in your midst and as one of you. Be of good cheer; I will not leave you until my work is finished.”}
 \vs p158 1:7 As they partook of their meagre evening meal, Peter asked the Master, “How long do we remain on this mountain away from our brethren?” And Jesus answered: \textcolour{ubdarkred}{“Until you shall see the glory of the Son of Man and know that whatsoever I have declared to you is true.”} And they talked over the affairs of the Lucifer rebellion while seated about the glowing embers of their fire until darkness drew on and the apostles’ eyes grew heavy, for they had begun their journey very early that morning.
 \vs p158 1:8 When the 3 had been fast asleep for about half an hour, they were suddenly awakened by a near\hyp{}by crackling sound, and much to their amazement and consternation, on looking about them, they beheld Jesus in intimate converse with two brilliant beings clothed in the habiliments of the light of the celestial world. And Jesus’ face and form shone with the luminosity of a heavenly light. These 3 conversed in a strange language, but from certain things said, Peter erroneously conjectured that the beings with Jesus were Moses and Elijah; in reality, they were Gabriel and the Father Melchizedek. The physical controllers had arranged for the apostles to witness this scene because of Jesus’ request.
 \vs p158 1:9 The 3 apostles were so badly frightened that they were slow in collecting their wits, but Peter, who was first to recover himself, said, as the dazzling vision faded from before them and they observed Jesus standing alone: “Jesus, Master, it is good to have been here. We rejoice to see this glory. We are loath to go back down to the inglorious world. If you are willing, let us abide here, and we will erect 3 tents, one for you, one for Moses, and one for Elijah.” And Peter said this because of his confusion, and because nothing else came into his mind at just that moment.
