--- a/tex/p170.tex
+++ b/tex/p170.tex
@@ -5,7 +5,7 @@
 \uminitoc{Jesus’ Teaching about the Kingdom}
 \uminitoc{Later Ideas of the Kingdom}
 \author{Midwayer Commission}
-\vs p170 0:1 Saturday afternoon, March 11, Jesus preached his last sermon at Pella. This was among the notable addresses of his public ministry, embracing a full and complete discussion of the kingdom of heaven. He was aware of the confusion which existed in the minds of his apostles and disciples regarding the meaning and significance of the terms “kingdom of heaven” and “kingdom of God,” which he used as interchangeable designations of his bestowal mission. Although the very term kingdom of \bibemph{heaven} should have been enough to separate what it stood for from all connection with \bibemph{earthly} kingdoms and temporal governments, it was not. The idea of a temporal king was too deep\hyp{}rooted in the Jewish mind thus to be dislodged in a single generation. Therefore Jesus did not at first openly oppose this long\hyp{}nourished concept of the kingdom.
+\vs p170 0:1 Saturday afternoon, March 11, Jesus\tunemarkup{pgkoboaurahd}{\linebreak} preached his last sermon at Pella. This was among the notable addresses of his public ministry, embracing a full and complete discussion of the kingdom of heaven. He was aware of the confusion which existed in the minds of his apostles and disciples regarding the meaning and significance of the terms “kingdom of heaven” and “kingdom of God,” which he used as interchangeable designations of his bestowal mission. Although the very term kingdom of \bibemph{heaven} should have been enough to separate what it stood for from all connection with \bibemph{earthly} kingdoms and temporal governments, it was not. The idea of a temporal king was too deep\hyp{}rooted in the Jewish mind thus to be dislodged in a single generation. Therefore Jesus did not at first openly oppose this long\hyp{}nourished concept of the kingdom.
 \vs p170 0:2 This Sabbath afternoon the Master sought to clarify the teaching about the kingdom of heaven; he discussed the subject from every viewpoint and endeavoured to make clear the many different senses in which the term had been used. In this narrative we will amplify the address by adding numerous statements made by Jesus on previous occasions and by including some remarks made only to the apostles during the evening discussions of this same day. We will also make certain comments dealing with the subsequent outworking of the kingdom idea as it is related to the later Christian church.
 \usection{Concepts of the Kingdom of Heaven}
 \vs p170 1:1 In connection with the recital of Jesus’ sermon it should be noted that throughout the Hebrew scriptures there was a dual concept of the kingdom of heaven. The prophets presented the kingdom of God as:
