--- a/tex/p195.tex
+++ b/tex/p195.tex
@@ -72,7 +72,7 @@
 \vs p195 5:1 The XX century has brought new problems for Christianity and all other religions to solve. The higher a civilization climbs, the more necessitous becomes the duty to “seek first the realities of heaven” in all of man’s efforts to stabilize society and facilitate the solution of its material problems.
 \vs p195 5:2 Truth often becomes confusing and even misleading when it is dismembered, segregated, isolated, and too much analysed. Living truth teaches the truth seeker aright only when it is embraced in wholeness and as a living spiritual reality, not as a fact of material science or an inspiration of intervening art.
 \vs p195 5:3 Religion is the revelation to man of his divine and eternal destiny. Religion is a purely personal and spiritual experience and must forever be distinguished from man’s other high forms of thought, such as:
-\vs p195 5:4 \ublistelem{1.}\bibnobreakspace Man’s logical attitude toward the things of material reality.
+\vs p195 5:4 \ublistelem{1.}\bibnobreakspace Man’s logical attitude toward the\tunemarkup{pgkoboaurahd}{\linebreak} things of material reality.
 \vs p195 5:5 \ublistelem{2.}\bibnobreakspace Man’s aesthetic appreciation of beauty contrasted with ugliness.
 \vs p195 5:6 \ublistelem{3.}\bibnobreakspace Man’s ethical recognition of social obligations and political duty.
 \vs p195 5:7 \ublistelem{4.}\bibnobreakspace Even man’s sense of human morality is not, in and of itself, religious.
