--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -45,7 +45,7 @@
 \vs p015 2:18 Each of the seven superuniverses is constituted, approximately, as follows:
 \vs p015 2:19 One system embraces, approximately\bibdf1,000 worlds
 \vs p015 2:20 One constellation (100 systems)\bibdf100,000 worlds
-\vs p015 2:21 One universe (100 constellations)\bibdf10,000,000 worlds
+\vs p015 2:21 One universe (100 constellations)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf10,000,000 worlds
 \vs p015 2:22 One minor sector (100 universes)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000 worlds
 \vs p015 2:23 One major sector (100 minor sectors)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf100,000,000,000 worlds
 \vs p015 2:24 One superuniverse (10 major sectors)\tunemarkup{pgkoboaurahd}{\linebreak}\bibdf1,000,000,000,000 worlds
@@ -73,8 +73,8 @@
 \vs p015 4:3 This segmentation of energy is a phenomenon which has never been solved by the physicists of Nebadon. Their chief difficulty lies in the relative inaccessibility of the Paradise force organizers, for the living power directors, though they are competent to deal with space\hyp{}energy, do not have the least conception of the origin of the energies they so skillfully and intelligently manipulate.
 \vs p015 4:4 \pc Paradise force organizers are nebulae originators; they are able to initiate about their space presence the tremendous cyclones of force which, when once started, can never be stopped or limited until the all\hyp{}pervading forces are mobilized for the eventual appearance of the ultimatonic units of universe matter. Thus are brought into being the spiral and other nebulae, the mother wheels of the direct\hyp{}origin suns and their varied systems. In outer space there may be seen ten different forms of nebulae, phases of primary universe evolution, and these vast energy wheels had the same origin as did those in the seven superuniverses.
 \vs p015 4:5 \pc Nebulae vary greatly in size and in the resulting number and aggregate mass of their stellar and planetary offspring. A sun\hyp{}forming nebula just north of the borders of Orvonton, but within the superuniverse space level, has already given origin to approximately 40,000 suns, and the mother wheel is still throwing off suns, the majority of which are many times the size of yours. Some of the larger nebulae of outer space are giving origin to as many as $10^8$ suns.
-\vs p015 4:6 Nebulae are not directly related to any of the administrative units, such as minor sectors or local universes, although some local universes have been organized from the products of a single nebula. Each local universe embraces exactly\fnst{\textbf{exactly}, In \bibref[32:1.4]{p032 1:4} we are told this is \bibemph{approximately} so, not \bibemph{exactly}. The only apparent difference is that there it refers to the \bibemph{force endowment}, whereas here to the \bibemph{energy charge} of a superuniverse.} 1/100,000\ts{th} of the total energy charge of a superuniverse irrespective of nebular relationship, for energy is not organized by nebulae --- it is universally distributed.
-\vs p015 4:7 Not all spiral nebulae are engaged in sun making. Some have retained control of many of their segregated stellar offspring, and their spiral appearance is occasioned by the fact that their suns pass out of the nebular arm in close formation but return by diverse routes, thus making it easy to observe them at one point but more difficult to see them when widely scattered on their different returning routes farther out and away from the arm of the nebula. There are not many sun\hyp{}forming nebulae active in Orvonton at the present time, though Andromeda, which is outside the inhabited superuniverse, is very active. This far\hyp{}distant nebula is visible to the naked eye, and when you view it, pause to consider that the light you behold left those distant suns almost million years\fnst{\textbf{almost million years}, The modern (2003) estimate of the distance to the Andromeda galaxy (M31) is $2.54 \pm\ 0.06 \times 10^6$ light years. The estimate given in the text corresponds to one given in the book ``Stars and Atoms'' by Sir Arthur Eddington, which was published in 1927. Edwin Hubble was the first to identify the Cepheid variable stars in M31 in 1925, thus forever settling the debate about the object being extragalactic.} ago.
+\vs p015 4:6 Nebulae are not directly related to any of the administrative units, such as minor sectors or local universes, although some local universes have been organized from the products of a single nebula. Each local universe embraces exactly\fnst{In \bibref[32:1.4]{p032 1:4} we are told this is \bibemph{approximately} so, not \bibemph{exactly}. The only apparent difference is that there it refers to the \bibemph{force endowment}, whereas here to the \bibemph{energy charge} of a superuniverse.} 1/100,000\ts{th} of the total energy charge of a superuniverse irrespective of nebular relationship, for energy is not organized by nebulae --- it is universally distributed.
+\vs p015 4:7 Not all spiral nebulae are engaged in sun making. Some have retained control of many of their segregated stellar offspring, and their spiral appearance is occasioned by the fact that their suns pass out of the nebular arm in close formation but return by diverse routes, thus making it easy to observe them at one point but more difficult to see them when widely scattered on their different returning routes farther out and away from the arm of the nebula. There are not many sun\hyp{}forming nebulae active in Orvonton at the present time, though Andromeda, which is outside the inhabited superuniverse, is very active. This far\hyp{}distant nebula is visible to the naked eye, and when you view it, pause to consider that the light you behold left those distant suns almost million years\fnst{The modern (2003) estimate of the distance to the Andromeda galaxy (M31) is $2.54 \pm\ 0.06 \times 10^6$ light years. The estimate given in the text corresponds to one given in the book ``Stars and Atoms'' by Sir Arthur Eddington, which was published in 1927. Edwin Hubble was the first to identify the Cepheid variable stars in M31 in 1925, thus forever settling the debate about the object being extragalactic.} ago.
 \vs p015 4:8 The Milky Way galaxy is composed of vast numbers of former spiral and other nebulae, and many still retain their original configuration. But as the result of internal catastrophes and external attraction, many have suffered such distortion and rearrangement as to cause these enormous aggregations to appear as gigantic luminous masses of blazing suns, like the Magellanic Cloud. The globular type of star clusters predominates near the outer margins of Orvonton.
 \vs p015 4:9 The vast star clouds of Orvonton should be regarded as individual aggregations of matter comparable to the separate nebulae observable in the space regions external to the Milky Way galaxy. Many of the so\hyp{}called star clouds of space, however, consist of gaseous material only. The energy potential of these stellar gas clouds is unbelievably enormous, and some of it is taken up by near\hyp{}by suns and redispatched in space as solar emanations.
 \usection{The Origin of Space Bodies}
@@ -102,12 +102,12 @@
 \vs p015 6:7 \pc With the exception of the architectural spheres, all space bodies have had an evolutionary origin, evolutionary in the sense that they have not been brought into being by fiat of Deity, evolutionary in the sense that the creative acts of God have unfolded by a time\hyp{}space technique through the operation of many of the created and eventuated intelligences of Deity.
 \vs p015 6:8 \pc \bibemph{The Suns.} These are the stars of space in all their various stages of existence. Some are solitary evolving space systems; others are double stars, contracting or disappearing planetary systems. The stars of space exist in no less than 1,000 different states and stages. You are familiar with suns that emit light accompanied by heat; but there are also suns which shine without heat.
 \vs p015 6:9 The trillions upon trillions of years that an ordinary sun will continue to give out heat and light well illustrates the vast store of energy which each unit of matter contains. The actual energy stored in these invisible particles of physical matter is well\hyp{}nigh unimaginable. And this energy becomes almost wholly available as light when subjected to the tremendous heat pressure and the associated energy activities which prevail in the interior of the blazing suns. Still other conditions enable these suns to transform and send forth much of the energy of space which comes their way in the established space circuits. Many phases of physical energy and all forms of matter are attracted to, and subsequently distributed by, the solar dynamos. In this way the suns serve as local accelerators of energy circulation, acting as automatic power\hyp{}control stations.
-\vs p015 6:10 The superuniverse of Orvonton is illuminated and warmed by more than ten trillion blazing suns. These suns are the stars of your observable astronomic system. More than two trillion are too distant and too small ever to be seen from Urantia. But in the master universe there are as many suns as there are glasses of water in the oceans of your world\fnst{\textbf{glasses of water in the oceans of your world}, Assuming the present value of the volume of the oceans (together with their seas) to be $1.5 \times 10^{18}\,m^3$ and a standard 250\,ml glass of water we obtain the required total number of stars: $6\times 10^{21}$.}.
+\vs p015 6:10 The superuniverse of Orvonton is illuminated and warmed by more than ten trillion blazing suns. These suns are the stars of your observable astronomic system. More than two trillion are too distant and too small ever to be seen from Urantia. But in the master universe there are as many suns as there are glasses of water in the oceans of your world\fnst{Assuming the present value of the volume of the oceans (together with their seas) to be $1.5 \times 10^{18}\,m^3$ and a standard 250\,ml glass of water we obtain the required total number of stars: $6\times 10^{21}$.}.
 \vs p015 6:11 \pc \bibemph{The Dark Islands of Space.} These are the dead suns and other large aggregations of matter devoid of light and heat. The dark islands are sometimes enormous in mass and exert a powerful influence in universe equilibrium and energy manipulation. The density of some of these large masses is well\hyp{}nigh unbelievable. And this great concentration of mass enables these dark islands to function as powerful balance wheels, holding large neighbouring systems in effective leash. They hold the gravity balance of power in many constellations; many physical systems which would otherwise speedily dive to destruction in near\hyp{}by suns are held securely in the gravity grasp of these guardian dark islands. It is because of this function that we can locate them accurately. We have measured the gravity pull of the luminous bodies, and we can therefore calculate the exact size and location of the dark islands of space which so effectively function to hold a given system steady in its course.
 \vs p015 6:12 \pc \bibemph{Minor Space Bodies.} The meteors and other small particles of matter circulating and evolving in space constitute an enormous aggregate of energy and material substance.
 \vs p015 6:13 Many comets are unestablished wild offspring of the solar mother wheels, which are being gradually brought under control of the central governing sun. Comets also have numerous other origins. A comet’s tail points away from the attracting body or sun because of the electrical reaction of its highly expanded gases and because of the actual pressure of light and other energies emanating from the sun. This phenomenon constitutes one of the positive proofs of the reality of light and its associated energies; it demonstrates that light has weight. Light is a real substance, not simply waves of hypothetical ether.
 \vs p015 6:14 \pc \bibemph{The Planets.} These are the larger aggregations of matter which follow an orbit around a sun or some other space body; they range in size from planetesimals to enormous gaseous, liquid, or solid spheres. The cold worlds which have been built up by the assemblage of floating space material, when they happen to be in proper relation to a near\hyp{}by sun, are the more ideal planets to harbour intelligent inhabitants. The dead suns are not, as a rule, suited to life; they are usually too far away from a living, blazing sun, and further, they are altogether too massive; gravity is tremendous at the surface.
-\vs p015 6:15 In your superuniverse not one cool planet in 40 is habitable by beings of your order. And, of course, the superheated suns and the frigid outlying worlds are unfit to harbour higher life. In your solar system only three planets\fnst{\textbf{only three planets}, The other two being Mars and Venus, according to A.S.\,Eddington, ``The Nature of the Physical World'', p.\,170, 1929.} are at present suited to harbour life. Urantia, in size, density, and location, is in many respects ideal for human habitation.
+\vs p015 6:15 In your superuniverse not one cool planet in 40 is habitable by beings of your order. And, of course, the superheated suns and the frigid outlying worlds are unfit to harbour higher life. In your solar system only three planets\fnst{The other two being Mars and Venus, according to A.S.\,Eddington, ``The Nature of the Physical World'', p.\,170, 1929.} are at present suited to harbour life. Urantia, in size, density, and location, is in many respects ideal for human habitation.
 \vs p015 6:16 The laws of physical\hyp{}energy behaviour are basically universal, but local influences have much to do with the physical conditions which prevail on individual planets and in local systems. An almost endless variety of creature life and other living manifestations characterizes the countless worlds of space. There are, however, certain points of similarity in a group of worlds associated in a given system, while there also is a universe pattern of intelligent life. There are physical relationships among those planetary systems which belong to the same physical circuit, and which closely follow each other in the endless swing around the circle of universes.
 \usection{The Architectural Spheres}
 \vs p015 7:1 While each superuniverse government presides near the centre of the evolutionary universes of its space segment, it occupies a world made to order and is peopled by accredited personalities. These headquarters worlds are architectural spheres, space bodies specifically constructed for their special purpose. While sharing the light of near\hyp{}by suns, these spheres are independently lighted and heated. Each has a sun which gives forth light without heat, like the satellites of Paradise, while each is supplied with heat by the circulation of certain energy currents near the surface of the sphere. These headquarters worlds belong to one of the greater systems situated near the astronomical centre of their respective superuniverses.
@@ -121,11 +121,11 @@
 \vs p015 7:9 \pc \bibemph{Umajor the fifth,} the headquarters of your major sector, Splandon, is surrounded by the 70 spheres of the advancing intellectual training of the superuniverse.
 \vs p015 7:10 \pc \bibemph{Uversa,} the headquarters of Orvonton, your superuniverse, is immediately surrounded by the 7 higher universities of advanced spiritual training for ascending will creatures. Each of these 7 clusters of wonder spheres consists of 70 specialized worlds containing thousands upon thousands of replete institutions and organizations devoted to universe training and spirit culture wherein the pilgrims of time are re\hyp{}educated and re\hyp{}examined preparatory to their long flight to Havona. The arriving pilgrims of time are always received on these associated worlds, but the departing graduates are always dispatched for Havona direct from the shores of Uversa.
 \vs p015 7:11 Uversa is the spiritual and administrative headquarters for approximately one trillion inhabited or inhabitable worlds. The glory, grandeur, and perfection of the Orvonton capital surpass any of the wonders of the time\hyp{}space creations.
-\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than 500 billion\fnst{\textbf{500 billion}, The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the 7 superuniverses.
+\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than 500 billion\fnst{The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the 7 superuniverses.
 \usection{Energy Control and Regulation}
 \vs p015 8:1 The headquarters spheres of the superuniverses are so constructed that they are able to function as efficient power\hyp{}energy regulators for their various sectors, serving as focal points for the directionization of energy to their component local universes. They exert a powerful influence over the balance and control of the physical energies circulating through organized space.
 \vs p015 8:2 Further regulative functions are performed by the superuniverse power centres and physical controllers, living and semiliving intelligent entities constituted for this express purpose. These power centres and controllers are difficult of understanding; the lower orders are not volitional, they do not possess will, they do not choose, their functions are very intelligent but apparently automatic and inherent in their highly specialized organization. The power centres and physical controllers of the superuniverses assume direction and partial control of the 30 energy systems which comprise the gravita domain. The physical\hyp{}energy circuits administered by the power centres of Uversa require a little over 968,000,000 years to complete the encirclement of the superuniverse.
-\vs p015 8:3 \pc Evolving energy has substance; it has weight, although weight is always relative, depending on revolutionary velocity, mass, and antigravity. Mass in matter tends to retard velocity in energy\fnst{\textbf{Mass in matter tends to retard velocity in energy}, Indeed, this is clear from the geometric nature of proper mass as the momentum $p_5 = m$ conjugated to the proper time $x^5 = \tau$, cf. the note on \bibref[23:3.2]{p023 3:2}.}; and the anywhere\hyp{}present velocity of energy represents: the initial endowment of velocity, minus retardation by mass encountered in transit, plus the regulatory function of the living energy controllers of the superuniverse and the physical influence of near\hyp{}by highly heated or heavily charged bodies.
+\vs p015 8:3 \pc Evolving energy has substance; it has weight, although weight is always relative, depending on revolutionary velocity, mass, and antigravity. Mass in matter tends to retard velocity in energy\fnst{Indeed, this is clear from the geometric nature of proper mass as the momentum $p_5 = m$ conjugated to the proper time $x^5 = \tau$, cf. the note on \bibref[23:3.2]{p023 3:2}.}; and the anywhere\hyp{}present velocity of energy represents: the initial endowment of velocity, minus retardation by mass encountered in transit, plus the regulatory function of the living energy controllers of the superuniverse and the physical influence of near\hyp{}by highly heated or heavily charged bodies.
 \vs p015 8:4 The universal plan for the maintenance of equilibrium between matter and energy necessitates the everlasting making and unmaking of the lesser material units. The Universe Power Directors have the ability to condense and detain, or to expand and liberate, varying quantities of energy.
 \vs p015 8:5 Given a sufficient duration of retarding influence, gravity would eventually convert all energy into matter were it not for two factors: First, because of the antigravity influences of the energy controllers, and second, because organized matter tends to disintegrate under certain conditions found in very hot stars and under certain peculiar conditions in space near highly energized cold bodies of condensed matter.
 \vs p015 8:6 When mass becomes overaggregated and threatens to unbalance energy, to deplete the physical power circuits, the physical controllers intervene unless gravity’s own further tendency to overmaterialize energy is defeated by the occurrence of a collision among the dead giants of space, thus in an instant completely dissipating the cumulative collections of gravity. In these collisional episodes enormous masses of matter are suddenly converted into the rarest form of energy, and the struggle for universal equilibrium is begun anew. Eventually the larger physical systems become stabilized, become physically settled, and are swung into the balanced and established circuits of the superuniverses. Subsequent to this event no more collisions or other devastating catastrophes will occur in such established systems.
@@ -200,7 +200,7 @@
 \vs p015 14:5 \pc Your world is called Urantia, and it is number 606 in the planetary group, or system, of Satania. This system has at present 619 inhabited worlds, and more than 200 additional planets are evolving favourably toward becoming inhabited worlds at some future time.
 \vs p015 14:6 Satania has a headquarters world called Jerusem, and it is system number 24 in the constellation of Norlatiadek. Your constellation, Norlatiadek, consists of 100 local systems and has a headquarters world called Edentia. Norlatiadek is number 70 in the universe of Nebadon. The local universe of Nebadon consists of 100 constellations and has a capital known as Salvington. The universe of Nebadon is number 84 in the minor sector of Ensa.
 \vs p015 14:7 The minor sector of Ensa consists of 100 local universes and has a capital called Uminor the 3\ts{rd}. This minor sector is number 3 in the major sector of Splandon. Splandon consists of 100 minor sectors and has a headquarters world called Umajor the 5\ts{th}. It is the 5\ts{th} major sector of the superuniverse of Orvonton, the 7\ts{th} segment of the grand universe. Thus you can locate your planet in the scheme of the organization and administration of the universe of universes.
-\vs p015 14:8 The grand universe number of your world, Urantia, is 5,342,482,337,666\fnst{\textbf{5,342,482,337,666}, How are the 7 celestial coordinates of our planet just given (7, 5, 3, 84, 70, 24, 606) encoded in the registry number? It is possible that the \bibemph{decimal} status is included as well and, together with the planet's number 606, it is represented in the final digits 666, see the note on \bibref[58:1.1]{p058 1:1}.}. That is the registry number on Uversa and on Paradise, your number in the catalogue of the inhabited worlds. I know the physical\hyp{}sphere registry number, but it is of such an extraordinary size that it is of little practical significance to the mortal mind.
+\vs p015 14:8 The grand universe number of your world, Urantia, is 5,342,482,337,666\fnst{How are the 7 celestial coordinates of our planet just given (7, 5, 3, 84, 70, 24, 606) encoded in the registry number? It is possible that the \bibemph{decimal} status is included as well and, together with the planet's number 606, it is represented in the final digits 666, see the note on \bibref[58:1.1]{p058 1:1}.}. That is the registry number on Uversa and on Paradise, your number in the catalogue of the inhabited worlds. I know the physical\hyp{}sphere registry number, but it is of such an extraordinary size that it is of little practical significance to the mortal mind.
 \vs p015 14:9 \pc Your planet is a member of an enormous cosmos; you belong to a well\hyp{}nigh infinite family of worlds, but your sphere is just as precisely administered and just as lovingly fostered as if it were the only inhabited world in all existence.
 \vsetoff
 \vs p015 14:10 [Presented by a Universal Censor hailing from Uversa.]
