--- a/tex/p023.tex
+++ b/tex/p023.tex
@@ -30,7 +30,7 @@
 \vs p023 2:10 \pc These spirit messengers are in every sense interchangeable from one type of service to another; such transfers are constantly taking place. There are no separate orders of Solitary Messengers; they are spiritually alike and in every sense equal. While they are generally designated by number, they are known to the Infinite Spirit by personal names. They are known to the rest of us by the name or number designative of their current assignment.
 \vs p023 2:11 \ublistelem{1.}\bibnobreakspace \bibemph{Messengers of the Paradise Trinity.} I am not permitted to reveal much of the work of the group of messengers assigned to the Trinity. They are the trusted and secret servants of the Deities, and when entrusted with special messages which involve the unrevealed policies and future conduct of the Gods, they have never been known to divulge a secret or betray the confidence reposed in their order. And all this is related in this connection, not to appear boastful of their perfection, but rather to point out that the Deities can and do create \bibemph{perfect beings.}
 \vs p023 2:12 The confusion and turmoil of Urantia do not signify that the Paradise Rulers lack either interest or ability to manage affairs differently. The Creators are possessed of full power to make Urantia a veritable paradise, but such an Eden would not contribute to the development of those strong, noble, and experienced characters which the Gods are so surely forging out on your world between the anvils of necessity and the hammers of anguish. Your anxieties and sorrows, your trials and disappointments, are just as much a part of the divine plan on your sphere as are the exquisite perfection and infinite adaptation of all things to their supreme purpose on the worlds of the central and perfect universe.
-\vs p023 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{Messengers of the Havona Circuits.}\tunemarkup{pgkoboaurahd}{\linebreak} Throughout the ascendant career you will be vaguely, but increasingly, able to detect the presence of the Solitary Messengers, but not until you reach Havona will you recognize them unmistakably. The first of the messengers you will see face to face will be those of the Havona circuits.
+\vs p023 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{Messengers of the Havona Circuits.} Throughout the ascendant career you will be vaguely, but increasingly, able to detect the presence of the Solitary Messengers, but not until you reach Havona will you recognize them unmistakably. The first of the messengers you will see face to face will be those of the Havona circuits.
 \vs p023 2:14 Solitary Messengers enjoy special relations with the natives of the Havona worlds. These messengers, who are so functionally handicapped when associating with one another, can and do have a very close and personal communion with the Havona natives. But it is quite impossible to convey to human minds the supreme satisfactions consequent upon the contact of the minds of these divinely perfect beings with the spirits of such near\hyp{}transcendent personalities.
 \vs p023 2:15 \ublistelem{3.}\bibnobreakspace \bibemph{Messengers of the Superuniverses.} The Ancients of Days, those personalities of Trinity origin who preside over the destinies of the seven superuniverses, those trios of divine power and administrative wisdom, are bountifully supplied with Solitary Messengers. It is only through this order of messengers that the triune rulers of one superuniverse can directly and personally communicate with the rulers of another. Solitary Messengers are the only available type of spirit intelligence --- aside, possibly, from the Inspired Trinity Spirits --- that can be dispatched from the headquarters of one superuniverse directly to the headquarters of another. All other personalities must make such excursions by way of Havona and the executive worlds of the Master Spirits.
 \vs p023 2:16 There are some kinds of information which cannot be obtained either by Gravity Messengers, reflectivity, or broadcast. And when the Ancients of Days would certainly know these things, they must dispatch a Solitary Messenger to the source of knowledge. Long before the presence of life on Urantia the messenger now associated with me was assigned on a mission out of Uversa to the central universe --- was absent from the roll calls of Orvonton for almost 1,000,000 years but returned in due time with the desired information.
@@ -44,7 +44,7 @@
 \vs p023 2:24 \ublistelem{7.}\bibnobreakspace \bibemph{Revelators of Truth.} The Solitary Messengers regard the assignment to reveal truth as the highest trust of their order. And they function ever and anon in this capacity, from the superuniverses to the individual planets of space. They are frequently attached to commissions which are sent to enlarge the revelation of truth to the worlds and systems.
 \usection{Time and Space Services of Solitary Messengers}
 \vs p023 3:1 The Solitary Messengers are the highest type of perfect and confidential personality available in all realms for the quick transmission of important and urgent messages when it is inexpedient to utilize either the broadcast service or the reflectivity mechanism. They serve in an endless variety of assignments, helping out the spiritual and material beings of the realms, particularly where the element of time is involved. Of all orders assigned to the services of the superuniverse domains, they are the highest and most versatile personalized beings who can come so near to defying time and space.
-\vs p023 3:2 \pc The universe is well supplied with spirits who utilize gravity for purposes of transit; they can go anywhere any time --- instanter --- but they are not persons. Certain other gravity traversers are personal beings, such as Gravity Messengers and Transcendental Recorders, but they are not available to the super\hyp{} and the local universe administrators. The worlds teem with angels and men and other highly personal beings, but they are handicapped by time and space: The limit of velocity for most nonenseraphimed beings is 299,789 kilometres of your world per second of your time\fnst{\textbf{299,789 kilometres of your world per second of your time}, Note that the speed of light is \bibemph{exactly} 299,792,458 m/s. The original American text says ``186,280 miles of your world per second of your time'', which is somewhat lower than the value 299,796$\pm 4$\,km/s measured in 1926 by Albert Michelson.}; the midway creatures and certain others can, often do, attain double velocity --- 599,577 km/s --- while the seraphim and others can traverse space at triple velocity, about 899,367 km/s\fnst{\textbf{899,367 km/s}. I have worked out the mathematical details of a possibility of travelling faster than the speed of light by interpreting the fifth dimension of Kaluza's ``unified field theory of gravitation and electromagnetism'' as \bibemph{proper time} $\tau$ and the momentum conjugated to it (the total phase space being the cotangent bundle over a 5-dimensional Lorentzian manifold $\mathcal{M}$ of signature $(-,+,+,+,+)$) as \bibemph{rest mass} $m$: $x^{\mu} = (t,\mathbf{r},\tau), p_{\mu}=(E,\mathbf{p},m)$, thus explicitly manifesting the geometric nature of rest mass (as opposed to it being an \bibemph{inherent constant parameter}). Therefore, the ordinary 4-dimensional mass shell constraint $E^2 = \mathbf{p}^2 + m^2, g(p,p) + m^2 = 0$ appears as nothing but the restriction on all matter being supported on the ``lightlike cone in 5-dimensions'': $G(p,p)=0$, where $g$ and $G$ are 4d and 5d metric tensors respectively. Thus, all energy is ``lightlike'' in 5 dimensions, but as this ``lightlike energy'' undergoes slowing down, it manifests itself (i.e. its projection to a 4-dimensional spacetime submanifold) as a normal ``massive material energy''. In such interpretation of Kaluza's fifth dimension there is no need whatsoever for Klein's constraint of $S^1$-compactification thereof. Moreover, it is easily seen that the modern offshoots of Kaluza-Klein model (superstring theories, etc.), which impose such constraints are nothing more than the special cases of \bibemph{monstrous} situations of energy somehow locked in a loop of time\hyp{}perception. Our ``normal'' perception of time is linear (and has a topology of a closed interval $[a,b] \subset \mathbb{R}^1$) and no such compactification constraints are demanded. Note, further, that the velocity in the fifth dimension (as measured with respect to the coordinate time $t$) is extremely high for slow movements in purely spatial dimension: $d\tau/dt=\sqrt{1 - v^2}$. Hence, if we can imagine a surface capable of reflecting the momentum in $\tau$-dimension (thus causing \bibemph{dematerialization}, i.e. passing through the point $m=0$ in the phase space) into one of the purely spatial dimensions (just like an ordinary elastic collision at an angle of 45° causes a reflection of, say $p_x$ momentum component into $p_y$), we would expect by the law of conservation of 5-momentum the corresponding spatial momentum to be likewise extremely high, even equal to that of light if the process begins from purely spatial rest ($\mathbf{p}=0$). And, having crossed ``the light barrier'', there is then nothing peculiar about accelerating to an even higher speed, this being permitted even by such limited treatment of the material reality as Einstein's Special Relativity theory in four dimensions. The surface itself would have to be immovable in (coordinate) time, such as the Isle of Paradise, which we are told is reachable from any point in space by moving inward, the Paradise itself remaining outside space and time. This implies that superluminal travel is possible from any point in space, but some sort of contact with the Isle of Paradise or other such ``surface immovable in time'' (or some other dematerialization technique) is required --- and this is apparently facilitated by the transport seraphim.}. There are, however, no transit or messenger personalities who function between the instantaneous velocities of the gravity traversers and the comparatively slow speeds of the seraphim, except the Solitary Messengers.
+\vs p023 3:2 \pc The universe is well supplied with spirits who utilize gravity for purposes of transit; they can go anywhere any time --- instanter --- but they are not persons. Certain other gravity traversers are personal beings, such as Gravity Messengers and Transcendental Recorders, but they are not available to the super\hyp{} and the local universe administrators. The worlds teem with angels and men and other highly personal beings, but they are handicapped by time and space: The limit of velocity for most nonenseraphimed beings is 299,789 kilometres of your world per second of your time\fnst{Note that the speed of light is \bibemph{exactly} 299,792,458 m/s. The original American text says ``186,280 miles of your world per second of your time'', which is somewhat lower than the value 299,796$\pm 4$\,km/s measured in 1926 by Albert Michelson.}; the midway creatures and certain others can, often do, attain double velocity --- 599,577 km/s --- while the seraphim and others can traverse space at triple velocity, about 899,367 km/s\fnst{I have worked out the mathematical details of a possibility of travelling faster than the speed of light by interpreting the fifth dimension of Kaluza's ``unified field theory of gravitation and electromagnetism'' as \bibemph{proper time} $\tau$ and the momentum conjugated to it (the total phase space being the cotangent bundle over a 5-dimensional Lorentzian manifold $\mathcal{M}$ of signature $(-,+,+,+,+)$) as \bibemph{rest mass} $m$: $x^{\mu} = (t,\mathbf{r},\tau), p_{\mu}=(E,\mathbf{p},m)$, thus explicitly manifesting the geometric nature of rest mass (as opposed to it being an \bibemph{inherent constant parameter}). Therefore, the ordinary 4-dimensional mass shell constraint $E^2 = \mathbf{p}^2 + m^2, g(p,p) + m^2 = 0$ appears as nothing but the restriction on all matter being supported on the ``lightlike cone in 5-dimensions'': $G(p,p)=0$, where $g$ and $G$ are 4d and 5d metric tensors respectively. Thus, all energy is ``lightlike'' in 5 dimensions, but as this ``lightlike energy'' undergoes slowing down, it manifests itself (i.e. its projection to a 4-dimensional spacetime submanifold) as a normal ``massive material energy''. In such interpretation of Kaluza's fifth dimension there is no need whatsoever for Klein's constraint of $S^1$-compactification thereof. Moreover, it is easily seen that the modern offshoots of Kaluza-Klein model (superstring theories, etc.), which impose such constraints are nothing more than the special cases of \bibemph{monstrous} situations of energy somehow locked in a loop of time\hyp{}perception. Our ``normal'' perception of time is linear (and has a topology of a closed interval $[a,b] \subset \mathbb{R}^1$) and no such compactification constraints are demanded. Note, further, that the velocity in the fifth dimension (as measured with respect to the coordinate time $t$) is extremely high for slow movements in purely spatial dimension: $d\tau/dt=\sqrt{1 - v^2}$. Hence, if we can imagine a surface capable of reflecting the momentum in $\tau$-dimension (thus causing \bibemph{dematerialization}, i.e. passing through the point $m=0$ in the phase space) into one of the purely spatial dimensions (just like an ordinary elastic collision at an angle of 45° causes a reflection of, say $p_x$ momentum component into $p_y$), we would expect by the law of conservation of 5-momentum the corresponding spatial momentum to be likewise extremely high, even equal to that of light if the process begins from purely spatial rest ($\mathbf{p}=0$). And, having crossed ``the light barrier'', there is then nothing peculiar about accelerating to an even higher speed, this being permitted even by such limited treatment of the material reality as Einstein's Special Relativity theory in four dimensions. The surface itself would have to be immovable in (coordinate) time, such as the Isle of Paradise, which we are told is reachable from any point in space by moving inward, the Paradise itself remaining outside space and time. This implies that superluminal travel is possible from any point in space, but some sort of contact with the Isle of Paradise or other such ``surface immovable in time'' (or some other dematerialization technique) is required --- and this is apparently facilitated by the transport seraphim.}. There are, however, no transit or messenger personalities who function between the instantaneous velocities of the gravity traversers and the comparatively slow speeds of the seraphim, except the Solitary Messengers.
 \vs p023 3:3 Solitary Messengers are, therefore, generally used for dispatch and service in those situations where personality is essential to the achievement of the assignment, and where it is desired to avoid the loss of time which would be occasioned by the sending of any other readily available type of personal messenger. They are the only definitely personalized beings who can synchronize with the combined universal currents of the grand universe. Their velocity in traversing space is variable, depending on a great variety of interfering influences, but the record shows that on the journey to fulfil this mission my associate messenger proceeded at the rate of 1,354,458,739,823 km/s.
 \vs p023 3:4 It is wholly beyond my ability to explain to the material type of mind how a spirit can be a real person and at the same time traverse space at such tremendous velocities. But these very Solitary Messengers actually come to, and go from, Urantia at these incomprehensible speeds; indeed, the whole economy of universal administration would be largely deprived of its personal element were this not a fact.
 \vs p023 3:5 \pc The Solitary Messengers are able to function as emergency lines of communication throughout remote space regions, realms not embraced within the established circuits of the grand universe. It develops that one messenger, when so functioning, can transmit a message or send an impulse through space to a fellow messenger about 100 light\hyp{}years away as Urantia astronomers estimate stellar distances.
