--- a/tex/p026.tex
+++ b/tex/p026.tex
@@ -88,7 +88,7 @@
 \vs p026 8:1 The fourth Havona circuit is sometimes called the “circuit of the Sons.” From the worlds of this circuit the ascending pilgrims go to Paradise to achieve an understanding contact with the Eternal Son, while on the worlds of this circuit the descending pilgrims achieve a new comprehension of the nature and mission of the Creator Sons of time and space. There are seven worlds in this circuit on which the reserve corps of the Paradise Michaels maintain special service schools of mutual ministry to both the ascending and descending pilgrims; and it is on these worlds of the Michael Sons that the pilgrims of time and the pilgrims of eternity arrive at their first truly mutual understanding of one another. In many respects the experiences of this circuit are the most intriguing of the entire Havona sojourn.
 \vs p026 8:2 The Son finders are the superaphic ministers to the ascending mortals of the fourth circuit. In addition to the general work of preparing their candidates for a realization of the Trinity relationships of the Eternal Son, these Son finders must so fully instruct their subjects that they will be wholly successful: first, in the adequate spiritual comprehension of the Son; second, in the satisfactory personality recognition of the Son; and third, in the proper differentiation of the Son from the personality of the Infinite Spirit.
 \vs p026 8:3 After the attainment of the Infinite Spirit, no more examinations are conducted. The tests of the inner circles are the performances of the pilgrim candidates when in the embrace of the enshroudment of the Deities. Advancement is determined purely by the spirituality of the individual, and no one but the Gods presumes to pass upon this possession. In the event of failure no reasons are ever assigned, neither are the candidates themselves nor their various tutors and guides ever chided or criticized. On Paradise, disappointment is never regarded as defeat; postponement is never looked upon as disgrace; the apparent failures of time are never confused with the significant delays of eternity.
-\vs p026 8:4 \pc Not many pilgrims experience the delay of seeming failure in the Deity adventure. Nearly all attain the Infinite Spirit, though occasionally a pilgrim from superuniverse number one does not succeed on the first attempt. The pilgrims who attain the Spirit seldom fail in finding the Son; of those who do fail on the first adventure, almost all hail from superuniverses three and five. The great majority of those who fail on the first adventure to attain the Father, after finding both the Spirit and the Son, hail from superuniverse number six, though a few from numbers two and three\fnst{\textbf{two and three}, The pattern observed here suggests that it is harder for the pilgrims hailing from a superuniverse not expressing the nature of a particular Paradise Deity to recognize that Deity on the first attempt.} are likewise unsuccessful. And all this seems clearly to indicate that there is some good and sufficient reason for these apparent failures; in reality, simply unescapable delays.
+\vs p026 8:4 \pc Not many pilgrims experience the delay of seeming failure in the Deity adventure. Nearly all attain the Infinite Spirit, though occasionally a pilgrim from superuniverse number one does not succeed on the first attempt. The pilgrims who attain the Spirit seldom fail in finding the Son; of those who do fail on the first adventure, almost all hail from superuniverses three and five. The great majority of those who fail on the first adventure to attain the Father, after finding both the Spirit and the Son, hail from superuniverse number six, though a few from numbers two and three\fnst{The pattern observed here suggests that it is harder for the pilgrims hailing from a superuniverse not expressing the nature of a particular Paradise Deity to recognize that Deity on the first attempt.} are likewise unsuccessful. And all this seems clearly to indicate that there is some good and sufficient reason for these apparent failures; in reality, simply unescapable delays.
 \vs p026 8:5 The defeated candidates for the Deity adventure are placed under the jurisdiction of the chiefs of assignment, a group of primary supernaphim, and are remanded to the work of the realms of space for a period of not less than one millennium. They never return to the superuniverse of their nativity, always to that supercreation most propitious for their retraining in preparation for the second Deity adventure. Following this service, on their own motion, they return to the outer circle of Havona, are immediately escorted to the circle of their interrupted career, and at once resume their preparations for the Deity adventure. Never do the secondary supernaphim fail to pilot their subjects successfully on the second attempt, and the same superaphic ministers and other guides always attend these candidates during this second adventure.
 \usection{The Father Guides}
 \vs p026 9:1 When the pilgrim soul attains the third circle of Havona, he comes under the tutelage of the Father guides, the older, highly skilled, and most experienced of the superaphic ministers. On the worlds of this circuit the Father guides maintain schools of wisdom and colleges of technique wherein all the beings inhabiting the central universe serve as teachers. Nothing is neglected which would be of service to a creature of time in this transcendent adventure of eternity attainment.
