--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -23,14 +23,14 @@
 \vs p036 2:8 \ublistelem{7.}\bibnobreakspace The sphere of unrevealed life.
 \vs p036 2:9 \pc Each of these primary spheres is surrounded by six satellites, on which the special phases of all the Life Carrier activities in the universe are centred.
 \vs p036 2:10 \pc \bibemph{World Number One,} the headquarters sphere, together with its 6 tributary satellites, is devoted to the study of universal life, life in all of its known phases of manifestation. Here is located the college of life planning, wherein function teachers and advisers from Uversa and Havona, even from Paradise. And I am permitted to reveal that the 7 central emplacements of the adjutant mind\hyp{}spirits are situated on this world of the Life Carriers.
-\vs p036 2:11 The number 10 --- the decimal system --- is inherent in the physical universe but not in the spiritual. The domain of life is characterized by 3, 7, and 12 or by multiples and combinations of these basic numbers. There are three primal and essentially different life plans, after the order of the three Paradise Sources and Centres, and in the universe of Nebadon these three basic forms of life are segregated on three different types of planets\fnst{\textbf{three different types of planets}, These three different types of planets and the corresponding three different life plans are: evolutionary planets --- material life, system and constellation spheres (cf. \bibref[48:1.2]{p048 1:2}) --- morontia life and the worlds of the Salvington cluster --- spirit life.}. There were, originally, 12 distinct and divine concepts of transmissible life. This number 12, with its subdivisions and multiples, runs throughout all basic life patterns of all 7 superuniverses. There are also 7 architectural types of life design, fundamental arrangements of the reproducing configurations of living matter. The Orvonton life patterns are configured as 12 inheritance carriers. The differing orders of will creatures are configured as 12, 24, 48, 96, 192, 384, and 768. On Urantia there are 48\fnst{\textbf{48}, These ``trait determiners'' and ``chromosomes'' are not the same thing, because the number of chromosome pairs in a single human sex cell is 23, not 48. There are 24 different chromosomes in human cells: 22 autosomes, the X, and the Y. Each chromosome contains a single DNA molecule, which contains two gene strands and thus represents two trait determiners. Therefore, there are really 48 (24$\times$2) trait determiners in sex cells, despite the fact that no single sex cell contains all 48. It is curious to note that the accepted number of chromosomes for humans at the time of revelation (1935) was 48, but the role of DNA in trait determination was as yet unknown. The authors of this revelation were able to present us with information which was consistent with the accepted scientific truth of the day in which it appeared and also remained consistent in the light of new discoveries.} units of pattern control --- trait determiners --- in the sex cells of human reproduction.
+\vs p036 2:11 The number 10 --- the decimal system --- is inherent in the physical universe but not in the spiritual. The domain of life is characterized by 3, 7, and 12 or by multiples and combinations of these basic numbers. There are three primal and essentially different life plans, after the order of the three Paradise Sources and Centres, and in the universe of Nebadon these three basic forms of life are segregated on three different types of planets\fnst{These three different types of planets and the corresponding three different life plans are: evolutionary planets --- material life, system and constellation spheres (cf. \bibref[48:1.2]{p048 1:2}) --- morontia life and the worlds of the Salvington cluster --- spirit life.}. There were, originally, 12 distinct and divine concepts of transmissible life. This number 12, with its subdivisions and multiples, runs throughout all basic life patterns of all 7 superuniverses. There are also 7 architectural types of life design, fundamental arrangements of the reproducing configurations of living matter. The Orvonton life patterns are configured as 12 inheritance carriers. The differing orders of will creatures are configured as 12, 24, 48, 96, 192, 384, and 768. On Urantia there are 48\fnst{The ``trait determiners'' and ``chromosomes'' are not the same thing, because the number of chromosome pairs in a single human sex cell is 23, not 48. There are 24 different chromosomes in human cells: 22 autosomes, the X, and the Y. Each chromosome contains a single DNA molecule, which contains two gene strands and thus represents two trait determiners. Therefore, there are really 48 (24$\times$2) trait determiners in sex cells, despite the fact that no single sex cell contains all 48. It is curious to note that the accepted number of chromosomes for humans at the time of revelation (1935) was 48, but the role of DNA in trait determination was as yet unknown. The authors of this revelation were able to present us with information which was consistent with the accepted scientific truth of the day in which it appeared and also remained consistent in the light of new discoveries.} units of pattern control --- trait determiners --- in the sex cells of human reproduction.
 \vs p036 2:12 \pc \bibemph{The Second World} is the life\hyp{}designing sphere; here all new modes of life organization are worked out. While the original life designs are provided by the Creator Son, the actual outworking of these plans is entrusted to the Life Carriers and their associates. When the general life plans for a new world have been formulated, they are transmitted to the headquarters sphere, where they are minutely scrutinized by the supreme council of the senior Life Carriers in collaboration with a corps of consulting Melchizedeks. If the plans are a departure from previously accepted formulas, they must be passed upon, and endorsed by, the Creator Son. The chief of Melchizedeks often represents the Creator Son in these deliberations.
 \vs p036 2:13 Planetary life, therefore, while similar in some respects, differs in many ways on each evolutionary world. Even in a uniform life series in a single family of worlds, life is not exactly the same on any two planets; there is always a planetary type, for the Life Carriers work constantly in an effort to improve the vital formulas committed to their keeping.
 \vs p036 2:14 There are over 1,000,000 fundamental or cosmic chemical formulas which constitute the parent patterns and the numerous basic functional variations of life manifestations. Satellite number one of the life\hyp{}planning sphere is the realm of the universe physicists and electrochemists who serve as technical assistants to the Life Carriers in the work of capturing, organizing, and manipulating the essential units of energy which are employed in building up the material vehicles of life transmission, the so\hyp{}called germ plasm.
 \vs p036 2:15 The planetary life\hyp{}planning laboratories are situated on the second satellite of this world number two. In these laboratories the Life Carriers and all their associates collaborate with the Melchizedeks in the effort to modify and possibly improve the life designed for implantation on the \bibemph{decimal planets} of Nebadon. The life now evolving on Urantia was planned and partially worked out on this very world, for Urantia is a decimal planet, a life\hyp{}experiment world. On 1 world in each 10 a greater variance in the standard life designs is permitted than on the other (nonexperimental) worlds.
 \vs p036 2:16 \pc \bibemph{World Number Three} is devoted to the conservation of life. Here various modes of life protection and preservation are studied and developed by the assistants and custodians of the Life Carrier corps. The life plans for every new world always provide for the early establishment of the life\hyp{}conservation commission, consisting of custodian specialists in the expert manipulation of the basic life patterns. On Urantia there were 24 such custodian commissioners, two for each fundamental or parent pattern of the architectural organization of the life material. On planets such as yours the highest form of life is reproduced by a life\hyp{}carrying bundle which possesses 24 pattern units. (And since the intellectual life grows out of, and upon the foundation of, the physical, there come into existence the four and twenty basic orders of psychic organization.)
 \vs p036 2:17 \pc \bibemph{Sphere Number Four} and its tributary satellites are devoted to the study of the evolution of creature life in general and to the evolutionary antecedents of any one life level in particular. The original life plasm of an evolutionary world must contain the full potential for all future developmental variations and for all subsequent evolutionary changes and modifications. The provision for such far\hyp{}reaching projects of life metamorphosis may require the appearance of many apparently useless forms of animal and vegetable life. Such by\hyp{}products of planetary evolution, foreseen or unforeseen, appear upon the stage of action only to disappear, but in and through all this long process there runs the thread of the wise and intelligent formulations of the original designers of the planetary life plan and species scheme. The manifold by\hyp{}products of biologic evolution are all essential to the final and full function of the higher intelligent forms of life, notwithstanding that great outward disharmony may prevail from time to time in the long upward struggle of the higher creatures to effect the mastery of the lower forms of life, many of which are sometimes so antagonistic to the peace and comfort of the evolving will creatures.
-\vs p036 2:18 \pc \bibemph{Number Five World} is concerned wholly with life associated with mind. Each of its satellites is devoted to the study of a single phase of creature mind correlated with creature life. Mind such as man comprehends is an endowment of the 7 adjutant mind\hyp{}spirits superimposed on the nonteachable or mechanical levels of mind\fnst{\textbf{superimposed on the nonteachable or mechanical levels of mind}, That is the level of individual cells or organs composed of similar cells (or, more correctly, of tissues, which are made up of cells). Thus, when an esoteric guru ``asks'' his own (or someone else's!) heart to slow down or the liver to heal itself, he in effect communes with such nonteachable or mechanical level of mind.} by the agencies of the Infinite Spirit. The life patterns are variously responsive to these adjutants and to the different spirit ministries operating throughout the universes of time and space. The capacity of material creatures to effect spirit response is entirely dependent on the associated mind endowment, which, in turn, has directionized the course of the biologic evolution of these same mortal creatures.
+\vs p036 2:18 \pc \bibemph{Number Five World} is concerned wholly with life associated with mind. Each of its satellites is devoted to the study of a single phase of creature mind correlated with creature life. Mind such as man comprehends is an endowment of the 7 adjutant mind\hyp{}spirits superimposed on the nonteachable or mechanical levels of mind\fnst{That is the level of individual cells or organs composed of similar cells (or, more correctly, of tissues, which are made up of cells). Thus, when an esoteric guru ``asks'' his own (or someone else's!) heart to slow down or the liver to heal itself, he in effect communes with such nonteachable or mechanical level of mind.} by the agencies of the Infinite Spirit. The life patterns are variously responsive to these adjutants and to the different spirit ministries operating throughout the universes of time and space. The capacity of material creatures to effect spirit response is entirely dependent on the associated mind endowment, which, in turn, has directionized the course of the biologic evolution of these same mortal creatures.
 \vs p036 2:19 \pc \bibemph{World Number Six} is dedicated to the correlation of mind with spirit as they are associated with living forms and organisms. This world and its six tributaries embrace the schools of creature co\hyp{}ordination, wherein teachers from both the central universe and the superuniverse collaborate with the Nebadon instructors in presenting the highest levels of creature attainment in time and space.
 \vs p036 2:20 \pc \bibemph{The Seventh Sphere} of the Life Carriers is dedicated to the unrevealed domains of evolutionary creature life as it is related to the cosmic philosophy of the expanding factualization of the Supreme Being.
 \usection{Life Transplantation}
@@ -46,7 +46,7 @@
 \usection{Melchizedek Life Carriers}
 \vs p036 4:1 In every local system of inhabited worlds throughout Nebadon there is a single sphere whereon the Melchizedeks have functioned as life carriers. These abodes are known as the system \bibemph{midsonite} worlds, and on each of them a materially modified Melchizedek Son has mated with a selected Daughter of the material order of sonship. The Mother Eves of such midsonite worlds are dispatched from the system headquarters of jurisdiction, having been chosen by the designated Melchizedek life carrier from among the numerous volunteers who respond to the call of the System Sovereign addressed to the Material Daughters of his sphere.
 \vs p036 4:2 The progeny of a Melchizedek life carrier and a Material Daughter are known as \bibemph{midsoniters.} The Melchizedek father of such a race of supernal creatures eventually leaves the planet of his unique life function, and the Mother Eve of this special order of universe beings also departs upon the appearance of the 7\ts{th} generation of planetary offspring. The direction of such a world then devolves upon her eldest son.
-\vs p036 4:3 The midsonite creatures live and function as reproducing beings on their magnificent worlds until they are 1,000 standard years of age; whereupon they are translated by seraphic transport. Midsoniters are nonreproducing beings thereafter because the technique of dematerialization which they pass through in preparation for enseraphiming forever deprives them of reproductive prerogatives\fnst{\textbf{dematerialization \ldots\ forever deprives them of reproductive prerogatives}, Is this also true of normal human mortals? If so, then it would appear that the experiences of Betty Andreasson cannot be explained as a journey in the transport seraphim. Rather, they were more likely to be the projections of the Thought Adjuster of this highly spiritually developed person, permeated by love and unselfish service. The evidence for Betty being enseraphimed is based solely on her perception of immersion in the white liquid-like cloudy substance during the trip, which also formed a part of my own \bibemph{very similar} experiences. However, we know too little about the mechanism of the detachment of Thought Adjuster from the body to conclude that ``passing through the white cloud'' (as was witnessed by several other prophets, both ancient and modern) is necessarily an indication of being transport-enseraphimed. For more information I recommend the series of five books by Raymond~E. Fowler which document the numerous contacts of Betty Andreasson with what appears to be the seraphic Planetary Government, namely: 1. \bibemph{The Andreasson Affair}, 2. \bibemph{The Andreasson Affair: Phase Two}, 3. \bibemph{The Watchers}, 4. \bibemph{The Watchers II}, 5. \bibemph{The Andreasson Legacy}. Note, however, that 99\% of the information presented in these books is sheer imagination (due to inevitable \bibemph{hypnotic confabulation}), so one has to exercise wisdom to extract the precious remaining 1\% of real truth.}.
+\vs p036 4:3 The midsonite creatures live and function as reproducing beings on their magnificent worlds until they are 1,000 standard years of age; whereupon they are translated by seraphic transport. Midsoniters are nonreproducing beings thereafter because the technique of dematerialization which they pass through in preparation for enseraphiming forever deprives them of reproductive prerogatives\fnst{Is this also true of normal human mortals? If so, then it would appear that the experiences of Betty Andreasson cannot be explained as a journey in the transport seraphim. Rather, they were more likely to be the projections of the Thought Adjuster of this highly spiritually developed person, permeated by love and unselfish service. The evidence for Betty being enseraphimed is based solely on her perception of immersion in the white liquid-like cloudy substance during the trip, which also formed a part of my own \bibemph{very similar} experiences. However, we know too little about the mechanism of the detachment of Thought Adjuster from the body to conclude that ``passing through the white cloud'' (as was witnessed by several other prophets, both ancient and modern) is necessarily an indication of being transport-enseraphimed. For more information I recommend the series of five books by Raymond~E. Fowler which document the numerous contacts of Betty Andreasson with what appears to be the seraphic Planetary Government, namely: 1. \bibemph{The Andreasson Affair}, 2. \bibemph{The Andreasson Affair: Phase Two}, 3. \bibemph{The Watchers}, 4. \bibemph{The Watchers II}, 5. \bibemph{The Andreasson Legacy}. Note, however, that 99\% of the information presented in these books is sheer imagination (due to inevitable \bibemph{hypnotic confabulation}), so one has to exercise wisdom to extract the precious remaining 1\% of real truth.}.
 \vs p036 4:4 The present status of these beings can hardly be reckoned as either mortal or immortal, neither can they be definitely classified as human or divine. These creatures are not Adjuster indwelt, hence hardly immortal. But neither do they seem to be mortal; no midsoniter has experienced death. All midsoniters ever born in Nebadon are alive today, functioning on their native worlds, on some intervening sphere, or on the Salvington midsonite sphere in the finaliters’ group of worlds.
 \vs p036 4:5 \pc \bibemph{The Salvington Worlds of the Finaliters.} The Melchizedek life carriers, as well as the associated Mother Eves, go from the system midsonite spheres to the finaliters’ worlds of the Salvington circuit, where their offspring are also destined to forgather.
 \vs p036 4:6 It should be explained in this connection that the fifth group of 7 primary worlds in the Salvington circuit are the Nebadon worlds of the finaliters. The children of the Melchizedek life carriers and the Material Daughters are domiciled on the 7\ts{th} world of the finaliters, the Salvington midsonite sphere.
