--- a/tex/p053.tex
+++ b/tex/p053.tex
@@ -17,7 +17,7 @@
 \vs p053 1:3 Lucifer is now the fallen and deposed Sovereign of Satania. Self\hyp{}contemplation is most disastrous, even to the exalted personalities of the celestial world. Of Lucifer it was said: “Your heart was lifted up because of your beauty; you corrupted your wisdom because of your brightness.” Your olden prophet saw his sad estate when he wrote: “How are you fallen from heaven, O Lucifer, son of the morning! How are you cast down, you who dared to confuse the worlds!”
 \vs p053 1:4 Very little was heard of Lucifer on Urantia owing to the fact that he assigned his first lieutenant, Satan, to advocate his cause on your planet. Satan was a member of the same primary group of Lanonandeks but had never functioned as a System Sovereign; he entered fully into the Lucifer insurrection. The “devil” is none other than Caligastia, the deposed Planetary Prince of Urantia and a Son of the secondary order of Lanonandeks. At the time Michael was on Urantia in the flesh, Lucifer, Satan, and Caligastia were leagued together to effect the miscarriage of his bestowal mission. But they signally failed.
 \vs p053 1:5 Abaddon was the chief of the staff of Caligastia. He followed his master into rebellion and has ever since acted as chief executive of the Urantia rebels. Beelzebub was the leader of the disloyal midway creatures who allied themselves with the forces of the traitorous Caligastia.
-\vs p053 1:6 \pc The dragon eventually became the symbolic representation of all these evil personages. Upon the triumph of Michael, “Gabriel came down from Salvington and bound the dragon (all the rebel leaders) for an age.”\fnst{\textbf{“\ldots\ bound the dragon (all the rebel leaders) for an age.”} We must not forget, however, the following verse, (Rev~20:3), which reads “\ldots\ and after that he must be loosed a little season.”} Of the Jerusem seraphic rebels it is written: “And the angels who kept not their first estate but left their own habitation, he has reserved in sure chains of darkness to the judgment of the great day.”
+\vs p053 1:6 \pc The dragon eventually became the symbolic representation of all these evil personages. Upon the triumph of Michael, “Gabriel came down from Salvington and bound the dragon (all the rebel leaders) for an age.”\fnst{We must not forget, however, the following verse, (Rev~20:3), which reads “\ldots\ and after that he must be loosed a little season.”} Of the Jerusem seraphic rebels it is written: “And the angels who kept not their first estate but left their own habitation, he has reserved in sure chains of darkness to the judgment of the great day.”
 \usection{The Causes of Rebellion}
 \vs p053 2:1 Lucifer and his first assistant, Satan, had reigned on Jerusem for more than 500,000 years when in their hearts they began to array themselves against the Universal Father and his then vicegerent Son, Michael.
 \vs p053 2:2 There were no peculiar or special conditions in the system of Satania which suggested or favoured rebellion. It is our belief that the idea took origin and form in Lucifer’s mind, and that he might have instigated such a rebellion no matter where he might have been stationed. Lucifer first announced his plans to Satan, but it required several months to corrupt the mind of his able and brilliant associate. However, when once converted to the rebel theories, he became a bold and earnest advocate of “self\hyp{}assertion and liberty.”
@@ -36,7 +36,7 @@
 \vs p053 4:1 The Lucifer manifesto was issued at the annual conclave of Satania on the sea of glass, in the presence of the assembled hosts of Jerusem, on the last day of the year, about 200,000 years ago, Urantia time. Satan proclaimed that worship could be accorded the universal forces --- physical, intellectual, and spiritual --- but that allegiance could be acknowledged only to the actual and present ruler, Lucifer, the “friend of men and angels” and the “God of liberty.”
 \vs p053 4:2 Self\hyp{}assertion was the battle cry of the Lucifer rebellion. One of his chief arguments was that, if self\hyp{}government was good and right for the Melchizedeks and other groups, it was equally good for all orders of intelligence. He was bold and persistent in the advocacy of the “equality of mind” and “the brotherhood of intelligence.” He maintained that all government should be limited to the local planets and their voluntary confederation into the local systems. All other supervision he disallowed. He promised the Planetary Princes that they should rule the worlds as supreme executives. He denounced the location of legislative activities on the constellation headquarters and the conduct of judicial affairs on the universe capital. He contended that all these functions of government should be concentrated on the system capitals and proceeded to set up his own legislative assembly and organized his own tribunals under the jurisdiction of Satan. And he directed that the princes on the apostate worlds do the same.
 \vs p053 4:3 The entire administrative cabinet of Lucifer went over in a body and were sworn in publicly as the officers of the administration of the new head of “the liberated worlds and systems.”
-\vs p053 4:4 \pc While there had been two previous rebellions in Nebadon, they were in distant constellations. Lucifer held that these insurrections were unsuccessful because the majority of the intelligences failed to follow their leaders. He contended that “majorities rule,”\fnst{\textbf{He contended that “majorities rule,”} Hence we learn that Lucifer was the first protagonist of democracy in our Universe.} that “mind is infallible.” The freedom allowed him by the universe rulers apparently sustained many of his nefarious contentions. He defied all his superiors; yet they apparently took no note of his doings. He was given a free hand to prosecute his seductive plan without let or hindrance.
+\vs p053 4:4 \pc While there had been two previous rebellions in Nebadon, they were in distant constellations. Lucifer held that these insurrections were unsuccessful because the majority of the intelligences failed to follow their leaders. He contended that “majorities rule,”\fnst{Hence we learn that Lucifer was the first protagonist of democracy in our Universe.} that “mind is infallible.” The freedom allowed him by the universe rulers apparently sustained many of his nefarious contentions. He defied all his superiors; yet they apparently took no note of his doings. He was given a free hand to prosecute his seductive plan without let or hindrance.
 \vs p053 4:5 \pc All the merciful delays of justice Lucifer pointed to as evidence of the inability of the government of the Paradise Sons to stop the rebellion. He would openly defy and arrogantly challenge Michael, Immanuel, and the Ancients of Days and then point to the fact that no action ensued as positive evidence of the impotency of the universe and the superuniverse governments.
 \vs p053 4:6 Gabriel was personally present throughout all these disloyal proceedings and only announced that he would, in due time, speak for Michael, and that all beings would be left free and unmolested in their choice; that the “government of the Sons for the Father desired only that loyalty and devotion which was voluntary, wholehearted, and sophistry\hyp{}proof.”
 \vs p053 4:7 \pc Lucifer was permitted fully to establish and thoroughly to organize his rebel government before Gabriel made any effort to contest the right of secession or to counterwork the rebel propaganda. But the Constellation Fathers immediately confined the action of these disloyal personalities to the system of Satania. Nevertheless, this period of delay was a time of great trial and testing to the loyal beings of all Satania. All was chaotic for a few years, and there was great confusion on the mansion worlds.
@@ -44,7 +44,7 @@
 \vs p053 5:1 Upon the outbreak of the Satania rebellion, Michael took counsel of his Paradise brother, Immanuel. Following this momentous conference, Michael announced that he would pursue the same policy which had characterized his dealings with similar upheavals in the past, an attitude of noninterference.
 \vs p053 5:2 \pc At the time of this rebellion and the two which preceded it there was no absolute and personal sovereign authority in the universe of Nebadon. Michael ruled by divine right, as vicegerent of the Universal Father, but not yet in his own personal right. He had not completed his bestowal career; he had not yet been vested with “all power in heaven and on earth.”
 \vs p053 5:3 From the outbreak of rebellion to the day of his enthronement as sovereign ruler of Nebadon, Michael never interfered with the rebel forces of Lucifer; they were allowed to run a free course for almost 200,000 years of Urantia time. Christ Michael now has ample power and authority to deal promptly, even summarily, with such outbreaks of disloyalty, but we doubt that this sovereign authority would lead him to act differently if another such upheaval should occur.
-\vs p053 5:4 \pc Since Michael elected to remain aloof from the actual warfare of the Lucifer rebellion, Gabriel called his personal staff together on Edentia and, in counsel with the Most Highs, elected to assume command of the loyal hosts of Satania. Michael remained on Salvington while Gabriel proceeded to Jerusem, and establishing himself on the sphere dedicated to the Father --- the same Universal Father whose personality Lucifer and Satan had questioned --- in the presence of the forgathered hosts of loyal personalities, he displayed the banner of Michael, the material emblem of the Trinity government of all creation, the three azure blue concentric circles\fnst{\textbf{the three azure blue concentric circles}, Many prophets (including myself) have visualised the evolving morontia soul as a blue sphere of light, see for example the presentation ``Glorious Ascent'' by Troy R.~Bishop.} on a white background.
+\vs p053 5:4 \pc Since Michael elected to remain aloof from the actual warfare of the Lucifer rebellion, Gabriel called his personal staff together on Edentia and, in counsel with the Most Highs, elected to assume command of the loyal hosts of Satania. Michael remained on Salvington while Gabriel proceeded to Jerusem, and establishing himself on the sphere dedicated to the Father --- the same Universal Father whose personality Lucifer and Satan had questioned --- in the presence of the forgathered hosts of loyal personalities, he displayed the banner of Michael, the material emblem of the Trinity government of all creation, the three azure blue concentric circles\fnst{Many prophets (including the present editor) have visualised the evolving morontia soul as a blue sphere of light, see for example the presentation ``Glorious Ascent'' by Troy R.~Bishop.} on a white background.
 \vs p053 5:5 The Lucifer emblem was a banner of white with one red circle, in the centre of which a black solid circle appeared.
 \vs p053 5:6 “There was war in heaven; Michael’s commander and his angels fought against the dragon (Lucifer, Satan, and the apostate princes); and the dragon and his rebellious angels fought but prevailed not.” This “war in heaven” was not a physical battle as such a conflict might be conceived on Urantia. In the early days of the struggle Lucifer held forth continuously in the planetary amphitheatre. Gabriel conducted an unceasing exposure of the rebel sophistries from his headquarters taken up near at hand. The various personalities present on the sphere who were in doubt as to their attitude would journey back and forth between these discussions until they arrived at a final decision.
 \vs p053 5:7 But this war in heaven was very terrible and very real. While displaying none of the barbarities so characteristic of physical warfare on the immature worlds, this conflict was far more deadly; material life is in jeopardy in material combat, but the war in heaven was fought in terms of life eternal.
@@ -56,13 +56,13 @@
 \vs p053 6:5 “Having been automatically thrown out of the constellation circuits by the secession of Lucifer, we were dependent on the loyalty of our intelligence corps, who forwarded calls for help to Edentia from the near\hyp{}by system of Rantulia; and we found that the kingdom of order, the intellect of loyalty, and the spirit of truth were inherently triumphant over rebellion, self\hyp{}assertion, and so\hyp{}called personal liberty; we were able to carry on until the arrival of the new System Sovereign, the worthy successor of Lucifer. And immediately thereafter I was assigned to the corps of the Melchizedek receivership of Urantia, assuming jurisdiction over the loyal seraphic orders on the world of the traitorous Caligastia, who had proclaimed his sphere a member of the newly projected system of ‘liberated worlds and emancipated personalities’ proposed in the infamous Declaration of Liberty issued by Lucifer in his call to the ‘liberty\hyp{}loving, free\hyp{}thinking, and forward\hyp{}looking intelligences of the misruled and maladministered worlds of Satania.’”
 \vs p053 6:6 \pc This angel is still in service on Urantia, functioning as associate chief of seraphim.
 \usection{History of the Rebellion}
-\vs p053 7:1 The Lucifer rebellion was system wide. 37 seceding Planetary Princes swung their world administrations largely to the side of the archrebel. Only on Panoptia did the Planetary Prince fail to carry his people with him. On this world, under the guidance of the Melchizedeks, the people rallied to the support of Michael. Ellanora\fnst{\textbf{Ellanora}, possibly derived from the Greek \textit{eleos} ``mercy'' and Hebrew \textit{nur} ``shining'', combined to give the meaning ``the one shining with mercy''.}, a young woman of that mortal realm, grasped the leadership of the human races, and not a single soul on that strife\hyp{}torn world enlisted under the Lucifer banner. And ever since have these loyal Panoptians served on the seventh Jerusem transition world as the caretakers and builders on the Father’s sphere and its surrounding seven detention worlds. The Panoptians not only act as the literal custodians of these worlds, but they also execute the personal orders of Michael for the embellishment of these spheres for some future and unknown use. They do this work as they tarry en route to Edentia.
+\vs p053 7:1 The Lucifer rebellion was system wide. 37 seceding Planetary Princes swung their world administrations largely to the side of the archrebel. Only on Panoptia did the Planetary Prince fail to carry his people with him. On this world, under the guidance of the Melchizedeks, the people rallied to the support of Michael. Ellanora\fnst{Possibly derived from the Greek \textit{eleos} ``mercy'' and Hebrew \textit{nur} ``shining'', combined to give the meaning ``the one shining with mercy''.}, a young woman of that mortal realm, grasped the leadership of the human races, and not a single soul on that strife\hyp{}torn world enlisted under the Lucifer banner. And ever since have these loyal Panoptians served on the seventh Jerusem transition world as the caretakers and builders on the Father’s sphere and its surrounding seven detention worlds. The Panoptians not only act as the literal custodians of these worlds, but they also execute the personal orders of Michael for the embellishment of these spheres for some future and unknown use. They do this work as they tarry en route to Edentia.
 \vs p053 7:2 Throughout this period Caligastia was advocating the cause of Lucifer on Urantia. The Melchizedeks ably opposed the apostate Planetary Prince, but the sophistries of unbridled liberty and the delusions of self\hyp{}assertion had every opportunity for deceiving the primitive peoples of a young and undeveloped world.
 \vs p053 7:3 All secession propaganda had to be carried on by personal effort because the broadcast service and all other avenues of interplanetary communication were suspended by the action of the system circuit supervisors. Upon the actual outbreak of the insurrection the entire system of Satania was isolated in both the constellation and the universe circuits. During this time all incoming and outgoing messages were dispatched by seraphic agents and Solitary Messengers. The circuits to the fallen worlds were also cut off, so that Lucifer could not utilize this avenue for the furtherance of his nefarious scheme. And these circuits will not be restored so long as the archrebel lives within the confines of Satania.
 \vs p053 7:4 This was a Lanonandek rebellion. The higher orders of local universe sonship did not join the Lucifer secession, although a few of the Life Carriers stationed on the rebel planets were somewhat influenced by the rebellion of the disloyal princes. None of the Trinitized Sons went astray. The Melchizedeks, archangels, and the Brilliant Evening Stars were all loyal to Michael and, with Gabriel, valiantly contended for the Father’s will and the Son’s rule.
 \vs p053 7:5 No beings of Paradise origin were involved in disloyalty. Together with the Solitary Messengers they took up headquarters on the world of the Spirit and remained under the leadership of the Faithful of Days of Edentia. None of the conciliators apostatized, nor did a single one of the Celestial Recorders go astray. But a heavy toll was taken of the Morontia Companions and the Mansion World Teachers.
 \vs p053 7:6 Of the supreme order of seraphim, not an angel was lost, but a considerable group of the next order, the superior, were deceived and ensnared. Likewise a few of the third or supervisor order of angels were misled. But the terrible breakdown came in the fourth group, the administrator angels, those seraphim who are normally assigned to the duties of the system capitals. Manotia saved almost \bibfrac{2}{3}\ts{rds} of them, but slightly over \bibfrac{1}{3}\ts{rd} followed their chief into the rebel ranks. \bibfrac{1}{3}\ts{rd} of all the Jerusem cherubim attached to the administrator angels were lost with their disloyal seraphim.
-\vs p053 7:7 Of the planetary angelic helpers, those assigned to the Material Sons, about \bibfrac{1}{3}\ts{rd} were deceived, and almost 10\% of the transition ministers were ensnared. In symbol John saw this when he wrote\fnst{\textbf{In symbol John saw this when he wrote}, Note that the quotation from Revelation~12:4 is not exact. The Greek (and almost all other) sources say ``cast them into the earth'' and not ``cast them down in darkness''. However, it is worth mentioning that some ancient Armenian MSS omit the phrase ``into the earth'' and instead say ``from heaven''.} of the great red dragon, saying: “And his tail drew a third part of the stars of heaven and cast them down in darkness.”
+\vs p053 7:7 Of the planetary angelic helpers, those assigned to the Material Sons, about \bibfrac{1}{3}\ts{rd} were deceived, and almost 10\% of the transition ministers were ensnared. In symbol John saw this when he wrote\fnst{Note that the quotation from Revelation~12:4 is not exact. The Greek (and almost all other) sources say ``cast them into the earth'' and not ``cast them down in darkness''. However, it is worth mentioning that some ancient Armenian MSS omit the phrase ``into the earth'' and instead say ``from heaven''.} of the great red dragon, saying: “And his tail drew a third part of the stars of heaven and cast them down in darkness.”
 \vs p053 7:8 The greatest loss occurred in the angelic ranks, but most of the lower orders of intelligence were involved in disloyalty. Of the 681,217\fnc{\textbf{681,217}, \bibexpl{In 1955 text: \bibtextul{681,227}. The change was made because at \bibref[51:1.5]{p051 1:5} it is stated that the total number of Material Sons lost is 13+681,204=681,217.}} Material Sons lost in Satania, 95\% were casualties of the Lucifer rebellion. Large numbers of midway creatures were lost on those individual planets whose Planetary Princes joined the Lucifer cause.
 \vs p053 7:9 \pc In many respects this rebellion was the most widespread and disastrous of all such occurrences in Nebadon. More personalities were involved in this insurrection than in both of the others. And it is to their everlasting dishonour that the emissaries of Lucifer and Satan spared not the infant\hyp{}training schools on the finaliter cultural planet but rather sought to corrupt these developing minds in mercy salvaged from the evolutionary worlds.
 \vs p053 7:10 \pc The ascending mortals were vulnerable, but they withstood the sophistries of rebellion better than the lower spirits. While many on the lower mansion worlds, those who had not attained final fusion with their Adjusters, fell, it is recorded to the glory of the wisdom of the ascension scheme that not a single member of the Satania ascendant citizenship resident on Jerusem participated in the Lucifer rebellion.
@@ -77,7 +77,7 @@
 \vs p053 8:3 \pc The bestowal of Michael terminated the Lucifer rebellion in all Satania aside from the planets of the apostate Planetary Princes. And this was the significance of Jesus’ personal experience, just before his death in the flesh, when he one day exclaimed to his disciples, \textcolour{ubdarkred}{“And I beheld Satan fall as lightning from heaven.”} He had come with Lucifer to Urantia for the last crucial struggle.
 \vs p053 8:4 The Son of Man was confident of success, and he knew that his triumph on your world would forever settle the status of his agelong enemies, not only in Satania but also in the other two systems where sin had entered. There was survival for mortals and security for angels when your Master, in reply to the Lucifer proposals, calmly and with divine assurance replied, \textcolour{ubdarkred}{“Get you behind me, Satan.”} That was, in principle, the real end of the Lucifer rebellion. True, the Uversa tribunals have not yet rendered the executive decision regarding the appeal of Gabriel praying for the destruction of the rebels, but such a decree will, no doubt, be forthcoming in the fullness of time since the first step in the hearing of this case has already been taken.
 \vs p053 8:5 Caligastia was recognized by the Son of Man as the technical Prince of Urantia up to near the time of his death. Said Jesus: \textcolour{ubdarkred}{“Now is the judgment of this world; now shall the prince of this world be cast down.”} And then still nearer the completion of his lifework he announced, \textcolour{ubdarkred}{“The prince of this world is judged.”} And it is this same dethroned and discredited Prince who was once termed “God of Urantia.”
-\vs p053 8:6 \pc The last act of Michael before leaving Urantia was to offer mercy to Caligastia and Daligastia\fnst{\textbf{Daligastia}, since the English letter `D' follows `C' in alphabetical order, the probable meaning of this name is ``the one who is next to Caligastia''. On the etymology of the name `Caligastia' see the note on \bibref[4:3.3]{p004 3:3}.}, but they spurned his tender proffer. Caligastia, your apostate Planetary Prince, is still free on Urantia to prosecute his nefarious designs, but he has absolutely no power to enter the minds of men, neither can he draw near to their souls to tempt or corrupt them unless they really desire to be cursed with his wicked presence.
+\vs p053 8:6 \pc The last act of Michael before leaving Urantia was to offer mercy to Caligastia and Daligastia\fnst{Since the English letter `D' follows `C' in alphabetical order, the probable meaning of this name is ``the one who is next to Caligastia''. On the etymology of the name `Caligastia' see the note on \bibref[4:3.3]{p004 3:3}.}, but they spurned his tender proffer. Caligastia, your apostate Planetary Prince, is still free on Urantia to prosecute his nefarious designs, but he has absolutely no power to enter the minds of men, neither can he draw near to their souls to tempt or corrupt them unless they really desire to be cursed with his wicked presence.
 \vs p053 8:7 \pc Before the bestowal of Michael these rulers of darkness sought to maintain their authority on Urantia, and they persistently withstood the minor and subordinate celestial personalities. But since the day of Pentecost this traitorous Caligastia and his equally contemptible associate, Daligastia, are servile before the divine majesty of the Paradise Thought Adjusters and the protective Spirit of Truth, the spirit of Michael, which has been poured out upon all flesh.
 \vs p053 8:8 But even so, no fallen spirit ever did have the power to invade the minds or to harass the souls of the children of God. Neither Satan nor Caligastia could ever touch or approach the faith sons of God; faith is an effective armour against sin and iniquity. It is true: “He who is born of God keeps himself, and the wicked one touches him not.”
 \vs p053 8:9 In general, when weak and dissolute mortals are supposed to be under the influence of devils and demons, they are merely being dominated by their own inherent and debased tendencies, being led away by their own natural propensities. The devil has been given a great deal of credit for evil which does not belong to him. Caligastia has been comparatively impotent since the cross of Christ.
