--- a/tex/p056.tex
+++ b/tex/p056.tex
@@ -82,7 +82,7 @@
 \vs p056 10:2 Throughout this glorious age the chief pursuit of the ever\hyp{}advancing mortals is the quest for a better understanding and a fuller realization of the comprehensible elements of Deity --- truth, beauty, and goodness. This represents man’s effort to discern God in mind, matter, and spirit. And as the mortal pursues this quest, he finds himself increasingly absorbed in the experiential study of philosophy, cosmology, and divinity.
 \vs p056 10:3 \pc Philosophy you somewhat grasp, and divinity you comprehend in worship, social service, and personal spiritual experience, but the pursuit of beauty --- cosmology --- you all too often limit to the study of man’s crude artistic endeavours. Beauty, art, is largely a matter of the unification of contrasts. Variety is essential to the concept of beauty. The supreme beauty, the height of finite art, is the drama of the unification of the vastness of the cosmic extremes of Creator and creature. Man finding God and God finding man --- the creature becoming perfect as is the Creator --- that is the supernal achievement of the supremely beautiful, the attainment of the apex of cosmic art.
 \vs p056 10:4 Hence materialism, atheism, is the maximation of ugliness, the climax of the finite antithesis of the beautiful. Highest beauty consists in the panorama of the unification of the variations which have been born of pre\hyp{}existent harmonious reality.
-\vs p056 10:5 The attainment of cosmologic levels of\tunemarkup{pgkoboaurahd}{\linebreak} thought includes:
+\vs p056 10:5 The attainment of cosmologic levels of thought includes:
 \vs p056 10:6 \ublistelem{1.}\bibnobreakspace \bibemph{Curiosity.} Hunger for harmony and thirst for beauty. Persistent attempts to discover new levels of harmonious cosmic relationships.
 \vs p056 10:7 \ublistelem{2.}\bibnobreakspace \bibemph{Aesthetic appreciation.} Love of the beautiful and ever\hyp{}advancing appreciation of the artistic touch of all creative manifestations on all levels of reality.
 \vs p056 10:8 \ublistelem{3.}\bibnobreakspace \bibemph{Ethic sensitivity.} Through the realization of truth the appreciation of beauty leads to the sense of the eternal fitness of those things which impinge upon the recognition of divine goodness in Deity relations with all beings; and thus even cosmology leads to the pursuit of divine reality values --- to God\hyp{}consciousness.
@@ -102,5 +102,5 @@
 \vsetoff
 \vs p056 10:22 [Presented by a Mighty Messenger visiting on Urantia, by request of the Nebadon Revelatory Corps and in collaboration with a certain Melchizedek, the vicegerent Planetary Prince of Urantia.]
 \vs p056 10:23 \separatorline
-\vs p056 10:24 This paper on Universal Unity is the 25\ts{th} of a series of presentations by various authors, having been sponsored as a group by a commission of Nebadon personalities numbering 12 and acting under the direction of Mantutia Melchizedek. We indited these narratives and put them in the English language, by a technique authorized by our superiors, in the year 1934\fnst{\textbf{1934}, Many of the human sources used in these papers were written and published in 1940s, so the date is spurious and was probably added later.} of Urantia time.
+\vs p056 10:24 This paper on Universal Unity is the 25\ts{th} of a series of presentations by various authors, having been sponsored as a group by a commission of Nebadon personalities numbering 12 and acting under the direction of Mantutia Melchizedek. We indited these narratives and put them in the English language, by a technique authorized by our superiors, in the year 1934\fnst{Many of the human sources used in these papers were written and published in 1940s, so the date is spurious and was probably added later.} of Urantia time.
 \quizlink
