--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -43,7 +43,7 @@
 \vs p057 4:4 \pc \bibemph{25,000,000,000} years ago witnessed the completion of the tertiary cycle of nebular life and brought about the organization and relative stabilization of the far\hyp{}flung starry systems derived from this parent nebula. But the process of physical contraction and increased heat production continued in the central mass of the nebular remnant.
 \vs p057 4:5 \pc \bibemph{10,000,000,000} years ago the quartan cycle of Andronover began. The maximum of nuclear\hyp{}mass temperature had been attained; the critical point of condensation was approaching. The original mother nucleus was convulsing under the combined pressure of its own internal\hyp{}heat condensation tension and the increasing gravity\hyp{}tidal pull of the surrounding swarm of liberated sun systems. The nuclear eruptions which were to inaugurate the second nebular sun cycle were imminent. The quartan cycle of nebular existence was about to begin.
 \vs p057 4:6 \pc \bibemph{8,000,000,000} years ago the terrific terminal eruption began. Only the outer systems are safe at the time of such a cosmic upheaval. And this was the beginning of the end of the nebula. This final sun disgorgement extended over a period of almost 2,000,000,000 years.
-\vs p057 4:7 \pc \bibemph{7,000,000,000} years ago witnessed the\tunemarkup{pgkoboaurahd}{\linebreak} height of the Andronover terminal breakup. This was the period of the birth of the larger terminal suns and the apex of the local physical disturbances.
+\vs p057 4:7 \pc \bibemph{7,000,000,000} years ago witnessed the height of the Andronover terminal breakup. This was the period of the birth of the larger terminal suns and the apex of the local physical disturbances.
 \vs p057 4:8 \pc \bibemph{6,000,000,000} years ago marks the end of the terminal breakup and the birth of your sun, the 56\ts{th} from the last of the Andronover second solar family. This final eruption of the nebular nucleus gave birth to 136,702 suns, most of them solitary orbs. The total number of suns and sun systems having origin in the Andronover nebula was 1,013,628. The number of the solar system sun is 1,013,572.
 \vs p057 4:9 And now the great Andronover nebula is no more, but it lives on in the many suns and their planetary families which originated in this mother cloud of space. The final nuclear remnant of this magnificent nebula still burns with a reddish glow and continues to give forth moderate light and heat to its remnant planetary family of 165 worlds, which now revolve about this venerable mother of two mighty generations of the monarchs of light.
 \usection{Origin of Monmatia --- The Urantia Solar System}
@@ -55,7 +55,7 @@
 \vs p057 5:6 As the Angona system drew nearer, the solar extrusions grew larger and larger; more and more matter was drawn from the sun to become independent circulating bodies in surrounding space. This situation developed for about 500,000 years until Angona made its closest approach to the sun; whereupon the sun, in conjunction with one of its periodic internal convulsions, experienced a partial disruption; from opposite sides and simultaneously, enormous volumes of matter were disgorged. From the Angona side there was drawn out a vast column of solar gases, rather pointed at both ends and markedly bulging at the centre, which became permanently detached from the immediate gravity control of the sun.
 \vs p057 5:7 This great column of solar gases which was thus separated from the sun subsequently evolved into the 12 planets of the solar system. The repercussional ejection of gas from the opposite side of the sun in tidal sympathy with the extrusion of this gigantic solar system ancestor, has since condensed into the meteors and space dust of the solar system, although much, very much, of this matter was subsequently recaptured by solar gravity as the Angona system receded into remote space.
 \vs p057 5:8 Although Angona succeeded in drawing away the ancestral material of the solar system planets and the enormous volume of matter now circulating about the sun as asteroids and meteors, it did not secure for itself any of this solar matter. The visiting system did not come quite close enough to actually steal any of the sun’s substance, but it did swing sufficiently close to draw off into the intervening space all of the material comprising the present\hyp{}day solar system.
-\vs p057 5:9 The five inner and five outer planets soon formed in miniature from the cooling and condensing nucleuses in the less massive and tapering ends of the gigantic gravity bulge which Angona had succeeded in detaching from the sun, while Saturn and Jupiter were formed from the more massive and bulging central portions. The powerful gravity pull of Jupiter and Saturn early captured most of the material stolen from Angona as the retrograde motion\fnst{\textbf{retrograde motion}, In Astronomy, this is the motion in a direction opposite to something else. The opposite is called ``prograde'' motion. All known planets of solar system revolve in orbit around the Sun in the ``prograde'' direction, i.e. in the same direction as the rotation of the Sun. Many (but not all) comets revolve on retrograde orbits.} of certain of their satellites bears witness.
+\vs p057 5:9 The five inner and five outer planets soon formed in miniature from the cooling and condensing nucleuses in the less massive and tapering ends of the gigantic gravity bulge which Angona had succeeded in detaching from the sun, while Saturn and Jupiter were formed from the more massive and bulging central portions. The powerful gravity pull of Jupiter and Saturn early captured most of the material stolen from Angona as the retrograde motion\fnst{In Astronomy, this is the motion in a direction opposite to something else. The opposite is called ``prograde'' motion. All known planets of solar system revolve in orbit around the Sun in the ``prograde'' direction, i.e. in the same direction as the rotation of the Sun. Many (but not all) comets revolve on retrograde orbits.} of certain of their satellites bears witness.
 \vs p057 5:10 Jupiter and Saturn, being derived from the very centre of the enormous column of superheated solar gases, contained so much highly heated sun material that they shone with a brilliant light and emitted enormous volumes of heat; they were in reality secondary suns for a short period after their formation as separate space bodies. These two largest of the solar system planets have remained largely gaseous to this day, not even yet having cooled off to the point of complete condensation or solidification.
 \vs p057 5:11 The gas\hyp{}contraction nucleuses of the other 10 planets soon reached the stage of solidification and so began to draw to themselves increasing quantities of the meteoric matter circulating in near\hyp{}by space. The worlds of the solar system thus had a double origin: nucleuses of gas condensation later on augmented by the capture of enormous quantities of meteors. Indeed they still continue to capture meteors, but in greatly lessened numbers.
 \vs p057 5:12 The planets do not swing around the sun in the equatorial plane of their solar mother, which they would do if they had been thrown off by solar revolution. Rather, they travel in the plane of the Angona solar extrusion, which existed at a considerable angle to the plane of the sun’s equator.
@@ -66,7 +66,7 @@
 \vs p057 6:2 \pc The planets nearest the sun were the first to have their revolutions slowed down by tidal friction. Such gravitational influences also contribute to the stabilization of planetary orbits while acting as a brake on the rate of planetary\hyp{}axial revolution, causing a planet to revolve ever slower until axial revolution ceases, leaving one hemisphere of the planet always turned toward the sun or larger body, as is illustrated by the planet Mercury and by the moon, which always turns the same face toward Urantia.
 \vs p057 6:3 When the tidal frictions of the moon and the earth become equalized, the earth will always turn the same hemisphere toward the moon, and the day and month will be analogous --- in length about 47 days. When such stability of orbits is attained, tidal frictions will go into reverse action, no longer driving the moon farther away from the earth but gradually drawing the satellite toward the planet. And then, in that far\hyp{}distant future when the moon approaches to within about 17,700\,km of the earth, the gravity action of the latter will cause the moon to disrupt, and this tidal\hyp{}gravity explosion will shatter the moon into small particles, which may assemble about the world as rings of matter resembling those of Saturn or may be gradually drawn into the earth as meteors.
 \vs p057 6:4 If space bodies are similar in size and density, collisions may occur. But if two space bodies of similar density are relatively unequal in size, then, if the smaller progressively approaches the larger, the disruption of the smaller body will occur when the radius of its orbit becomes less than 2.5 times the radius of the larger body. Collisions among the giants of space are rare indeed, but these gravity\hyp{}tidal explosions of lesser bodies are quite common.
-\vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{\textbf{fifth planet}, This planet was named by the Soviet astronomer S.V.~Orlov ``Phaeton'' in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.
+\vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{This planet was named by the Soviet astronomer S.V.~Orlov ``Phaeton'' in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.
 \vs p057 6:6 \pc \bibemph{4,000,000,000} years ago witnessed the organization of the Jupiter and Saturn systems much as observed today except for their moons, which continued to increase in size for several billions of years. In fact, all of the planets and satellites of the solar system are still growing as the result of continued meteoric captures.
 \vs p057 6:7 \pc \bibemph{3,500,000,000} years ago the condensation nucleuses of the other 10 planets were well formed, and the cores of most of the moons were intact, though some of the smaller satellites later united to make the present\hyp{}day larger moons. This age may be regarded as the era of planetary assembly.
 \vs p057 6:8 \pc \bibemph{3,000,000,000} years ago the solar system was functioning much as it does today. Its members continued to grow in size as space meteors continued to pour in upon the planets and their satellites at a prodigious rate.
