--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -24,47 +24,47 @@
 \usection{Political Organization}
 \vs p072 2:1 This continental nation now has a representative government with a centrally located national capital. The central government consists of a strong federation of 100 comparatively free states. These states elect their governors and legislators for 10 years, and none are eligible for re\hyp{}election. State judges are appointed for life by the governors and confirmed by their legislatures, which consist of 1 representative for each 100,000 citizens.
 \vs p072 2:2 There are 5 different types of metropolitan government, depending on the size of the city, but no city is permitted to have more than 1,000,000 inhabitants. On the whole, these municipal governing schemes are very simple, direct, and economical. The few offices of city administration are keenly sought by the highest types of citizens.
-\vs p072 2:3 The federal government embraces 3 co\hyp{}ordinate divisions: executive, legislative, and judicial. The federal chief executive is elected every 6 years by universal territorial suffrage. He is not eligible for re\hyp{}election except upon the petition of at least 75 state legislatures concurred in by the respective state governors, and then but for one term. He is advised by a supercabinet composed of all living ex\hyp{}chief executives.
-\vs p072 2:4 \pc The legislative division embraces 3 houses:
+\vs p072 2:3 The federal government embraces three co\hyp{}ordinate divisions: executive, legislative, and judicial. The federal chief executive is elected every 6 years by universal territorial suffrage. He is not eligible for re\hyp{}election except upon the petition of at least 75 state legislatures concurred in by the respective state governors, and then but for one term. He is advised by a supercabinet composed of all living ex\hyp{}chief executives.
+\vs p072 2:4 \pc The legislative division embraces three houses:
 \vs p072 2:5 \ublistelem{1.}\bibnobreakspace The \bibemph{upper house} is elected by industrial, professional, agricultural, and other groups of workers, balloting in accordance with economic function.
 \vs p072 2:6 \ublistelem{2.}\bibnobreakspace The \bibemph{lower house} is elected by certain organizations of society embracing the social, political, and philosophic groups not included in industry or the professions. All citizens in good standing participate in the election of both classes of representatives, but they are differently grouped, depending on whether the election pertains to the upper or lower house.
 \vs p072 2:7 \ublistelem{3.}\bibnobreakspace The \bibemph{third house ---} the elder statesmen --- embraces the veterans of civic service and includes many distinguished persons nominated by the chief executive, by the regional (subfederal) executives, by the chief of the supreme tribunal, and by the presiding officers of either of the other legislative houses. This group is limited to 100, and its members are elected by the majority action of the elder statesmen themselves. Membership is for life, and when vacancies occur, the person receiving the largest ballot among the list of nominees is thereby duly elected. The scope of this body is purely advisory, but it is a mighty regulator of public opinion and exerts a powerful influence upon all branches of the government.
 \vs p072 2:8 \pc Very much of the federal administrative work is carried on by the 10 regional (subfederal) authorities, each consisting of the association of 10 states. These regional divisions are wholly executive and administrative, having neither legislative nor judicial functions. The 10 regional executives are the personal appointees of the federal chief executive, and their term of office is concurrent with his --- 6 years. The federal supreme tribunal approves the appointment of these 10 regional executives, and while they may not be reappointed, the retiring executive automatically becomes the associate and adviser of his successor. Otherwise, these regional chiefs choose their own cabinets of administrative officials.
-\vs p072 2:9 \pc This nation is adjudicated by two major court systems --- the law courts and the socio\hyp{}economic courts. The law courts function on the following 3 levels:
+\vs p072 2:9 \pc This nation is adjudicated by two major court systems --- the law courts and the socio\hyp{}economic courts. The law courts function on the following three levels:
 \vs p072 2:10 \ublistelem{1.}\bibnobreakspace \bibemph{Minor courts} of municipal and local jurisdiction, whose decisions may be appealed to the high state tribunals.
 \vs p072 2:11 \ublistelem{2.}\bibnobreakspace \bibemph{State supreme courts,} whose decisions are final in all matters not involving the federal government or jeopardy of citizenship rights and liberties. The regional executives are empowered to bring any case at once to the bar of the federal supreme court.
 \vs p072 2:12 \ublistelem{3.}\bibnobreakspace \bibemph{Federal supreme court ---} the high tribunal for the adjudication of national contentions and the appellate cases coming up from the state courts. This supreme tribunal consists of 12 men over 40 and under 75 years of age who have served 2 or more years on some state tribunal, and who have been appointed to this high position by the chief executive with the majority approval of the supercabinet and the third house of the legislative assembly. All decisions of this supreme judicial body are by at least a \bibfrac{2}{3}\ts{rds} vote.
-\vs p072 2:13 \pc The socio\hyp{}economic courts function in the following 3 divisions:
+\vs p072 2:13 \pc The socio\hyp{}economic courts function in the following three divisions:
 \vs p072 2:14 \ublistelem{1.}\bibnobreakspace \bibemph{Parental courts,} associated with the legislative and executive divisions of the home and social system.
 \vs p072 2:15 \ublistelem{2.}\bibnobreakspace \bibemph{Educational courts ---} the juridical bodies connected with the state and regional school systems and associated with the executive and legislative branches of the educational administrative mechanism.
 \vs p072 2:16 \ublistelem{3.}\bibnobreakspace \bibemph{Industrial courts ---} the jurisdictional tribunals vested with full authority for the settlement of all economic misunderstandings.
 \vs p072 2:17 \pc The federal supreme court does not pass upon socio\hyp{}economic cases except upon the \bibfrac{3}{4}\ts{ers} vote of the 3\ts{rd} legislative branch of the national government, the house of elder statesmen. Otherwise, all decisions of the parental, educational, and industrial high courts are final.
 \usection{The Home Life}
-\vs p072 3:1 On this continent it is against the law for two families to live under the same roof. And since group dwellings have been outlawed, most of the tenement type of buildings have been demolished. But the unmarried still live in clubs, hotels, and other group dwellings. The smallest homesite permitted must provide 4,600\,m\ts{2}\fnst{\textbf{4,600\,m\ts{2}}, This is, approximately, half a hectare. Note, that Anastasia (who appears to be one of the purest Andites living at present) recommends that each family should own and cultivate a hectare of land as a way to save the civilization and enter the new age of enlarged spiritual vision and brotherhood of all mankind based on the fatherhood of God.} of land. All land and other property used for home purposes are free from taxation up to 10 times the minimum homesite allotment.
+\vs p072 3:1 On this continent it is against the law for two families to live under the same roof. And since group dwellings have been outlawed, most of the tenement type of buildings have been demolished. But the unmarried still live in clubs, hotels, and other group dwellings. The smallest homesite permitted must provide 4,600\,m\ts{2}\fnst{This is, approximately, half a hectare. Note, that Anastasia (who appears to be one of the purest Andites living at present) recommends that each family should own and cultivate a hectare of land as a way to save the civilization and enter the new age of enlarged spiritual vision and brotherhood of all mankind based on the fatherhood of God.} of land. All land and other property used for home purposes are free from taxation up to 10 times the minimum homesite allotment.
 \vs p072 3:2 The home life of this people has greatly improved during the last century. Attendance of parents, both fathers and mothers, at the parental schools of child culture is compulsory. Even the agriculturists who reside in small country settlements carry on this work by correspondence, going to the near\hyp{}by centres for oral instruction once in 10 days --- every two weeks, for they maintain a 5\hyp{}day week.
 \vs p072 3:3 The average number of children in each family is 5, and they are under the full control of their parents or, in case of the demise of one or both, under that of the guardians designated by the parental courts. It is considered a great honour for any family to be awarded the guardianship of a full orphan. Competitive examinations are held among parents, and the orphan is awarded to the home of those displaying the best parental qualifications.
 \vs p072 3:4 \pc These people regard the home as the basic institution of their civilization. It is expected that the most valuable part of a child’s education and character training will be secured from his parents and at home, and fathers devote almost as much attention to child culture as do mothers.
 \vs p072 3:5 All sex instruction is administered in the home by parents or by legal guardians. Moral instruction is offered by teachers during the rest periods in the school shops, but not so with religious training, which is deemed to be the exclusive privilege of parents, religion being looked upon as an integral part of home life. Purely religious instruction is given publicly only in the temples of philosophy, no such exclusively religious institutions as the Urantia churches having developed among this people. In their philosophy, religion is the striving to know God and to manifest love for one’s fellows through service for them, but this is not typical of the religious status of the other nations on this planet. Religion is so entirely a family matter among these people that there are no public places devoted exclusively to religious assembly. Politically, church and state, as Urantians are wont to say, are entirely separate, but there is a strange overlapping of religion and philosophy.
 \vs p072 3:6 Until 20 years ago the spiritual teachers (comparable to Urantia pastors), who visit each family periodically to examine the children to ascertain if they have been properly instructed by their parents, were under governmental supervision. These spiritual advisers and examiners are now under the direction of the newly created Foundation of Spiritual Progress, an institution supported by voluntary contributions. Possibly this institution may not further evolve until after the arrival of a Paradise Magisterial Son.
 \vs p072 3:7 \pc Children remain legally subject to their parents until they are 15, when the first initiation into civic responsibility is held. Thereafter, every 5 years for 5 successive periods similar public exercises are held for such age groups at which their obligations to parents are lessened, while new civic and social responsibilities to the state are assumed. Suffrage is conferred at 20, the right to marry without parental consent is not bestowed until 25, and children must leave home on reaching the age of 30.
-\vs p072 3:8 Marriage and divorce laws are uniform\tunemarkup{pgkoboaurahd}{\linebreak} throughout the nation. Marriage before 20 --- the age of civil enfranchisement --- is not permitted. Permission to marry is only granted after one year’s notice of intention, and after both bride and groom present certificates showing that they have been duly instructed in the parental schools regarding the responsibilities of married life.
+\vs p072 3:8 Marriage and divorce laws are uniform throughout the nation. Marriage before 20 --- the age of civil enfranchisement --- is not permitted. Permission to marry is only granted after one year’s notice of intention, and after both bride and groom present certificates showing that they have been duly instructed in the parental schools regarding the responsibilities of married life.
 \vs p072 3:9 Divorce regulations are somewhat lax, but decrees of separation, issued by the parental courts, may not be had until one year after application therefor has been recorded, and the year on this planet is considerably longer than on Urantia. Notwithstanding their easy divorce laws, the present rate of divorces is only \bibfrac{1}{10}\ts{th} that of the civilized races of Urantia.
 \usection{The Educational System}
-\vs p072 4:1 The educational system of this nation is compulsory and coeducational in the precollege schools that the student attends from the ages of 5 to 18. These schools are vastly different from those of Urantia. There are no classrooms, only one study is pursued at a time, and after the first 3 years all pupils become assistant teachers, instructing those below them. Books are used only to secure information that will assist in solving the problems arising in the school shops and on the school farms. Much of the furniture used on the continent and the many mechanical contrivances --- this is a great age of invention and mechanization --- are produced in these shops. Adjacent to each shop is a working library where the student may consult the necessary reference books. Agriculture and horticulture are also taught throughout the entire educational period on the extensive farms adjoining every local school.
+\vs p072 4:1 The educational system of this nation is compulsory and coeducational in the precollege schools that the student attends from the ages of 5 to 18. These schools are vastly different from those of Urantia. There are no classrooms, only one study is pursued at a time, and after the first three years all pupils become assistant teachers, instructing those below them. Books are used only to secure information that will assist in solving the problems arising in the school shops and on the school farms. Much of the furniture used on the continent and the many mechanical contrivances --- this is a great age of invention and mechanization --- are produced in these shops. Adjacent to each shop is a working library where the student may consult the necessary reference books. Agriculture and horticulture are also taught throughout the entire educational period on the extensive farms adjoining every local school.
 \vs p072 4:2 \pc The feeble\hyp{}minded are trained only in agriculture and animal husbandry, and are committed for life to special custodial colonies where they are segregated by sex to prevent parenthood, which is denied all subnormals. These restrictive measures have been in operation for 75 years; the commitment decrees are handed down by the parental courts.
 \vs p072 4:3 \pc Everyone takes one month’s vacation each year. The precollege schools are conducted for 9 months out of the year of 10, the vacation being spent with parents or friends in travel. This travel is a part of the adult\hyp{}education program and is continued throughout a lifetime, the funds for meeting such expenses being accumulated by the same methods as those employed in old\hyp{}age insurance.
 \vs p072 4:4 \bibfrac{1}{4}\ts{er} of the school time is devoted to play --- competitive athletics --- the pupils progressing in these contests from the local, through the state and regional, and on to the national trials of skill and prowess. Likewise, the oratorical and musical contests, as well as those in science and philosophy, occupy the attention of students from the lower social divisions on up to the contests for national honours.
-\vs p072 4:5 The school government is a replica of the national government with its 3 correlated branches, the teaching staff functioning as the third or advisory legislative division. The chief object of education on this continent is to make every pupil a self\hyp{}supporting citizen.
+\vs p072 4:5 The school government is a replica of the national government with its three correlated branches, the teaching staff functioning as the third or advisory legislative division. The chief object of education on this continent is to make every pupil a self\hyp{}supporting citizen.
 \vs p072 4:6 Every child graduating from the precollege school system at 18 is a skilled artisan. Then begins the study of books and the pursuit of special knowledge, either in the adult schools or in the colleges. When a brilliant student completes his work ahead of schedule, he is granted an award of time and means wherewith he may execute some pet project of his own devising. The entire educational system is designed to adequately train the individual.
 \usection{Industrial Organization}
 \vs p072 5:1 The industrial situation among this people is far from their ideals; capital and labour still have their troubles, but both are becoming adjusted to the plan of sincere co\hyp{}operation. On this unique continent the workers are increasingly becoming shareholders in all industrial concerns; every intelligent labourer is slowly becoming a small capitalist.
 \vs p072 5:2 Social antagonisms are lessening, and good will is growing apace. No grave economic problems have arisen out of the abolition of slavery (over 100 years ago) since this adjustment was effected gradually by the liberation of 2\% each year. Those slaves who satisfactorily passed mental, moral, and physical tests were granted citizenship; many of these superior slaves were war captives or children of such captives. Some 50 years ago they deported the last of their inferior slaves, and still more recently they are addressing themselves to the task of reducing the numbers of their degenerate and vicious classes.
 \vs p072 5:3 \pc These people have recently developed new techniques for the adjustment of industrial misunderstandings and for the correction of economic abuses which are marked improvements over their older methods of settling such problems. Violence has been outlawed as a procedure in adjusting either personal or industrial differences. Wages, profits, and other economic problems are not rigidly regulated, but they are in general controlled by the industrial legislatures, while all disputes arising out of industry are passed upon by the industrial courts.
-\vs p072 5:4 The industrial courts are only 30 years old but are functioning very satisfactorily. The most recent development provides that hereafter the industrial courts shall recognize legal compensation as falling in 3 divisions:
+\vs p072 5:4 The industrial courts are only 30 years old but are functioning very satisfactorily. The most recent development provides that hereafter the industrial courts shall recognize legal compensation as falling in three divisions:
 \vs p072 5:5 \ublistelem{1.}\bibnobreakspace Legal rates of interest on invested capital.
 \vs p072 5:6 \ublistelem{2.}\bibnobreakspace Reasonable salary for skill employed in industrial operations.
 \vs p072 5:7 \ublistelem{3.}\bibnobreakspace Fair and equitable wages for labour.
-\vs p072 5:8 \pc These shall first be met in accordance with contract, or in the face of decreased earnings they shall share proportionally in transient reduction. And thereafter all earnings in excess of these fixed charges shall be regarded as dividends and shall be prorated to all 3 divisions: capital, skill, and labour.
+\vs p072 5:8 \pc These shall first be met in accordance with contract, or in the face of decreased earnings they shall share proportionally in transient reduction. And thereafter all earnings in excess of these fixed charges shall be regarded as dividends and shall be prorated to all three divisions: capital, skill, and labour.
 \vs p072 5:9 \pc Every 10 years the regional executives adjust and decree the lawful hours of daily gainful toil. Industry now operates on a 5\hyp{}day week, working 4 and playing 1. These people labour 6 hours each working day and, like students, 9 months in the year of 10. Vacation is usually spent in travel, and new methods of transportation having been so recently developed, the whole nation is travel bent. The climate favours travel about 8 months in the year, and they are making the most of their opportunities.
 \vs p072 5:10 \pc 200 years ago the profit motive was wholly dominant in industry, but today it is being rapidly displaced by other and higher driving forces. Competition is keen on this continent, but much of it has been transferred from industry to play, skill, scientific achievement, and intellectual attainment. It is most active in social service and governmental loyalty. Among this people public service is rapidly becoming the chief goal of ambition. The richest man on the continent works 6 hours a day in the office of his machine shop and then hastens over to the local branch of the school of statesmanship, where he seeks to qualify for public service.
 \vs p072 5:11 Labour is becoming more honourable on this continent, and all able\hyp{}bodied citizens over 18 work either at home and on farms, at some recognized industry, on the public works where the temporarily unemployed are absorbed, or else in the corps of compulsory labourers in the mines.
@@ -96,7 +96,7 @@
 \vs p072 7:14 \pc Federal appropriations, except war funds assessed by the National Council of Defence, are originated in the upper legislative house, concurred in by the lower house, approved by the chief executive, and finally validated by the federal budget commission of 100. The members of this commission are nominated by the state governors and elected by the state legislatures to serve for 24 years, \bibfrac{1}{4}\ts{er} being elected every 6 years. Every 6 years this body, by a \bibfrac{3}{4}\ts{ths} ballot, chooses one of its number as chief, and he thereby becomes director\hyp{}controller of the federal treasury.
 \usection{The Special Colleges}
 \vs p072 8:1 In addition to the basic compulsory education program extending from the ages of 5 to 18, special schools are maintained as follows:
-\vs p072 8:2 \ublistelem{1.}\bibnobreakspace \bibemph{Statesmanship schools.} These schools are of 3 classes: national, regional, and state. The public offices of the nation are grouped in 4 divisions. The 1\ts{st} division of public trust pertains principally to the national administration, and all officeholders of this group must be graduates of both regional and national schools of statesmanship. Individuals may accept political, elective, or appointive office in the 2\ts{nd} division upon graduating from any one of the 10 regional schools of statesmanship; their trusts concern responsibilities in the regional administration and the state governments. Division 3 includes state responsibilities, and such officials are only required to have state degrees of statesmanship. The 4\ts{th} and last division of officeholders are not required to hold statesmanship degrees, such offices being wholly appointive. They represent minor positions of assistantship, secretaryships, and technical trusts which are discharged by the various learned professions functioning in governmental administrative capacities.
+\vs p072 8:2 \ublistelem{1.}\bibnobreakspace \bibemph{Statesmanship schools.} These schools are of three classes: national, regional, and state. The public offices of the nation are grouped in 4 divisions. The 1\ts{st} division of public trust pertains principally to the national administration, and all officeholders of this group must be graduates of both regional and national schools of statesmanship. Individuals may accept political, elective, or appointive office in the 2\ts{nd} division upon graduating from any one of the 10 regional schools of statesmanship; their trusts concern responsibilities in the regional administration and the state governments. Division 3 includes state responsibilities, and such officials are only required to have state degrees of statesmanship. The 4\ts{th} and last division of officeholders are not required to hold statesmanship degrees, such offices being wholly appointive. They represent minor positions of assistantship, secretaryships, and technical trusts which are discharged by the various learned professions functioning in governmental administrative capacities.
 \vs p072 8:3 Judges of the minor and state courts hold degrees from the state schools of statesmanship. Judges of the jurisdictional tribunals of social, educational, and industrial matters hold degrees from the regional schools. Judges of the federal supreme court must hold degrees from all these schools of statesmanship.
 \vs p072 8:4 \ublistelem{2.}\bibnobreakspace \bibemph{Schools of philosophy.} These schools are affiliated with the temples of philosophy and are more or less associated with religion as a public function.
 \vs p072 8:5 \ublistelem{3.}\bibnobreakspace \bibemph{Institutions of science.} These technical schools are co\hyp{}ordinated with industry rather than with the educational system and are administered under 15 divisions.
@@ -119,7 +119,7 @@
 \vs p072 11:1 Graduates of the federal military schools may be commissioned as “guardians of civilization” in 7 ranks, in accordance with ability and experience, by the president of the National Council of Defence. This council consists of 25 members, nominated by the highest parental, educational, and industrial tribunals, confirmed by the federal supreme court, and presided over ex officio by the chief of staff of co\hyp{}ordinated military affairs. Such members serve until they are 70 years of age.
 \vs p072 11:2 The courses pursued by such commissioned officers are 4 years in length and are invariably correlated with the mastery of some trade or profession. Military training is never given without this associated industrial, scientific, or professional schooling. When military training is finished, the individual has, during his 4 years’ course, received one half of the education imparted in any of the special schools where the courses are likewise 4 years in length. In this way the creation of a professional military class is avoided by providing this opportunity for a large number of men to support themselves while securing the first half of a technical or professional training.
 \vs p072 11:3 Military service during peacetime is purely voluntary, and the enlistments in all branches of the service are for 4 years, during which every man pursues some special line of study in addition to the mastery of military tactics. Training in music is one of the chief pursuits of the central military schools and of the 25 training camps distributed about the periphery of the continent. During periods of industrial slackness many thousands of unemployed are automatically utilized in upbuilding the military defences of the continent on land and sea and in the air.
-\vs p072 11:4 \pc Although these people maintain a powerful war establishment as a defence against invasion by the surrounding hostile peoples, it may be recorded to their credit that they have not in over 100 years employed these military resources in an offensive war. They have become civilized to that point where they can vigorously defend civilization without yielding to the temptation to utilize their war powers in aggression. There have been no civil wars since the establishment of the united continental state, but during the last 2 centuries these people have been called upon to wage 9 fierce defensive conflicts, 3 of which were against mighty confederations of world powers. Although this nation maintains adequate defence against attack by hostile neighbours, it pays far more attention to the training of statesmen, scientists, and philosophers.
+\vs p072 11:4 \pc Although these people maintain a powerful war establishment as a defence against invasion by the surrounding hostile peoples, it may be recorded to their credit that they have not in over 100 years employed these military resources in an offensive war. They have become civilized to that point where they can vigorously defend civilization without yielding to the temptation to utilize their war powers in aggression. There have been no civil wars since the establishment of the united continental state, but during the last 2 centuries these people have been called upon to wage nine fierce defensive conflicts, three of which were against mighty confederations of world powers. Although this nation maintains adequate defence against attack by hostile neighbours, it pays far more attention to the training of statesmen, scientists, and philosophers.
 \vs p072 11:5 When at peace with the world, all mobile defence mechanisms are quite fully employed in trade, commerce, and recreation. When war is declared, the entire nation is mobilized. Throughout the period of hostilities military pay obtains in all industries, and the chiefs of all military departments become members of the chief executive’s cabinet.
 \usection{The Other Nations}
 \vs p072 12:1 Although the society and government of this unique people are in many respects superior to those of the Urantia nations, it should be stated that on the other continents (there are 11 on this planet) the governments are decidedly inferior to the more advanced nations of Urantia.
