--- a/tex/p121.tex
+++ b/tex/p121.tex
@@ -98,7 +98,7 @@
 \vs p121 8:3 \ublistelem{1.}\bibnobreakspace \bibemph{The Gospel by Mark.} John Mark wrote the earliest (excepting the notes of Andrew), briefest, and most simple record of Jesus’ life. He presented the Master as a minister, as man among men. Although Mark was a lad lingering about many of the scenes which he depicts, his record is in reality the Gospel according to Simon Peter. He was early associated with Peter; later with Paul. Mark wrote this record at the instigation of Peter and on the earnest petition of the church at Rome. Knowing how consistently the Master refused to write out his teachings when on earth and in the flesh, Mark, like the apostles and other leading disciples, was hesitant to put them in writing. But Peter felt the church at Rome required the assistance of such a written narrative, and Mark consented to undertake its preparation. He made many notes before Peter died in A.D.\,67, and in accordance with the outline approved by Peter and for the church at Rome, he began his writing soon after Peter’s death. The Gospel was completed near the end of A.D.\,68. Mark wrote entirely from his own memory and Peter’s memory. The record has since been considerably changed, numerous passages having been taken out and some later matter added at the end to replace the latter \bibfrac{1}{5}\ts{th} of the original Gospel, which was lost from the first manuscript before it was ever copied. This record by Mark, in conjunction with Andrew’s and Matthew’s notes, was the written basis of all subsequent Gospel narratives which sought to portray the life and teachings of Jesus.
 \vs p121 8:4 \ublistelem{2.}\bibnobreakspace \bibemph{The Gospel of Matthew.} The so\hyp{}called Gospel according to Matthew is the record of the Master’s life which was written for the edification of Jewish Christians. The author of this record constantly seeks to show in Jesus’ life that much which he did was that “it might be fulfilled which was spoken by the prophet.” Matthew’s Gospel portrays Jesus as a son of David, picturing him as showing great respect for the law and the prophets.
 \vs p121 8:5 The Apostle Matthew did not write this Gospel. It was written by Isador, one of his disciples, who had as a help in his work not only Matthew’s personal remembrance of these events but also a certain record which the latter had made of the sayings of Jesus directly after the crucifixion. This record by Matthew was written in Aramaic; Isador wrote in Greek. There was no intent to deceive in accrediting the production to Matthew. It was the custom in those days for pupils thus to honour their teachers.
-\vs p121 8:6 Matthew’s original record was edited and added to in A.D.\,40 just before he left Jerusalem to engage in evangelistic preaching. It was a private record, the last copy having been destroyed in the burning of a Syrian monastery in A.D.\,416\fnst{\textbf{burning of a Syrian monastery in A.D.\,416}, This event is likely to be associated with the life of St~Eustochia, as narrated by Filaret of Chernigov (Gumilevsky) in his ``Lives of the Saints of the Eastern Church''. He describes the burning of the monastery by the Pelagians in A.D.\,416, two years prior to the horrible earthquake in Palestine which was likened to ``the end of the world''.}.
+\vs p121 8:6 Matthew’s original record was edited and added to in A.D.\,40 just before he left Jerusalem to engage in evangelistic preaching. It was a private record, the last copy having been destroyed in the burning of a Syrian monastery in A.D.\,416\fnst{This event is likely to be associated with the life of St~Eustochia, as narrated by Filaret of Chernigov (Gumilevsky) in his ``Lives of the Saints of the Eastern Church''. He describes the burning of the monastery by the Pelagians in A.D.\,416, two years prior to the horrible earthquake in Palestine which was likened to ``the end of the world''.}.
 \vs p121 8:7 Isador escaped from Jerusalem in A.D.\,70 after the investment of the city by the armies of Titus, taking with him to Pella a copy of Matthew’s notes. In the year 71, while living at Pella, Isador wrote the Gospel according to Matthew. He also had with him the first \bibfrac{4}{5}\ts{ths} of Mark’s narrative.
 \vs p121 8:8 \ublistelem{3.}\bibnobreakspace \bibemph{The Gospel by Luke.} Luke, the physician of Antioch in Pisidia, was a gentile convert of Paul, and he wrote quite a different story of the Master’s life. He began to follow Paul and learn of the life and teachings of Jesus in A.D.\,47. Luke preserves much of the “grace of the Lord Jesus Christ” in his record as he gathered up these facts from Paul and others. Luke presents the Master as “the friend of publicans and sinners.” He did not formulate his many notes into the Gospel until after Paul’s death. Luke wrote in the year 82 in Achaia. He planned three books dealing with the history of Christ and Christianity but died in A.D.\,90 just before he finished the second of these works, the “Acts of the Apostles.”
 \vs p121 8:9 As material for the compilation of his Gospel, Luke first depended upon the story of Jesus’ life as Paul had related it to him. Luke’s Gospel is, therefore, in some ways the Gospel according to Paul. But Luke had other sources of information. He not only interviewed scores of eyewitnesses to the numerous episodes of Jesus’ life which he records, but he also had with him a copy of Mark’s Gospel, that is, the first \bibfrac{4}{5}\ts{ths}, Isador’s narrative, and a brief record made in the year A.D.\,78 at Antioch by a believer named Cedes. Luke also had a mutilated and much\hyp{}edited copy of some notes purported to have been made by the Apostle Andrew.
