--- a/tex/p169.tex
+++ b/tex/p169.tex
@@ -46,7 +46,7 @@
 \vs p169 4:2 Jesus never gave his apostles a systematic lesson concerning the personality and attributes of the Father in heaven. He never asked men to believe in his Father; he took it for granted they did. Jesus never belittled himself by offering arguments in proof of the reality of the Father. His teaching regarding the Father all centred in the declaration that he and the Father are one; that he who has seen the Son has seen the Father; that the Father, like the Son, knows all things; that only the Son really knows the Father, and he to whom the Son will reveal him; that he who knows the Son knows also the Father; and that the Father sent him into the world to reveal their combined natures and to show forth their conjoint work. He never made other pronouncements about his Father except to the woman of Samaria at Jacob’s well, when he declared, \textcolour{ubdarkred}{“God is spirit.”}
 \vs p169 4:3 \pc You learn about God from Jesus by observing the divinity of his life, not by depending on his teachings. From the life of the Master you may each assimilate that concept of God which represents the measure of your capacity to perceive realities spiritual and divine, truths real and eternal. The finite can never hope to comprehend the Infinite except as the Infinite was focalized in the time\hyp{}space personality of the finite experience of the human life of Jesus of Nazareth.
 \vs p169 4:4 Jesus well knew that God can be known only by the realities of experience; never can he be understood by the mere teaching of the mind. Jesus taught his apostles that, while they never could fully understand God, they could most certainly \bibemph{know} him, even as they had known the Son of Man. You can know God, not by understanding what Jesus said, but by knowing what Jesus was. Jesus \bibemph{was} a revelation of God.
-\vs p169 4:5 \pc Except when quoting the Hebrew scriptures, Jesus referred to Deity by only two names: God and Father. And when the Master made reference to his Father as God, he usually employed the Hebrew word signifying the plural God\fnst{\textbf{the plural God}, in Hebrew \textheb{אֱלֹהִים} is normally used with the singular form of a verb, unless referring to pagan gods.} (the Trinity) and not the word Yahweh\fnst{\textbf{Yahweh}, in Hebrew either left unpointed as \textheb{יהוה} or pointed with the vowels of Shemah ``the Name'' as \textheb{יְהוָה} or Adonai ``Lord'' as \textheb{יְהוָֹה}, except when it occurs as part of \textheb{יֱהוִֹה אֲדֹנָי} and is pointed with the vowels of Elohim ``Gods''.}, which stood for the progressive conception of the tribal God of the Jews.
+\vs p169 4:5 \pc Except when quoting the Hebrew scriptures, Jesus referred to Deity by only two names: God and Father. And when the Master made reference to his Father as God, he usually employed the Hebrew word signifying the plural God\fnst{In Hebrew \textheb{אֱלֹהִים} is normally used with the singular form of a verb, unless referring to pagan gods.} (the Trinity) and not the word Yahweh\fnst{In Hebrew either left unpointed as \textheb{יהוה} or pointed with the vowels of Shemah ``the Name'' as \textheb{יְהוָה} or Adonai ``Lord'' as \textheb{יְהוָֹה}, except when it occurs as part of \textheb{יֱהוִֹה אֲדֹנָי} and is pointed with the vowels of Elohim ``Gods''.}, which stood for the progressive conception of the tribal God of the Jews.
 \vs p169 4:6 Jesus never called the Father a king, and he very much regretted that the Jewish hope for a restored kingdom and John’s proclamation of a coming kingdom made it necessary for him to denominate his proposed spiritual brotherhood the kingdom of heaven. With the one exception --- the declaration that \textcolour{ubdarkred}{“God is spirit”} --- Jesus never referred to Deity in any manner other than in terms descriptive of his own personal relationship with the First Source and Centre of Paradise.
 \vs p169 4:7 Jesus employed the word God to designate the \bibemph{idea} of Deity and the word Father to designate the \bibemph{experience} of knowing God. When the word Father is employed to denote God, it should be understood in its largest possible meaning. The word God cannot be defined and therefore stands for the infinite concept of the Father, while the term Father, being capable of partial definition, may be employed to represent the human concept of the divine Father as he is associated with man during the course of mortal existence.
 \vs p169 4:8 To the Jews, Elohim was the God of gods, while Yahweh was the God of Israel. Jesus accepted the concept of Elohim and called this supreme group of beings God. In the place of the concept of Yahweh, the racial deity, he introduced the idea of the fatherhood of God and the world\hyp{}wide brotherhood of man. He exalted the Yahweh concept of a deified racial Father to the idea of a Father of all the children of men, a divine Father of the individual believer. And he further taught that this God of universes and this Father of all men were one and the same Paradise Deity.
