--- a/tex/p173.tex
+++ b/tex/p173.tex
@@ -11,7 +11,7 @@
 \usection{Cleansing the Temple}
 \vs p173 1:1 A huge commercial traffic had grown up in association with the services and ceremonies of the temple worship. There was the business of providing suitable animals for the various sacrifices. Though it was permissible for a worshipper to provide his own sacrifice, the fact remained that this animal must be free from all “blemish” in the meaning of the Levitical law and as interpreted by official inspectors of the temple. Many a worshipper had experienced the humiliation of having his supposedly perfect animal rejected by the temple examiners. It therefore became the more general practice to purchase sacrificial animals at the temple, and although there were several stations on near\hyp{}by Olivet where they could be bought, it had become the vogue to buy these animals directly from the temple pens. Gradually there had grown up this custom of selling all kinds of sacrificial animals in the temple courts. An extensive business, in which enormous profits were made, had thus been brought into existence. Part of these gains was reserved for the temple treasury, but the larger part went indirectly into the hands of the ruling high\hyp{}priestly families.
 \vs p173 1:2 This sale of animals in the temple prospered because, when the worshipper purchased such an animal, although the price might be somewhat high, no more fees had to be paid, and he could be sure the intended sacrifice would not be rejected on the ground of possessing real or technical blemishes. At one time or another systems of exorbitant overcharge were practised upon the common people, especially during the great national feasts. At one time the greedy priests went so far as to demand the equivalent of the value of a week’s labour for a pair of doves which should have been sold to the poor for a few pennies. The “sons of Annas” had already begun to establish their bazaars in the temple precincts, those very merchandise marts which persisted to the time of their final overthrow by a mob three years before the destruction of the temple itself.
-\vs p173 1:3 \pc But traffic in sacrificial animals and sundry merchandise was not the only way in which the courts of the temple were profaned. At this time there was fostered an extensive system of banking and commercial exchange which was carried on right within the temple precincts. And this all came about in the following manner: During the Asmonean dynasty the Jews coined their own silver money\fnst{\textbf{Jews coined their own silver money}, The ``Jewish money'' proper, coined during the years of Hasmonean dynasty (164\,--\,35\,B.C.) should not be confused with the Tyrian type half-shekels required for the Temple tax and other offerings (cf.~Mishna Bek.8.7) and probably minted in Jerusalem after the mint in Tyre was closed down by Rome in 19\,B.C. The Hasmonean money (so far only bronze coins have been found) never contained images of gods or people or animals, like the Tyrian silver shekels and half-shekels (see the picture).}, and it had become the practice to require the temple dues of ½ shekel and all other temple fees to be paid with this Jewish coin. This regulation necessitated that money\hyp{}changers be licensed to exchange the many sorts of currency in circulation throughout Palestine and other provinces of the Roman Empire for this orthodox shekel of Jewish coining. The temple head tax, payable by all except women, slaves, and minors, was ½ shekel, a coin about the size of a 10¢ piece but twice as thick. By the times of Jesus the priests had also been exempted from the payment of temple dues. Accordingly, from the 15\ts{th} to the 25\ts{th} of the month preceding the Passover, accredited money\hyp{}changers erected their booths in the principal cities of Palestine for the purpose of providing the Jewish people with proper money to meet the temple dues after they had reached Jerusalem. After this 10\hyp{}day period these money\hyp{}changers moved on to Jerusalem and proceeded to set up their exchange tables in the courts of the temple. They were permitted to charge the equivalent of from 3¢ to 4¢ commission for the exchange of a coin valued at about 10¢, and in case a coin of larger value was offered for exchange, they were allowed to collect double. Likewise did these temple bankers profit from the exchange of all money intended for the purchase of sacrificial animals and for the payment of vows and the making of offerings.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jerusalem-Tyrian-halfshekel.jpg}\caption{Jerusalem half-shekel of Tyrian type, 45\,A.D. On the obverse we see Melkhart, god of the Phoenicians, corresponding to the Greek Hercules. The reverse shows the eagle and the letters ``KP''. The meaning of ``KP'' is unknown, but this abbreviation is only present in the coins minted outside Tyre.}\end{figure}}
+\vs p173 1:3 \pc But traffic in sacrificial animals and sundry merchandise was not the only way in which the courts of the temple were profaned. At this time there was fostered an extensive system of banking and commercial exchange which was carried on right within the temple precincts. And this all came about in the following manner: During the Asmonean dynasty the Jews coined their own silver money\fnst{The ``Jewish money'' proper, coined during the years of Hasmonean dynasty (164\,--\,35\,B.C.) should not be confused with the Tyrian type half-shekels required for the Temple tax and other offerings (cf.~Mishna Bek.8.7) and probably minted in Jerusalem after the mint in Tyre was closed down by Rome in 19\,B.C. The Hasmonean money (so far only bronze coins have been found) never contained images of gods or people or animals, like the Tyrian silver shekels and half-shekels (see the picture).}, and it had become the practice to require the temple dues of ½ shekel and all other temple fees to be paid with this Jewish coin. This regulation necessitated that money\hyp{}changers be licensed to exchange the many sorts of currency in circulation throughout Palestine and other provinces of the Roman Empire for this orthodox shekel of Jewish coining. The temple head tax, payable by all except women, slaves, and minors, was ½ shekel, a coin about the size of a 10¢ piece but twice as thick. By the times of Jesus the priests had also been exempted from the payment of temple dues. Accordingly, from the 15\ts{th} to the 25\ts{th} of the month preceding the Passover, accredited money\hyp{}changers erected their booths in the principal cities of Palestine for the purpose of providing the Jewish people with proper money to meet the temple dues after they had reached Jerusalem. After this 10\hyp{}day period these money\hyp{}changers moved on to Jerusalem and proceeded to set up their exchange tables in the courts of the temple. They were permitted to charge the equivalent of from 3¢ to 4¢ commission for the exchange of a coin valued at about 10¢, and in case a coin of larger value was offered for exchange, they were allowed to collect double. Likewise did these temple bankers profit from the exchange of all money intended for the purchase of sacrificial animals and for the payment of vows and the making of offerings.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jerusalem-Tyrian-halfshekel.jpg}\caption{Jerusalem half-shekel of Tyrian type, 45\,A.D. On the obverse we see Melkhart, god of the Phoenicians, corresponding to the Greek Hercules. The reverse shows the eagle and the letters ``KP''. The meaning of ``KP'' is unknown, but this abbreviation is only present in the coins minted outside Tyre.}\end{figure}}
 \vs p173 1:4 These temple money\hyp{}changers not only conducted a regular banking business for profit in the exchange of more than 20 sorts of money which the visiting pilgrims would periodically bring to Jerusalem, but they also engaged in all other kinds of transactions pertaining to the banking business. Both the temple treasury and the temple rulers profited tremendously from these commercial activities. It was not uncommon for the temple treasury to hold upwards of \$10,000,000 while the common people languished in poverty and continued to pay these unjust levies.
 \vs p173 1:5 \pc In the midst of this noisy aggregation of money\hyp{}changers, merchandisers, and cattle sellers, Jesus, on this Monday morning, attempted to teach the gospel of the heavenly kingdom. He was not alone in resenting this profanation of the temple; the common people, especially the Jewish visitors from foreign provinces, also heartily resented this profiteering desecration of their national house of worship. At this time the Sanhedrin itself held its regular meetings in a chamber surrounded by all this babble and confusion of trade and barter.
 \vs p173 1:6 As Jesus was about to begin his address, two things happened to arrest his attention. At the money table of a near\hyp{}by exchanger a violent and heated argument had arisen over the alleged overcharging of a Jew from Alexandria, while at the same moment the air was rent by the bellowing of a drove of some one hundred bullocks which was being driven from one section of the animal pens to another. As Jesus paused, silently but thoughtfully contemplating this scene of commerce and confusion, close by he beheld a simple\hyp{}minded Galilean, a man he had once talked with in Iron, being ridiculed and jostled about by supercilious and would\hyp{}be superior Judeans; and all of this combined to produce one of those strange and periodic uprisings of indignant emotion in the soul of Jesus.
